--- a/_tweets-md/2011/2011-10-01-tweets.md
+++ b/_tweets-md/2011/2011-10-01-tweets.md
@@ -172,7 +172,7 @@ Replying to [@SunniBrown](https://twitter.com/@SunniBrown/status/124538684954525
 
 > I've found a few #iPhone4S #Siri jokes, but this one made me laugh the hardest "I need to hide a body" #SiriHumor: 
 > 
-> ![]({{ site.url }}{{ site.baseurl }}/assets/images/media/125342777184747520-Ab1Ol33CAAAgRDU.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/125342777184747520-Ab1Ol33CAAAgRDU.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sat Oct 15 22:50:22 +0000 2011](https://twitter.com/ChristopherA/status/125342777184747520)
 
@@ -222,6 +222,6 @@ Replying to [@SunniBrown](https://twitter.com/@SunniBrown/status/124538684954525
 
 > The local Kensington haunted house has taken over the whole block: 
 > 
-> ![]({{ site.url }}{{ site.baseurl }}/assets/images/media/131216876364775424-AdItDciCQAAKJqk.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/131216876364775424-AdItDciCQAAKJqk.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Nov 01 03:51:56 +0000 2011](https://twitter.com/ChristopherA/status/131216876364775424)
