--- a/_tweets-md/2012/2012-01-01-tweets.md
+++ b/_tweets-md/2012/2012-01-01-tweets.md
@@ -166,7 +166,7 @@ Replying to [@psound74](https://twitter.com/psound74/status/153976674474655744)
 
 > RT @joverbeck: Jonathan Frakes look alike @beckinfield   @christophera  #macworld 
 > 
-> ![]({{ site.url }}{{ site.baseurl }}/assets/images/media/163006614431993856-AkIAW_YCIAMfpRl.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/163006614431993856-AkIAW_YCIAMfpRl.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri Jan 27 21:13:00 +0000 2012](https://twitter.com/ChristopherA/status/163006614431993856)
 
