--- a/_tweets-md/2012/2012-02-01-tweets.md
+++ b/_tweets-md/2012/2012-02-01-tweets.md
@@ -14,7 +14,7 @@ time: 23:59:59 +0000
 
 > Winner of the Christopher Allen look-alike contest — Jonathan Frakes ;-) 
 > 
-> ![]({{ site.url }}{{ site.baseurl }}/assets/images/media/164772162278920192-Akg5ludCAAE4rrd.jpg) via @joverbeck
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/164772162278920192-Akg5ludCAAE4rrd.jpg) via @joverbeck
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Feb 01 18:08:39 +0000 2012](https://twitter.com/ChristopherA/status/164772162278920192)
 
