--- a/_tweets-md/2012/2012-07-01-tweets.md
+++ b/_tweets-md/2012/2012-07-01-tweets.md
@@ -78,7 +78,7 @@ time: 23:59:59 +0000
 
 > RT @KickFlipit: How many iDevices does one developer need?  Brad from @viame #iosDevCamp #aarong 
 > 
-> ![]({{ site.url }}{{ site.baseurl }}/assets/images/media/226783079761580032-AyWl01lCcAEzo0q.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/226783079761580032-AyWl01lCcAEzo0q.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sat Jul 21 20:57:54 +0000 2012](https://twitter.com/ChristopherA/status/226783079761580032)
 
@@ -142,7 +142,7 @@ time: 23:59:59 +0000
 
 > Dropped Kalle Alm (@kallewoof) off at SFO—a great two weeks working with him on @InfiniteCanvas &amp; #iOSDevCamp. Thanks! 
 > 
-> ![]({{ site.url }}{{ site.baseurl }}/assets/images/media/227948859786158080-AynWR77CYAA2cfq.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/227948859786158080-AynWR77CYAA2cfq.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Jul 25 02:10:18 +0000 2012](https://twitter.com/ChristopherA/status/227948859786158080)
 
