--- a/_tweets-md/2012/2012-08-01-tweets.md
+++ b/_tweets-md/2012/2012-08-01-tweets.md
@@ -198,7 +198,7 @@ Replying to [@TWA2Jenny](https://twitter.com/TWA2Jenny/status/236230382796828672
 
 > @nancywhite you may want to share about the "Group Works" from the #InfiniteCanvas iPad app: [http://showcase.infinitecanvasapp.com/GroupWorks.icz](http://showcase.infinitecanvasapp.com/GroupWorks.icz) 
 > 
-> ![]({{ site.url }}{{ site.baseurl }}/assets/images/media/237772767905316864-A0y9EpiCAAA4IwS.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/237772767905316864-A0y9EpiCAAA4IwS.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Aug 21 04:47:00 +0000 2012](https://twitter.com/ChristopherA/status/237772767905316864)
 
