--- a/_tweets-md/2012/2012-10-01-tweets.md
+++ b/_tweets-md/2012/2012-10-01-tweets.md
@@ -42,7 +42,7 @@ time: 23:59:59 +0000
 
 > RT @mattchittum: Salsa dancers warmup the crowd at @CityWorksXpo #Xpo12 @roanoketimes 
 > 
-> ![]({{ site.url }}{{ site.baseurl }}/assets/images/media/258995822845366273-A5gg_C_CMAEHbUe.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/258995822845366273-A5gg_C_CMAEHbUe.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Oct 18 18:19:50 +0000 2012](https://twitter.com/ChristopherA/status/258995822845366273)
 
