--- a/_tweets-md/2013/2013-07-01-tweets.md
+++ b/_tweets-md/2013/2013-07-01-tweets.md
@@ -12,7 +12,7 @@ time: 23:59:59 +0000
 
 > RT @pcrampton: @ChristopherA sharing the community magic at  #iOSDevCamp 
 > 
-> ![]({{ site.url }}{{ site.baseurl }}/assets/images/media/355872382260486146-BPBKsy3CEAAwN9n.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/355872382260486146-BPBKsy3CEAAwN9n.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sat Jul 13 02:12:42 +0000 2013](https://twitter.com/ChristopherA/status/355872382260486146)
 
