--- a/_tweets-md/2013/2013-10-01-tweets.md
+++ b/_tweets-md/2013/2013-10-01-tweets.md
@@ -6,7 +6,7 @@ time: 23:59:59 +0000
 
 > Sunset bubbles: 
 > 
-> ![]({{ site.url }}{{ site.baseurl }}/assets/images/media/385228851317440512-BVibmVqCcAAAyvc.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/385228851317440512-BVibmVqCcAAAyvc.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Oct 02 02:24:50 +0000 2013](https://twitter.com/ChristopherA/status/385228851317440512)
 
