--- a/_tweets-md/2014/2014-06-01-tweets.md
+++ b/_tweets-md/2014/2014-06-01-tweets.md
@@ -50,7 +50,7 @@ Replying to [@adam13vy](https://twitter.com/adam13vy/status/473999155371577344)
 
 > I like the nice touch of the imperial storm troopers guarding the stage before the #WWDC #StarWars lunch talk. 
 > 
-> ![]({{ site.url }}{{ site.baseurl }}/assets/images/media/474640379149438976-BpZC6KhCMAAlywq.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/474640379149438976-BpZC6KhCMAAlywq.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Jun 05 19:54:19 +0000 2014](https://twitter.com/ChristopherA/status/474640379149438976)
 
@@ -64,7 +64,7 @@ Replying to [@adam13vy](https://twitter.com/adam13vy/status/473999155371577344)
 
 > OK, I admit it, I'm a Star Wars fan: #wwdc 
 > 
-> ![]({{ site.url }}{{ site.baseurl }}/assets/images/media/474662062900391938-BpZWoW4CAAAbU41.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/474662062900391938-BpZWoW4CAAAbU41.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Jun 05 21:20:29 +0000 2014](https://twitter.com/ChristopherA/status/474662062900391938)
 
@@ -132,7 +132,7 @@ Replying to [@brennanMKE, @randyscovil, @khanacademy and @cocoaconf](https://twi
 
 > I wish more movie festivals would do this for Q&amp;A after screenings—you get better questions. #WishIWasHere @ZackBraff 
 > 
-> ![]({{ site.url }}{{ site.baseurl }}/assets/images/media/481595273647357953-Bq74WRiCIAAIzv5.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/481595273647357953-Bq74WRiCIAAIzv5.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Jun 25 00:30:35 +0000 2014](https://twitter.com/ChristopherA/status/481595273647357953)
 
