--- a/_tweets-md/2014/2014-08-01-tweets.md
+++ b/_tweets-md/2014/2014-08-01-tweets.md
@@ -70,7 +70,7 @@ Replying to [@whoisrae, @banane and @hazmatzo](https://twitter.com/raebonfanti/s
 > RT @erico: Some people have just one, small vice.   
 > @fryselectronics @iOSDevCamp 
 > 
-> ![]({{ site.url }}{{ site.baseurl }}/assets/images/media/503248555444674560-BvviFFoCAAAreyf.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/503248555444674560-BvviFFoCAAAreyf.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sat Aug 23 18:33:00 +0000 2014](https://twitter.com/ChristopherA/status/503248555444674560)
 
