--- a/_tweets-md/2014/2014-09-01-tweets.md
+++ b/_tweets-md/2014/2014-09-01-tweets.md
@@ -86,7 +86,7 @@ Replying to [@MultiMarkdown](https://twitter.com/MultiMarkdown/status/5101488113
 
 > RT @SFist: Should you see 'An Audience With Meow Meow' at Berkeley Rep? Our reviewer says yes. [http://sfist.com/2014/09/17/sfist_reviews_an_audience_with_meow.php](http://sfist.com/2014/09/17/sfist_reviews_an_audience_with_meow.php) 
 > 
-> ![]({{ site.url }}{{ site.baseurl }}/assets/images/media/512834828631171072-BxxXtqDCQAAH8IT.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/512834828631171072-BxxXtqDCQAAH8IT.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri Sep 19 05:25:25 +0000 2014](https://twitter.com/ChristopherA/status/512834828631171072)
 
