--- a/_tweets-md/2015/2015-04-01-tweets.md
+++ b/_tweets-md/2015/2015-04-01-tweets.md
@@ -92,7 +92,7 @@ time:  23:59:59 +0000
 
 > Peter Senge: "A leader facilitates " 
 > 
-> ![]({{ site.url }}{{ site.baseurl }}/assets/images/media/590344801871998977-CDFTdevVIAMs4kz.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/590344801871998977-CDFTdevVIAMs4kz.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Apr 21 02:42:23 +0000 2015](https://twitter.com/ChristopherA/status/590344801871998977)
 
@@ -164,7 +164,7 @@ Replying to [@Jason](https://twitter.com/Jason/status/590587779203133442)
 
 > My caricature by local artist @JonCaseyDraws from the @Perspecsysys #RSAC booth #2333 
 > 
-> ![]({{ site.url }}{{ site.baseurl }}/assets/images/media/590740266530775040-CDK7ItvWMAAGQpa.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/590740266530775040-CDK7ItvWMAAGQpa.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Apr 22 04:53:49 +0000 2015](https://twitter.com/ChristopherA/status/590740266530775040)
 
