--- a/_tweets-md/2015/2015-05-01-tweets.md
+++ b/_tweets-md/2015/2015-05-01-tweets.md
@@ -95,7 +95,7 @@ Replying to [@taoeffect](https://twitter.com/taoeffect/status/597094468995579904
 
 > RT @blockchainU: @ChristopherA @matthewjosef @jarodholtz at Cohort #2 Demo Night #bcudemos 
 > 
-> ![]({{ site.url }}{{ site.baseurl }}/assets/images/media/601188572503257091-CFdsaORUIAEXkDL.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/601188572503257091-CFdsaORUIAEXkDL.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu May 21 00:51:39 +0000 2015](https://twitter.com/ChristopherA/status/601188572503257091)
 
