--- a/_tweets-md/2015/2015-06-01-tweets.md
+++ b/_tweets-md/2015/2015-06-01-tweets.md
@@ -48,7 +48,7 @@ Replying to [@yuhong2, @lightcoin and @BRIAN_____](https://twitter.com/yuhong2/s
 
 > RT @coindesk: Consensus 2015: What the Early Internet Can Teach Blockchain Innovators [http://coinde.sk/1FC1DVR](http://coinde.sk/1FC1DVR) 
 > 
-> ![]({{ site.url }}{{ site.baseurl }}/assets/images/media/607303946445586432-CGv96UyWwAAzzkp.png)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/607303946445586432-CGv96UyWwAAzzkp.png)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sat Jun 06 21:51:58 +0000 2015](https://twitter.com/ChristopherA/status/607303946445586432)
 
