--- a/_tweets-md/2015/2015-07-01-tweets.md
+++ b/_tweets-md/2015/2015-07-01-tweets.md
@@ -48,7 +48,7 @@ time:  23:59:59 +0000
 
 > A new generation of #StarWars fans at #SDCC… 
 > 
-> ![](../../media/619234943126757376-CJf25lBUkAA7Rx3.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/619234943126757376-CJf25lBUkAA7Rx3.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Jul 09 20:01:29 +0000 2015](https://twitter.com/ChristopherA/status/619234943126757376)
 
@@ -106,7 +106,7 @@ time:  23:59:59 +0000
 
 > RT @anakkurt: Are u at #iOSDevCamp and interested in #ConnectedCar opportunities? Let's talk! 
 > 
-> ![](../../media/619915814066503680-CJmjryWUkAEiiQL.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/619915814066503680-CJmjryWUkAEiiQL.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sat Jul 11 17:07:02 +0000 2015](https://twitter.com/ChristopherA/status/619915814066503680)
 
@@ -140,7 +140,7 @@ Replying to [@Blairyk](https://twitter.com/Blairyk/status/619974549023502337)
 
 > RT @anakkurt: Peeps hacking away @iOSDevCamp  Cool that #ConnectedCar is represented by @VinliDev 
 > 
-> ![](../../media/620031018720870400-CJqJRuhUwAEUxXe.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/620031018720870400-CJqJRuhUwAEUxXe.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sun Jul 12 00:44:49 +0000 2015](https://twitter.com/ChristopherA/status/620031018720870400)
 
@@ -194,7 +194,7 @@ Replying to [@Blairyk](https://twitter.com/Blairyk/status/619974549023502337)
 
 > RT @pcrampton: This is the next demo team. #iOSDevCamp iOSDevCamp2015 
 > 
-> ![](../../media/620371006264217600-CJv6r43UMAAUP37.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/620371006264217600-CJv6r43UMAAUP37.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sun Jul 12 23:15:48 +0000 2015](https://twitter.com/ChristopherA/status/620371006264217600)
 
@@ -226,7 +226,7 @@ Replying to [@Blairyk](https://twitter.com/Blairyk/status/619974549023502337)
 
 > RT @pcrampton: Over 25% of attendees at this weekends #iOSDevCamp are women! Rock on! 
 > 
-> ![](../../media/620432739175501824-CJwKzx7UYAAf7_O.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/620432739175501824-CJwKzx7UYAAf7_O.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon Jul 13 03:21:06 +0000 2015](https://twitter.com/ChristopherA/status/620432739175501824)
 
@@ -234,7 +234,7 @@ Replying to [@Blairyk](https://twitter.com/Blairyk/status/619974549023502337)
 
 > RT @ritun: Awesome WaterNinja team solving water drought problem in CA without expensive sensors #iOSDevCamp 
 > 
-> ![](../../media/620432887129571328-CJwF7ezVAAAiH1R.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/620432887129571328-CJwF7ezVAAAiH1R.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon Jul 13 03:21:42 +0000 2015](https://twitter.com/ChristopherA/status/620432887129571328)
 
