--- a/_tweets-md/2015/2015-08-01-tweets.md
+++ b/_tweets-md/2015/2015-08-01-tweets.md
@@ -126,13 +126,13 @@ time:  23:59:59 +0000
 
 > Pieter Wuille @pwuille presents Threshold Tree Signatures for #bitcoin, code in @blockstream's Elements sidechain: 
 > 
-> ![](../../media/636022779138019328-CNObVzfUsAAIMHZ.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/636022779138019328-CNObVzfUsAAIMHZ.jpg)
 > 
-> ![](../../media/636022779138019328-CNObVzoVEAAF5sr.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/636022779138019328-CNObVzoVEAAF5sr.jpg)
 > 
-> ![](../../media/636022779138019328-CNObVz2UEAApEmZ.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/636022779138019328-CNObVz2UEAApEmZ.jpg)
 > 
-> ![](../../media/636022779138019328-CNObV1yVAAAaKf7.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/636022779138019328-CNObV1yVAAAaKf7.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Aug 25 03:50:21 +0000 2015](https://twitter.com/ChristopherA/status/636022779138019328)
 
