--- a/_tweets-md/2015/2015-09-01-tweets.md
+++ b/_tweets-md/2015/2015-09-01-tweets.md
@@ -273,7 +273,7 @@ Replying to [@CommonAccord, @rickcolosimo and @PeterMahlerEsq](https://twitter.c
 
 > RT @pete_rizzo_: #Consensus2015 mentor @ChristopherA workshops ideas with makeathon participants 
 > 
-> ![](../../media/641658519612170240-COeb5A_VEAAqQKo.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/641658519612170240-COeb5A_VEAAqQKo.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Sep 09 17:04:47 +0000 2015](https://twitter.com/ChristopherA/status/641658519612170240)
 
@@ -301,7 +301,7 @@ Replying to [@CommonAccord, @rickcolosimo and @PeterMahlerEsq](https://twitter.c
 
 > Speaking tomorrow at #Consensus “Bitcoin and its Antecedents: A Look at the History and Evolution of Digital Cash” 
 > 
-> ![](../../media/641697027684986880-COfECxuUEAAUTLj.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/641697027684986880-COfECxuUEAAUTLj.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Sep 09 19:37:48 +0000 2015](https://twitter.com/ChristopherA/status/641697027684986880)
 
@@ -315,7 +315,7 @@ Replying to [@CommonAccord, @rickcolosimo and @PeterMahlerEsq](https://twitter.c
 
 > A depression-era “local script” good for $1 exchangeable for goods &amp; service near Carmel-by-the-Sea, California: 
 > 
-> ![](../../media/641743386781851648-COfuKrKWwAAOx53.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/641743386781851648-COfuKrKWwAAOx53.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Sep 09 22:42:01 +0000 2015](https://twitter.com/ChristopherA/status/641743386781851648)
 
@@ -323,7 +323,7 @@ Replying to [@CommonAccord, @rickcolosimo and @PeterMahlerEsq](https://twitter.c
 
 > Solid gold Monopoly game set at the Museum of American Finance: 
 > 
-> ![](../../media/641748242741489664-COfyaP0UEAAnKoK.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/641748242741489664-COfyaP0UEAAnKoK.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Sep 09 23:01:18 +0000 2015](https://twitter.com/ChristopherA/status/641748242741489664)
 
@@ -331,7 +331,7 @@ Replying to [@CommonAccord, @rickcolosimo and @PeterMahlerEsq](https://twitter.c
 
 > Amazing shot of Twin Tower lights shooting the moon! 
 > 
-> ![](../../media/641767216363474945-COgD3qOUYAA_vNw.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/641767216363474945-COgD3qOUYAA_vNw.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Sep 10 00:16:42 +0000 2015](https://twitter.com/ChristopherA/status/641767216363474945)
 
@@ -383,7 +383,7 @@ Replying to [@CommonAccord, @rickcolosimo and @PeterMahlerEsq](https://twitter.c
 
 > #BlockStackSummit @OneName reports that NameCoin has been mined &gt;51% for weeks and no one noticed. No security! 
 > 
-> ![](../../media/642708790589161473-COtcKM2UsAAQtfG.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/642708790589161473-COtcKM2UsAAQtfG.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sat Sep 12 14:38:11 +0000 2015](https://twitter.com/ChristopherA/status/642708790589161473)
 
@@ -397,7 +397,7 @@ Replying to [@CommonAccord, @rickcolosimo and @PeterMahlerEsq](https://twitter.c
 
 > I named my old company "Consensus Development" in 1988 inspired by this quote. I wrote then I wanted this by 2015: 
 > 
-> ![](../../media/642711322921160705-COteIVoUsAAjKUh.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/642711322921160705-COteIVoUsAAjKUh.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sat Sep 12 14:48:15 +0000 2015](https://twitter.com/ChristopherA/status/642711322921160705)
 
@@ -441,7 +441,7 @@ Replying to [@CommonAccord, @rickcolosimo and @PeterMahlerEsq](https://twitter.c
 
 > Great to meet the thoughtful folk at @coindesk's #Consensus2015 &amp; @BlockstackOrg's Summit! Here is my contact card: 
 > 
-> ![](../../media/642797994060972032-COutXoEWgAAWJ-X.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/642797994060972032-COutXoEWgAAWJ-X.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sat Sep 12 20:32:39 +0000 2015](https://twitter.com/ChristopherA/status/642797994060972032)
 
@@ -449,7 +449,7 @@ Replying to [@CommonAccord, @rickcolosimo and @PeterMahlerEsq](https://twitter.c
 
 > RT @kristovatlas: #blockstack discussion on bip32 tech lead by @ChristopherA 
 > 
-> ![](../../media/642804984892014593-COuxedRWgAQz1JH.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/642804984892014593-COuxedRWgAQz1JH.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sat Sep 12 21:00:25 +0000 2015](https://twitter.com/ChristopherA/status/642804984892014593)
 
@@ -481,7 +481,7 @@ Replying to [@CommonAccord, @rickcolosimo and @PeterMahlerEsq](https://twitter.c
 
 > RT @drwasho: @ChristopherA @ChrisPacia @openbazaar Great suggestion! 
 > 
-> ![](../../media/643594135711039488-CO1bh_pUYAA3IyT.png)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/643594135711039488-CO1bh_pUYAA3IyT.png)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Sep 15 01:16:14 +0000 2015](https://twitter.com/ChristopherA/status/643594135711039488)
 
