--- a/_tweets-md/2015/2015-10-01-tweets.md
+++ b/_tweets-md/2015/2015-10-01-tweets.md
@@ -184,7 +184,7 @@ Replying to [@IdentityWoman](https://twitter.com/IdentityWoman/status/6550635924
 
 > I wrote in [http://www.lifewithalacrity.com/2006/08/using_5star_rat.html](http://www.lifewithalacrity.com/2006/08/using_5star_rat.html) about problems with 5-star rating systems. Fandango offer a new bad example: 
 > 
-> ![](../../media/655123017924636672-CRd26deUwAAmF3B.png)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/655123017924636672-CRd26deUwAAmF3B.png)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri Oct 16 20:47:53 +0000 2015](https://twitter.com/ChristopherA/status/655123017924636672)
 
@@ -384,7 +384,7 @@ Replying to [@albertwenger](https://twitter.com/albertwenger/status/656848772274
 
 > Identity 2020 — An ambitious ambition: a "self-sovereign identity" for all @identity2020 #RebootingWebOfTrust 
 > 
-> ![](../../media/656903903045283840-CR3KnmpUAAEDRJp.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/656903903045283840-CR3KnmpUAAEDRJp.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Oct 21 18:44:29 +0000 2015](https://twitter.com/ChristopherA/status/656903903045283840)
 
