--- a/_tweets-md/2015/2015-11-01-tweets.md
+++ b/_tweets-md/2015/2015-11-01-tweets.md
@@ -62,7 +62,7 @@ time:  23:59:59 +0000
 
 > Morning of first day at #RebootingWebOfTrust —creating the next generation of decentralized identity: 
 > 
-> ![](../../media/661662034120019969-CS6yHT0WoAARuzw.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/661662034120019969-CS6yHT0WoAARuzw.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Nov 03 21:51:36 +0000 2015](https://twitter.com/ChristopherA/status/661662034120019969)
 
@@ -70,7 +70,7 @@ time:  23:59:59 +0000
 
 > Some ideas we want to explore at #RebootingWebOfTrust —creating the next generation of decentralized identity: 
 > 
-> ![](../../media/661662459372154880-CS6ygD9WcAA9I7M.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/661662459372154880-CS6ygD9WcAA9I7M.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Nov 03 21:53:18 +0000 2015](https://twitter.com/ChristopherA/status/661662459372154880)
 
@@ -78,7 +78,7 @@ time:  23:59:59 +0000
 
 > The five teams at #RebootingWebOfTrust have chosen these as their topics: #1 What did you mean by trust? 
 > 
-> ![](../../media/661735252595838977-CS70s7GVAAAyChE.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/661735252595838977-CS70s7GVAAAyChE.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Nov 04 02:42:33 +0000 2015](https://twitter.com/ChristopherA/status/661735252595838977)
 
@@ -86,7 +86,7 @@ time:  23:59:59 +0000
 
 > Topic #2 at #RebootingWebOfTrust is — Satisfying the Real World: Web of Trust Use Cases 
 > 
-> ![](../../media/661736731348086784-CS72DGrUAAAKE5A.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/661736731348086784-CS72DGrUAAAKE5A.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Nov 04 02:48:25 +0000 2015](https://twitter.com/ChristopherA/status/661736731348086784)
 
@@ -94,7 +94,7 @@ time:  23:59:59 +0000
 
 > Topic #3 at #RebootingWebOfTrust is — DPKI… Decentralized Public Key Infrastructure 
 > 
-> ![](../../media/661737032843026432-CS72UpYU8AA8LNI.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/661737032843026432-CS72UpYU8AA8LNI.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Nov 04 02:49:37 +0000 2015](https://twitter.com/ChristopherA/status/661737032843026432)
 
@@ -102,7 +102,7 @@ time:  23:59:59 +0000
 
 > Topic #4 at #RebootingWebOfTrust is — Sybil Resilient Reputation Aggregation 
 > 
-> ![](../../media/661737278113378304-CS72i7bUkAAqQfp.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/661737278113378304-CS72i7bUkAAqQfp.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Nov 04 02:50:36 +0000 2015](https://twitter.com/ChristopherA/status/661737278113378304)
 
@@ -110,7 +110,7 @@ time:  23:59:59 +0000
 
 > Topic #5 at #RebootingWebOfTrust is — A Framework for Smart Signatures 
 > 
-> ![](../../media/661737489648893952-CS72vOZUwAAFMzM.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/661737489648893952-CS72vOZUwAAFMzM.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Nov 04 02:51:26 +0000 2015](https://twitter.com/ChristopherA/status/661737489648893952)
 
@@ -208,7 +208,7 @@ Replying to [@manusporny and @elfpavlik](https://twitter.com/manusporny/status/6
 
 > End of day 1 summary at #RebootingWebOfTrust as captured by graphic facilitator @ssawhney87 #decentralized #identity 
 > 
-> ![](../../media/661945251033186304-CS-zss4WEAEclVB.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/661945251033186304-CS-zss4WEAEclVB.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Nov 04 16:37:00 +0000 2015](https://twitter.com/ChristopherA/status/661945251033186304)
 
@@ -216,7 +216,7 @@ Replying to [@manusporny and @elfpavlik](https://twitter.com/manusporny/status/6
 
 > Sorting through the topics as prioritized by the #RebootingWebOfTrust participants by a group process called "35": 
 > 
-> ![](../../media/661959117423173632-CS_ATvwWoAET1d1.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/661959117423173632-CS_ATvwWoAET1d1.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Nov 04 17:32:06 +0000 2015](https://twitter.com/ChristopherA/status/661959117423173632)
 
@@ -242,7 +242,7 @@ Replying to [@manusporny and @elfpavlik](https://twitter.com/manusporny/status/6
 
 > Day Two of #RebootingWebOfTrust —overnight insights: 
 > 
-> ![](../../media/662334430447427584-CTEVp7DU8AAJ-sR.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/662334430447427584-CTEVp7DU8AAJ-sR.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Nov 05 18:23:28 +0000 2015](https://twitter.com/ChristopherA/status/662334430447427584)
 
@@ -250,7 +250,7 @@ Replying to [@manusporny and @elfpavlik](https://twitter.com/manusporny/status/6
 
 > Day Two of #RebootingWebOfTrust — looking forward, what at some next actions? 
 > 
-> ![](../../media/662334931138273280-CTEWHEiUcAAfXig.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/662334931138273280-CTEWHEiUcAAfXig.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Nov 05 18:25:27 +0000 2015](https://twitter.com/ChristopherA/status/662334931138273280)
 
@@ -258,7 +258,7 @@ Replying to [@manusporny and @elfpavlik](https://twitter.com/manusporny/status/6
 
 > White paper draft for #RebootingWebOfTrust — Rebranding Web of Trust: 
 > 
-> ![](../../media/662335346575695872-CTEWfQaU8AATpvt.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/662335346575695872-CTEWfQaU8AATpvt.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Nov 05 18:27:06 +0000 2015](https://twitter.com/ChristopherA/status/662335346575695872)
 
@@ -266,7 +266,7 @@ Replying to [@manusporny and @elfpavlik](https://twitter.com/manusporny/status/6
 
 > A #bitcoin technical white paper draft for #RebootingWebOfTrust — how do we know when keys are compromised?: 
 > 
-> ![](../../media/662336019665055745-CTEXGboVAAAOq4D.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/662336019665055745-CTEXGboVAAAOq4D.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Nov 05 18:29:47 +0000 2015](https://twitter.com/ChristopherA/status/662336019665055745)
 
@@ -274,7 +274,7 @@ Replying to [@manusporny and @elfpavlik](https://twitter.com/manusporny/status/6
 
 > White paper draft for #RebootingWebOfTrust — DPKI: A Distributed Public Key Infrastructure: 
 > 
-> ![](../../media/662337122582421504-CTEYGoZU8AAGpjr.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/662337122582421504-CTEYGoZU8AAGpjr.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Nov 05 18:34:10 +0000 2015](https://twitter.com/ChristopherA/status/662337122582421504)
 
@@ -282,7 +282,7 @@ Replying to [@manusporny and @elfpavlik](https://twitter.com/manusporny/status/6
 
 > White paper draft for #RebootingWebOfTrust — DPKI: Creating a Distributed Registy 
 > 
-> ![](../../media/662337396130738176-CTEYWjSUEAAdY6V.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/662337396130738176-CTEYWjSUEAAdY6V.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Nov 05 18:35:15 +0000 2015](https://twitter.com/ChristopherA/status/662337396130738176)
 
@@ -290,7 +290,7 @@ Replying to [@manusporny and @elfpavlik](https://twitter.com/manusporny/status/6
 
 > White paper draft for #RebootingWebOfTrust — Use Cases for Web of Trust: 
 > 
-> ![](../../media/662337564028747776-CTEYgU7UsAE5Cwl.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/662337564028747776-CTEYgU7UsAE5Cwl.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Nov 05 18:35:55 +0000 2015](https://twitter.com/ChristopherA/status/662337564028747776)
 
@@ -298,7 +298,7 @@ Replying to [@manusporny and @elfpavlik](https://twitter.com/manusporny/status/6
 
 > White paper draft for #RebootingWebOfTrust — An Example Use Case: Making Better Decisions: 
 > 
-> ![](../../media/662337822498525184-CTEYvXuUcAEl0Na.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/662337822498525184-CTEYvXuUcAEl0Na.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Nov 05 18:36:57 +0000 2015](https://twitter.com/ChristopherA/status/662337822498525184)
 
@@ -306,7 +306,7 @@ Replying to [@manusporny and @elfpavlik](https://twitter.com/manusporny/status/6
 
 > A technical white paper draft at #RebootingWebOfTrust — Smart Signatures: 
 > 
-> ![](../../media/662338350414626816-CTEZOGmVAAAgFFC.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/662338350414626816-CTEZOGmVAAAgFFC.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Nov 05 18:39:03 +0000 2015](https://twitter.com/ChristopherA/status/662338350414626816)
 
@@ -462,7 +462,7 @@ Replying to [@hadleybeeman](https://twitter.com/hadleybeeman/status/663393623715
 
 > The #SmartSignatures team at #RebootingWebOfTrust "self-validating certificates using Bitcoin’s script vm" 
 > 
-> ![](../../media/663824551940231168-CTZg6UmVEAA6CFQ.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/663824551940231168-CTZg6UmVEAA6CFQ.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon Nov 09 21:04:41 +0000 2015](https://twitter.com/ChristopherA/status/663824551940231168)
 
@@ -535,7 +535,7 @@ Replying to [@hadleybeeman](https://twitter.com/hadleybeeman/status/663393623715
 
 > Hmm, could done with a #BlockChain or #SmartContract someday… [http://www.cnn.com/2015/11/12/opinions/soros-ending-campaign-dollars-corruption/index.html](http://www.cnn.com/2015/11/12/opinions/soros-ending-campaign-dollars-corruption/index.html) 
 > 
-> ![](../../media/665305805827141632-CTukGd9UAAAplwL.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/665305805827141632-CTukGd9UAAAplwL.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri Nov 13 23:10:39 +0000 2015](https://twitter.com/ChristopherA/status/665305805827141632)
 
@@ -549,7 +549,7 @@ Replying to [@hadleybeeman](https://twitter.com/hadleybeeman/status/663393623715
 
 > #TinyHome envy… Sustainable does not mean you have to be Spartan! 
 > 
-> ![](../../media/665307940090281984-CTumCqYUcAElHfm.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/665307940090281984-CTumCqYUcAElHfm.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri Nov 13 23:19:08 +0000 2015](https://twitter.com/ChristopherA/status/665307940090281984)
 
@@ -645,7 +645,7 @@ Replying to [@taoeffect, @__apf__, @metromoxie, @frgx, @slightlylate, @laparisa,
 
 > RT @laparisa: Dell pre-installing self-signed root CAs too?! [https://edell.tlsfun.de/](https://edell.tlsfun.de/) #shockednotshocked 
 > 
-> <video controls><source src="../../media/668991759116976130-CUgsZ7uUYAAXQJd.mp4">Your browser does not support the video tag.</video>
+> <video controls><source src="{{ site.url }}{{ site.baseurl }}/assets/images/media/668991759116976130-CUgsZ7uUYAAXQJd.mp4">Your browser does not support the video tag.</video>
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Nov 24 03:17:19 +0000 2015](https://twitter.com/ChristopherA/status/668991759116976130)
 
