--- a/_tweets-md/2015/2015-12-01-tweets.md
+++ b/_tweets-md/2015/2015-12-01-tweets.md
@@ -66,7 +66,7 @@ Replying to [@networkservice](https://twitter.com/networkservice/status/67248262
 
 > Except from a poem by T.S. Eliot relevant to this conversation… 
 > 
-> ![](../../media/672529000590213122-CVVNkABUkAEeNFB.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/672529000590213122-CVVNkABUkAEeNFB.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Dec 03 21:33:03 +0000 2015](https://twitter.com/ChristopherA/status/672529000590213122)
 
@@ -94,7 +94,7 @@ Replying to [@networkservice](https://twitter.com/networkservice/status/67248262
 
 > RT @HeartIQ: 
 > 
-> ![](../../media/672984650294276098-CVVbF2ZUsAApurh.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/672984650294276098-CVVbF2ZUsAApurh.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sat Dec 05 03:43:38 +0000 2015](https://twitter.com/ChristopherA/status/672984650294276098)
 
@@ -238,7 +238,7 @@ Replying to [@khannib](https://twitter.com/khannib/status/676567422690705409)
 
 > My expansions to the Cthulhu Wars #Kickstarter game from @PetersenGames by @SandyOfCthulhu have arrived at @RPGnet: 
 > 
-> ![](../../media/676681820885291008-CWQOhqzVAAEp23k.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/676681820885291008-CWQOhqzVAAEp23k.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Dec 15 08:34:52 +0000 2015](https://twitter.com/ChristopherA/status/676681820885291008)
 
@@ -314,7 +314,7 @@ Replying to [@khannib](https://twitter.com/khannib/status/676608391129735169)
 
 > A winter #solstice thought from “In Praise of Shadows” by Jun'ichirō Tanizaki… 
 > 
-> ![](../../media/679128284475482114-CWy_kyfVAAEBYq9.png)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/679128284475482114-CWy_kyfVAAEBYq9.png)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Dec 22 02:36:15 +0000 2015](https://twitter.com/ChristopherA/status/679128284475482114)
 
@@ -322,7 +322,7 @@ Replying to [@khannib](https://twitter.com/khannib/status/676608391129735169)
 
 > RT @davepell: The condensed version of the 2015 Year in News. 
 > 
-> ![](../../media/679397900263120896-CWyQRTfUwAAQMP6.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/679397900263120896-CWyQRTfUwAAQMP6.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Dec 22 20:27:36 +0000 2015](https://twitter.com/ChristopherA/status/679397900263120896)
 
@@ -372,7 +372,7 @@ Replying to [@khannib](https://twitter.com/khannib/status/676608391129735169)
 
 > Frustrated by the 140 character limit in Twitter… 
 > 
-> ![](../../media/679775807972085760-CW8Mfm7UAAEl9om.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/679775807972085760-CW8Mfm7UAAEl9om.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Dec 23 21:29:16 +0000 2015](https://twitter.com/ChristopherA/status/679775807972085760)
 
@@ -535,7 +535,7 @@ Replying to [@JenniferSertl](https://twitter.com/JenniferSertl/status/5790646756
 
 > I agree with @davewiner about harm from dominance by and then shutdown of Google Reader… [https://medium.com/p/653bc2e991c5](https://medium.com/p/653bc2e991c5) 
 > 
-> ![](../../media/681960327651573760-CXbPTYaUQAASDQw.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/681960327651573760-CXbPTYaUQAASDQw.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Dec 29 22:09:46 +0000 2015](https://twitter.com/ChristopherA/status/681960327651573760)
 
@@ -557,7 +557,7 @@ Replying to [@JenniferSertl](https://twitter.com/JenniferSertl/status/5790646756
 
 > I have lately been calling this form of artificial intelligence "invisible architecture"… [http://qz.com/580080/evolutionary-biologist-elon-musk-is-right-about-the-threat-of-ai-but-hes-wrong-about-why/](http://qz.com/580080/evolutionary-biologist-elon-musk-is-right-about-the-threat-of-ai-but-hes-wrong-about-why/) 
 > 
-> ![](../../media/682007178576703488-CXb56TjUkAI2RyO.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/682007178576703488-CXb56TjUkAI2RyO.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Dec 30 01:15:57 +0000 2015](https://twitter.com/ChristopherA/status/682007178576703488)
 
