--- a/_tweets-md/2016/2016-01-01-tweets.md
+++ b/_tweets-md/2016/2016-01-01-tweets.md
@@ -89,7 +89,7 @@ Replying to [@zooko](https://twitter.com/zooko/status/683703726394204160)
 
 > RT @SanderDemeester: Here we go... #realworldcrypto 
 > 
-> ![](../../media/685261628607090694-CYKGHWfUoAEm27T.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/685261628607090694-CYKGHWfUoAEm27T.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri Jan 08 00:47:58 +0000 2016](https://twitter.com/ChristopherA/status/685261628607090694)
 
@@ -231,7 +231,7 @@ Replying to [@zooko](https://twitter.com/zooko/status/683703726394204160)
 
 > RT @gojomo: abandoned, worthless fiat coins (37¢) on the floor at the @SFBitcoinDevs meetup 
 > 
-> ![](../../media/691849982505271296-CZnrGLLWEAATkpV.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/691849982505271296-CZnrGLLWEAATkpV.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Jan 26 05:07:44 +0000 2016](https://twitter.com/ChristopherA/status/691849982505271296)
 
@@ -287,7 +287,7 @@ Replying to [@zooko](https://twitter.com/zooko/status/683703726394204160)
 
 > By @RamanFrey “Punishing the Outliers: How we unconsciously reward those who are like us” [http://bit.ly/1QqSHuR](http://bit.ly/1QqSHuR) 
 > 
-> ![](../../media/692213163681566723-CZs8JwyWEAEcnmJ.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/692213163681566723-CZs8JwyWEAEcnmJ.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Jan 27 05:10:53 +0000 2016](https://twitter.com/ChristopherA/status/692213163681566723)
 
@@ -341,7 +341,7 @@ Replying to [@zooko](https://twitter.com/zooko/status/683703726394204160)
 
 > “challenges: how to encourage contributions &amp; how to build antifragile ecosystems”  @nayafia [https://medium.com/@nayafia/we-re-in-a-brave-new-post-open-source-world-56ef46d152a3#---61-194.pjy4ed9vz](https://medium.com/@nayafia/we-re-in-a-brave-new-post-open-source-world-56ef46d152a3#---61-194.pjy4ed9vz) 
 > 
-> ![](../../media/692799033572745217-CZ1RDL9WEAEyFjX.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/692799033572745217-CZ1RDL9WEAEyFjX.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Jan 28 19:58:55 +0000 2016](https://twitter.com/ChristopherA/status/692799033572745217)
 
@@ -389,7 +389,7 @@ Replying to [@zooko](https://twitter.com/zooko/status/683703726394204160)
 
 > I appreciate how the audiences dress up for the #NoirCity film festival at the old Castro Theatre — Classic! 
 > 
-> ![](../../media/693626642057416704-CaBBwIrVAAAfIR0.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/693626642057416704-CaBBwIrVAAAfIR0.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sun Jan 31 02:47:33 +0000 2016](https://twitter.com/ChristopherA/status/693626642057416704)
 
