--- a/_tweets-md/2016/2016-02-01-tweets.md
+++ b/_tweets-md/2016/2016-02-01-tweets.md
@@ -32,7 +32,7 @@ Replying to [@NancyWhite](https://twitter.com/NancyWhite/status/6956092127646883
 
 > True! “the dream that drove so many of us in the early days isn’t the dream of…” — @zephoria [https://points.datasociety.net/it-s-not-cyberspace-anymore-55c659025e97#---75-198.npb04by5b](https://points.datasociety.net/it-s-not-cyberspace-anymore-55c659025e97#---75-198.npb04by5b) 
 > 
-> ![](../../media/695650707777654784-CadyofEWIAAbQ3j.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/695650707777654784-CadyofEWIAAbQ3j.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri Feb 05 16:50:27 +0000 2016](https://twitter.com/ChristopherA/status/695650707777654784)
 
@@ -316,9 +316,9 @@ Replying to [@petertoddbtc and @gojomo](https://twitter.com/peterktodd/status/69
 > RT @NickSzabo4: Noise in commodity prices misleads us about scarcity and sustainability.  
 > [http://unenumerated.blogspot.com/2016/02/two-malthusian-scares.html](http://unenumerated.blogspot.com/2016/02/two-malthusian-scares.html) 
 > 
-> ![](../../media/700027628795723776-CbZrINUVIAAkWGc.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/700027628795723776-CbZrINUVIAAkWGc.jpg)
 > 
-> ![](../../media/700027628795723776-CbZrIOnUcAAGKLL.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/700027628795723776-CbZrIOnUcAAGKLL.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Feb 17 18:42:47 +0000 2016](https://twitter.com/ChristopherA/status/700027628795723776)
 
@@ -334,9 +334,9 @@ Replying to [@taoeffect and @zcashco](https://twitter.com/taoeffect/status/69982
 
 > RT @NickSzabo4: New blog post -- of money and Malthus: [http://unenumerated.blogspot.com/2016/02/two-malthusian-scares.html](http://unenumerated.blogspot.com/2016/02/two-malthusian-scares.html) 
 > 
-> ![](../../media/700030872829833216-CbYF8tJUsAAkKAR.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/700030872829833216-CbYF8tJUsAAkKAR.jpg)
 > 
-> ![](../../media/700030872829833216-CbYF82_UkAAeLKw.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/700030872829833216-CbYF82_UkAAeLKw.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Feb 17 18:55:40 +0000 2016](https://twitter.com/ChristopherA/status/700030872829833216)
 
@@ -372,7 +372,7 @@ Replying to [@taoeffect and @zcashco](https://twitter.com/taoeffect/status/69982
 
 > We in tech community, in particular in #Blockchain, need to be careful of "Tyranny of the Quantifiable" #Complexity 
 > 
-> ![](../../media/700084658764034049-CbczSazVIAAdm6C.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/700084658764034049-CbczSazVIAAdm6C.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Feb 17 22:29:24 +0000 2016](https://twitter.com/ChristopherA/status/700084658764034049)
 
@@ -557,7 +557,7 @@ Replying to [@equalsAndy and @manusporny](https://twitter.com/equalsAndy/status/
 
 > Talking #VerifiableClaims &amp; #Blockchain at lunch with @Ryladog @Shepazu @manusporny @ChristopherA @halindrome 
 > 
-> ![](../../media/701884972404072448-Cb2YqGCUsAEkF29.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/701884972404072448-Cb2YqGCUsAEkF29.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon Feb 22 21:43:12 +0000 2016](https://twitter.com/ChristopherA/status/701884972404072448)
 
@@ -585,7 +585,7 @@ Replying to [@equalsAndy and @manusporny](https://twitter.com/equalsAndy/status/
 
 > I agree w/ @Joi here—part of the reason I'm here at a W3C mtg &amp; watching Linux Foundation's Hyperledger. Decisions! 
 > 
-> ![](../../media/701914898062663680-Cb2z4QRVAAAt2bT.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/701914898062663680-Cb2z4QRVAAAt2bT.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon Feb 22 23:42:07 +0000 2016](https://twitter.com/ChristopherA/status/701914898062663680)
 
@@ -595,7 +595,7 @@ Replying to [@equalsAndy and @manusporny](https://twitter.com/equalsAndy/status/
 
 > .@Joi You may find relevant the principals that I outline in the definition of a [http://ParticipatoryEcosystem.com](http://ParticipatoryEcosystem.com) 
 > 
-> ![](../../media/701915872424624128-Cb20w9bUAAAPl8c.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/701915872424624128-Cb20w9bUAAAPl8c.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon Feb 22 23:45:59 +0000 2016](https://twitter.com/ChristopherA/status/701915872424624128)
 
