--- a/_tweets-md/2016/2016-03-01-tweets.md
+++ b/_tweets-md/2016/2016-03-01-tweets.md
@@ -7,7 +7,7 @@ time:  23:59:59 +0000
 > RT @okTurtles: The Zcash Catch  
 > [https://blog.okturtles.com/2016/03/the-zcash-catch/](https://blog.okturtles.com/2016/03/the-zcash-catch/) #Zcash #Zerocash 
 > 
-> ![](../../media/705213770088316929-Ccj771xUsAAMUJL.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/705213770088316929-Ccj771xUsAAMUJL.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Mar 03 02:10:39 +0000 2016](https://twitter.com/ChristopherA/status/705213770088316929)
 
@@ -234,7 +234,7 @@ Replying to [@aleksblumentals, @clayforsberg, @blindspotting and @pekcafe](https
 
 > My favorite paragraphs by @profjasonpotts in @mesosoupblog about this: 
 > 
-> ![](../../media/708430137524498433-CdTZcomUYAAfRmB.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/708430137524498433-CdTZcomUYAAfRmB.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri Mar 11 23:11:21 +0000 2016](https://twitter.com/ChristopherA/status/708430137524498433)
 
@@ -425,9 +425,9 @@ Replying to [@fredhicks](https://twitter.com/@fredhicks/status/71301266658387558
 
 > Results of hack at Hyperledger meeting using UTXO code from Blockstream, middle from DAH, chaincode &amp; PBFT from IBM: 
 > 
-> ![](../../media/713377692922560512-CeZtOVRVAAAFBqh.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/713377692922560512-CeZtOVRVAAAFBqh.jpg)
 > 
-> ![](../../media/713377692922560512-CeZtOVTUMAUCwO_.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/713377692922560512-CeZtOVTUMAUCwO_.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri Mar 25 14:51:10 +0000 2016](https://twitter.com/ChristopherA/status/713377692922560512)
 
@@ -435,7 +435,7 @@ Replying to [@fredhicks](https://twitter.com/@fredhicks/status/71301266658387558
 
 > Pano of media wall installation in lobby of JP Morgan Chase in Brooklyn, made up of old CRTs: 
 > 
-> ![](../../media/713404804081573888-CeaF4LSUMAAQZpz.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/713404804081573888-CeaF4LSUMAAQZpz.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri Mar 25 16:38:54 +0000 2016](https://twitter.com/ChristopherA/status/713404804081573888)
 
@@ -512,7 +512,7 @@ Replying to [@chrismessina](https://twitter.com/chrismessina/status/713935389912
 
 > We need more social change this way: "Making change through norms has a momentum…" @EthanZ [https://medium.com/@EthanZ/rooftop-solar-and-the-four-levers-of-social-change-8e64c40bd5d7](https://medium.com/@EthanZ/rooftop-solar-and-the-four-levers-of-social-change-8e64c40bd5d7) 
 > 
-> ![](../../media/714499590137913344-CepplfhWIAAU7t6.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/714499590137913344-CepplfhWIAAU7t6.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon Mar 28 17:09:11 +0000 2016](https://twitter.com/ChristopherA/status/714499590137913344)
 
@@ -566,7 +566,7 @@ Replying to [@jaredhanson](https://twitter.com/jaredhanson/status/71461839431874
 
 > I'm disappointed in the corruption of the term "Smart Contracts"… 
 > 
-> ![](../../media/715197498646593536-CezkVHZWAAE-zTz.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/715197498646593536-CezkVHZWAAE-zTz.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Mar 30 15:22:26 +0000 2016](https://twitter.com/ChristopherA/status/715197498646593536)
 
