--- a/_tweets-md/2016/2016-04-01-tweets.md
+++ b/_tweets-md/2016/2016-04-01-tweets.md
@@ -123,7 +123,7 @@ Replying to [@coindesk](https://twitter.com/CoinDesk/status/717456484297216000)
 
 > "The Panama Papers show how vital encryption is…" [http://www.forbes.com/sites/thomasbrewster/2016/04/05/panama-papers-amazon-encryption-epic-leak/](http://www.forbes.com/sites/thomasbrewster/2016/04/05/panama-papers-amazon-encryption-epic-leak/) 
 > 
-> ![](../../media/717713678288572416-CfXUx8VUMAAn6nU.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/717713678288572416-CfXUx8VUMAAn6nU.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Apr 06 14:00:50 +0000 2016](https://twitter.com/ChristopherA/status/717713678288572416)
 
@@ -155,7 +155,7 @@ Replying to [@coindesk](https://twitter.com/CoinDesk/status/717456484297216000)
 
 > Hmm, look who Twitter is recommending that I follow: 
 > 
-> ![](../../media/717776023148896256-CfYNfUXUYAEGpFd.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/717776023148896256-CfYNfUXUYAEGpFd.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Apr 06 18:08:34 +0000 2016](https://twitter.com/ChristopherA/status/717776023148896256)
 
@@ -328,7 +328,7 @@ Replying to [@BernieRihn and @petertoddbtc](https://twitter.com/ChristopherA/sta
 
 > Ikigai 生き甲斐 is a Japanese concept meaning "a reason for being". Everyone, according to the Japanese, has an ikigai. 
 > 
-> ![](../../media/720111558790148100-Cf5ZpGBXIAE1-oz.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/720111558790148100-Cf5ZpGBXIAE1-oz.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Apr 13 04:49:09 +0000 2016](https://twitter.com/ChristopherA/status/720111558790148100)
 
@@ -658,7 +658,7 @@ Replying to [@EmLindley](https://twitter.com/EmLindley/status/722506973669941252
 
 > Challenges of popular smart contract approaches that DAML is trying to address is when confidentiality is an issue: 
 > 
-> ![](../../media/722805424987054080-Cgfrs74UsAEIihZ.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/722805424987054080-Cgfrs74UsAEIihZ.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Apr 20 15:13:37 +0000 2016](https://twitter.com/ChristopherA/status/722805424987054080)
 
@@ -716,7 +716,7 @@ Replying to [@trentmc0](https://twitter.com/trentmc0/status/722804423085461504)
 
 > +1 to Kevin Werbach's @kwerb tweetstorm rant on hidden economics, loss of faith in our ecosystem and transparency: 
 > 
-> ![](../../media/722900816152035328-CghCdhwUkAATi0r.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/722900816152035328-CghCdhwUkAATi0r.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Apr 20 21:32:40 +0000 2016](https://twitter.com/ChristopherA/status/722900816152035328)
 
@@ -832,7 +832,7 @@ Replying to [@trentmc0](https://twitter.com/trentmc0/status/722902966194208768)
 
 > RT @brainpicker: What makes a person—the 7 layers of identity, in literature and life [https://www.brainpickings.org/2016/03/02/amelie-rorty-the-identities-of-persons/](https://www.brainpickings.org/2016/03/02/amelie-rorty-the-identities-of-persons/) 
 > 
-> ![](../../media/723528205345296384-CgpnbZuW4AE7SZ6.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/723528205345296384-CgpnbZuW4AE7SZ6.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri Apr 22 15:05:41 +0000 2016](https://twitter.com/ChristopherA/status/723528205345296384)
 
@@ -962,7 +962,7 @@ Replying to [@petertoddbtc](https://twitter.com/ChristopherA/status/723521974375
 
 > At #IIW where @Kim_Cameron is sharing the origin of "7 Laws of Identity" over a decade ago. [http://www.identityblog.com/stories/2005/05/13/TheLawsOfIdentity.pdf](http://www.identityblog.com/stories/2005/05/13/TheLawsOfIdentity.pdf) 
 > 
-> ![](../../media/725002478358388736-Cg-56NeUcAA2Jab.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/725002478358388736-Cg-56NeUcAA2Jab.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Apr 26 16:43:55 +0000 2016](https://twitter.com/ChristopherA/status/725002478358388736)
 
@@ -1074,13 +1074,13 @@ Replying to [@Steve_Lockstep and @JohnFontana](https://twitter.com/Steve_Lockste
 
 > Is it possible to revoke a biometric based identity key? A discussion at #IIW. I'm skeptical, but great if we could. 
 > 
-> ![](../../media/725763914403713024-ChJubidVEAAmW5r.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/725763914403713024-ChJubidVEAAmW5r.jpg)
 > 
-> ![](../../media/725763914403713024-ChJubioU8AAddbF.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/725763914403713024-ChJubioU8AAddbF.jpg)
 > 
-> ![](../../media/725763914403713024-ChJubjzUoAAeOLL.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/725763914403713024-ChJubjzUoAAeOLL.jpg)
 > 
-> ![](../../media/725763914403713024-ChJubk8UUAAiNbr.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/725763914403713024-ChJubk8UUAAiNbr.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Apr 28 19:09:35 +0000 2016](https://twitter.com/ChristopherA/status/725763914403713024)
 
@@ -1090,7 +1090,7 @@ Replying to [@Steve_Lockstep and @JohnFontana](https://twitter.com/Steve_Lockste
 
 > Many problems in our discussion is biometric's use for auth vs privacy risks of using them for identification. 
 > 
-> ![](../../media/725767058642718722-ChJxSn1UcAAVgjf.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/725767058642718722-ChJxSn1UcAAVgjf.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Apr 28 19:22:05 +0000 2016](https://twitter.com/ChristopherA/status/725767058642718722)
 
