--- a/_tweets-md/2016/2016-05-01-tweets.md
+++ b/_tweets-md/2016/2016-05-01-tweets.md
@@ -38,7 +38,7 @@ Replying to [@RaineyReitman](https://twitter.com/RaineyReitman/status/7265955945
 
 > RT @ofnumbers: with gurus: @muneeb @ChristopherA @zooko @socrates1024 at #Consensus2016 
 > 
-> ![](../../media/727209660386828288-CheQS3PW0AQsUTe.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/727209660386828288-CheQS3PW0AQsUTe.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon May 02 18:54:28 +0000 2016](https://twitter.com/ChristopherA/status/727209660386828288)
 
@@ -295,9 +295,9 @@ Replying to [@pro2rat](https://twitter.com/@pro2rat/status/727839728041500672)
 
 > RT @guylepage3: Identity on the Blockchain via @ChristopherA at #Consensus2016 @blockstackorg 
 > 
-> ![](../../media/727860644020662273-Chne3LtWUAAKW6D.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/727860644020662273-Chne3LtWUAAKW6D.jpg)
 > 
-> ![](../../media/727860644020662273-Chne3L6WsAAmeWx.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/727860644020662273-Chne3L6WsAAmeWx.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed May 04 14:01:15 +0000 2016](https://twitter.com/ChristopherA/status/727860644020662273)
 
@@ -305,7 +305,7 @@ Replying to [@pro2rat](https://twitter.com/@pro2rat/status/727839728041500672)
 
 > RT @BTC_Jeff: .@ChristopherA from @Blockstream presenting at the @Consensus2016 Identity workshop 
 > 
-> ![](../../media/727860660743372800-ChndwEmWEAAFDA8.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/727860660743372800-ChndwEmWEAAFDA8.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed May 04 14:01:19 +0000 2016](https://twitter.com/ChristopherA/status/727860660743372800)
 
@@ -347,13 +347,13 @@ Replying to [@pro2rat](https://twitter.com/@pro2rat/status/727853211780947969)
 
 > Paul Ferris of ObjectChain also working toward self-sovereign identity. 
 > 
-> ![](../../media/727869212853678081-ChnpL_OWUAAH8T-.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/727869212853678081-ChnpL_OWUAAH8T-.jpg)
 > 
-> ![](../../media/727869212853678081-ChnpL_PW0AEYsbe.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/727869212853678081-ChnpL_PW0AEYsbe.jpg)
 > 
-> ![](../../media/727869212853678081-ChnpL_xWsAAv0SF.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/727869212853678081-ChnpL_xWsAAv0SF.jpg)
 > 
-> ![](../../media/727869212853678081-ChnpMAyWkAEVhdb.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/727869212853678081-ChnpMAyWkAEVhdb.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed May 04 14:35:18 +0000 2016](https://twitter.com/ChristopherA/status/727869212853678081)
 
@@ -492,7 +492,7 @@ Replying to [@jonmarsk, @nelsonforthewin and @identity2020](https://twitter.com/
 
 > Thomas Jefferson regularly amazes me with his prescient prose. This on connects #OpenSource to the #BigBang: 
 > 
-> ![](../../media/728565408979161088-ChxiYAjXIAEMSaH.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/728565408979161088-ChxiYAjXIAEMSaH.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri May 06 12:41:44 +0000 2016](https://twitter.com/ChristopherA/status/728565408979161088)
 
@@ -522,7 +522,7 @@ Replying to [@jessibaker](https://twitter.com/jessibaker/status/7285726615472742
 
 > I am optimistic about the self-sovereign identity opportunities to address some problems in the developing world: 
 > 
-> ![](../../media/730109360077189120-CiHelsCWsAALXdL.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/730109360077189120-CiHelsCWsAALXdL.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue May 10 18:56:50 +0000 2016](https://twitter.com/ChristopherA/status/730109360077189120)
 
@@ -552,7 +552,7 @@ Replying to [@timpastoor and @coindesk](https://twitter.com/timpastoor/status/73
 
 > Four steps to kind, constructive criticism. We need more of it, and please hold me to offering it! @brainpicker 
 > 
-> ![](../../media/730162237843886080-CiIOredVEAA8csI.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/730162237843886080-CiIOredVEAA8csI.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue May 10 22:26:57 +0000 2016](https://twitter.com/ChristopherA/status/730162237843886080)
 
@@ -578,7 +578,7 @@ Replying to [@timpastoor and @coindesk](https://twitter.com/timpastoor/status/73
 
 > My comments on #identity were picked up as one of the 10 quotes that defined #Consensus2016 [https://twitter.com/coindesk/status/730044360323108865](https://twitter.com/coindesk/status/730044360323108865) 
 > 
-> ![](../../media/730466214678532096-CiMjJZcXIAAUF1O.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/730466214678532096-CiMjJZcXIAAUF1O.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed May 11 18:34:51 +0000 2016](https://twitter.com/ChristopherA/status/730466214678532096)
 
@@ -604,7 +604,7 @@ Replying to [@timpastoor and @coindesk](https://twitter.com/timpastoor/status/73
 
 > RT @S4Pattern: Yup. (image from slides by @ChristopherA: [http://www.slideshare.net/ChristopherA/identity-of-the-blockchain-perils-and-promise)](http://www.slideshare.net/ChristopherA/identity-of-the-blockchain-perils-and-promise)) 
 > 
-> ![](../../media/730563973179834368-CiN6TsHVAAAyJJh.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/730563973179834368-CiN6TsHVAAAyJJh.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu May 12 01:03:19 +0000 2016](https://twitter.com/ChristopherA/status/730563973179834368)
 
@@ -626,7 +626,7 @@ Replying to [@timpastoor and @coindesk](https://twitter.com/timpastoor/status/73
 
 > I like this image about fundamental difference between financial &amp; supply chain blockchains [http://www.multichain.com/blog/2016/05/four-genuine-blockchain-use-cases/](http://www.multichain.com/blog/2016/05/four-genuine-blockchain-use-cases/) 
 > 
-> ![](../../media/730796872865058817-CiRP4U3UkAA1t-2.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/730796872865058817-CiRP4U3UkAA1t-2.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu May 12 16:28:46 +0000 2016](https://twitter.com/ChristopherA/status/730796872865058817)
 
@@ -670,7 +670,7 @@ Replying to [@windley, @NZN and @dsearls](https://twitter.com/windley/status/730
 
 > "We must take control of our online identities or be prepared to surrender key rights…" [https://twitter.com/windley/status/730806729756139520](https://twitter.com/windley/status/730806729756139520) 
 > 
-> ![](../../media/730871028805697537-CiSTUyVWUAAH4y-.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/730871028805697537-CiSTUyVWUAAH4y-.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu May 12 21:23:26 +0000 2016](https://twitter.com/ChristopherA/status/730871028805697537)
 
@@ -812,9 +812,9 @@ Replying to [@carwynedwards](https://twitter.com/carwynedwards/status/7290533762
 
 > RT @izakaminska: Good on the bitshares guys from at least admitting this reality 
 > 
-> ![](../../media/732583326012280832-CiokTSlVEAALA8U.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/732583326012280832-CiokTSlVEAALA8U.jpg)
 > 
-> ![](../../media/732583326012280832-CiokTTBUUAAuCuu.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/732583326012280832-CiokTTBUUAAuCuu.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue May 17 14:47:30 +0000 2016](https://twitter.com/ChristopherA/status/732583326012280832)
 
@@ -1012,7 +1012,7 @@ Replying to [@davewiner](https://twitter.com/davewiner/status/733226727703511040
 
 > People arriving at the Trusteeship Council in the United Nations for the first #ID2020 Digital Identity Summit: 
 > 
-> ![](../../media/733644239922434048-Ci5tg3eXEAAO7iy.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/733644239922434048-Ci5tg3eXEAAO7iy.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri May 20 13:03:11 +0000 2016](https://twitter.com/ChristopherA/status/733644239922434048)
 
@@ -1109,7 +1109,7 @@ Replying to [@alaeven](https://twitter.com/alaeven/status/733646378631565313)
 
 > #ID2020 Digital Identity Summit at UN Summit. Session 1: Welcome and Opening Remarks #GraphicRecording 
 > 
-> ![](../../media/733671106612199426-Ci6F9kAWEAEoseQ.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/733671106612199426-Ci6F9kAWEAEoseQ.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri May 20 14:49:57 +0000 2016](https://twitter.com/ChristopherA/status/733671106612199426)
 
@@ -1139,7 +1139,7 @@ Replying to [@alaeven](https://twitter.com/alaeven/status/733646378631565313)
 
 > #ID2020 Digital Identity Summit at UN Summit. Session 2: What is the Reality? #GraphicRecording 
 > 
-> ![](../../media/733677267474341888-Ci6Li2DWkAA3P8u.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/733677267474341888-Ci6Li2DWkAA3P8u.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri May 20 15:14:26 +0000 2016](https://twitter.com/ChristopherA/status/733677267474341888)
 
@@ -1171,7 +1171,7 @@ Replying to [@alaeven](https://twitter.com/alaeven/status/733646378631565313)
 
 > RT @GhelaBoskovich: The horrendous consequences of being stripped of #identity - the #BokoHaram case study @ #ID2020 
 > 
-> ![](../../media/733680584250265600-Ci6IpWaVEAE_rFV.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/733680584250265600-Ci6IpWaVEAE_rFV.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri May 20 15:27:37 +0000 2016](https://twitter.com/ChristopherA/status/733680584250265600)
 
@@ -1235,7 +1235,7 @@ Replying to [@alaeven](https://twitter.com/alaeven/status/733646378631565313)
 
 > RT @crainbf: 'How do you build an identity platform for the future?' @VinnyLingham at #ID2020 
 > 
-> ![](../../media/733684663437381632-Ci6SA4RWYAAJD-N.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/733684663437381632-Ci6SA4RWYAAJD-N.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri May 20 15:43:49 +0000 2016](https://twitter.com/ChristopherA/status/733684663437381632)
 
@@ -1245,7 +1245,7 @@ Replying to [@alaeven](https://twitter.com/alaeven/status/733646378631565313)
 
 > #ID2020 Digital Identity Summit at UN Headquarters. Session 3: What Makes Up Legal Identity?  #GraphicRecording 
 > 
-> ![](../../media/733686612203339776-Ci6UDXfWkAAkmQ6.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/733686612203339776-Ci6UDXfWkAAkmQ6.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri May 20 15:51:34 +0000 2016](https://twitter.com/ChristopherA/status/733686612203339776)
 
@@ -1309,7 +1309,7 @@ Replying to [@alaeven](https://twitter.com/alaeven/status/733646378631565313)
 
 > #ID2020 Digital Identity Summit at UN Headquarters. Session 4: Specific Problems With Identity #GraphicRecording 
 > 
-> ![](../../media/733696253553414144-Ci6c1OMWYAAZags.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/733696253553414144-Ci6c1OMWYAAZags.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri May 20 16:29:52 +0000 2016](https://twitter.com/ChristopherA/status/733696253553414144)
 
@@ -1349,7 +1349,7 @@ Replying to [@rangerj](https://twitter.com/rangerj/status/733721113960808448)
 
 > RT @anujaksingh: Powerful concept - Freedom as a Service @moniquejmorrow #id2020 
 > 
-> ![](../../media/733726382765813760-Ci63NLPWUAInpn3.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/733726382765813760-Ci63NLPWUAInpn3.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri May 20 18:29:36 +0000 2016](https://twitter.com/ChristopherA/status/733726382765813760)
 
@@ -1363,7 +1363,7 @@ Replying to [@rangerj](https://twitter.com/rangerj/status/733721113960808448)
 
 > RT @IntermarketPR: Watch the #ID2020 Summit press conference live on @UN Web TV right now: [http://webtv.un.org/live-now/watch/press-conference-the-un-office-for-partnerships-unop-on-id-2020-harnessing-the-power-of-digital-legal-identities-for-global-good/4586131268001](http://webtv.un.org/live-now/watch/press-conference-the-un-office-for-partnerships-unop-on-id-2020-harnessing-the-power-of-digital-legal-identities-for-global-good/4586131268001) 
 > 
-> ![](../../media/733727516452618240-Ci64t9IWEAA0P-6.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/733727516452618240-Ci64t9IWEAA0P-6.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri May 20 18:34:06 +0000 2016](https://twitter.com/ChristopherA/status/733727516452618240)
 
@@ -1371,7 +1371,7 @@ Replying to [@rangerj](https://twitter.com/rangerj/status/733721113960808448)
 
 > RT @MollyElginCossa: A whole new take on drones from @moniquejmorrow #ID2020 #RefugeeChallenge 
 > 
-> ![](../../media/733727581749583872-Ci65JjcUYAAbVAt.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/733727581749583872-Ci65JjcUYAAbVAt.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri May 20 18:34:22 +0000 2016](https://twitter.com/ChristopherA/status/733727581749583872)
 
@@ -1461,7 +1461,7 @@ Replying to [@JPNicols and @NextMoney_](https://twitter.com/JPNicols/status/7336
 
 > RT @PartelowPati: #ID2020 @moniquejmorrow shares concept of Freedom as a Service 
 > 
-> ![](../../media/733733252423421953-Ci69h38WgAYpysH.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/733733252423421953-Ci69h38WgAYpysH.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri May 20 18:56:54 +0000 2016](https://twitter.com/ChristopherA/status/733733252423421953)
 
@@ -1479,7 +1479,7 @@ Replying to [@anujaksingh and @moniquejmorrow](https://twitter.com/anujaksingh/s
 
 > #ID2020 Digital Identity Summit at UN HQ. Session 5: What Can Tech Do To Make This A Reality?#GraphicRecording 
 > 
-> ![](../../media/733735406743760896-Ci7AcxcXAAA86ND.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/733735406743760896-Ci7AcxcXAAA86ND.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri May 20 19:05:27 +0000 2016](https://twitter.com/ChristopherA/status/733735406743760896)
 
@@ -1538,7 +1538,7 @@ Replying to [@anujaksingh and @moniquejmorrow](https://twitter.com/anujaksingh/s
 > Smartphones are "blessing but also a curse" for #RefugeeCrisis @margiecheese—so is Identity!  
 > [https://twitter.com/margiecheese/status/733738757510303744](https://twitter.com/margiecheese/status/733738757510303744) 
 > 
-> ![](../../media/733741569845649408-Ci7GEJ4WkAIRhDj.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/733741569845649408-Ci7GEJ4WkAIRhDj.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri May 20 19:29:57 +0000 2016](https://twitter.com/ChristopherA/status/733741569845649408)
 
@@ -1548,7 +1548,7 @@ Replying to [@anujaksingh and @moniquejmorrow](https://twitter.com/anujaksingh/s
 
 > #ID2020 Digital Identity Summit at UN Headquarters. Session 6: What Could Get In The Way? #GraphicRecording 
 > 
-> ![](../../media/733742580932988928-Ci7G-c-XAAEYRAV.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/733742580932988928-Ci7G-c-XAAEYRAV.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri May 20 19:33:58 +0000 2016](https://twitter.com/ChristopherA/status/733742580932988928)
 
@@ -1602,7 +1602,7 @@ Replying to [@anujaksingh and @moniquejmorrow](https://twitter.com/anujaksingh/s
 
 > #ID2020 Digital Identity Summit at UN Headquarters. Session 7: Lunch Group Results &amp; Discussion #GraphicRecording 
 > 
-> ![](../../media/733759113361039360-Ci7WAdNWUAA0tQC.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/733759113361039360-Ci7WAdNWUAA0tQC.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri May 20 20:39:39 +0000 2016](https://twitter.com/ChristopherA/status/733759113361039360)
 
@@ -1619,7 +1619,7 @@ Replying to [@anujaksingh and @moniquejmorrow](https://twitter.com/anujaksingh/s
 
 > #ID2020 Digital Identity Summit at UN Headquarters. Session 8: Getting Started? #GraphicRecording 
 > 
-> ![](../../media/733805467697336320-Ci8AJnAXEAA7mKp.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/733805467697336320-Ci8AJnAXEAA7mKp.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri May 20 23:43:51 +0000 2016](https://twitter.com/ChristopherA/status/733805467697336320)
 
@@ -1629,7 +1629,7 @@ Replying to [@anujaksingh and @moniquejmorrow](https://twitter.com/anujaksingh/s
 
 > #ID2020 Digital Identity Summit at UN Headquarters. Session 9 (and last): Call to Action! #GraphicRecording 
 > 
-> ![](../../media/733805988550172674-Ci8ApVAWEAAzOH7.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/733805988550172674-Ci8ApVAWEAAzOH7.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri May 20 23:45:55 +0000 2016](https://twitter.com/ChristopherA/status/733805988550172674)
 
@@ -1663,7 +1663,7 @@ Replying to [@anujaksingh and @moniquejmorrow](https://twitter.com/anujaksingh/s
 
 > RT @MaryHodder: We have standardization problem. 
 > 
-> ![](../../media/733820699492503552-Ci8IaA7UkAQ4LIC.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/733820699492503552-Ci8IaA7UkAQ4LIC.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sat May 21 00:44:23 +0000 2016](https://twitter.com/ChristopherA/status/733820699492503552)
 
@@ -1683,11 +1683,11 @@ Replying to [@anujaksingh and @moniquejmorrow](https://twitter.com/anujaksingh/s
 
 > The obligatory "I led a panel at the United Nations on Digital Identity" vanity shot. The place defines seriousness. 
 > 
-> ![](../../media/733850217477464064-Ci8o1f-XEAAeZ54.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/733850217477464064-Ci8o1f-XEAAeZ54.jpg)
 > 
-> ![](../../media/733850217477464064-Ci8o1gBW0AESLjx.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/733850217477464064-Ci8o1gBW0AESLjx.jpg)
 > 
-> ![](../../media/733850217477464064-Ci8o1gCWYAAc4wk.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/733850217477464064-Ci8o1gCWYAAc4wk.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sat May 21 02:41:40 +0000 2016](https://twitter.com/ChristopherA/status/733850217477464064)
 
@@ -1695,7 +1695,7 @@ Replying to [@anujaksingh and @moniquejmorrow](https://twitter.com/anujaksingh/s
 
 > Visualizing the Future of Identity at #RebootingWebOfTrust using the #TakeAPanel process. 
 > 
-> ![](../../media/734034290334420992-Ci_QTCYW0AArzUj.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/734034290334420992-Ci_QTCYW0AArzUj.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sat May 21 14:53:07 +0000 2016](https://twitter.com/ChristopherA/status/734034290334420992)
 
@@ -1705,13 +1705,13 @@ Replying to [@anujaksingh and @moniquejmorrow](https://twitter.com/anujaksingh/s
 
 > Next step in #TakeAPanel exercise at #RebootingWebOfTrust: Similarities &amp; differences between our visions of future 
 > 
-> ![](../../media/734043594185641984-Ci_Yu1XXAAAVUQo.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/734043594185641984-Ci_Yu1XXAAAVUQo.jpg)
 > 
-> ![](../../media/734043594185641984-Ci_Yu1aWYAAInVW.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/734043594185641984-Ci_Yu1aWYAAInVW.jpg)
 > 
-> ![](../../media/734043594185641984-Ci_Yu1lXIAAzjHZ.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/734043594185641984-Ci_Yu1lXIAAzjHZ.jpg)
 > 
-> ![](../../media/734043594185641984-Ci_Yu2RXIAAgZyN.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/734043594185641984-Ci_Yu2RXIAAgZyN.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sat May 21 15:30:05 +0000 2016](https://twitter.com/ChristopherA/status/734043594185641984)
 
@@ -1737,7 +1737,7 @@ Replying to [@anujaksingh and @moniquejmorrow](https://twitter.com/anujaksingh/s
 
 > RT @globalconsent: Super excited to be participating in #rebootingweboftrust design workshop in NYC this weekend 
 > 
-> ![](../../media/734057288705658880-Ci_FHm2UYAAxrni.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/734057288705658880-Ci_FHm2UYAAxrni.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sat May 21 16:24:30 +0000 2016](https://twitter.com/ChristopherA/status/734057288705658880)
 
@@ -1849,7 +1849,7 @@ Replying to [@anujaksingh and @moniquejmorrow](https://twitter.com/anujaksingh/s
 
 > Opening notes from day 1 of #RebootingWebOfTrust #GraphicRecording 
 > 
-> ![](../../media/734357605691338752-CjD2VvAXEAIYDtm.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/734357605691338752-CjD2VvAXEAIYDtm.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sun May 22 12:17:51 +0000 2016](https://twitter.com/ChristopherA/status/734357605691338752)
 
@@ -1859,13 +1859,13 @@ Replying to [@anujaksingh and @moniquejmorrow](https://twitter.com/anujaksingh/s
 
 > Four of the 40 different visions of what is Identity in 2031. Part of #RebootingWebOfTrust #TakeAPanel exercise: 
 > 
-> ![](../../media/734361993025626112-CjD6VClWEAAYA6K.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/734361993025626112-CjD6VClWEAAYA6K.jpg)
 > 
-> ![](../../media/734361993025626112-CjD6VClW0AA5myh.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/734361993025626112-CjD6VClW0AA5myh.jpg)
 > 
-> ![](../../media/734361993025626112-CjD6VClWgAQrR9N.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/734361993025626112-CjD6VClWgAQrR9N.jpg)
 > 
-> ![](../../media/734361993025626112-CjD6VDlW0AERBSs.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/734361993025626112-CjD6VDlW0AERBSs.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sun May 22 12:35:17 +0000 2016](https://twitter.com/ChristopherA/status/734361993025626112)
 
@@ -1875,7 +1875,7 @@ Replying to [@anujaksingh and @moniquejmorrow](https://twitter.com/anujaksingh/s
 
 > Notes summarizing the 40 different visions of the future of identity in 2031, from #RebootingWebOfTrust #TakeAPanel 
 > 
-> ![](../../media/734362984353550336-CjD7O0_W0AAXi2D.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/734362984353550336-CjD7O0_W0AAXi2D.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sun May 22 12:39:13 +0000 2016](https://twitter.com/ChristopherA/status/734362984353550336)
 
@@ -1963,11 +1963,11 @@ Replying to [@anujaksingh and @moniquejmorrow](https://twitter.com/anujaksingh/s
 
 > Made real progress last weekend at #RebootingWebOfTrust on an architecture for self-sovereign identity @manusporny 
 > 
-> ![](../../media/734705552094269441-CjIyzI0WkAA7pV1.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/734705552094269441-CjIyzI0WkAA7pV1.jpg)
 > 
-> ![](../../media/734705552094269441-CjIyzI2XIAAOzLi.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/734705552094269441-CjIyzI2XIAAOzLi.jpg)
 > 
-> ![](../../media/734705552094269441-CjIyzI3XIAApxMe.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/734705552094269441-CjIyzI3XIAApxMe.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon May 23 11:20:28 +0000 2016](https://twitter.com/ChristopherA/status/734705552094269441)
 
@@ -1977,11 +1977,11 @@ Replying to [@anujaksingh and @moniquejmorrow](https://twitter.com/anujaksingh/s
 
 > Core component of the self-sovereign identity architecture is the DID—Decentralized IDentifier #RebootingWebOfTrust 
 > 
-> ![](../../media/734706786528317440-CjIz68KVEAAor9I.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/734706786528317440-CjIz68KVEAAor9I.jpg)
 > 
-> ![](../../media/734706786528317440-CjIz68NUYAAtflh.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/734706786528317440-CjIz68NUYAAtflh.jpg)
 > 
-> ![](../../media/734706786528317440-CjIz68OUUAArI_e.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/734706786528317440-CjIz68OUUAArI_e.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon May 23 11:25:22 +0000 2016](https://twitter.com/ChristopherA/status/734706786528317440)
 
@@ -1989,13 +1989,13 @@ Replying to [@anujaksingh and @moniquejmorrow](https://twitter.com/anujaksingh/s
 
 > We plan to have next #RebootingWebOfTrust in September, meanwhile work with other groups &amp; increase diversity. 
 > 
-> ![](../../media/734707986317348864-CjI1A4IWEAEhN8X.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/734707986317348864-CjI1A4IWEAEhN8X.jpg)
 > 
-> ![](../../media/734707986317348864-CjI1A4KXEAAyy_A.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/734707986317348864-CjI1A4KXEAAyy_A.jpg)
 > 
-> ![](../../media/734707986317348864-CjI1A4OW0AIfdK9.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/734707986317348864-CjI1A4OW0AIfdK9.jpg)
 > 
-> ![](../../media/734707986317348864-CjI1A4jWgAE4js9.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/734707986317348864-CjI1A4jWgAE4js9.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon May 23 11:30:08 +0000 2016](https://twitter.com/ChristopherA/status/734707986317348864)
 
@@ -2003,9 +2003,9 @@ Replying to [@anujaksingh and @moniquejmorrow](https://twitter.com/anujaksingh/s
 
 > Our inspirations, insights and appreciations from #RebootingWebOfTrust after #ID2020: 
 > 
-> ![](../../media/734709095496880129-CjI2BaVWsAAJdeg.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/734709095496880129-CjI2BaVWsAAJdeg.jpg)
 > 
-> ![](../../media/734709095496880129-CjI2BaPWEAEeqM1.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/734709095496880129-CjI2BaPWEAEeqM1.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon May 23 11:34:33 +0000 2016](https://twitter.com/ChristopherA/status/734709095496880129)
 
@@ -2039,13 +2039,13 @@ Replying to [@anujaksingh and @moniquejmorrow](https://twitter.com/anujaksingh/s
 
 > Vermont H.868 Blockchain Enabling "As used in this section, 'blockchain technology' means a mathematically secured…" 
 > 
-> ![](../../media/734785916502462465-CjJ75QpWUAI49KK.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/734785916502462465-CjJ75QpWUAI49KK.jpg)
 > 
-> ![](../../media/734785916502462465-CjJ75QrXAAAbjKp.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/734785916502462465-CjJ75QrXAAAbjKp.jpg)
 > 
-> ![](../../media/734785916502462465-CjJ75QqXEAAALXf.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/734785916502462465-CjJ75QqXEAAALXf.jpg)
 > 
-> ![](../../media/734785916502462465-CjJ75RAXEAEuBxB.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/734785916502462465-CjJ75RAXEAEuBxB.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon May 23 16:39:48 +0000 2016](https://twitter.com/ChristopherA/status/734785916502462465)
 
@@ -2067,7 +2067,7 @@ Replying to [@anujaksingh and @moniquejmorrow](https://twitter.com/anujaksingh/s
 
 > Some interesting thoughts about using the laws around US credit unions to be guarantor of self-sovereign identities. 
 > 
-> ![](../../media/734834898742218752-CjKocVZWUAACgRt.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/734834898742218752-CjKocVZWUAACgRt.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon May 23 19:54:27 +0000 2016](https://twitter.com/ChristopherA/status/734834898742218752)
 
@@ -2103,7 +2103,7 @@ Replying to [@angela_walch](https://twitter.com/angela_walch/status/734847105412
 
 > RT @veorq: 
 > 
-> ![](../../media/735106675254910976-CjLXOXpXIAEMhuQ.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/735106675254910976-CjLXOXpXIAEMhuQ.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue May 24 13:54:23 +0000 2016](https://twitter.com/ChristopherA/status/735106675254910976)
 
@@ -2111,7 +2111,7 @@ Replying to [@angela_walch](https://twitter.com/angela_walch/status/734847105412
 
 > RT @mdangear: @pdewost presenting at the @MIT @CommonAccord conference #DecentLaw 
 > 
-> ![](../../media/735146596141309952-CjPCyofWsAEbBTB.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/735146596141309952-CjPCyofWsAEbBTB.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue May 24 16:33:01 +0000 2016](https://twitter.com/ChristopherA/status/735146596141309952)
 
@@ -2195,7 +2195,7 @@ Replying to [@SamouraiWallet, @Firuzeh1, @IranCubator, @united4iran and @andreca
 
 > I'm very intrigued by this slide from @bsuichies on the mismatch between smart contracts and legal contracts. 
 > 
-> ![](../../media/735249660101730304-CjQhqpvXEAExUi3.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/735249660101730304-CjQhqpvXEAExUi3.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue May 24 23:22:33 +0000 2016](https://twitter.com/ChristopherA/status/735249660101730304)
 
@@ -2241,7 +2241,7 @@ Replying to [@mindspillage and @bsuichies](https://twitter.com/mindspillage/stat
 
 > RT @lopp: There is no such thing as a "Bitcoin Expert" [https://zander.github.io/posts/With%20Information%20Comes%20Understanding/](https://zander.github.io/posts/With%20Information%20Comes%20Understanding/) 
 > 
-> ![](../../media/735262759659659264-CjQRvQdVAAAKBeL.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/735262759659659264-CjQRvQdVAAAKBeL.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed May 25 00:14:37 +0000 2016](https://twitter.com/ChristopherA/status/735262759659659264)
 
@@ -2363,7 +2363,7 @@ Replying to [@lykle](https://twitter.com/lykle/status/735369024134057984)
 
 > RT @rangerj: A plan for peace in the digital privacy wars: [https://medium.com/the-internet-of-me/a-plan-for-peace-in-the-personal-data-war-interview-with-julian-ranger-of-digi-me-89f88ce88780#---0-167.fz7lt5wdn](https://medium.com/the-internet-of-me/a-plan-for-peace-in-the-personal-data-war-interview-with-julian-ranger-of-digi-me-89f88ce88780#---0-167.fz7lt5wdn) 
 > 
-> ![](../../media/735523258737528832-CjUDXjGWgAIdqag.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/735523258737528832-CjUDXjGWgAIdqag.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed May 25 17:29:44 +0000 2016](https://twitter.com/ChristopherA/status/735523258737528832)
 
@@ -2511,7 +2511,7 @@ Replying to [@apperceptions](https://twitter.com/ChristopherA/status/73592668997
 
 > RT @laurentbenichou: My early thoughts on #blockchain and insurance [https://medium.com/@laurentbenichou/blockchain-insurance-early-thoughts-b61977b82c27#.zhwn8h1vk](https://medium.com/@laurentbenichou/blockchain-insurance-early-thoughts-b61977b82c27#.zhwn8h1vk) 
 > 
-> ![](../../media/735942343652696064-CjZc-ZeXIAA6zxn.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/735942343652696064-CjZc-ZeXIAA6zxn.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu May 26 21:15:02 +0000 2016](https://twitter.com/ChristopherA/status/735942343652696064)
 
@@ -2561,13 +2561,13 @@ Replying to [@apperceptions](https://twitter.com/ChristopherA/status/73592668997
 
 > I appreciate the design &amp; aesthetic choices made in NYC's High Line Park that preserved the old elevated tracks. 
 > 
-> ![](../../media/736966784805437441-Cjo7XTwWYAEK7gl.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/736966784805437441-Cjo7XTwWYAEK7gl.jpg)
 > 
-> ![](../../media/736966784805437441-Cjo7XTwWEAAqRJI.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/736966784805437441-Cjo7XTwWEAAqRJI.jpg)
 > 
-> ![](../../media/736966784805437441-Cjo7XTxXEAQtEtL.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/736966784805437441-Cjo7XTxXEAQtEtL.jpg)
 > 
-> ![](../../media/736966784805437441-Cjo7XU3WgAAvDiZ.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/736966784805437441-Cjo7XU3WgAAvDiZ.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sun May 29 17:05:48 +0000 2016](https://twitter.com/ChristopherA/status/736966784805437441)
 
