--- a/_tweets-md/2016/2016-06-01-tweets.md
+++ b/_tweets-md/2016/2016-06-01-tweets.md
@@ -154,7 +154,7 @@ Replying to [@dgwbirch, @Leon_Vandenberg, @timpastoor, @sammantic and @fuzo](htt
 
 > Talking with @timberners_lee (inventor of the World Wide Web) on the future of the Decentralized Web at #DWebSummit 
 > 
-> ![](../../media/740349693054439424-CkZAHeNVAAADcPm.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/740349693054439424-CkZAHeNVAAADcPm.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Jun 08 01:08:16 +0000 2016](https://twitter.com/ChristopherA/status/740349693054439424)
 
@@ -194,7 +194,7 @@ Replying to [@dgwbirch, @Leon_Vandenberg, @timpastoor, @sammantic and @fuzo](htt
 
 > Vint Cerf speaking at Decentralized Web conference at the Internet Archive #DWebSummit 
 > 
-> ![](../../media/740583042096332800-CkcUWT8VEAQQSHQ.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/740583042096332800-CkcUWT8VEAQQSHQ.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Jun 08 16:35:31 +0000 2016](https://twitter.com/ChristopherA/status/740583042096332800)
 
@@ -522,7 +522,7 @@ Replying to [@bethbrains](https://twitter.com/bethbrains/status/7410528465739489
 
 > At the #DWebSummit I shared how I'd been inspired in '88 to create smart contracts &amp; got my 1st investors based on: 
 > 
-> ![](../../media/741113407726714880-Ckj2tsYUUAA6K_2.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/741113407726714880-Ckj2tsYUUAA6K_2.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri Jun 10 03:43:00 +0000 2016](https://twitter.com/ChristopherA/status/741113407726714880)
 
@@ -705,7 +705,7 @@ Replying to [@jgarzik](https://twitter.com/jgarzik/status/743853249950683137)
 
 > I wrote this #SmartContracts tweetstorm back in April, but is applicable to #theDOA today: [https://twitter.com/ChristopherA/status/715197498646593536](https://twitter.com/ChristopherA/status/715197498646593536) 
 > 
-> ![](../../media/743859847855149056-ClK4lmlUoAATC3z.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/743859847855149056-ClK4lmlUoAATC3z.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri Jun 17 17:36:22 +0000 2016](https://twitter.com/ChristopherA/status/743859847855149056)
 
@@ -713,7 +713,7 @@ Replying to [@jgarzik](https://twitter.com/jgarzik/status/743853249950683137)
 
 > The #RebootingWebOfTrust community is talking about #SmartSignatures as being a path toward new #SmartContracts: 
 > 
-> ![](../../media/743861942876418048-ClK6fevVYAAPHaI.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/743861942876418048-ClK6fevVYAAPHaI.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri Jun 17 17:44:42 +0000 2016](https://twitter.com/ChristopherA/status/743861942876418048)
 
@@ -809,7 +809,7 @@ Replying to [@timpastoor](https://twitter.com/timpastoor/status/7438674608776847
 
 > Related: "The current language does not fulfill any of these commandments" @el33th4xor  [http://hackingdistributed.com/2016/06/17/thoughts-on-the-dao-hack/](http://hackingdistributed.com/2016/06/17/thoughts-on-the-dao-hack/) 
 > 
-> ![](../../media/743893685448761344-ClLXXEpUgAEOr21.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/743893685448761344-ClLXXEpUgAEOr21.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri Jun 17 19:50:50 +0000 2016](https://twitter.com/ChristopherA/status/743893685448761344)
 
@@ -893,7 +893,7 @@ Replying to [@eiaine](https://twitter.com/eiaine/status/743935352939831296)
 
 > The are even more small-game fallacies in #theDAO that have not been discovered: [http://unenumerated.blogspot.com/2015/05/small-game-fallacies.html](http://unenumerated.blogspot.com/2015/05/small-game-fallacies.html) @NickSzabo4 
 > 
-> ![](../../media/744132088413097985-ClOwLqBUoAEDCRf.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/744132088413097985-ClOwLqBUoAEDCRf.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sat Jun 18 11:38:09 +0000 2016](https://twitter.com/ChristopherA/status/744132088413097985)
 
@@ -913,7 +913,7 @@ Replying to [@eiaine](https://twitter.com/eiaine/status/743935352939831296)
 
 > RT @ygrenzinger: The elements of responsive #organization 
 > 
-> ![](../../media/744132954419433472-ClOTGOWWkAAssBb.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/744132954419433472-ClOTGOWWkAAssBb.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sat Jun 18 11:41:36 +0000 2016](https://twitter.com/ChristopherA/status/744132954419433472)
 
@@ -1003,7 +1003,7 @@ Replying to [@Ultra_Sec, @muneeb and @rozzie](https://twitter.com/@Ultra_Sec/sta
 
 > It is worth revisiting @iang_fc's 7 layer model for financial cryptography [http://iang.org/papers/fc7.html](http://iang.org/papers/fc7.html) 
 > 
-> ![](../../media/744877157483061249-ClZV0oOWMAAtzNs.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/744877157483061249-ClZV0oOWMAAtzNs.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon Jun 20 12:58:48 +0000 2016](https://twitter.com/ChristopherA/status/744877157483061249)
 
@@ -1025,7 +1025,7 @@ Replying to [@Ultra_Sec, @muneeb and @rozzie](https://twitter.com/@Ultra_Sec/sta
 
 > "not clear whether a functional smart contract language is as beneficial as we initially envisioned" 
 > 
-> ![](../../media/744912617790111749-ClZ2D0oWQAAsY8y.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/744912617790111749-ClZ2D0oWQAAsY8y.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon Jun 20 15:19:42 +0000 2016](https://twitter.com/ChristopherA/status/744912617790111749)
 
@@ -1055,7 +1055,7 @@ Replying to [@petertoddbtc](https://twitter.com/ChristopherA/status/744911507981
 
 > What I was specifically talking about in this part of the @Coindesk article is the [http://github.com/ParticipatoryOrgs](http://github.com/ParticipatoryOrgs) community 
 > 
-> ![](../../media/745686236812062720-Clk1nV1WIAAjruG.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/745686236812062720-Clk1nV1WIAAjruG.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Jun 22 18:33:47 +0000 2016](https://twitter.com/ChristopherA/status/745686236812062720)
 
@@ -1150,7 +1150,7 @@ Replying to [@Ultra_Sec](https://twitter.com/@Ultra_Sec/status/74604870629051596
 
 > RT @coindesk: The DAO Shows Blockchain Can't Code Away Social Problems [http://www.coindesk.com/system-problems-social-issues-daos-structure](http://www.coindesk.com/system-problems-social-issues-daos-structure) 
 > 
-> ![](../../media/746377286694354944-Clt24g3WgAACSh9.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/746377286694354944-Clt24g3WgAACSh9.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri Jun 24 16:19:46 +0000 2016](https://twitter.com/ChristopherA/status/746377286694354944)
 
@@ -1320,7 +1320,7 @@ Replying to [@chaiwaala, @petertoddbtc, @eternitywall, @Manu and @WayneVaughan](
 
 > "Fulfilling these uses and meeting these requirements of smart signatures necessitates the creation of…" 
 > 
-> ![](../../media/747852500661837824-CmDn4enXEAA59h9.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/747852500661837824-CmDn4enXEAA59h9.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Jun 28 18:01:45 +0000 2016](https://twitter.com/ChristopherA/status/747852500661837824)
 
@@ -1385,7 +1385,7 @@ Replying to [@chaiwaala, @petertoddbtc, @eternitywall, @Manu and @WayneVaughan](
 
 > Examples in #SmartSignatures of internal depth vs external transaction support use cases: [https://github.com/WebOfTrustInfo/ID2020DesignWorkshop/blob/master/draft-documents/smarter-signatures.md](https://github.com/WebOfTrustInfo/ID2020DesignWorkshop/blob/master/draft-documents/smarter-signatures.md) 
 > 
-> ![](../../media/748102932608991232-CmHLpWKWgAA29hO.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/748102932608991232-CmHLpWKWgAA29hO.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Jun 29 10:36:52 +0000 2016](https://twitter.com/ChristopherA/status/748102932608991232)
 
@@ -1399,7 +1399,7 @@ Replying to [@chaiwaala, @petertoddbtc, @eternitywall, @Manu and @WayneVaughan](
 
 > Interactive session 1 at #W3C #BlockchainWeb "The Secret Sauce of Collaboration" Top 16 Thoughts #GraphicRecording 
 > 
-> ![](../../media/748163396986634240-CmICpAEXEAAizru.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/748163396986634240-CmICpAEXEAAizru.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Jun 29 14:37:08 +0000 2016](https://twitter.com/ChristopherA/status/748163396986634240)
 
@@ -1423,7 +1423,7 @@ Replying to [@chaiwaala, @petertoddbtc, @eternitywall, @Manu and @WayneVaughan](
 
 > RT @WayneVaughan: We're getting started at the @W3C Blockchain Workshop at @medialab. 
 > 
-> ![](../../media/748165930845343744-CmH_KBTWIAQS-XX.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/748165930845343744-CmH_KBTWIAQS-XX.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Jun 29 14:47:12 +0000 2016](https://twitter.com/ChristopherA/status/748165930845343744)
 
@@ -1441,7 +1441,7 @@ Replying to [@guriahluwalia](https://twitter.com/guriahluwalia/status/7481597319
 
 > Wednesday Keynote by Arvind Narayanan @random_walker at #W3C #BlockchainWeb Workshop 
 > 
-> ![](../../media/748171791902908416-CmIKRpJXEAEA_Lv.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/748171791902908416-CmIKRpJXEAEA_Lv.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Jun 29 15:10:30 +0000 2016](https://twitter.com/ChristopherA/status/748171791902908416)
 
@@ -1451,7 +1451,7 @@ Replying to [@guriahluwalia](https://twitter.com/guriahluwalia/status/7481597319
 
 > Takeaways slide from @random_walker's keynote "Blockchains, the Web &amp; Standardization" #W3C #BlockchainWeb 
 > 
-> ![](../../media/748172535347482624-CmIK8-MWYAA6fy1.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/748172535347482624-CmIK8-MWYAA6fy1.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Jun 29 15:13:27 +0000 2016](https://twitter.com/ChristopherA/status/748172535347482624)
 
@@ -1467,7 +1467,7 @@ Replying to [@guriahluwalia](https://twitter.com/guriahluwalia/status/7481597319
 
 > RT @Tierion: Diagramming the @W3C Blockchain Workshop. #blockchainweb 
 > 
-> ![](../../media/748223470442536960-CmINzAEWEAABR6d.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/748223470442536960-CmINzAEWEAABR6d.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Jun 29 18:35:51 +0000 2016](https://twitter.com/ChristopherA/status/748223470442536960)
 
@@ -1477,7 +1477,7 @@ Replying to [@guriahluwalia](https://twitter.com/guriahluwalia/status/7481597319
 
 > Interactive session 2 at #W3C #BlockchainWeb "Identity" #GraphicRecording 
 > 
-> ![](../../media/748227983127744512-CmI9YbkWIAANVTx.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/748227983127744512-CmI9YbkWIAANVTx.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Jun 29 18:53:47 +0000 2016](https://twitter.com/ChristopherA/status/748227983127744512)
 
@@ -1487,7 +1487,7 @@ Replying to [@guriahluwalia](https://twitter.com/guriahluwalia/status/7481597319
 
 > Opening/Introduction (session 0) "Standards for the Open Web" at #W3C #BlockchainWeb #GraphicRecording 
 > 
-> ![](../../media/748237508551581697-CmJGC3PXEAAJaPM.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/748237508551581697-CmJGC3PXEAAJaPM.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Jun 29 19:31:38 +0000 2016](https://twitter.com/ChristopherA/status/748237508551581697)
 
@@ -1503,7 +1503,7 @@ Replying to [@guriahluwalia](https://twitter.com/guriahluwalia/status/7481597319
 
 > Interactive session 3 at #W3C #BlockchainWeb "Provenance Part 1: Lightning Talks"  #GraphicRecording 
 > 
-> ![](../../media/748240332710612992-CmJInRmXEAADf-T.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/748240332710612992-CmJInRmXEAADf-T.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Jun 29 19:42:51 +0000 2016](https://twitter.com/ChristopherA/status/748240332710612992)
 
@@ -1527,7 +1527,7 @@ Replying to [@guriahluwalia](https://twitter.com/guriahluwalia/status/7481597319
 
 > Interactive session 3 at #W3C #BlockchainWeb "Provenance Part 2: Report Outs"  #GraphicRecording 
 > 
-> ![](../../media/748260529576222720-CmJa-3fWEAEPyy-.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/748260529576222720-CmJa-3fWEAEPyy-.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Jun 29 21:03:06 +0000 2016](https://twitter.com/ChristopherA/status/748260529576222720)
 
@@ -1569,7 +1569,7 @@ Replying to [@Abrahadabra_ and @random_walker](https://twitter.com/ynotez/status
 
 > Interactive session 4 at #W3C #BlockchainWeb "Primitives, APIs &amp; Kitchen Sink"  #GraphicRecording 
 > 
-> ![](../../media/748587281880059904-CmOEKW0WEAAy0fS.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/748587281880059904-CmOEKW0WEAAy0fS.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Jun 30 18:41:30 +0000 2016](https://twitter.com/ChristopherA/status/748587281880059904)
 
@@ -1579,7 +1579,7 @@ Replying to [@Abrahadabra_ and @random_walker](https://twitter.com/ynotez/status
 
 > Potential future #W3C collaborations after dot voting at end of #BlockchainWeb #GraphicRecording 
 > 
-> ![](../../media/748604981259943940-CmOUQitWMAA0YZR.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/748604981259943940-CmOUQitWMAA0YZR.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Jun 30 19:51:50 +0000 2016](https://twitter.com/ChristopherA/status/748604981259943940)
 
@@ -1589,7 +1589,7 @@ Replying to [@Abrahadabra_ and @random_walker](https://twitter.com/ynotez/status
 
 > During #W3C #BlockchainWeb I led a session on Collaboration beginning w/ a random draw of a #GroupWorks card. Mine… 
 > 
-> ![](../../media/748617400120135680-CmOfjZvWgAEgoyZ.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/748617400120135680-CmOfjZvWgAEgoyZ.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Jun 30 20:41:11 +0000 2016](https://twitter.com/ChristopherA/status/748617400120135680)
 
