--- a/_tweets-md/2016/2016-07-01-tweets.md
+++ b/_tweets-md/2016/2016-07-01-tweets.md
@@ -111,7 +111,7 @@ Replying to [@aronvanammers, @lawrencelundy and @OVioHQ](https://twitter.com/aro
 
 > What is fundamentally different about newer self-management structures? Biological-like adaptability: @HarvardBiz 
 > 
-> ![](../../media/748963836263268352-CmTaoyAWEAALofJ.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/748963836263268352-CmTaoyAWEAALofJ.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri Jul 01 19:37:48 +0000 2016](https://twitter.com/ChristopherA/status/748963836263268352)
 
@@ -311,9 +311,9 @@ Replying to [@timpastoor](https://twitter.com/timpastoor/status/7490847213642096
 
 > RT @sacca: Last night, Garrison Keillor gave this note to each attendee of his last @prairie_home. 
 > 
-> ![](../../media/749462009868017664-CmXoTajVMAANEGe.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/749462009868017664-CmXoTajVMAANEGe.jpg)
 > 
-> ![](../../media/749462009868017664-CmXoTalVUAABxDB.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/749462009868017664-CmXoTalVUAABxDB.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sun Jul 03 04:37:22 +0000 2016](https://twitter.com/ChristopherA/status/749462009868017664)
 
@@ -463,7 +463,7 @@ Replying to [@ConsenSysLLC and @voidsnax](https://twitter.com/Consensys/status/7
 
 > A legal term new to me &amp; relevant today: "Rescission" [http://www.arijuels.com/wp-content/uploads/2016/06/Setting-Standards-for-Altering-and-Undoing-Smart-Contracts.docx](http://www.arijuels.com/wp-content/uploads/2016/06/Setting-Standards-for-Altering-and-Undoing-Smart-Contracts.docx) /HT @billgleim @billymarino @AriJuels 
 > 
-> ![](../../media/750836027288219648-CmuBYlTVIAAnQHh.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/750836027288219648-CmuBYlTVIAAnQHh.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Jul 06 23:37:13 +0000 2016](https://twitter.com/ChristopherA/status/750836027288219648)
 
@@ -589,7 +589,7 @@ Replying to [@ConsenSysLLC and @voidsnax](https://twitter.com/Consensys/status/7
 
 > Good article! “What’s in a Name? — The Disambiguation of Smart Contracts” by @AnthonyMacey [https://medium.com/@anthonymacey/whats-in-a-name-the-disambiguation-of-smart-contracts-daca8276db4?source=twitterShare-63ba9be92e8f-1468013499](https://medium.com/@anthonymacey/whats-in-a-name-the-disambiguation-of-smart-contracts-daca8276db4?source=twitterShare-63ba9be92e8f-1468013499) 
 > 
-> ![](../../media/751529905322467328-Cm34dwZUEAAEuOx.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/751529905322467328-Cm34dwZUEAAEuOx.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri Jul 08 21:34:26 +0000 2016](https://twitter.com/ChristopherA/status/751529905322467328)
 
@@ -609,7 +609,7 @@ Replying to [@ConsenSysLLC and @voidsnax](https://twitter.com/Consensys/status/7
 
 > RT @d10e_con: Insightful words. @ChristopherA joining us @ #d10eSF! Are you coming? 
 > 
-> ![](../../media/752333071253254145-Cm9iftBWAAADLYW.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/752333071253254145-Cm9iftBWAAADLYW.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon Jul 11 02:45:56 +0000 2016](https://twitter.com/ChristopherA/status/752333071253254145)
 
@@ -641,7 +641,7 @@ Replying to [@ConsenSysLLC and @voidsnax](https://twitter.com/Consensys/status/7
 
 > A new term for me—agnotology: "constructed ignorance" [http://www.bloomberg.com/view/articles/2016-06-27/culturally-constructed-ignorance-wins-the-day](http://www.bloomberg.com/view/articles/2016-06-27/culturally-constructed-ignorance-wins-the-day) 
 > 
-> ![](../../media/752371502545137664-CnD15EdUMAA2-a0.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/752371502545137664-CnD15EdUMAA2-a0.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon Jul 11 05:18:39 +0000 2016](https://twitter.com/ChristopherA/status/752371502545137664)
 
@@ -667,7 +667,7 @@ Replying to [@ConsenSysLLC and @voidsnax](https://twitter.com/Consensys/status/7
 
 > "We seem to have lost sight of the original motive that justified…trustless systems…"—@yaoeo [https://motherboard.vice.com/en_uk/read/thedao](https://motherboard.vice.com/en_uk/read/thedao) 
 > 
-> ![](../../media/752874685428211713-CnK_iJ2UsAASX8L.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/752874685428211713-CnK_iJ2UsAASX8L.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Jul 12 14:38:07 +0000 2016](https://twitter.com/ChristopherA/status/752874685428211713)
 
@@ -761,7 +761,7 @@ Replying to [@ConsenSysLLC and @voidsnax](https://twitter.com/Consensys/status/7
 
 > I am quite pleased to be part of raising the bar on diversity at #iOSDevCamp. More to do! [http://daringfireball.net/linked/2016/06/28/iosdevcamp](http://daringfireball.net/linked/2016/06/28/iosdevcamp) 
 > 
-> ![](../../media/753289082831187968-CnQ4ag3VIAAYIhe.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/753289082831187968-CnQ4ag3VIAAYIhe.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Jul 13 18:04:47 +0000 2016](https://twitter.com/ChristopherA/status/753289082831187968)
 
@@ -781,7 +781,7 @@ Replying to [@ConsenSysLLC and @voidsnax](https://twitter.com/Consensys/status/7
 
 > So little of this list of the Xanadu Project's 18 objectives from 80's are yet in the WWW [https://blog.codinghorror.com/the-xanadu-dream/](https://blog.codinghorror.com/the-xanadu-dream/) 
 > 
-> ![](../../media/753491034106015744-CnTvYEMUkAAvYcF.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/753491034106015744-CnTvYEMUkAAvYcF.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Jul 14 07:27:16 +0000 2016](https://twitter.com/ChristopherA/status/753491034106015744)
 
@@ -883,7 +883,7 @@ Replying to [@ConsenSysLLC and @voidsnax](https://twitter.com/Consensys/status/7
 
 > I don't believe that this is a liberal or conservative idea—it is a fact. "Paradoxically…" [http://www.nationalaffairs.com/publications/detail/the-limits-of-majority-rule](http://www.nationalaffairs.com/publications/detail/the-limits-of-majority-rule) 
 > 
-> ![](../../media/753955443924307968-CnaWeePUEAEzEUa.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/753955443924307968-CnaWeePUEAEzEUa.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri Jul 15 14:12:40 +0000 2016](https://twitter.com/ChristopherA/status/753955443924307968)
 
@@ -919,7 +919,7 @@ Replying to [@ConsenSysLLC and @voidsnax](https://twitter.com/Consensys/status/7
 
 > "We are currently witnessing the gentrification of hacker culture"—@Suitpossum [https://aeon.co/essays/how-yuppies-hacked-the-original-hacker-ethos](https://aeon.co/essays/how-yuppies-hacked-the-original-hacker-ethos) 
 > 
-> ![](../../media/754059817728126976-Cnb1Z7-UMAAPNS9.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/754059817728126976-Cnb1Z7-UMAAPNS9.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri Jul 15 21:07:24 +0000 2016](https://twitter.com/ChristopherA/status/754059817728126976)
 
@@ -1059,7 +1059,7 @@ Replying to [@CassSunstein](https://twitter.com/ChristopherA/status/755152407856
 
 > RT @CarovonMX: Financial exclusion. Map via @rszbt 
 > 
-> ![](../../media/755451469545869312-CPfS02GUkAA8Tll.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/755451469545869312-CPfS02GUkAA8Tll.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Jul 19 17:17:20 +0000 2016](https://twitter.com/ChristopherA/status/755451469545869312)
 
@@ -1099,7 +1099,7 @@ Replying to [@CassSunstein](https://twitter.com/ChristopherA/status/755152407856
 
 > Seen at #d10e from @pamelawjd "CryptoSteel" for 'hard' storage of BIP-39 24-word master keys. I'm skeptical by cool. 
 > 
-> ![](../../media/755858521875292160-Cn1ZSOeUAAAQjXT.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/755858521875292160-Cn1ZSOeUAAAQjXT.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Jul 20 20:14:49 +0000 2016](https://twitter.com/ChristopherA/status/755858521875292160)
 
@@ -1115,7 +1115,7 @@ Replying to [@normative and @pmarca](https://twitter.com/normative/status/755818
 
 > Critical commentary on Ethereum's hard fork from FT blogger @izakaminska: [http://ftalphaville.ft.com/2016/07/20/2170463/ethereum-bailout-complete-long-live-ethereum/](http://ftalphaville.ft.com/2016/07/20/2170463/ethereum-bailout-complete-long-live-ethereum/) 
 > 
-> ![](../../media/755863925028118528-Cn1eOW-VMAAojii.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/755863925028118528-Cn1eOW-VMAAojii.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Jul 20 20:36:17 +0000 2016](https://twitter.com/ChristopherA/status/755863925028118528)
 
@@ -1205,7 +1205,7 @@ Replying to [@TuurDemeester and @pamelawjd](https://twitter.com/TuurDemeester/st
 
 > I like these key principles on the next generation of business, from @timoreilly's upcoming Next:Economy conference: 
 > 
-> ![](../../media/756000826380816384-Cn3avSzUEAAYW0h.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/756000826380816384-Cn3avSzUEAAYW0h.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Jul 21 05:40:17 +0000 2016](https://twitter.com/ChristopherA/status/756000826380816384)
 
@@ -1289,7 +1289,7 @@ Replying to [@TuurDemeester and @pamelawjd](https://twitter.com/TuurDemeester/st
 
 > "Our thesis is that there are five psychological foundations of morality…" [http://www.unl.edu/rhames/courses/current/readings/haidth-graham.pdf](http://www.unl.edu/rhames/courses/current/readings/haidth-graham.pdf) 
 > 
-> ![](../../media/756508156424024064-Cn-oJ7pUsAISv27.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/756508156424024064-Cn-oJ7pUsAISv27.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri Jul 22 15:16:14 +0000 2016](https://twitter.com/ChristopherA/status/756508156424024064)
 
@@ -1388,7 +1388,7 @@ Replying to [@TuurDemeester and @pamelawjd](https://twitter.com/TuurDemeester/st
 
 > RT @coindesk: Blockstream Acquires Bitcoin Wallet to Boost Sidechains Development [http://www.coindesk.com/blockstream-wallet-greenaddress-sidechains](http://www.coindesk.com/blockstream-wallet-greenaddress-sidechains) 
 > 
-> ![](../../media/758326073717252096-CoYVLY3XgAAWYAX.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/758326073717252096-CoYVLY3XgAAWYAX.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Jul 27 15:39:59 +0000 2016](https://twitter.com/ChristopherA/status/758326073717252096)
 
@@ -1454,7 +1454,7 @@ Replying to [@TuurDemeester and @pamelawjd](https://twitter.com/TuurDemeester/st
 
 > I glad Marissa Mayer's compassion as leader came through—Yahoo was unsavable: [https://hackernoon.com/what-marissa-mayer-brought-to-yahoo-that-cant-be-bought-or-sold-4ee82382e4ee](https://hackernoon.com/what-marissa-mayer-brought-to-yahoo-that-cant-be-bought-or-sold-4ee82382e4ee) 
 > 
-> ![](../../media/759096120450555904-CojZ5TuUkAAh59m.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/759096120450555904-CojZ5TuUkAAh59m.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri Jul 29 18:39:53 +0000 2016](https://twitter.com/ChristopherA/status/759096120450555904)
 
@@ -1464,13 +1464,13 @@ Replying to [@TuurDemeester and @pamelawjd](https://twitter.com/TuurDemeester/st
 
 > I wonder if the new #ETH qualifies as a blockchain suitable for records under recent New Hampshire law? @StamperyCo 
 > 
-> ![](../../media/759097453391978498-CojbGzIUEAA55Is.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/759097453391978498-CojbGzIUEAA55Is.jpg)
 > 
-> ![](../../media/759097453391978498-CojbGzCUMAEROo_.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/759097453391978498-CojbGzCUMAEROo_.jpg)
 > 
-> ![](../../media/759097453391978498-CojbGy8UkAIphrM.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/759097453391978498-CojbGy8UkAIphrM.jpg)
 > 
-> ![](../../media/759097453391978498-CojbGy9UIAE9Ijr.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/759097453391978498-CojbGy9UIAE9Ijr.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri Jul 29 18:45:10 +0000 2016](https://twitter.com/ChristopherA/status/759097453391978498)
 
