--- a/_tweets-md/2016/2016-08-01-tweets.md
+++ b/_tweets-md/2016/2016-08-01-tweets.md
@@ -54,9 +54,9 @@ Replying to [@timpastoor](https://twitter.com/timpastoor/status/7607425690054492
 >   
 > [http://11fs.co.uk/uncategorized/top-10-things-know-blockchain-week/](http://11fs.co.uk/uncategorized/top-10-things-know-blockchain-week/)  
 >   
-> Now with link!! :) 
+> (Now with link!! :) 
 > 
-> ![](../../media/761609317007003648-CpGOUiUWYAAha7f.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/761609317007003648-CpGOUiUWYAAha7f.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri Aug 05 17:06:25 +0000 2016](https://twitter.com/ChristopherA/status/761609317007003648)
 
@@ -64,7 +64,7 @@ Replying to [@timpastoor](https://twitter.com/timpastoor/status/7607425690054492
 
 > RT @cdixon: Small &amp; inexpensive Lidar on its way- the next ubiquitous sensor [http://spectrum.ieee.org/tech-talk/semiconductors/optoelectronics/mit-lidar-on-a-chip](http://spectrum.ieee.org/tech-talk/semiconductors/optoelectronics/mit-lidar-on-a-chip) 
 > 
-> ![](../../media/761610483031912449-CpEsyjYUMAAWDfB.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/761610483031912449-CpEsyjYUMAAWDfB.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri Aug 05 17:11:03 +0000 2016](https://twitter.com/ChristopherA/status/761610483031912449)
 
@@ -80,7 +80,7 @@ Replying to [@timpastoor](https://twitter.com/timpastoor/status/7607425690054492
 
 > My SW4SX class taught this:"The Problem is that there is asymmetric information…" @leashless [https://media.consensys.net/2016/08/03/mortal-hazard-the-dapp-ecosystem-other-peoples-money-and-the-prospects-for-a-long-term-regulation-free-environment/](https://media.consensys.net/2016/08/03/mortal-hazard-the-dapp-ecosystem-other-peoples-money-and-the-prospects-for-a-long-term-regulation-free-environment/) 
 > 
-> ![](../../media/761614401187094529-CpHMQaJVUAArVvk.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/761614401187094529-CpHMQaJVUAArVvk.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri Aug 05 17:26:38 +0000 2016](https://twitter.com/ChristopherA/status/761614401187094529)
 
@@ -176,7 +176,7 @@ Replying to [@durumcrustulum and @veorq](https://twitter.com/veorq/status/763601
 
 > RT @benjancewicz: In light of concerns re: vote rigging, I give you slot machines vs voting machines. 
 > 
-> ![](../../media/764297133243576320-CpZV29PXEAAyqqv.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/764297133243576320-CpZV29PXEAAyqqv.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sat Aug 13 03:06:51 +0000 2016](https://twitter.com/ChristopherA/status/764297133243576320)
 
@@ -190,7 +190,7 @@ Replying to [@durumcrustulum and @veorq](https://twitter.com/veorq/status/763601
 
 > I like the 9 categories in this organizational culture diagram. From the OS Canvas [https://medium.com/the-ready/the-os-canvas-8253ac249f53#.2awlw0liz](https://medium.com/the-ready/the-os-canvas-8253ac249f53#.2awlw0liz) 
 > 
-> ![](../../media/764334476037992448-Cpt2CaEVUAAnO0j.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/764334476037992448-Cpt2CaEVUAAnO0j.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sat Aug 13 05:35:14 +0000 2016](https://twitter.com/ChristopherA/status/764334476037992448)
 
@@ -248,7 +248,7 @@ Replying to [@Melt_Dem](https://twitter.com/Melt_Dem/status/765000873688694786)
 
 > RT @coindesk: Blockstream Adds New Hires to All-Star Developer Team [http://bit.ly/2bb3Hxe](http://bit.ly/2bb3Hxe) 
 > 
-> ![](../../media/765213805198520320-Cp5oWFWWEAAsjGV.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/765213805198520320-Cp5oWFWWEAAsjGV.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon Aug 15 15:49:22 +0000 2016](https://twitter.com/ChristopherA/status/765213805198520320)
 
@@ -256,7 +256,7 @@ Replying to [@Melt_Dem](https://twitter.com/Melt_Dem/status/765000873688694786)
 
 > These are the main two use case for identity on blockchains—others are too privacy risky: [https://identityassurance.blog.gov.uk/2016/08/15/does-digital-identity-need-blockchain-technology/](https://identityassurance.blog.gov.uk/2016/08/15/does-digital-identity-need-blockchain-technology/) 
 > 
-> ![](../../media/765220153382481920-Cp6bq4cVYAAMwi7.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/765220153382481920-Cp6bq4cVYAAMwi7.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon Aug 15 16:14:36 +0000 2016](https://twitter.com/ChristopherA/status/765220153382481920)
 
@@ -272,7 +272,7 @@ Replying to [@lawrencelundy and @floppy](https://twitter.com/ChristopherA/status
 
 > I too sit in the 2nd camp: #memes a richly productive model—but like all models, not reality [https://evolution-institute.org/blog/a-forty-year-update-on-meme-theory/](https://evolution-institute.org/blog/a-forty-year-update-on-meme-theory/) 
 > 
-> ![](../../media/765274049295425536-Cp7Mr60VYAAA0Db.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/765274049295425536-Cp7Mr60VYAAA0Db.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon Aug 15 19:48:46 +0000 2016](https://twitter.com/ChristopherA/status/765274049295425536)
 
@@ -280,7 +280,7 @@ Replying to [@lawrencelundy and @floppy](https://twitter.com/ChristopherA/status
 
 > Blockstream intern @anarchoass &amp; MIT/DCI student @jonhbit installing #qubes on our laptops to play around with. 
 > 
-> ![](../../media/765326644806504448-Cp78hfIVYAAVr0Q.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/765326644806504448-Cp78hfIVYAAVr0Q.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon Aug 15 23:17:45 +0000 2016](https://twitter.com/ChristopherA/status/765326644806504448)
 
@@ -421,7 +421,7 @@ Replying to [@petertoddbtc and @muneeb](https://twitter.com/peterktodd/status/76
 
 > "What happens when we disagree? How do we live with—or live as—the losers?" [http://civichall.org/civicist/vtaiwan-democracy-frontier/](http://civichall.org/civicist/vtaiwan-democracy-frontier/) 
 > 
-> ![](../../media/767080044883619840-CqU3OStVUAEkE0h.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/767080044883619840-CqU3OStVUAEkE0h.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sat Aug 20 19:25:09 +0000 2016](https://twitter.com/ChristopherA/status/767080044883619840)
 
@@ -493,7 +493,7 @@ Replying to [@NGruen1, @profjasonpotts and @slatestarcodex](https://twitter.com/
 
 > "We propose using 'correlation' instead of 'identity' when discussing…identity systems" [https://raw.githubusercontent.com/WebOfTrustInfo/ID2020DesignWorkshop/master/final-documents/identity-crisis.pdf](https://raw.githubusercontent.com/WebOfTrustInfo/ID2020DesignWorkshop/master/final-documents/identity-crisis.pdf) 
 > 
-> ![](../../media/768476819620139008-Cqotlz2VUAAGBx3.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/768476819620139008-Cqotlz2VUAAGBx3.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Aug 24 15:55:26 +0000 2016](https://twitter.com/ChristopherA/status/768476819620139008)
 
@@ -509,7 +509,7 @@ Replying to [@NGruen1, @profjasonpotts and @slatestarcodex](https://twitter.com/
 
 > RT @timpastoor: @ChristopherA Reminds me of: 
 > 
-> ![](../../media/768480903421014017-CqowT91WIAAbn1N.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/768480903421014017-CqowT91WIAAbn1N.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Aug 24 16:11:39 +0000 2016](https://twitter.com/ChristopherA/status/768480903421014017)
 
@@ -573,7 +573,7 @@ Replying to [@NGruen1, @profjasonpotts and @slatestarcodex](https://twitter.com/
 
 > RT @coindesk: Did Ethereum's Fork Validate Bitcoin Block Size Conservatism? [http://www.coindesk.com/ethereum-fork-bitcoin-block-size-debate-impact](http://www.coindesk.com/ethereum-fork-bitcoin-block-size-debate-impact) 
 > 
-> ![](../../media/769321383339827202-CqzVrcZWAAA6Xk7.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/769321383339827202-CqzVrcZWAAA6Xk7.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri Aug 26 23:51:25 +0000 2016](https://twitter.com/ChristopherA/status/769321383339827202)
 
