--- a/_tweets-md/2016/2016-09-01-tweets.md
+++ b/_tweets-md/2016/2016-09-01-tweets.md
@@ -11,10 +11,9 @@ time:  23:59:59 +0000
 
 ----
 
-
 > A different view on governments vs. corporations vs. civil society: [https://www.researchgate.net/publication/307465820_Corporatism_and_Civil_Society](https://www.researchgate.net/publication/307465820_Corporatism_and_Civil_Society) via @profjasonpotts 
 > 
-> ![](../../media/771420952785670144-CrSjRC2UEAAkTJi.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/771420952785670144-CrSjRC2UEAAkTJi.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Sep 01 18:54:22 +0000 2016](https://twitter.com/ChristopherA/status/771420952785670144)
 
@@ -23,7 +22,7 @@ time:  23:59:59 +0000
 
 > "…provide governance solutions which compete with those of the state" [https://www.researchgate.net/publication/307465820_Corporatism_and_Civil_Society](https://www.researchgate.net/publication/307465820_Corporatism_and_Civil_Society) via @profjasonpotts 
 > 
-> ![](../../media/771422356711497728-CrSkivRVIAAi7Dc.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/771422356711497728-CrSkivRVIAAi7Dc.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Sep 01 18:59:56 +0000 2016](https://twitter.com/ChristopherA/status/771422356711497728)
 
@@ -31,7 +30,7 @@ time:  23:59:59 +0000
 
 > The Cybersecurity Canon Project @raceBannon99 reviews @TheCynja comic book series for kids: [http://researchcenter.paloaltonetworks.com/2016/08/the-cybersecurity-canon-the-cynja-volume-1-and-code-of-the-cynja-volume-2/?platform=hootsuite](http://researchcenter.paloaltonetworks.com/2016/08/the-cybersecurity-canon-the-cynja-volume-1-and-code-of-the-cynja-volume-2/?platform=hootsuite) 
 > 
-> ![](../../media/772141212992049152-CrcyVheVIAE4EX0.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/772141212992049152-CrcyVheVIAE4EX0.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sat Sep 03 18:36:25 +0000 2016](https://twitter.com/ChristopherA/status/772141212992049152)
 
@@ -39,7 +38,7 @@ time:  23:59:59 +0000
 
 > "cultivating positive emotion might be one way to actually get people to be more productive" [https://www.weforum.org/agenda/2016/08/the-surprising-thing-you-do-when-youre-happiest](https://www.weforum.org/agenda/2016/08/the-surprising-thing-you-do-when-youre-happiest) 
 > 
-> ![](../../media/772142761369665536-CrczvulVIAAcawx.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/772142761369665536-CrczvulVIAAcawx.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sat Sep 03 18:42:34 +0000 2016](https://twitter.com/ChristopherA/status/772142761369665536)
 
@@ -80,11 +79,11 @@ Replying to [@sytaylor, @davidbrear, @belimad, @JimMarous, @this_is_bud, @solari
 
 > RT @NickSzabo4: Three crucial books on our origins &amp; our natures: 
 > 
-> ![](../../media/773563665891024896-Crs2e5nUkAASjXX.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/773563665891024896-Crs2e5nUkAASjXX.jpg)
 > 
-> ![](../../media/773563665891024896-Crs26fwVYAAtRJ3.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/773563665891024896-Crs26fwVYAAtRJ3.jpg)
 > 
-> ![](../../media/773563665891024896-Crs3N9dVMAA4iWE.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/773563665891024896-Crs3N9dVMAA4iWE.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Sep 07 16:48:44 +0000 2016](https://twitter.com/ChristopherA/status/773563665891024896)
 
@@ -172,7 +171,7 @@ Replying to [@sytaylor, @davidbrear, @belimad, @JimMarous, @this_is_bud, @solari
 >   
 > [https://github.com/WebOfTrustInfo/ID2020DesignWorkshop/blob/master/final-documents/smarter-signatures.pdf](https://github.com/WebOfTrustInfo/ID2020DesignWorkshop/blob/master/final-documents/smarter-signatures.pdf) 
 > 
-> ![](../../media/775356398775533568-CsKeh8GWgAArkbi.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/775356398775533568-CsKeh8GWgAArkbi.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon Sep 12 15:32:25 +0000 2016](https://twitter.com/ChristopherA/status/775356398775533568)
 
@@ -185,7 +184,7 @@ Replying to [@sytaylor, @davidbrear, @belimad, @JimMarous, @this_is_bud, @solari
 >   
 > [https://github.com/WebOfTrustInfo/ID2020DesignWorkshop/blob/master/final-documents/smarter-signatures.pdf](https://github.com/WebOfTrustInfo/ID2020DesignWorkshop/blob/master/final-documents/smarter-signatures.pdf) 
 > 
-> ![](../../media/775356913852747776-CsKe_v8WIAAtKhl.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/775356913852747776-CsKe_v8WIAAtKhl.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon Sep 12 15:34:28 +0000 2016](https://twitter.com/ChristopherA/status/775356913852747776)
 
@@ -198,7 +197,7 @@ Replying to [@sytaylor, @davidbrear, @belimad, @JimMarous, @this_is_bud, @solari
 >   
 > [https://github.com/WebOfTrustInfo/ID2020DesignWorkshop/blob/master/final-documents/smarter-signatures.pdf](https://github.com/WebOfTrustInfo/ID2020DesignWorkshop/blob/master/final-documents/smarter-signatures.pdf) 
 > 
-> ![](../../media/775357217084170240-CsKfRRkWcAAl40F.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/775357217084170240-CsKfRRkWcAAl40F.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon Sep 12 15:35:40 +0000 2016](https://twitter.com/ChristopherA/status/775357217084170240)
 
@@ -211,7 +210,7 @@ Replying to [@sytaylor, @davidbrear, @belimad, @JimMarous, @this_is_bud, @solari
 >   
 > [https://github.com/WebOfTrustInfo/ID2020DesignWorkshop/blob/master/final-documents/smarter-signatures.pdf](https://github.com/WebOfTrustInfo/ID2020DesignWorkshop/blob/master/final-documents/smarter-signatures.pdf) 
 > 
-> ![](../../media/775357516976910336-CsKfi-vWAAAIEbJ.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/775357516976910336-CsKfi-vWAAAIEbJ.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon Sep 12 15:36:52 +0000 2016](https://twitter.com/ChristopherA/status/775357516976910336)
 
@@ -224,7 +223,7 @@ Replying to [@sytaylor, @davidbrear, @belimad, @JimMarous, @this_is_bud, @solari
 >   
 > [https://github.com/WebOfTrustInfo/ID2020DesignWorkshop/blob/master/final-documents/smarter-signatures.pdf](https://github.com/WebOfTrustInfo/ID2020DesignWorkshop/blob/master/final-documents/smarter-signatures.pdf) 
 > 
-> ![](../../media/775357978132316160-CsKf9xIWcAApxGO.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/775357978132316160-CsKf9xIWcAApxGO.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon Sep 12 15:38:42 +0000 2016](https://twitter.com/ChristopherA/status/775357978132316160)
 
@@ -237,7 +236,7 @@ Replying to [@sytaylor, @davidbrear, @belimad, @JimMarous, @this_is_bud, @solari
 >   
 > [https://github.com/WebOfTrustInfo/ID2020DesignWorkshop/blob/master/final-documents/smarter-signatures.pdf](https://github.com/WebOfTrustInfo/ID2020DesignWorkshop/blob/master/final-documents/smarter-signatures.pdf) 
 > 
-> ![](../../media/775358459520909312-CsKgZ8QW8AAuCyz.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/775358459520909312-CsKgZ8QW8AAuCyz.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon Sep 12 15:40:36 +0000 2016](https://twitter.com/ChristopherA/status/775358459520909312)
 
@@ -248,7 +247,7 @@ Replying to [@sytaylor, @davidbrear, @belimad, @JimMarous, @this_is_bud, @solari
 >   
 > [https://github.com/WebOfTrustInfo/ID2020DesignWorkshop/blob/master/final-documents/smarter-signatures.pdf](https://github.com/WebOfTrustInfo/ID2020DesignWorkshop/blob/master/final-documents/smarter-signatures.pdf) 
 > 
-> ![](../../media/775359437284474880-CsKhSVIXEAAbtRP.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/775359437284474880-CsKhSVIXEAAbtRP.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon Sep 12 15:44:29 +0000 2016](https://twitter.com/ChristopherA/status/775359437284474880)
 
@@ -520,7 +519,7 @@ Replying to [@kemitchell](https://twitter.com/@kemitchell/status/779548336474861
 
 > RT @kyletorpey: /r/btc has temporarily banned me. Peak hypocrisy has been achieved! 
 > 
-> ![](../../media/780872992129593344-CtXvS_BWAAE0EhX.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/780872992129593344-CtXvS_BWAAE0EhX.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Sep 27 20:53:23 +0000 2016](https://twitter.com/ChristopherA/status/780872992129593344)
 
@@ -577,7 +576,7 @@ Replying to [@kemitchell](https://twitter.com/@kemitchell/status/779548336474861
 
 > A followup: When is majority rule appropriate? "Regular, low stakes, reversible decisions for small groups" [https://groupincome.org/2016/09/deprecating-mays-theorem/](https://groupincome.org/2016/09/deprecating-mays-theorem/) 
 > 
-> ![](../../media/781230462312157184-Ctd89okVYAA2LXv.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/781230462312157184-Ctd89okVYAA2LXv.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Sep 28 20:33:51 +0000 2016](https://twitter.com/ChristopherA/status/781230462312157184)
 
@@ -598,7 +597,7 @@ Replying to [@kemitchell](https://twitter.com/@kemitchell/status/779548336474861
 
 > I'm quite frustrated with the many years late JOBS Act Title III aka "crowdfunding equity"—an opportunity squandered [https://techcrunch.com/2016/06/07/equity-crowdfunding-is-now-legal-but-dont-expect-anything-to-change-just-yet/](https://techcrunch.com/2016/06/07/equity-crowdfunding-is-now-legal-but-dont-expect-anything-to-change-just-yet/) 
 > 
-> ![](../../media/781344272247197696-CtfkeJqUEAAHES2.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/781344272247197696-CtfkeJqUEAAHES2.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Sep 29 04:06:05 +0000 2016](https://twitter.com/ChristopherA/status/781344272247197696)
 
@@ -618,7 +617,7 @@ Replying to [@kemitchell](https://twitter.com/@kemitchell/status/779548336474861
 
 > "real world human gatherings have remained largely static &amp; antiquated in their underlying approaches for millennia" [https://medium.com/@paddycosgrave/maths-and-conferences-lanyards-and-legibility-59fe589c97c7#.g5na99xyn](https://medium.com/@paddycosgrave/maths-and-conferences-lanyards-and-legibility-59fe589c97c7#.g5na99xyn) 
 > 
-> ![](../../media/781376821715623936-CtgCEztUsAAP4Oz.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/781376821715623936-CtgCEztUsAAP4Oz.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Sep 29 06:15:26 +0000 2016](https://twitter.com/ChristopherA/status/781376821715623936)
 
