--- a/_tweets-md/2016/2016-10-01-tweets.md
+++ b/_tweets-md/2016/2016-10-01-tweets.md
@@ -104,7 +104,7 @@ Replying to [@sweis](https://twitter.com/sweis/status/782752126539665409)
 
 > I'm glad to see more people working on formal verification &amp; using coq for smart contract languages [https://hackernoon.com/smart-contracts-turing-completeness-reality-3eb897996621#.30d05vg3k](https://hackernoon.com/smart-contracts-turing-completeness-reality-3eb897996621#.30d05vg3k) @ArthurB @tez0s 
 > 
-> ![](../../media/783783782654603264-CuCPJk5W8AEjBsO.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/783783782654603264-CuCPJk5W8AEjBsO.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Oct 05 21:39:50 +0000 2016](https://twitter.com/ChristopherA/status/783783782654603264)
 
@@ -152,7 +152,7 @@ Replying to [@taoeffect](https://twitter.com/taoeffect/status/783892800676896768
 
 > RT @bergealex4: Crashed @blockchainlabit. Found a picture of Satoshi... and a very cool group of people! 
 > 
-> ![](../../media/784041328065843200-CuAktwSWEAQNYw9.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/784041328065843200-CuAktwSWEAQNYw9.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Oct 06 14:43:14 +0000 2016](https://twitter.com/ChristopherA/status/784041328065843200)
 
@@ -178,7 +178,7 @@ Replying to [@taoeffect](https://twitter.com/taoeffect/status/783892800676896768
 
 > I agree with hypothesis in comments that TDD (test driven dev) applies more to large projects like Linux &amp; Bitcoin… [http://neverworkintheory.org/2016/10/05/test-driven-development.html](http://neverworkintheory.org/2016/10/05/test-driven-development.html) 
 > 
-> ![](../../media/784309165845913601-CuJtAhTUMAAE1VH.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/784309165845913601-CuJtAhTUMAAE1VH.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri Oct 07 08:27:31 +0000 2016](https://twitter.com/ChristopherA/status/784309165845913601)
 
@@ -186,7 +186,7 @@ Replying to [@taoeffect](https://twitter.com/taoeffect/status/783892800676896768
 
 > RT @mir_serena: #Bitcoin hall of fame @deloitte @giacomozucco @blockchainlabit 
 > 
-> ![](../../media/784627743191334916-CuMWvMtXEAAvcZN.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/784627743191334916-CuMWvMtXEAAvcZN.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sat Oct 08 05:33:26 +0000 2016](https://twitter.com/ChristopherA/status/784627743191334916)
 
@@ -254,7 +254,7 @@ Replying to [@taoeffect](https://twitter.com/taoeffect/status/783892800676896768
 
 > In 2013 over $410 trillion in global non-cash transactions result in $1 trillion in bank revenues ~= 00.25% fees. [https://www.bcgperspectives.com/Images/Global_Payments_2014_Next_Level_Value_Sep_2014_tcm80-171913.pdf](https://www.bcgperspectives.com/Images/Global_Payments_2014_Next_Level_Value_Sep_2014_tcm80-171913.pdf) 
 > 
-> ![](../../media/784987854929813504-CuTVqV9WEAAtays.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/784987854929813504-CuTVqV9WEAAtays.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sun Oct 09 05:24:23 +0000 2016](https://twitter.com/ChristopherA/status/784987854929813504)
 
@@ -263,7 +263,7 @@ Replying to [@taoeffect](https://twitter.com/taoeffect/status/783892800676896768
 
 > That $410T in global non-cash transactions is 387B individual transactions results global average tr. size = $1026 [https://www.worldpaymentsreport.com/u/f8lyf3vtfy](https://www.worldpaymentsreport.com/u/f8lyf3vtfy) 
 > 
-> ![](../../media/784993756504137728-CuTbKTsWcAAl_dl.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/784993756504137728-CuTbKTsWcAAl_dl.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sun Oct 09 05:47:50 +0000 2016](https://twitter.com/ChristopherA/status/784993756504137728)
 
@@ -409,7 +409,7 @@ Replying to [@JayCoDon and @TuurDemeester](https://twitter.com/JayCoDon/status/7
 
 > I was quoted in @coindesk "Why Weight? Bitcoin Scaling is Moving Beyond Block Size" by @pete_rizzo_ [http://www.coindesk.com/weight-scaling-bitcoin-milan-block-size/](http://www.coindesk.com/weight-scaling-bitcoin-milan-block-size/) 
 > 
-> ![](../../media/785445456600006656-CuZ2eYfXEAAj9Zz.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/785445456600006656-CuZ2eYfXEAAj9Zz.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon Oct 10 11:42:44 +0000 2016](https://twitter.com/ChristopherA/status/785445456600006656)
 
@@ -447,7 +447,7 @@ Replying to [@JayCoDon and @TuurDemeester](https://twitter.com/JayCoDon/status/7
 
 > Excellent long read on intersection of human expertise &amp; computer autonomy. Two attached paragraphs are a key quote: [https://www.theguardian.com/technology/2016/oct/11/crash-how-computers-are-setting-us-up-disaster](https://www.theguardian.com/technology/2016/oct/11/crash-how-computers-are-setting-us-up-disaster) 
 > 
-> ![](../../media/785742151015620608-CueDfVEUEAAPICY.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/785742151015620608-CueDfVEUEAAPICY.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Oct 11 07:21:41 +0000 2016](https://twitter.com/ChristopherA/status/785742151015620608)
 
@@ -455,7 +455,7 @@ Replying to [@JayCoDon and @TuurDemeester](https://twitter.com/JayCoDon/status/7
 
 > Principles of Self-Sovereign Identity summarized in three categories: [https://www.sovrin.org/The%20Inevitable%20Rise%20of%20Self-Sovereign%20Identity.pdf](https://www.sovrin.org/The%20Inevitable%20Rise%20of%20Self-Sovereign%20Identity.pdf) 
 > 
-> ![](../../media/785787973988155394-Cuet_bpXgAEKMr4.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/785787973988155394-Cuet_bpXgAEKMr4.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Oct 11 10:23:46 +0000 2016](https://twitter.com/ChristopherA/status/785787973988155394)
 
@@ -469,11 +469,11 @@ Replying to [@JayCoDon and @TuurDemeester](https://twitter.com/JayCoDon/status/7
 
 > I've heard of vertical gardens before, but vertical forests? Beautiful! 
 > 
-> ![](../../media/785897577627746306-CugRlWqW8AAjjut.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/785897577627746306-CugRlWqW8AAjjut.jpg)
 > 
-> ![](../../media/785897577627746306-CugRlW0WIAM4g2n.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/785897577627746306-CugRlW0WIAM4g2n.jpg)
 > 
-> ![](../../media/785897577627746306-CugRlWhWgAArxG9.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/785897577627746306-CugRlWhWgAArxG9.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Oct 11 17:39:18 +0000 2016](https://twitter.com/ChristopherA/status/785897577627746306)
 
@@ -565,7 +565,7 @@ Replying to [@juscamarena and @NSmolenski](https://twitter.com/juscamarena/statu
 
 > A key quote about males learning nurturing from [https://norasamaran.com/2016/02/11/the-opposite-of-rape-culture-is-nurturance-culture-2/](https://norasamaran.com/2016/02/11/the-opposite-of-rape-culture-is-nurturance-culture-2/) 
 > 
-> ![](../../media/786127801552347136-CujjDPMWcAAn-vd.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/786127801552347136-CujjDPMWcAAn-vd.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Oct 12 08:54:08 +0000 2016](https://twitter.com/ChristopherA/status/786127801552347136)
 
@@ -865,7 +865,7 @@ Replying to [@DarioTepoTec and @techvibes](https://twitter.com/DarioUTXO/status/
 
 > Interesting academic article on limitations of Web Of Trust, relevant to #RebootingWebOfTrust [http://lockstep.com.au/library/pki/limitations-of-wot](http://lockstep.com.au/library/pki/limitations-of-wot) /ht @Steve_Lockstep 
 > 
-> ![](../../media/788967544082210816-CvL5y0MVYAAjbOT.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/788967544082210816-CvL5y0MVYAAjbOT.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Oct 20 04:58:15 +0000 2016](https://twitter.com/ChristopherA/status/788967544082210816)
 
@@ -873,7 +873,7 @@ Replying to [@DarioTepoTec and @techvibes](https://twitter.com/DarioUTXO/status/
 
 > RT @WayneVaughan: Geeking out at the WebofTrust at @Microsoft Reactor. 
 > 
-> ![](../../media/788981072222531584-CvKbYeZUAAAmCvy.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/788981072222531584-CvKbYeZUAAAmCvy.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Oct 20 05:52:00 +0000 2016](https://twitter.com/ChristopherA/status/788981072222531584)
 
@@ -912,7 +912,7 @@ Replying to [@DarioTepoTec and @techvibes](https://twitter.com/DarioUTXO/status/
 
 > The Wells Fargo fiasco and control of personal identity: [http://www.americanbanker.com/bankthink/wells-fargo-fiasco-lays-bare-a-broken-identity-system-1092032-1.html](http://www.americanbanker.com/bankthink/wells-fargo-fiasco-lays-bare-a-broken-identity-system-1092032-1.html) @AmerBanker @MarcHochstein @BankThink 
 > 
-> ![](../../media/789242270973177858-CvPzqSjUkAEBtSP.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/789242270973177858-CvPzqSjUkAEBtSP.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Oct 20 23:09:55 +0000 2016](https://twitter.com/ChristopherA/status/789242270973177858)
 
@@ -949,7 +949,7 @@ Replying to [@Alex_Amsel, @mr_archenemy, @MarcHochstein and @AmerBanker](https:/
 
 > Progress report on "DIDs (Decentralized Identifiers)" from today's #RebootingWebOfTrust 
 > 
-> ![](../../media/789286783062122496-CvQcI71UIAAMeeh.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/789286783062122496-CvQcI71UIAAMeeh.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri Oct 21 02:06:47 +0000 2016](https://twitter.com/ChristopherA/status/789286783062122496)
 
@@ -958,7 +958,7 @@ Replying to [@Alex_Amsel, @mr_archenemy, @MarcHochstein and @AmerBanker](https:/
 
 > Progress report on "Identity Containers" from today's #RebootingWebOfTrust 
 > 
-> ![](../../media/789287138751713280-CvQcd0QVIAAtFD_.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/789287138751713280-CvQcd0QVIAAtFD_.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri Oct 21 02:08:12 +0000 2016](https://twitter.com/ChristopherA/status/789287138751713280)
 
@@ -967,7 +967,7 @@ Replying to [@Alex_Amsel, @mr_archenemy, @MarcHochstein and @AmerBanker](https:/
 
 > Progress report on "Jorum: UN SDG 16.9 Compatable Identity Engagement Model" from today's #RebootingWebOfTrust 
 > 
-> ![](../../media/789287462887526400-CvQcwiaUMAE0Zd1.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/789287462887526400-CvQcwiaUMAE0Zd1.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri Oct 21 02:09:30 +0000 2016](https://twitter.com/ChristopherA/status/789287462887526400)
 
@@ -976,11 +976,11 @@ Replying to [@Alex_Amsel, @mr_archenemy, @MarcHochstein and @AmerBanker](https:/
 
 > Progress report on "Bootstrapping Identity &amp; User Adoption" from today's #RebootingWebOfTrust 
 > 
-> ![](../../media/789288096978219010-CvQdVWRUkAACp_A.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/789288096978219010-CvQdVWRUkAACp_A.jpg)
 > 
-> ![](../../media/789288096978219010-CvQdVXgVIAAvRWi.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/789288096978219010-CvQdVXgVIAAvRWi.jpg)
 > 
-> ![](../../media/789288096978219010-CvQdVb3UIAAmKGk.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/789288096978219010-CvQdVb3UIAAmKGk.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri Oct 21 02:12:01 +0000 2016](https://twitter.com/ChristopherA/status/789288096978219010)
 
@@ -989,7 +989,7 @@ Replying to [@Alex_Amsel, @mr_archenemy, @MarcHochstein and @AmerBanker](https:/
 
 > Progress report on "Reconciling COALA IP with Kantara's Consent Receipts, for Personal Data" from today's #RebootingWebOfTrust 
 > 
-> ![](../../media/789288656074747904-CvQd2GgVMAEWqnD.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/789288656074747904-CvQd2GgVMAEWqnD.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri Oct 21 02:14:14 +0000 2016](https://twitter.com/ChristopherA/status/789288656074747904)
 
@@ -998,7 +998,7 @@ Replying to [@Alex_Amsel, @mr_archenemy, @MarcHochstein and @AmerBanker](https:/
 
 > Progress report on "Portable Reputation Toolkit" from today's #RebootingWebOfTrust 
 > 
-> ![](../../media/789288877081059329-CvQeC3HUEAAFLVh.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/789288877081059329-CvQeC3HUEAAFLVh.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri Oct 21 02:15:07 +0000 2016](https://twitter.com/ChristopherA/status/789288877081059329)
 
@@ -1007,7 +1007,7 @@ Replying to [@Alex_Amsel, @mr_archenemy, @MarcHochstein and @AmerBanker](https:/
 
 > Progress report on "Humanness in Digital Identity" from today's #RebootingWebOfTrust 
 > 
-> ![](../../media/789289098083078145-CvQeP1xVYAA6TTO.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/789289098083078145-CvQeP1xVYAA6TTO.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri Oct 21 02:15:59 +0000 2016](https://twitter.com/ChristopherA/status/789289098083078145)
 
@@ -1024,7 +1024,7 @@ Replying to [@Steve_Lockstep](https://twitter.com/Steve_Lockstep/status/78936454
 
 > Phil @Windley argues that there is a place for permissioned but public blockchains in Self-Sovereign Identity [http://www.windley.com/archives/2016/09/self-sovereign_identity_and_the_legitimacy_of_permissioned_ledgers.shtml](http://www.windley.com/archives/2016/09/self-sovereign_identity_and_the_legitimacy_of_permissioned_ledgers.shtml) 
 > 
-> ![](../../media/789487535315496960-CvTSuWrVUAAQ2oM.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/789487535315496960-CvTSuWrVUAAQ2oM.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri Oct 21 15:24:31 +0000 2016](https://twitter.com/ChristopherA/status/789487535315496960)
 
@@ -1137,7 +1137,7 @@ Replying to [@Steve_Lockstep](https://twitter.com/Steve_Lockstep/status/78936454
 
 > RT @ValaAfshar: We desperately need a word for this 
 > 
-> ![](../../media/789704265983889409-CvV23ztUsAA-LWz.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/789704265983889409-CvV23ztUsAA-LWz.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sat Oct 22 05:45:43 +0000 2016](https://twitter.com/ChristopherA/status/789704265983889409)
 
@@ -1170,7 +1170,7 @@ Replying to [@Steve_Lockstep](https://twitter.com/Steve_Lockstep/status/78936454
 
 > Another reason for @BarackObama to pardon @Snowden—incentivize responsible curation of whistleblower data vs irresponsible ones @accessnow 
 > 
-> ![](../../media/789947864537366528-CvZ1ZPxVUAIHMet.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/789947864537366528-CvZ1ZPxVUAIHMet.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sat Oct 22 21:53:42 +0000 2016](https://twitter.com/ChristopherA/status/789947864537366528)
 
@@ -1191,7 +1191,7 @@ Replying to [@Steve_Lockstep](https://twitter.com/Steve_Lockstep/status/78936454
 
 > One of the more interesting results from the #RebootingWebOfTrust participant survey: 55% come to collaborate, 0% to network. 
 > 
-> ![](../../media/790011912104718337-CvavpGIUAAA9i2C.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/790011912104718337-CvavpGIUAAA9i2C.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sun Oct 23 02:08:12 +0000 2016](https://twitter.com/ChristopherA/status/790011912104718337)
 
@@ -1239,7 +1239,7 @@ Replying to [@Mwforhr and @accessnow](https://twitter.com/Mwforhr/status/7901617
 
 > The Four Kinds of Privacy: "What privacy means varies between…" [http://www.lifewithalacrity.com/2015/04/the-four-kinds-of-privacy.html](http://www.lifewithalacrity.com/2015/04/the-four-kinds-of-privacy.html) 
 > 
-> ![](../../media/790565882795663360-CvinelPVIAEXjMH.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/790565882795663360-CvinelPVIAEXjMH.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon Oct 24 14:49:29 +0000 2016](https://twitter.com/ChristopherA/status/790565882795663360)
 
@@ -1254,7 +1254,7 @@ Replying to [@Mwforhr and @accessnow](https://twitter.com/Mwforhr/status/7901617
 
 > Solving Chinese business fraud problems is worthy, but centralized reputation is authoritarian &amp; too abusable [http://www.independent.co.uk/news/world/asia/china-surveillance-big-data-score-censorship-a7375221.html](http://www.independent.co.uk/news/world/asia/china-surveillance-big-data-score-censorship-a7375221.html) 
 > 
-> ![](../../media/790569247747350528-CviqifQUkAA6gou.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/790569247747350528-CviqifQUkAA6gou.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon Oct 24 15:02:51 +0000 2016](https://twitter.com/ChristopherA/status/790569247747350528)
 
@@ -1392,7 +1392,7 @@ Replying to [@Steve_Lockstep](https://twitter.com/Steve_Lockstep/status/79058319
 
 > Best post I've seen so far to explain how Bitcoin Unlimited's approach risks leading us to centralization [https://blog.sia.tech/2016/10/24/a-future-led-by-bitcoin-unlimited-is-a-centralized-future](https://blog.sia.tech/2016/10/24/a-future-led-by-bitcoin-unlimited-is-a-centralized-future) 
 > 
-> ![](../../media/790636778822569985-Cvjn9SgVUAABfOS.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/790636778822569985-Cvjn9SgVUAABfOS.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon Oct 24 19:31:12 +0000 2016](https://twitter.com/ChristopherA/status/790636778822569985)
 
@@ -1504,7 +1504,7 @@ Replying to [@ahopebailie and @chain](https://twitter.com/ahopebailie/status/790
 
 > RT @alexisohanian: My thoughts on Mediachain Attribution Engine on @ProductHunt [https://www.producthunt.com/tech/mediachain-attribution-engine#comment-377579](https://www.producthunt.com/tech/mediachain-attribution-engine#comment-377579) 
 > 
-> ![](../../media/790809883822002177-CvjzCO8W8AQ2_2D.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/790809883822002177-CvjzCO8W8AQ2_2D.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Oct 25 06:59:03 +0000 2016](https://twitter.com/ChristopherA/status/790809883822002177)
 
@@ -1542,7 +1542,7 @@ Replying to [@ahopebailie and @chain](https://twitter.com/ahopebailie/status/790
 
 > Answer to ? at #IIW related to both personal and contextual privacy—workers do their best when not watched by bosses [https://www.psychologytoday.com/blog/the-outsourced-mind/201604/want-people-behave-better-give-them-more-privacy](https://www.psychologytoday.com/blog/the-outsourced-mind/201604/want-people-behave-better-give-them-more-privacy) 
 > 
-> ![](../../media/791082438013259777-Cvp9SCAVMAEweNR.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/791082438013259777-Cvp9SCAVMAEweNR.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Oct 26 01:02:05 +0000 2016](https://twitter.com/ChristopherA/status/791082438013259777)
 
@@ -1592,7 +1592,7 @@ Replying to [@ahopebailie and @chain](https://twitter.com/ahopebailie/status/790
 
 > RT @durumcrustulum: I'm not sure if this is exciting or just deep learning blather. [https://arxiv.org/abs/1610.06918](https://arxiv.org/abs/1610.06918) 
 > 
-> ![](../../media/791482551185530881-CvvOYtlWcAA3NrB.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/791482551185530881-CvvOYtlWcAA3NrB.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Oct 27 03:31:59 +0000 2016](https://twitter.com/ChristopherA/status/791482551185530881)
 
@@ -1662,9 +1662,9 @@ Replying to [@santisiri](https://twitter.com/santisiri/status/791433957489475585
 
 > There is something so civilized about an old fashioned breakfast cafe w/ good food, great service &amp; people quietly reading papers. Baji's. 
 > 
-> ![](../../media/791672862067175424-CvyWRDYUEAE0GUQ.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/791672862067175424-CvyWRDYUEAE0GUQ.jpg)
 > 
-> ![](../../media/791672862067175424-CvyWRDZUIAAAKFW.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/791672862067175424-CvyWRDZUIAAAKFW.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Oct 27 16:08:13 +0000 2016](https://twitter.com/ChristopherA/status/791672862067175424)
 
