--- a/_tweets-md/2016/2016-12-01-tweets.md
+++ b/_tweets-md/2016/2016-12-01-tweets.md
@@ -101,7 +101,7 @@ Replying to [@AlexSteffen](https://twitter.com/AlexSteffen/status/80550176560070
 
 > I'll one up you! 
 > 
-> ![](../../media/805862453015810048-Cy7_nsCVEAAFsbQ.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/805862453015810048-Cy7_nsCVEAAFsbQ.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon Dec 05 19:52:35 +0000 2016](https://twitter.com/ChristopherA/status/805862453015810048)
 
@@ -286,7 +286,7 @@ Replying to [@lightcoin, @mindspillage and @melt_dem](https://twitter.com/lightc
 
 > 👍 Pieter Wuille @pwuille was named today as 6th most influential person in blockchain industry in 2016 by @coindesk [http://www.coindesk.com/coindesks-influential-people-blockchain-2016/](http://www.coindesk.com/coindesks-influential-people-blockchain-2016/) 
 > 
-> ![](../../media/809217438025994243-Czrq9u0VIAAyUhF.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/809217438025994243-Czrq9u0VIAAyUhF.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Dec 15 02:04:06 +0000 2016](https://twitter.com/ChristopherA/status/809217438025994243)
 
@@ -314,7 +314,7 @@ Replying to [@clayforsberg](https://twitter.com/clayforsberg/status/809135555879
 
 > RT @durumcrustulum: Good news, TLS 1.3 is making many good choices. 
 > 
-> ![](../../media/809315037802151936-Czlnch5WIAADWvf.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/809315037802151936-Czlnch5WIAADWvf.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Dec 15 08:31:56 +0000 2016](https://twitter.com/ChristopherA/status/809315037802151936)
 
@@ -340,7 +340,7 @@ Replying to [@clayforsberg](https://twitter.com/clayforsberg/status/809135555879
 
 > A Facebook post from earlier this month addressed to my family &amp; friends. Still relevant so sharing more broadly "Rally against fear! …" 
 > 
-> ![](../../media/809503245789863936-Czvu6D0VEAAGx_G.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/809503245789863936-Czvu6D0VEAAGx_G.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Dec 15 20:59:48 +0000 2016](https://twitter.com/ChristopherA/status/809503245789863936)
 
@@ -440,7 +440,7 @@ Replying to [@ummjackson and @Target](https://twitter.com/@ummjackson/status/809
 
 > The sustainable business schools have been teaching about these for some time—18 Business Management Fallacies: [http://www.forbes.com/sites/stevedenning/2016/12/19/understanding-the-religion-of-business-18-management-fallacies/#759f114b65f9](http://www.forbes.com/sites/stevedenning/2016/12/19/understanding-the-religion-of-business-18-management-fallacies/#759f114b65f9) 
 > 
-> ![](../../media/811321918754168832-C0Jk-SiXgAAxFrC.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/811321918754168832-C0Jk-SiXgAAxFrC.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Dec 20 21:26:33 +0000 2016](https://twitter.com/ChristopherA/status/811321918754168832)
 
@@ -460,7 +460,7 @@ Replying to [@ummjackson and @Target](https://twitter.com/@ummjackson/status/809
 
 > The first issue of the peer-reviewed cryptocurrency journal Ledger is now available: [http://www.ledgerjournal.org/ojs/index.php/ledger](http://www.ledgerjournal.org/ojs/index.php/ledger) 
 > 
-> ![](../../media/811672165925801985-C0Ojhx2UUAAeQnr.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/811672165925801985-C0Ojhx2UUAAeQnr.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Dec 21 20:38:19 +0000 2016](https://twitter.com/ChristopherA/status/811672165925801985)
 
@@ -486,7 +486,7 @@ Replying to [@McKellogs](https://twitter.com/ChristopherA/status/812073633598181
 
 > One of the best rituals was "Check In". In &lt;5 minutes everyone in class feels listened to. 
 > 
-> ![](../../media/812075528341458945-C0USYu-UoAAESFB.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/812075528341458945-C0USYu-UoAAESFB.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Dec 22 23:21:08 +0000 2016](https://twitter.com/ChristopherA/status/812075528341458945)
 
@@ -512,7 +512,7 @@ Replying to [@McKellogs](https://twitter.com/ChristopherA/status/812076581254373
 
 > my Kaizen slide from another SlideShare on my teaching methodology [https://www.slideshare.net/ChristopherA/my-hybrid-flipped-learning-environment](https://www.slideshare.net/ChristopherA/my-hybrid-flipped-learning-environment) 
 > 
-> ![](../../media/812078073491243009-C0UUs6yUcAAWXI0.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/812078073491243009-C0UUs6yUcAAWXI0.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Dec 22 23:31:15 +0000 2016](https://twitter.com/ChristopherA/status/812078073491243009)
 
@@ -548,7 +548,7 @@ Replying to [@McKellogs](https://twitter.com/ChristopherA/status/812076581254373
 
 > ❷Greg Slepak @taoeffect of @Group_Income writes in detail about flaws in May's Theorem about majority rule: [https://groupincome.org/2016/09/misconceptions-about-majority-rule/](https://groupincome.org/2016/09/misconceptions-about-majority-rule/) 
 > 
-> ![](../../media/814526333472546816-C03HYbOVQAAN-h4.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/814526333472546816-C03HYbOVQAAN-h4.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Dec 29 17:39:45 +0000 2016](https://twitter.com/ChristopherA/status/814526333472546816)
 
@@ -558,7 +558,7 @@ Replying to [@McKellogs](https://twitter.com/ChristopherA/status/812076581254373
 
 > ❸In @taoeffect's analysis majority rule is best for small groups for regular, low-stakes reversible decisions. [https://groupincome.org/2016/09/deprecating-mays-theorem/](https://groupincome.org/2016/09/deprecating-mays-theorem/) 
 > 
-> ![](../../media/814526889389719552-C03H4wkUQAAZZh6.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/814526889389719552-C03H4wkUQAAZZh6.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Dec 29 17:41:58 +0000 2016](https://twitter.com/ChristopherA/status/814526889389719552)
 
@@ -669,7 +669,7 @@ Replying to [@C1aranMurray](https://twitter.com/C1aranMurray/status/814531486439
 
 > RT @yaneerbaryam: Representative democracy is failing. A fragmented people are not represented by voting systems. 
 > 
-> ![](../../media/814608741270102016-CxO7tI9WEAA2e-a.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/814608741270102016-CxO7tI9WEAA2e-a.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Dec 29 23:07:13 +0000 2016](https://twitter.com/ChristopherA/status/814608741270102016)
 
