--- a/_tweets-md/2017/2017-01-01-tweets.md
+++ b/_tweets-md/2017/2017-01-01-tweets.md
@@ -115,7 +115,7 @@ Replying to [@trbouma and @jonibrennan](https://twitter.com/trbouma/status/81629
 
 > Interesting overview of quadratic voting. I need to add it to my spectrum of consent article. [http://ericposner.com/quadratic-voting/](http://ericposner.com/quadratic-voting/) 
 > 
-> ![](../../media/816429663744573445-C1SKbhPXAAQBoPc.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/816429663744573445-C1SKbhPXAAQBoPc.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Jan 03 23:42:55 +0000 2017](https://twitter.com/ChristopherA/status/816429663744573445)
 
@@ -123,7 +123,7 @@ Replying to [@trbouma and @jonibrennan](https://twitter.com/trbouma/status/81629
 
 > RT @calroscow: I think we often forget how much of today's language Shakespeare gave us. Profound. 
 > 
-> ![](../../media/816436809387405312-C1RFb5NWgAAQAiM.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/816436809387405312-C1RFb5NWgAAQAiM.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Jan 04 00:11:18 +0000 2017](https://twitter.com/ChristopherA/status/816436809387405312)
 
@@ -155,7 +155,7 @@ Replying to [@trbouma and @jonibrennan](https://twitter.com/trbouma/status/81629
 
 > RT @PatrickLonga: First Levchin prize, edition 2017, goes to Joan Daemen #realworldcrypto 
 > 
-> ![](../../media/816694423388033024-C1V5e7AVIAAFXDa.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/816694423388033024-C1V5e7AVIAAFXDa.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Jan 04 17:14:58 +0000 2017](https://twitter.com/ChristopherA/status/816694423388033024)
 
@@ -205,7 +205,7 @@ Replying to [@el33th4xor](https://twitter.com/el33th4xor/status/8168078106505420
 
 > Weaponized Narrative is a good name for it. It is more than Propoganda, w/ A/B testing, neuroscience, sociology, ++. [http://www.defenseone.com/ideas/2017/01/weaponized-narrative-new-battlespace/134284/](http://www.defenseone.com/ideas/2017/01/weaponized-narrative-new-battlespace/134284/) 
 > 
-> ![](../../media/817087208758841345-C1bge1dWIAE0ixs.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/817087208758841345-C1bge1dWIAE0ixs.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Jan 05 19:15:45 +0000 2017](https://twitter.com/ChristopherA/status/817087208758841345)
 
@@ -213,7 +213,7 @@ Replying to [@el33th4xor](https://twitter.com/el33th4xor/status/8168078106505420
 
 > RT @clayforsberg: “The Business Model of Democracy” — @elithechef [https://medium.com/bif-speak/the-business-model-of-democracy-91518abb7ca6#---0-186.sgcvho8bt](https://medium.com/bif-speak/the-business-model-of-democracy-91518abb7ca6#---0-186.sgcvho8bt) 
 > 
-> ![](../../media/817102575677870082-C1bppe0UsAAZgec.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/817102575677870082-C1bppe0UsAAZgec.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Jan 05 20:16:49 +0000 2017](https://twitter.com/ChristopherA/status/817102575677870082)
 
@@ -335,7 +335,7 @@ Replying to [@DarioTepoTec](https://twitter.com/DarioUTXO/status/817144281098055
 
 > RT @xkcdComic: Team Chat [http://xkcd.com/1782/](http://xkcd.com/1782/) [http://m.xkcd.com/1782/](http://m.xkcd.com/1782/) 
 > 
-> ![](../../media/817773235118841856-C1gGPpqUAAA2qSD.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/817773235118841856-C1gGPpqUAAA2qSD.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sat Jan 07 16:41:47 +0000 2017](https://twitter.com/ChristopherA/status/817773235118841856)
 
@@ -362,7 +362,7 @@ Replying to [@DarioTepoTec](https://twitter.com/DarioUTXO/status/817144281098055
 
 > Fabulous #longread from historian @Ada_Palmer on the nature of "progress". Great Forces or Great Men? Both! [http://www.exurbe.com/?p=4041](http://www.exurbe.com/?p=4041) 
 > 
-> ![](../../media/818144176290328577-C1qhyTcUUAA12Nu.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/818144176290328577-C1qhyTcUUAA12Nu.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sun Jan 08 17:15:46 +0000 2017](https://twitter.com/ChristopherA/status/818144176290328577)
 
@@ -370,11 +370,11 @@ Replying to [@DarioTepoTec](https://twitter.com/DarioUTXO/status/817144281098055
 
 > I first experienced NYC's High Line Park back in May and loved the aesthetics of it. So I had to check it out after a winter snowstorm… 
 > 
-> ![](../../media/818220725995761664-C1rnRchXgAETOWV.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/818220725995761664-C1rnRchXgAETOWV.jpg)
 > 
-> ![](../../media/818220725995761664-C1rnRcjXEAQ-Q8i.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/818220725995761664-C1rnRcjXEAQ-Q8i.jpg)
 > 
-> ![](../../media/818220725995761664-C1rnRcpXEAQUzhG.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/818220725995761664-C1rnRcpXEAQUzhG.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sun Jan 08 22:19:57 +0000 2017](https://twitter.com/ChristopherA/status/818220725995761664)
 
@@ -580,7 +580,7 @@ Replying to [@el33th4xor](https://twitter.com/el33th4xor/status/8199900234204119
 > Kahlil Gibran   
 > #a3r 
 > 
-> ![](../../media/820408947135770625-C2GHJySUcAAjGoJ.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/820408947135770625-C2GHJySUcAAjGoJ.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sat Jan 14 23:15:10 +0000 2017](https://twitter.com/ChristopherA/status/820408947135770625)
 
@@ -626,7 +626,7 @@ Replying to [@el33th4xor](https://twitter.com/el33th4xor/status/8199900234204119
 
 > On a dark day it is great to be able to see some dark movies in SF at the Castro for Noir City 15 festival. Theme: capers, heists &amp; fiascos. 
 > 
-> ![](../../media/822645673082441728-C2qf0jLW8AAFpiu.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/822645673082441728-C2qf0jLW8AAFpiu.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sat Jan 21 03:23:07 +0000 2017](https://twitter.com/ChristopherA/status/822645673082441728)
 
@@ -670,7 +670,7 @@ Replying to [@rusty_twit](https://twitter.com/rusty_twit/status/8226437161040896
 
 > I own a small ad-based community website @RPGnet — we probably loose 50% rev to keep ad quality high, but is very hard to do. @waltmossberg 
 > 
-> ![](../../media/822719016825339906-C2rilPFUsAAaOrl.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/822719016825339906-C2rilPFUsAAaOrl.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sat Jan 21 08:14:33 +0000 2017](https://twitter.com/ChristopherA/status/822719016825339906)
 
@@ -687,7 +687,7 @@ Replying to [@rusty_twit](https://twitter.com/rusty_twit/status/8226437161040896
 > “In exchange for power, influence, command and a place in history, a president gives up the bulk of his privacy.”  
 > – Roger Mudd, Journalist 
 > 
-> ![](../../media/822740599505719298-C2r2HsOUQAAu9Bu.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/822740599505719298-C2r2HsOUQAAu9Bu.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sat Jan 21 09:40:19 +0000 2017](https://twitter.com/ChristopherA/status/822740599505719298)
 
@@ -732,7 +732,7 @@ Replying to [@kevinakwok](https://twitter.com/kevinakwok/status/8229865626777681
 
 > answer to your question: it is different depending on energy in group—for survival is only way to max: [http://www.lifewithalacrity.com/2009/03/power-laws.html](http://www.lifewithalacrity.com/2009/03/power-laws.html) 
 > 
-> ![](../../media/822988587746529280-C2vXwRxVEAEUJla.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/822988587746529280-C2vXwRxVEAEUJla.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sun Jan 22 02:05:44 +0000 2017](https://twitter.com/ChristopherA/status/822988587746529280)
 
@@ -740,7 +740,7 @@ Replying to [@kevinakwok](https://twitter.com/kevinakwok/status/8229865626777681
 
 > Are you a relentless multidisciplinarian? A "neo-generalist"? It requires both expertise &amp; a beginners mind. [https://mag.e-180.com/2016/07/the-restless-multidisciplinarian/](https://mag.e-180.com/2016/07/the-restless-multidisciplinarian/) 
 > 
-> ![](../../media/822990255691165696-C2vZRbhUAAImSfW.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/822990255691165696-C2vZRbhUAAImSfW.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sun Jan 22 02:12:22 +0000 2017](https://twitter.com/ChristopherA/status/822990255691165696)
 
@@ -786,7 +786,7 @@ Replying to [@kevinakwok](https://twitter.com/kevinakwok/status/8229865626777681
 
 > Quoted by @coindesk about respectful discussions at Satashi Roundtable to heal the rifts in the Bitcoin ecosystem. [http://www.coindesk.com/blocked-block-size-bitcoin-basics-satoshi-roundtable/](http://www.coindesk.com/blocked-block-size-bitcoin-basics-satoshi-roundtable/) 
 > 
-> ![](../../media/824708588782424064-C3H0E_mWYAANKw3.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/824708588782424064-C3H0E_mWYAANKw3.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Jan 26 20:00:24 +0000 2017](https://twitter.com/ChristopherA/status/824708588782424064)
 
@@ -832,13 +832,13 @@ Replying to [@VinnyLingham](https://twitter.com/VinnyLingham/status/825018121857
 
 > Graphic recording for #Construct2017 by Sonia Sawhney @ssawhney87 — she also did one of our #RebootingWebOfTrust design workshops. 
 > 
-> ![](../../media/826198925186998272-C3c_hqZUEAEXpWp.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/826198925186998272-C3c_hqZUEAEXpWp.jpg)
 > 
-> ![](../../media/826198925186998272-C3c_hqcUcAAG1jj.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/826198925186998272-C3c_hqcUcAAG1jj.jpg)
 > 
-> ![](../../media/826198925186998272-C3c_hqYVMAA03aV.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/826198925186998272-C3c_hqYVMAA03aV.jpg)
 > 
-> ![](../../media/826198925186998272-C3c_hqYVUAAX3z7.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/826198925186998272-C3c_hqYVUAAX3z7.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon Jan 30 22:42:28 +0000 2017](https://twitter.com/ChristopherA/status/826198925186998272)
 
@@ -864,7 +864,7 @@ Replying to [@VinnyLingham](https://twitter.com/VinnyLingham/status/825018121857
 
 > RT @mir_serena: Bitcoin core 2016 in a nutshell #construct2017 
 > 
-> ![](../../media/826479402229706752-C3b8mjQUcAEMK4N.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/826479402229706752-C3b8mjQUcAEMK4N.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Jan 31 17:16:59 +0000 2017](https://twitter.com/ChristopherA/status/826479402229706752)
 
@@ -880,11 +880,11 @@ Replying to [@VinnyLingham](https://twitter.com/VinnyLingham/status/825018121857
 
 > More graphic recording from day one of #construct2017 by @ssawhney87 
 > 
-> ![](../../media/826482313382944768-C3hBR2kUoAAHV7t.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/826482313382944768-C3hBR2kUoAAHV7t.jpg)
 > 
-> ![](../../media/826482313382944768-C3hBR2jVUAEzAtk.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/826482313382944768-C3hBR2jVUAEzAtk.jpg)
 > 
-> ![](../../media/826482313382944768-C3hBR2_VcAM313N.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/826482313382944768-C3hBR2_VcAM313N.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Jan 31 17:28:33 +0000 2017](https://twitter.com/ChristopherA/status/826482313382944768)
 
@@ -894,11 +894,11 @@ Replying to [@VinnyLingham](https://twitter.com/VinnyLingham/status/825018121857
 
 > Last of day one graphic recording of #construct2017 by @ssawhney87 
 > 
-> ![](../../media/826482642774224897-C3hBlDoVcAQJcnV.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/826482642774224897-C3hBlDoVcAQJcnV.jpg)
 > 
-> ![](../../media/826482642774224897-C3hBlErVUAAhWoI.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/826482642774224897-C3hBlErVUAAhWoI.jpg)
 > 
-> ![](../../media/826482642774224897-C3hBlHWUkAAi2F1.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/826482642774224897-C3hBlHWUkAAi2F1.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Jan 31 17:29:51 +0000 2017](https://twitter.com/ChristopherA/status/826482642774224897)
 
@@ -906,7 +906,7 @@ Replying to [@VinnyLingham](https://twitter.com/VinnyLingham/status/825018121857
 
 > RT @giacomozucco: Best talk I've ever heard about "blockchain". Greg Maxwell at #construct2017. #Bitcoin 
 > 
-> ![](../../media/826483151933280257-C3hBY_0XUAA7j6o.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/826483151933280257-C3hBY_0XUAA7j6o.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Jan 31 17:31:53 +0000 2017](https://twitter.com/ChristopherA/status/826483151933280257)
 
@@ -935,13 +935,13 @@ Replying to [@VinnyLingham](https://twitter.com/VinnyLingham/status/825018121857
 
 > Morning sessions for day 2 of #construct2017 #GraphicRecording by @ssawhney87 
 > 
-> ![](../../media/826606520066465793-C3iyPrwUEAA2xDF.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/826606520066465793-C3iyPrwUEAA2xDF.jpg)
 > 
-> ![](../../media/826606520066465793-C3iyPrxUcAA1SBm.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/826606520066465793-C3iyPrxUcAA1SBm.jpg)
 > 
-> ![](../../media/826606520066465793-C3iyPsaUEAAUFqs.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/826606520066465793-C3iyPsaUEAAUFqs.jpg)
 > 
-> ![](../../media/826606520066465793-C3iyPu5UoAARnv5.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/826606520066465793-C3iyPu5UoAARnv5.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Feb 01 01:42:06 +0000 2017](https://twitter.com/ChristopherA/status/826606520066465793)
 
@@ -949,11 +949,11 @@ Replying to [@VinnyLingham](https://twitter.com/VinnyLingham/status/825018121857
 
 > Closing of #construct2017 - results of interactive sessions—3 gotcha's of Blockchain identity; mutual savings &amp; insurance; interoperability? 
 > 
-> ![](../../media/826658892574650368-C3jh2RJWAAANa7E.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/826658892574650368-C3jh2RJWAAANa7E.jpg)
 > 
-> ![](../../media/826658892574650368-C3jh2RAXUAAqIr9.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/826658892574650368-C3jh2RAXUAAqIr9.jpg)
 > 
-> ![](../../media/826658892574650368-C3jh2Q_WYAAQmHC.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/826658892574650368-C3jh2Q_WYAAQmHC.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Feb 01 05:10:13 +0000 2017](https://twitter.com/ChristopherA/status/826658892574650368)
 
@@ -967,6 +967,6 @@ Replying to [@VinnyLingham](https://twitter.com/VinnyLingham/status/825018121857
 
 > RT @coindesk: Blockchain white boarding is still going strong #construct2017 
 > 
-> ![](../../media/826696345331208196-C3ixmc_UYAAftXa.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/826696345331208196-C3ixmc_UYAAftXa.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Feb 01 07:39:02 +0000 2017](https://twitter.com/ChristopherA/status/826696345331208196)
