--- a/_tweets-md/2017/2017-02-01-tweets.md
+++ b/_tweets-md/2017/2017-02-01-tweets.md
@@ -24,7 +24,7 @@ time:  23:59:59 +0000
 
 > 👍@DanielSolove essay against "I have nothing to hide" [https://papers.ssrn.com/sol3/papers.cfm?abstract_id=998565](https://papers.ssrn.com/sol3/papers.cfm?abstract_id=998565) Related to my tl:dr 4 Kinds of Privacy [http://www.lifewithalacrity.com/2015/04/the-four-kinds-of-privacy.html](http://www.lifewithalacrity.com/2015/04/the-four-kinds-of-privacy.html) 
 > 
-> ![](../../media/826909249468895233-C3nFkplWYAEKvS2.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/826909249468895233-C3nFkplWYAEKvS2.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Feb 01 21:45:02 +0000 2017](https://twitter.com/ChristopherA/status/826909249468895233)
 
@@ -62,7 +62,7 @@ time:  23:59:59 +0000
 
 > Useful word from Okanagan tribe in BC: "*En'owkan* — Please give me the viewpoint  most opposite of mine so I can increase my wisdom." 
 > 
-> ![](../../media/827190281191641088-C3rFLK3VMAMTquC.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/827190281191641088-C3rFLK3VMAMTquC.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Feb 02 16:21:46 +0000 2017](https://twitter.com/ChristopherA/status/827190281191641088)
 
@@ -100,7 +100,7 @@ time:  23:59:59 +0000
 
 > RT @JeremyRubin: 100 new Bitcoin developers being "brought up" in Tokyo at Digital Garage. 
 > 
-> ![](../../media/827414468749516800-C3twdn5UcAMsSh1.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/827414468749516800-C3twdn5UcAMsSh1.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri Feb 03 07:12:36 +0000 2017](https://twitter.com/ChristopherA/status/827414468749516800)
 
@@ -120,7 +120,7 @@ time:  23:59:59 +0000
 
 > “Facts are notes; Stories are the song…” from @pwang's Story of Stories (Orientation, Part 3) [https://medium.com/@pwang/story-of-stories-orientation-part-3-9c42247a0083?source=twitterShare-63ba9be92e8f-1486235435](https://medium.com/@pwang/story-of-stories-orientation-part-3-9c42247a0083?source=twitterShare-63ba9be92e8f-1486235435) 
 > 
-> ![](../../media/827958173004730369-C31_kfSUYAEQaRR.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/827958173004730369-C31_kfSUYAEQaRR.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sat Feb 04 19:13:05 +0000 2017](https://twitter.com/ChristopherA/status/827958173004730369)
 
@@ -148,7 +148,7 @@ time:  23:59:59 +0000
 
 > "invisible architectures…if we are unaware of our own assumptions, we may simply re-create them in digital form" [https://github.com/WebOfTrustInfo/rebooting-the-web-of-trust-fall2016/blob/master/final-documents/WisdomEmbedding-Human-Wisdom-in-Our-Digital-Tomorrow.pdf](https://github.com/WebOfTrustInfo/rebooting-the-web-of-trust-fall2016/blob/master/final-documents/WisdomEmbedding-Human-Wisdom-in-Our-Digital-Tomorrow.pdf) 
 > 
-> ![](../../media/828051993100840960-C33U5IOUYAEte3S.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/828051993100840960-C33U5IOUYAEte3S.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sun Feb 05 01:25:54 +0000 2017](https://twitter.com/ChristopherA/status/828051993100840960)
 
@@ -162,7 +162,7 @@ time:  23:59:59 +0000
 
 > A 21st Century problem: our culture &amp; education taught us in Occam's Razor that simple is often right—today we need to be more skeptical. 
 > 
-> ![](../../media/828084492237549568-C33yc6fUcAAoxo-.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/828084492237549568-C33yc6fUcAAoxo-.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sun Feb 05 03:35:02 +0000 2017](https://twitter.com/ChristopherA/status/828084492237549568)
 
@@ -171,7 +171,7 @@ time:  23:59:59 +0000
 
 > Among others at the #UpdateDemocracy Unconference today, @Johannes_Ernst is worried how bad this crisis in our world systems might be: 
 > 
-> ![](../../media/828135932675051520-C34hPAyXAAEUgwv.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/828135932675051520-C34hPAyXAAEUgwv.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sun Feb 05 06:59:27 +0000 2017](https://twitter.com/ChristopherA/status/828135932675051520)
 
@@ -448,7 +448,7 @@ Replying to [@lykle and @Blockstream](https://twitter.com/lykle/status/829975416
 
 > From BAMPFA exhibit "Hippie Modernism" from 1973. Not as much has evolved since as you might think. [http://www.bampfa.berkeley.edu/program/hippie-modernism-struggle-utopia](http://www.bampfa.berkeley.edu/program/hippie-modernism-struggle-utopia) 
 > 
-> ![](../../media/830201234141306881-C4V3na6UEAEk_Qy.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/830201234141306881-C4V3na6UEAEk_Qy.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri Feb 10 23:46:13 +0000 2017](https://twitter.com/ChristopherA/status/830201234141306881)
 
@@ -457,7 +457,7 @@ Replying to [@lykle and @Blockstream](https://twitter.com/lykle/status/829975416
 
 > Closeup of previous 1973 poster "The Minimal Design Team" from BAMPFA exhibit "Hippie Modernism" 
 > 
-> ![](../../media/830249914835668992-C4Wj5GmVYAAieC6.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/830249914835668992-C4Wj5GmVYAAieC6.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sat Feb 11 02:59:39 +0000 2017](https://twitter.com/ChristopherA/status/830249914835668992)
 
@@ -517,9 +517,9 @@ Replying to [@lykle and @Blockstream](https://twitter.com/lykle/status/829975416
 
 > I've been expressing concerns about the #privacy of India's aadhaar ID system for some time, at industry events &amp; UN [http://mashable.com/2017/02/14/india-aadhaar-uidai-privacy-security-debate/](http://mashable.com/2017/02/14/india-aadhaar-uidai-privacy-security-debate/) 
 > 
-> ![](../../media/832334749708345344-C40MANNVUAArejB.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/832334749708345344-C40MANNVUAArejB.jpg)
 > 
-> ![](../../media/832334749708345344-C40MANNUYAAgbBY.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/832334749708345344-C40MANNUYAAgbBY.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Feb 16 21:04:03 +0000 2017](https://twitter.com/ChristopherA/status/832334749708345344)
 
