--- a/_tweets-md/2017/2017-03-01-tweets.md
+++ b/_tweets-md/2017/2017-03-01-tweets.md
@@ -66,7 +66,7 @@ time:  23:59:59 +0000
 
 > This is a very important but complex concept that the cryptocurrency community needs to get regulators to understand [https://coincenter.org/entry/when-does-a-company-actually-control-customer-bitcoins](https://coincenter.org/entry/when-does-a-company-actually-control-customer-bitcoins) 
 > 
-> ![](../../media/838455371312197632-C6LKtkyVAAAXCAE.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/838455371312197632-C6LKtkyVAAAXCAE.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sun Mar 05 18:25:12 +0000 2017](https://twitter.com/ChristopherA/status/838455371312197632)
 
@@ -120,7 +120,7 @@ Replying to [@petertoddbtc, @WayneVaughan, @csuwildcat and @opentimestamps](http
 
 > I appreciate @VladZamfir's warnings about the hype in the blockchain industry. It isn't just about Ethereum. [https://twitter.com/vladzamfir/status/838457529168506886](https://twitter.com/vladzamfir/status/838457529168506886) 
 > 
-> ![](../../media/838516073657851904-C6MB62_VAAAjbIs.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/838516073657851904-C6MB62_VAAAjbIs.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sun Mar 05 22:26:25 +0000 2017](https://twitter.com/ChristopherA/status/838516073657851904)
 
@@ -322,7 +322,7 @@ Replying to [@kanzure](https://twitter.com/kanzure/status/838517545783148545)
 
 > RT @Melt_Dem: for @lopp - this is the chart that was drawn for me my first week in #bitcoin 😂 
 > 
-> ![](../../media/840627366325964800-C4KyZlfWEAAVA6I.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/840627366325964800-C4KyZlfWEAAVA6I.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sat Mar 11 18:15:56 +0000 2017](https://twitter.com/ChristopherA/status/840627366325964800)
 
@@ -334,7 +334,7 @@ Replying to [@kanzure](https://twitter.com/kanzure/status/838517545783148545)
 > —Hazard: I'm an expert  
 > —Expert: I know nothing 
 > 
-> ![](../../media/841336616752881664-C6rYwaUVwAIUx9g.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/841336616752881664-C6rYwaUVwAIUx9g.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon Mar 13 17:14:15 +0000 2017](https://twitter.com/ChristopherA/status/841336616752881664)
 
@@ -392,7 +392,7 @@ Replying to [@Melt_Dem](https://twitter.com/Melt_Dem/status/841359113988771840)
 
 > If we were to redraw the states of the union today by common subcultures, it would likely look like this… [https://mystudentvoices.com/us-social-fragmentation-a0e7586c9180#.34j4a1jki](https://mystudentvoices.com/us-social-fragmentation-a0e7586c9180#.34j4a1jki) 
 > 
-> ![](../../media/842205330989764608-C7AdR6OXAAEgUzc.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/842205330989764608-C7AdR6OXAAEgUzc.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Mar 16 02:46:12 +0000 2017](https://twitter.com/ChristopherA/status/842205330989764608)
 
@@ -408,7 +408,7 @@ Replying to [@kristovatlas](https://twitter.com/kristovatlas/status/842115418487
 
 > A great long read, both practical &amp; philosophical, on happiness and meaningfulness in life. [https://aeon.co/essays/what-is-better-a-happy-life-or-a-meaningful-one](https://aeon.co/essays/what-is-better-a-happy-life-or-a-meaningful-one) 
 > 
-> ![](../../media/842208547186208768-C7AgNB4U4AABqAq.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/842208547186208768-C7AgNB4U4AABqAq.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Mar 16 02:58:59 +0000 2017](https://twitter.com/ChristopherA/status/842208547186208768)
 
@@ -508,7 +508,7 @@ Replying to [@dangillmor](https://twitter.com/dangillmor/status/8427615407217541
 
 > My favorite thing about this article is the allusion to magic circles—we already have daemons in programming. [https://techcrunch.com/2017/03/17/laying-a-trap-for-self-driving-cars/](https://techcrunch.com/2017/03/17/laying-a-trap-for-self-driving-cars/) 
 > 
-> ![](../../media/842850892072210433-C7JoaeXUwAA6cDv.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/842850892072210433-C7JoaeXUwAA6cDv.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri Mar 17 21:31:26 +0000 2017](https://twitter.com/ChristopherA/status/842850892072210433)
 
@@ -516,7 +516,7 @@ Replying to [@dangillmor](https://twitter.com/dangillmor/status/8427615407217541
 
 > RT @trbouma: A #trustframework is the set of #verifiableclaims based on #trustedprocesses - graphic version 
 > 
-> ![](../../media/842851631850909697-C7JJRNPXkAI3JGP.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/842851631850909697-C7JJRNPXkAI3JGP.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri Mar 17 21:34:23 +0000 2017](https://twitter.com/ChristopherA/status/842851631850909697)
 
@@ -524,7 +524,7 @@ Replying to [@dangillmor](https://twitter.com/dangillmor/status/8427615407217541
 
 > Criticism regarding Singapore possibly adopting a single ID per citizen identity system: [http://www.straitstimes.com/opinion/one-digital-id-to-rule-them-all](http://www.straitstimes.com/opinion/one-digital-id-to-rule-them-all) 
 > 
-> ![](../../media/842855629190393856-C7JsuRrU4AATOqo.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/842855629190393856-C7JsuRrU4AATOqo.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri Mar 17 21:50:16 +0000 2017](https://twitter.com/ChristopherA/status/842855629190393856)
 
@@ -565,7 +565,7 @@ Replying to [@dangillmor](https://twitter.com/dangillmor/status/8427615407217541
 
 > RT @ARKblockchain: 1/ 👉 $337 appears to be the pivotal price where #Bitcoin miners start to bleed money. 
 > 
-> ![](../../media/843212121349349376-C7N7HbAXkAA_J9i.png)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/843212121349349376-C7N7HbAXkAA_J9i.png)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sat Mar 18 21:26:50 +0000 2017](https://twitter.com/ChristopherA/status/843212121349349376)
 
@@ -657,7 +657,7 @@ Replying to [@dangillmor](https://twitter.com/dangillmor/status/8427615407217541
 
 > RT @MiradoreLtd: What computer users see in security warning boxes 
 > 
-> ![](../../media/844302886909571072-C7YOSEGWkAAFJWz.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/844302886909571072-C7YOSEGWkAAFJWz.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Mar 21 21:41:09 +0000 2017](https://twitter.com/ChristopherA/status/844302886909571072)
 
@@ -703,7 +703,7 @@ Replying to [@zmanian](https://twitter.com/zmanian/status/844346008725155844)
 
 > This article posits shallow engagement such as Like buttons has hurt discourse. Better when RSS readers dominated. [https://www.theatlantic.com/technology/archive/2017/03/how-the-like-button-ruined-the-internet/519795/](https://www.theatlantic.com/technology/archive/2017/03/how-the-like-button-ruined-the-internet/519795/) 
 > 
-> ![](../../media/844591225189543936-C7iXPN2XwAAtvUC.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/844591225189543936-C7iXPN2XwAAtvUC.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Mar 22 16:46:54 +0000 2017](https://twitter.com/ChristopherA/status/844591225189543936)
 
@@ -742,7 +742,7 @@ Replying to [@zmanian](https://twitter.com/zmanian/status/844346008725155844)
 
 > Commons: one of my favorite patterns from the new Wise Democracy pattern language [http://www.wd-pl.com/patterns/](http://www.wd-pl.com/patterns/) @tomatlee 
 > 
-> ![](../../media/844667060818882562-C7jcNmmVAAEMb2t.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/844667060818882562-C7jcNmmVAAEMb2t.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Mar 22 21:48:15 +0000 2017](https://twitter.com/ChristopherA/status/844667060818882562)
 
@@ -752,7 +752,7 @@ Replying to [@zmanian](https://twitter.com/zmanian/status/844346008725155844)
 
 > Common Ground: a related pattern from the Group Works pattern language [http://groupworksdeck.org/patterns/Common_Ground](http://groupworksdeck.org/patterns/Common_Ground) 
 > 
-> ![](../../media/844740731222671361-C7kfNo-WkAAaOgE.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/844740731222671361-C7kfNo-WkAAaOgE.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Mar 23 02:40:59 +0000 2017](https://twitter.com/ChristopherA/status/844740731222671361)
 
@@ -784,7 +784,7 @@ Replying to [@zmanian](https://twitter.com/zmanian/status/844346008725155844)
 
 > DID (Decentralized IDentifier) Implementors Draft 1.0 from last #RebootingWebOfTrust — join us in Paris to demo! [https://github.com/WebOfTrustInfo/rebooting-the-web-of-trust-fall2016/blob/master/final-documents/did-implementer-draft-10.pdf](https://github.com/WebOfTrustInfo/rebooting-the-web-of-trust-fall2016/blob/master/final-documents/did-implementer-draft-10.pdf) 
 > 
-> ![](../../media/844776642710974464-C7k_3xnVMAIxPdL.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/844776642710974464-C7k_3xnVMAIxPdL.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Mar 23 05:03:41 +0000 2017](https://twitter.com/ChristopherA/status/844776642710974464)
 
@@ -792,7 +792,7 @@ Replying to [@zmanian](https://twitter.com/zmanian/status/844346008725155844)
 
 > RT @bitcoincoreorg: Technology Roadmap - Schnorr Signatures and Signature Aggregation! [https://bitcoincore.org/en/2017/03/23/schnorr-signature-aggregation/](https://bitcoincore.org/en/2017/03/23/schnorr-signature-aggregation/) 
 > 
-> ![](../../media/844931536356978689-C7myOikXQAMknHR.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/844931536356978689-C7myOikXQAMknHR.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Mar 23 15:19:10 +0000 2017](https://twitter.com/ChristopherA/status/844931536356978689)
 
@@ -844,7 +844,7 @@ Replying to [@tomatlee](https://twitter.com/tomatlee/status/844970279503736832)
 
 > Required before successfully selling of an innovative product — Belief, i.e. “I’ll see it when I believe it” [https://hbr.org/2014/07/dont-sell-a-product-sell-a-whole-new-way-of-thinking](https://hbr.org/2014/07/dont-sell-a-product-sell-a-whole-new-way-of-thinking) 
 > 
-> ![](../../media/845029185341046784-C7olj-WVYAAPwbz.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/845029185341046784-C7olj-WVYAAPwbz.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Mar 23 21:47:12 +0000 2017](https://twitter.com/ChristopherA/status/845029185341046784)
 
@@ -882,11 +882,11 @@ Replying to [@Sheldrake, @agropper, @dsearls, @moxie and @bratton](https://twitt
 
 > Some key quotes by @saikatd in @scroll_in on human rights issues with India's Aardhaar digital identity system: [https://scroll.in/article/832592/the-end-of-privacy-aadhaar-is-being-converted-into-the-worlds-biggest-surveillance-engine](https://scroll.in/article/832592/the-end-of-privacy-aadhaar-is-being-converted-into-the-worlds-biggest-surveillance-engine) 
 > 
-> ![](../../media/845406952066760707-C7t9I6TU8AASWJL.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/845406952066760707-C7t9I6TU8AASWJL.jpg)
 > 
-> ![](../../media/845406952066760707-C7t9I6TVAAAD4wS.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/845406952066760707-C7t9I6TVAAAD4wS.jpg)
 > 
-> ![](../../media/845406952066760707-C7t9I6UVUAAmt8W.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/845406952066760707-C7t9I6UVUAAmt8W.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri Mar 24 22:48:18 +0000 2017](https://twitter.com/ChristopherA/status/845406952066760707)
 
@@ -900,7 +900,7 @@ Replying to [@Sheldrake, @agropper, @dsearls, @moxie and @bratton](https://twitt
 
 > Asked for advice today from a young engineer on how to be engaged in a career more meaningful than a corporate path was allowing. My answer: 
 > 
-> ![](../../media/845443570160979969-C7uecVTVQAESmEq.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/845443570160979969-C7uecVTVQAESmEq.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sat Mar 25 01:13:49 +0000 2017](https://twitter.com/ChristopherA/status/845443570160979969)
 
@@ -935,9 +935,9 @@ Replying to [@1cyrilblanc1](https://twitter.com/@1cyrilblanc1/status/84544445202
 
 > RT @_tessr: in honor of the new Warm Springs BART station, here's the original 1961 plan: 
 > 
-> ![](../../media/845794287035940865-C7zW6cbVQAAe7OF.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/845794287035940865-C7zW6cbVQAAe7OF.jpg)
 > 
-> ![](../../media/845794287035940865-C7zW8brU8AAJDxS.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/845794287035940865-C7zW8brU8AAJDxS.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sun Mar 26 00:27:26 +0000 2017](https://twitter.com/ChristopherA/status/845794287035940865)
 
@@ -990,7 +990,7 @@ Replying to [@1cyrilblanc1](https://twitter.com/@1cyrilblanc1/status/84544445202
 
 > Key paragraph in@VladZamfir's article on blockchain failures &amp; how to avoid them is at bottom—stop fearing miners. [https://medium.com/@Vlad_Zamfir/dealing-with-failure-in-cryptocurrency-463475da83e5](https://medium.com/@Vlad_Zamfir/dealing-with-failure-in-cryptocurrency-463475da83e5) 
 > 
-> ![](../../media/846385095489441794-C772wajU8AAsxBm.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/846385095489441794-C772wajU8AAsxBm.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon Mar 27 15:35:06 +0000 2017](https://twitter.com/ChristopherA/status/846385095489441794)
 
@@ -1080,7 +1080,7 @@ Replying to [@1cyrilblanc1](https://twitter.com/@1cyrilblanc1/status/84544445202
 
 > RT @GreenAddress: GreenAddress’ position on contentious forks [http://blog.greenaddress.it/2017/03/27/greenaddress-position-on-contentious-forks](http://blog.greenaddress.it/2017/03/27/greenaddress-position-on-contentious-forks) 
 > 
-> ![](../../media/846911052415561728-C79ZBOKU8AArrXF.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/846911052415561728-C79ZBOKU8AArrXF.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Mar 29 02:25:04 +0000 2017](https://twitter.com/ChristopherA/status/846911052415561728)
 
