--- a/_tweets-md/2017/2017-04-01-tweets.md
+++ b/_tweets-md/2017/2017-04-01-tweets.md
@@ -97,7 +97,7 @@ Replying to [@Blockstream](https://twitter.com/Blockstream/status/84890406433936
 
 > RT @TuurDemeester: Thought this @PerkinsCoieLLP fintech report was worth the read. [https://www.fintechlegalreport.com/2017/03/as-fintech-platforms-grow-up-investment-management-firms-face-the-problems-of-tomorrow/](https://www.fintechlegalreport.com/2017/03/as-fintech-platforms-grow-up-investment-management-firms-face-the-problems-of-tomorrow/) 
 > 
-> ![](../../media/849723439959224325-C8lnGReXcAIIzG3.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/849723439959224325-C8lnGReXcAIIzG3.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Apr 05 20:40:29 +0000 2017](https://twitter.com/ChristopherA/status/849723439959224325)
 
@@ -119,7 +119,7 @@ Replying to [@ckhonson](https://twitter.com/spiderfoods/status/84970985939823411
 
 > Essentially what @ckhonson is asking for is self-sovereign identity. #RebootingWebOfTrust is working on this problem [https://medium.com/@thejohnhenry/mastodon-is-dead-in-the-water-888c10e8abb1](https://medium.com/@thejohnhenry/mastodon-is-dead-in-the-water-888c10e8abb1) 
 > 
-> ![](../../media/849741570085724165-C8rjYgeXgAMHKYH.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/849741570085724165-C8rjYgeXgAMHKYH.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Apr 05 21:52:32 +0000 2017](https://twitter.com/ChristopherA/status/849741570085724165)
 
@@ -177,7 +177,7 @@ Replying to [@ckhonson](https://twitter.com/spiderfoods/status/84970985939823411
 
 > "Identity Protective Cognition" Several years old, but ever so relevant in our increasingly divisive world: [http://www.vox.com/2014/4/6/5556462/brain-dead-how-politics-makes-us-stupid](http://www.vox.com/2014/4/6/5556462/brain-dead-how-politics-makes-us-stupid) 
 > 
-> ![](../../media/850391558574800896-C80qX6XWAAIUnAG.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/850391558574800896-C80qX6XWAAIUnAG.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri Apr 07 16:55:21 +0000 2017](https://twitter.com/ChristopherA/status/850391558574800896)
 
@@ -191,7 +191,7 @@ Replying to [@ckhonson](https://twitter.com/spiderfoods/status/84970985939823411
 
 > RT @SarahJamieLewis: Well this is terrifying. 
 > 
-> ![](../../media/851089467834281984-C8Ob0P2V0AA_QZJ.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/851089467834281984-C8Ob0P2V0AA_QZJ.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sun Apr 09 15:08:36 +0000 2017](https://twitter.com/ChristopherA/status/851089467834281984)
 
@@ -219,7 +219,7 @@ Replying to [@tqbf and @zmanian](https://twitter.com/tqbf/status/850763449818853
 
 > "When fairness and equality clash, people prefer fair inequality over unfair equality." [http://www.nature.com/articles/s41562-017-0082](http://www.nature.com/articles/s41562-017-0082) 
 > 
-> ![](../../media/851109300089040896-C8-_YaOXoAAHLZW.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/851109300089040896-C8-_YaOXoAAHLZW.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sun Apr 09 16:27:24 +0000 2017](https://twitter.com/ChristopherA/status/851109300089040896)
 
@@ -241,7 +241,7 @@ Replying to [@tqbf and @zmanian](https://twitter.com/tqbf/status/850763449818853
 >   
 > Thanks @Excellion for the hat 
 > 
-> ![](../../media/851498485744623616-C9EDtS8XcAIxV9K.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/851498485744623616-C9EDtS8XcAIxV9K.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon Apr 10 18:13:53 +0000 2017](https://twitter.com/ChristopherA/status/851498485744623616)
 
@@ -267,7 +267,7 @@ Replying to [@tqbf and @zmanian](https://twitter.com/tqbf/status/850763449818853
 
 > RT @kenshishido: Satoshi Nakamoto-San is proud of us! @mir_serena @ChristopherA @LukeDashjr @BHBnetwork @bitcoinmi 
 > 
-> ![](../../media/851893990450397184-C9KAiwdWAAAv1rZ.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/851893990450397184-C9KAiwdWAAAv1rZ.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Apr 11 20:25:29 +0000 2017](https://twitter.com/ChristopherA/status/851893990450397184)
 
@@ -347,11 +347,11 @@ Replying to [@tqbf and @zmanian](https://twitter.com/tqbf/status/850763449818853
 
 > Been thinking about the future of digital signatures lately, but the past is relevant—here Emperor Leopold grants rights to Count Salvin. 
 > 
-> ![](../../media/853208425957863424-C9c0OpgXUAAkGar.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/853208425957863424-C9c0OpgXUAAkGar.jpg)
 > 
-> ![](../../media/853208425957863424-C9c0OpxXUAAlFbl.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/853208425957863424-C9c0OpxXUAAlFbl.jpg)
 > 
-> ![](../../media/853208425957863424-C9c0OqKXoAMFfA9.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/853208425957863424-C9c0OqKXoAMFfA9.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sat Apr 15 11:28:35 +0000 2017](https://twitter.com/ChristopherA/status/853208425957863424)
 
@@ -385,7 +385,7 @@ Replying to [@WayneVaughan, @brianchoffman, @petertoddbtc, @chainpnt, @opentimes
 
 > Proof of Collaboration 👏❤️ 
 > 
-> ![](../../media/853294052636336132-C9eCaVyXYAIJaxT.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/853294052636336132-C9eCaVyXYAIJaxT.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sat Apr 15 17:08:50 +0000 2017](https://twitter.com/ChristopherA/status/853294052636336132)
 
@@ -571,9 +571,9 @@ Replying to [@jwildeboer](https://twitter.com/@jwildeboer/status/853356867011186
 
 > I'm glad I took the risk despite the weather report to visit Zermatt (below the Matterhorn). Yesterday on arrival vs this morning: 
 > 
-> ![](../../media/853896571230007297-C9mmZTWXYAAB9DJ.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/853896571230007297-C9mmZTWXYAAB9DJ.jpg)
 > 
-> ![](../../media/853896571230007297-C9mmZT2XsAAfXVX.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/853896571230007297-C9mmZT2XsAAfXVX.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon Apr 17 09:03:01 +0000 2017](https://twitter.com/ChristopherA/status/853896571230007297)
 
@@ -581,7 +581,7 @@ Replying to [@jwildeboer](https://twitter.com/@jwildeboer/status/853356867011186
 
 > Leaving Switzerland for Paris, to prepare for tomorrow's #RebootingWebOfTrust. I'm glad I didn't fly this time: 
 > 
-> ![](../../media/854245620193865728-C9rjyT_VwAA135M.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/854245620193865728-C9rjyT_VwAA135M.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Apr 18 08:10:01 +0000 2017](https://twitter.com/ChristopherA/status/854245620193865728)
 
@@ -589,7 +589,7 @@ Replying to [@jwildeboer](https://twitter.com/@jwildeboer/status/853356867011186
 
 > RT @coindesk: Cryptocurrency Investment Cues From the South Seas Bubble [http://bit.ly/2ppdTtG](http://bit.ly/2ppdTtG) 
 > 
-> ![](../../media/854257116089069568-C9hVRZkU0AE3CbP.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/854257116089069568-C9hVRZkU0AE3CbP.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Apr 18 08:55:42 +0000 2017](https://twitter.com/ChristopherA/status/854257116089069568)
 
@@ -617,7 +617,7 @@ Replying to [@jwildeboer](https://twitter.com/@jwildeboer/status/853356867011186
 
 > People don't like to make decisions, a source of authoritarianism. Algorithmic authoritarian can be worse: [https://shift.newco.co/how-algorithms-and-authoritarianism-created-a-corporate-nightmare-at-united-52346f264a56](https://shift.newco.co/how-algorithms-and-authoritarianism-created-a-corporate-nightmare-at-united-52346f264a56) 
 > 
-> ![](../../media/854296203412070400-C9sR1bgV0AEEgTr.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/854296203412070400-C9sR1bgV0AEEgTr.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Apr 18 11:31:01 +0000 2017](https://twitter.com/ChristopherA/status/854296203412070400)
 
@@ -653,7 +653,7 @@ Replying to [@R3CEV and @iang_fc](https://twitter.com/inside_r3/status/854336308
 
 > "Identity is an edge protocol, and not a nodal protocol." 👍 [https://www.r3cev.com/blog/2017/4/17/identity-is-an-edge-protocol](https://www.r3cev.com/blog/2017/4/17/identity-is-an-edge-protocol) 
 > 
-> ![](../../media/854364603756806145-C9tQAWyUwAEdMkx.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/854364603756806145-C9tQAWyUwAEdMkx.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Apr 18 16:02:49 +0000 2017](https://twitter.com/ChristopherA/status/854364603756806145)
 
@@ -673,7 +673,7 @@ Replying to [@R3CEV and @iang_fc](https://twitter.com/inside_r3/status/854336308
 
 > At #RebootingWebOfTrust, what decentralized self-sovereign identity topics we are working on for the remaining two days: 
 > 
-> ![](../../media/854737341096833025-C9yjEpwVwAAb2mb.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/854737341096833025-C9yjEpwVwAAb2mb.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Apr 19 16:43:57 +0000 2017](https://twitter.com/ChristopherA/status/854737341096833025)
 
@@ -733,7 +733,7 @@ Replying to [@Steve_Lockstep, @iang_fc, @benjaminjwhitby, @dgwbirch, @timpastoor
 
 > How do we grow our #RebootingWebOfTrust community? More Impact? Funding and biz model? More papers? Events? Bridge? … 
 > 
-> ![](../../media/855061900551389184-C93KRD_XUAQIDAt.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/855061900551389184-C93KRD_XUAQIDAt.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Apr 20 14:13:38 +0000 2017](https://twitter.com/ChristopherA/status/855061900551389184)
 
@@ -773,7 +773,7 @@ Replying to [@benjaminjwhitby and @theyblinked](https://twitter.com/benjaminjwhi
 
 > Our 4th #RebootinWebOfTrust in Paris was a great success! My thanks to all involved for your participation &amp; collaboration! Boston Next! 
 > 
-> ![](../../media/855751199836049408-C-A6QnlWAAADnYh.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/855751199836049408-C-A6QnlWAAADnYh.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sat Apr 22 11:52:39 +0000 2017](https://twitter.com/ChristopherA/status/855751199836049408)
 
@@ -795,11 +795,11 @@ Replying to [@martijnbolt and @lykle](https://twitter.com/martijnbolt/status/855
 
 > The Paris #marchforscience on #Earthday processional down the very appropriate Rue Des Écoles (Street of Schools) 
 > 
-> ![](../../media/855781608661626880-C-BYW3XWsAEQekO.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/855781608661626880-C-BYW3XWsAEQekO.jpg)
 > 
-> ![](../../media/855781608661626880-C-BYW4RXsAAV9aG.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/855781608661626880-C-BYW4RXsAAV9aG.jpg)
 > 
-> ![](../../media/855781608661626880-C-BYW3VXYAAVsuU.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/855781608661626880-C-BYW3VXYAAVsuU.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sat Apr 22 13:53:29 +0000 2017](https://twitter.com/ChristopherA/status/855781608661626880)
 
@@ -807,7 +807,7 @@ Replying to [@martijnbolt and @lykle](https://twitter.com/martijnbolt/status/855
 
 > RT @davidmackau: amazing #MarchForScience sign in  Paris (📷 : Getty) 
 > 
-> ![](../../media/855782085142949888-C-BWJFzXcAAZ2BD.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/855782085142949888-C-BWJFzXcAAZ2BD.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sat Apr 22 13:55:23 +0000 2017](https://twitter.com/ChristopherA/status/855782085142949888)
 
@@ -817,13 +817,13 @@ Replying to [@martijnbolt and @lykle](https://twitter.com/martijnbolt/status/855
 
 > More #MarchForScience #Paris photos: 
 > 
-> ![](../../media/855784574219161605-C-BbWn8UQAEDltS.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/855784574219161605-C-BbWn8UQAEDltS.jpg)
 > 
-> ![](../../media/855784574219161605-C-BbWoRV0AA-7TW.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/855784574219161605-C-BbWoRV0AA-7TW.jpg)
 > 
-> ![](../../media/855784574219161605-C-BbWpIUIAEVhR9.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/855784574219161605-C-BbWpIUIAEVhR9.jpg)
 > 
-> ![](../../media/855784574219161605-C-BbWpRUQAAQALQ.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/855784574219161605-C-BbWpRUQAAQALQ.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sat Apr 22 14:05:16 +0000 2017](https://twitter.com/ChristopherA/status/855784574219161605)
 
@@ -831,13 +831,13 @@ Replying to [@martijnbolt and @lykle](https://twitter.com/martijnbolt/status/855
 
 > RT @ChristopherA: More #MarchForScience #Paris photos: 
 > 
-> ![](../../media/855784606804713472-C-BbWn8UQAEDltS.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/855784606804713472-C-BbWn8UQAEDltS.jpg)
 > 
-> ![](../../media/855784606804713472-C-BbWoRV0AA-7TW.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/855784606804713472-C-BbWoRV0AA-7TW.jpg)
 > 
-> ![](../../media/855784606804713472-C-BbWpIUIAEVhR9.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/855784606804713472-C-BbWpIUIAEVhR9.jpg)
 > 
-> ![](../../media/855784606804713472-C-BbWpRUQAAQALQ.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/855784606804713472-C-BbWpRUQAAQALQ.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sat Apr 22 14:05:24 +0000 2017](https://twitter.com/ChristopherA/status/855784606804713472)
 
@@ -1158,7 +1158,7 @@ Replying to [@Steve_Lockstep](https://twitter.com/Steve_Lockstep/status/85663900
 
 > RT @Conferences_PIC: Sidechains presentation @ChristopherA @Blockstream #blockchain 
 > 
-> ![](../../media/856817478617444354-C-QE08cWsAA2mfj.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/856817478617444354-C-QE08cWsAA2mfj.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Apr 25 10:29:40 +0000 2017](https://twitter.com/ChristopherA/status/856817478617444354)
 
@@ -1192,7 +1192,7 @@ Replying to [@koeppelmann](https://twitter.com/koeppelmann/status/85688294476975
 
 > RT @DaytradeJeffrey: I am sorry if you bought gnosis $gno $btc 
 > 
-> ![](../../media/856913532318871554-C-NS6HSWAAAJHZU.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/856913532318871554-C-NS6HSWAAAJHZU.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Apr 25 16:51:21 +0000 2017](https://twitter.com/ChristopherA/status/856913532318871554)
 
@@ -1406,7 +1406,7 @@ Replying to [@SmilieKylie](https://twitter.com/SmilieKylie/status/85705848983052
 
 > A good article by @lykle on "surveillance capitalism", its origin &amp; possible effects: [https://twitter.com/lykle/status/857051776020877313](https://twitter.com/lykle/status/857051776020877313) 
 > 
-> ![](../../media/857114052039987204-C-UUpUDXUAA4aUF.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/857114052039987204-C-UUpUDXUAA4aUF.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Apr 26 06:08:09 +0000 2017](https://twitter.com/ChristopherA/status/857114052039987204)
 
@@ -1498,7 +1498,7 @@ Replying to [@marshallk](https://twitter.com/marshallk/status/857062699225812992
 
 > I love the living buildings in Milan. 
 > 
-> ![](../../media/857250803152760834-C-WRDWTWAAEka2R.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/857250803152760834-C-WRDWTWAAEka2R.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Apr 26 15:11:33 +0000 2017](https://twitter.com/ChristopherA/status/857250803152760834)
 
@@ -1508,7 +1508,7 @@ Replying to [@csuwildcat, @jaredhanson, @windley, @Steve_Lockstep, @alfiedotwtf,
 
 > "Sovereignty is about relationships and boundaries" — @windley [http://www.windley.com/archives/2016/10/on_sovereignty.shtml](http://www.windley.com/archives/2016/10/on_sovereignty.shtml) 
 > 
-> ![](../../media/857299258885754881-C-W9GOOUQAANNBN.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/857299258885754881-C-W9GOOUQAANNBN.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Apr 26 18:24:05 +0000 2017](https://twitter.com/ChristopherA/status/857299258885754881)
 
@@ -1536,9 +1536,9 @@ Replying to [@Steve_Lockstep and @timpastoor](https://twitter.com/Steve_Lockstep
 
 > Review of a number of OpenID Connect implementations for common attacks, due to not understanding protocol specs and/or too much complexity. 
 > 
-> ![](../../media/857519157126062080-C-aFHyfWsAAmgT8.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/857519157126062080-C-aFHyfWsAAmgT8.jpg)
 > 
-> ![](../../media/857519157126062080-C-aFHymWAAAxswu.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/857519157126062080-C-aFHymWAAAxswu.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Apr 27 08:57:53 +0000 2017](https://twitter.com/ChristopherA/status/857519157126062080)
 
@@ -1552,7 +1552,7 @@ Replying to [@Steve_Lockstep and @timpastoor](https://twitter.com/Steve_Lockstep
 
 > Ashby's Law of Requisite Variety—"A system that’s governing another system has to have at least the variety of the system its governing" or… 
 > 
-> ![](../../media/857537964984987649-C-aWOyrWsAEUyW4.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/857537964984987649-C-aWOyrWsAEUyW4.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Apr 27 10:12:37 +0000 2017](https://twitter.com/ChristopherA/status/857537964984987649)
 
@@ -1676,7 +1676,7 @@ Replying to [@timpastoor](https://twitter.com/timpastoor/status/8579540102293504
 
 > Idea! Create a legal JOBS Act Title III *debt* funding—give investors tokens for debt &amp; full transparency of corp. [https://m.forbes.com/sites/kauffman/2016/09/20/the-potential-and-perils-of-title-iii-crowdfunding/](https://m.forbes.com/sites/kauffman/2016/09/20/the-potential-and-perils-of-title-iii-crowdfunding/) 
 > 
-> ![](../../media/857980458457550849-C-goq_AXsAAZW_e.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/857980458457550849-C-goq_AXsAAZW_e.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri Apr 28 15:30:56 +0000 2017](https://twitter.com/ChristopherA/status/857980458457550849)
 
@@ -1684,7 +1684,7 @@ Replying to [@timpastoor](https://twitter.com/timpastoor/status/8579540102293504
 
 > I'm a big supporter of @CreativeCommons. Changing the world? When not source code use CC-BY or BY-SA. [https://creativecommons.org/2017/04/28/state-of-the-commons-2016/](https://creativecommons.org/2017/04/28/state-of-the-commons-2016/) 
 > 
-> ![](../../media/857982929301012482-C-gq66-XYAAcIGV.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/857982929301012482-C-gq66-XYAAcIGV.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri Apr 28 15:40:45 +0000 2017](https://twitter.com/ChristopherA/status/857982929301012482)
 
