--- a/_tweets-md/2017/2017-05-01-tweets.md
+++ b/_tweets-md/2017/2017-05-01-tweets.md
@@ -58,17 +58,17 @@ Replying to [@Lauren_Southern and @kristovatlas](https://twitter.com/Lauren_Sout
 
 > Who says you can't buy coffee with Bitcoin? Of course, it is easier that I'm across the street from Ledger. Soon via Lighting Network! 
 > 
-> ![](../../media/859680735841726464-C-4zBh1XkAEkZl4.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/859680735841726464-C-4zBh1XkAEkZl4.jpg)
 > 
-> ![](../../media/859680735841726464-C-4zBh1XcAAGsWf.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/859680735841726464-C-4zBh1XcAAGsWf.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed May 03 08:07:14 +0000 2017](https://twitter.com/ChristopherA/status/859680735841726464)
 
 ----
 
-> RT @windley: Lots of interest in decentralized identifiers using distributed ledgers at #iiw 
-> 
-> ![](../../media/859681302592835585-C-2HFtJVwAA1iOE.jpg)
+> RT @windley: Lots of interest in decentralized identifiers using distributed ledgers at #iiw
+>
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/859681302592835585-C-2HFtJVwAA1iOE.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed May 03 08:09:29 +0000 2017](https://twitter.com/ChristopherA/status/859681302592835585)
 
@@ -84,11 +84,11 @@ Replying to [@a_ferron](https://twitter.com/a_ferron/status/859683221612761088)
 
 > Some formal proofs at Eurocrypt that Bitcoin's mining rate is about right. At 10m &amp; given max network delay, 49.57% honesty required. 
 > 
-> ![](../../media/859689897044660224-C-47WSaXYAAqaOX.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/859689897044660224-C-47WSaXYAAqaOX.jpg)
 > 
-> ![](../../media/859689897044660224-C-47WNJWsAA2spj.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/859689897044660224-C-47WNJWsAA2spj.jpg)
 > 
-> ![](../../media/859689897044660224-C-47WNIXUAAzfSC.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/859689897044660224-C-47WNIXUAAzfSC.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed May 03 08:43:38 +0000 2017](https://twitter.com/ChristopherA/status/859689897044660224)
 
@@ -136,7 +136,7 @@ Replying to [@petertoddbtc](https://twitter.com/peterktodd/status/85982119718129
 
 > This means the cryptography community has successfully protected the 5th Amendment, other civil &amp; human rights of 46% of US cellphone users! 
 > 
-> ![](../../media/859834736382005248-C-6_Hn7XkAARuEI.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/859834736382005248-C-6_Hn7XkAARuEI.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed May 03 18:19:10 +0000 2017](https://twitter.com/ChristopherA/status/859834736382005248)
 
@@ -151,7 +151,7 @@ Replying to [@petertoddbtc](https://twitter.com/peterktodd/status/85982119718129
 
 > RT @windley: Full house for @drummondreed's talk on decentralized identifiers (DIDs) at #iiw 
 > 
-> ![](../../media/859838155599605760-C-6uhU5VwAAZ7gx.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/859838155599605760-C-6uhU5VwAAZ7gx.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed May 03 18:32:45 +0000 2017](https://twitter.com/ChristopherA/status/859838155599605760)
 
@@ -190,9 +190,9 @@ Replying to [@petertoddbtc](https://twitter.com/peterktodd/status/85982119718129
 
 > There is something just appropriately scaled about the Parisian passage—a covered alley between two buildings that are the original malls. 
 > 
-> ![](../../media/860346344275402753-C_CQHNOVYAE-OBQ.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/860346344275402753-C_CQHNOVYAE-OBQ.jpg)
 > 
-> ![](../../media/860346344275402753-C_CQHNOVoAAaaEY.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/860346344275402753-C_CQHNOVoAAaaEY.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri May 05 04:12:07 +0000 2017](https://twitter.com/ChristopherA/status/860346344275402753)
 
@@ -206,7 +206,7 @@ Replying to [@petertoddbtc](https://twitter.com/peterktodd/status/85982119718129
 
 > RT @mgd: A Self-Sovereign #Identity Architecture - ID2020 Design Workshop [http://buff.ly/2qwrwKZ](http://buff.ly/2qwrwKZ) 
 > 
-> ![](../../media/860576989454794752-C_BlndeXgAATuLc.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/860576989454794752-C_BlndeXgAATuLc.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri May 05 19:28:37 +0000 2017](https://twitter.com/ChristopherA/status/860576989454794752)
 
@@ -227,7 +227,7 @@ Replying to [@petertoddbtc](https://twitter.com/peterktodd/status/85982119718129
 
 > Interesting 2014 law article on the legality of a zero-member LLC managed by an algorithm. [http://scholarlycommons.law.northwestern.edu/cgi/viewcontent.cgi?article=1009](http://scholarlycommons.law.northwestern.edu/cgi/viewcontent.cgi?article=1009) 
 > 
-> ![](../../media/860607475464024064-C_F971dVoAABJ0q.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/860607475464024064-C_F971dVoAABJ0q.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri May 05 21:29:46 +0000 2017](https://twitter.com/ChristopherA/status/860607475464024064)
 
@@ -432,7 +432,7 @@ Replying to [@cmort, @NishantK, @Steve_Lockstep and @BlockChainSmith](https://tw
 
 > RT @antony_btc: A gentle introduction to self-sovereign identity [http://bitsonblocks.net/2017/05/17/a-gentle-introduction-to-self-sovereign-identity/](http://bitsonblocks.net/2017/05/17/a-gentle-introduction-to-self-sovereign-identity/) 
 > 
-> ![](../../media/865076546314227712-C_-NQXXUMAUmXcD.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/865076546314227712-C_-NQXXUMAUmXcD.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu May 18 05:28:15 +0000 2017](https://twitter.com/ChristopherA/status/865076546314227712)
 
@@ -525,7 +525,7 @@ Replying to [@TuurDemeester](https://twitter.com/TuurDemeester/status/8660156730
 
 > RT @TuurDemeester: @ChristopherA Screenshot of the synopsis: 
 > 
-> ![](../../media/866016296466391040-DAS0orUUMAEJ_nq.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/866016296466391040-DAS0orUUMAEJ_nq.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sat May 20 19:42:29 +0000 2017](https://twitter.com/ChristopherA/status/866016296466391040)
 
@@ -613,7 +613,7 @@ Replying to [@Steve_Lockstep, @trbouma, @EmLindley, @Microsoft and @SovrinID](ht
 
 > RT @giacomozucco: Blockstream#AMA with @adam3us, @Excellion and Andrew Poelstra! 
 > 
-> ![](../../media/866833930590208000-DAeOKk_WsAEX5Mp.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/866833930590208000-DAeOKk_WsAEX5Mp.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue May 23 01:51:28 +0000 2017](https://twitter.com/ChristopherA/status/866833930590208000)
 
@@ -695,7 +695,7 @@ Replying to [@veorq](https://twitter.com/veorq/status/867383040447741953)
 
 > RT @ponli137: Some thoughts on why I belive in #Bitcoin over #Ethereum 
 > 
-> ![](../../media/868514566572879872-DA0YDX4XcAAAZfE.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/868514566572879872-DA0YDX4XcAAAZfE.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sat May 27 17:09:43 +0000 2017](https://twitter.com/ChristopherA/status/868514566572879872)
 
@@ -709,7 +709,7 @@ Replying to [@veorq](https://twitter.com/veorq/status/867383040447741953)
 
 > RT @qrs: Why Johnny Can't Encrypt, 2017 edition. [https://www.ieee-security.org/TC/SP2017/papers/84.pdf](https://www.ieee-security.org/TC/SP2017/papers/84.pdf) 
 > 
-> ![](../../media/868515541710811136-DAwnXF6XcAAx8tJ.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/868515541710811136-DAwnXF6XcAAx8tJ.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sat May 27 17:13:36 +0000 2017](https://twitter.com/ChristopherA/status/868515541710811136)
 
@@ -819,7 +819,7 @@ Replying to [@IdentityiPseudo and @pwuille](https://twitter.com/IdentityiPseudo/
 
 > RT @durumcrustulum: // @hdevalence 
 > 
-> ![](../../media/869730857887477760-DBGqTd_XkAUv8Wz.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/869730857887477760-DBGqTd_XkAUv8Wz.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed May 31 01:42:49 +0000 2017](https://twitter.com/ChristopherA/status/869730857887477760)
 
