--- a/_tweets-md/2017/2017-06-01-tweets.md
+++ b/_tweets-md/2017/2017-06-01-tweets.md
@@ -6,7 +6,7 @@ time:  23:59:59 +0000
 
 > RT @kyletorpey: “How Etheroll and other Dapps will kill Ethereum” — Yo Banjo [https://medium.com/@yobanjo/how-etheroll-and-other-dapps-will-kill-ethereum-e973d8e1c465#---290-387](https://medium.com/@yobanjo/how-etheroll-and-other-dapps-will-kill-ethereum-e973d8e1c465#---290-387) 
 > 
-> ![](../../media/870186306646589440-DBMqG3vXoAQ7PIJ.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/870186306646589440-DBMqG3vXoAQ7PIJ.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Jun 01 07:52:37 +0000 2017](https://twitter.com/ChristopherA/status/870186306646589440)
 
@@ -58,7 +58,7 @@ Replying to [@kryptokidz_ and @matthew_d_green](https://twitter.com/kryptokidz_/
 
 > RT @TuurDemeester: Also this: 
 > 
-> ![](../../media/870674082043281410-C7dlckpVsAE9nfQ.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/870674082043281410-C7dlckpVsAE9nfQ.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri Jun 02 16:10:52 +0000 2017](https://twitter.com/ChristopherA/status/870674082043281410)
 
@@ -140,7 +140,7 @@ Replying to [@DarioTepoTec](https://twitter.com/DarioUTXO/status/872461960641744
 
 > RT @palleylaw: "Security" (15 U.S.C. § 77b(a)(1)). 
 > 
-> ![](../../media/872966892792594432-DB0Z1zXXsAAjXb1.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/872966892792594432-DB0Z1zXXsAAjXb1.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri Jun 09 00:01:40 +0000 2017](https://twitter.com/ChristopherA/status/872966892792594432)
 
@@ -373,7 +373,7 @@ Replying to [@kevinakwok and @KevinSimler](https://twitter.com/kevinakwok/status
 
 > Dropped by "Token Sales for Entrepreneurs" in SF this evening. Notable on signin list before me was someone from SEC [https://tokensession.splashthat.com/](https://tokensession.splashthat.com/) 
 > 
-> ![](../../media/875168476733644800-DCU5FhbVYAA3xHR.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/875168476733644800-DCU5FhbVYAA3xHR.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Jun 15 01:49:59 +0000 2017](https://twitter.com/ChristopherA/status/875168476733644800)
 
@@ -397,9 +397,9 @@ Replying to [@bryanomalley and @reneritchie](https://twitter.com/bryanomalley/st
 
 > Advice from lawyer Lee A. Schneider at Token Sales for Entrepreneurs meeting in SF "Key thing to remember is — don't commit fraud!" 
 > 
-> ![](../../media/875171924665548801-DCU8OL8VYAAntYn.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/875171924665548801-DCU8OL8VYAAntYn.jpg)
 > 
-> ![](../../media/875171924665548801-DCU8OL8UMAAlCHF.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/875171924665548801-DCU8OL8UMAAlCHF.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Jun 15 02:03:41 +0000 2017](https://twitter.com/ChristopherA/status/875171924665548801)
 
@@ -443,7 +443,7 @@ Replying to [@bryanomalley and @reneritchie](https://twitter.com/bryanomalley/st
 
 > Advice from Polychain Capital's @rzurrer "Don't don't do ICOs solely for rent seeking". His firm does not invest in firms, only tokens. 
 > 
-> ![](../../media/875178062970630144-DCVBzV7VoAAnDrm.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/875178062970630144-DCVBzV7VoAAnDrm.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Jun 15 02:28:04 +0000 2017](https://twitter.com/ChristopherA/status/875178062970630144)
 
@@ -573,7 +573,7 @@ Replying to [@Stavros, @juanbenet and @davewiner](https://twitter.com/Stavros/st
 
 > It is almost impossible to do a cryptographic smart contract with EVM. Thus my investigations w/ more constraints: [https://github.com/WebOfTrustInfo/ID2020DesignWorkshop/blob/master/final-documents/smarter-signatures.pdf](https://github.com/WebOfTrustInfo/ID2020DesignWorkshop/blob/master/final-documents/smarter-signatures.pdf) 
 > 
-> ![](../../media/875235912312954880-DCV2TLkVoAMuIN9.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/875235912312954880-DCV2TLkVoAMuIN9.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Jun 15 06:17:57 +0000 2017](https://twitter.com/ChristopherA/status/875235912312954880)
 
@@ -681,7 +681,7 @@ Replying to [@byrongibson and @rzurrer](https://twitter.com/byrongibson/status/8
 
 > Like The DAO, even if the code works, the smart contract won't deliver the results its makers promised. [http://hackingdistributed.com/2017/06/19/bancor-is-flawed/](http://hackingdistributed.com/2017/06/19/bancor-is-flawed/) @el33th4xor 
 > 
-> ![](../../media/876844256127705090-DCstM40V0AAC7kh.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/876844256127705090-DCstM40V0AAC7kh.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon Jun 19 16:48:56 +0000 2017](https://twitter.com/ChristopherA/status/876844256127705090)
 
@@ -689,7 +689,7 @@ Replying to [@byrongibson and @rzurrer](https://twitter.com/byrongibson/status/8
 
 > RT @laurencehaslop: #id2020 vaccinations in Malawi heavily outweigh identity registrations. This is crazy! 
 > 
-> ![](../../media/876858733082533888-DCsH30jWsAA95nm.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/876858733082533888-DCsH30jWsAA95nm.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon Jun 19 17:46:27 +0000 2017](https://twitter.com/ChristopherA/status/876858733082533888)
 
@@ -796,7 +796,7 @@ Replying to [@trbouma](https://twitter.com/trbouma/status/876867380571406337)
 
 > RT @iang_fc: @NZN @hillbrad @windley @dsearls @idworkshop this bit we don’t grok yet 
 > 
-> ![](../../media/877242220503379968-DCyWBeeXYAI34Ry.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/877242220503379968-DCyWBeeXYAI34Ry.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Jun 20 19:10:18 +0000 2017](https://twitter.com/ChristopherA/status/877242220503379968)
 
@@ -834,7 +834,7 @@ Replying to [@trbouma](https://twitter.com/trbouma/status/876867380571406337)
 
 > RT @vgr: Better stock photos for crypto articles #1, a ledger 
 > 
-> ![](../../media/877551585626173440-DCzzgS1VoAIE0hm.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/877551585626173440-DCzzgS1VoAIE0hm.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Jun 21 15:39:36 +0000 2017](https://twitter.com/ChristopherA/status/877551585626173440)
 
@@ -842,7 +842,7 @@ Replying to [@trbouma](https://twitter.com/trbouma/status/876867380571406337)
 
 > RT @vgr: Better stock photos for crypto articles #2, a pile of keys 
 > 
-> ![](../../media/877551605230391296-DCzzzjSUwAA3KI0.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/877551605230391296-DCzzzjSUwAA3KI0.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Jun 21 15:39:41 +0000 2017](https://twitter.com/ChristopherA/status/877551605230391296)
 
@@ -850,7 +850,7 @@ Replying to [@trbouma](https://twitter.com/trbouma/status/876867380571406337)
 
 > RT @vgr: Better stock photos for crypto articles #3 a chain of locks 
 > 
-> ![](../../media/877551622125109248-DCz0SNhVoAAuyR8.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/877551622125109248-DCz0SNhVoAAuyR8.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Jun 21 15:39:45 +0000 2017](https://twitter.com/ChristopherA/status/877551622125109248)
 
@@ -858,7 +858,7 @@ Replying to [@trbouma](https://twitter.com/trbouma/status/876867380571406337)
 
 > RT @vgr: Better stock photos for crypto articles #4 a row of mailboxes 
 > 
-> ![](../../media/877551638495379456-DCz0vrFUAAAhErk.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/877551638495379456-DCz0vrFUAAAhErk.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Jun 21 15:39:49 +0000 2017](https://twitter.com/ChristopherA/status/877551638495379456)
 
@@ -881,7 +881,7 @@ Replying to [@kevinakwok and @vgr](https://twitter.com/kevinakwok/status/8775527
 > Long queue to outside of Digital Garage in SF for people on wait list for "ICOs: The Tech and Legal Angles" Meetup   
 > [http://meetu.ps/e/CVlfF/4J0k8/a](http://meetu.ps/e/CVlfF/4J0k8/a) 
 > 
-> ![](../../media/877707385753686017-DC4-NRxU0AA5Hi9.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/877707385753686017-DC4-NRxU0AA5Hi9.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Jun 22 01:58:42 +0000 2017](https://twitter.com/ChristopherA/status/877707385753686017)
 
@@ -922,7 +922,7 @@ Replying to [@kevinakwok and @vgr](https://twitter.com/kevinakwok/status/8775527
 > RT @NickSzabo4: Your question: is my ICO legal?  
 > Your lawyer's answer: 
 > 
-> ![](../../media/877720093664321541-DC4bfXHWsAA0el-.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/877720093664321541-DC4bfXHWsAA0el-.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Jun 22 02:49:12 +0000 2017](https://twitter.com/ChristopherA/status/877720093664321541)
 
@@ -962,7 +962,7 @@ Replying to [@NTmoney](https://twitter.com/NTmoney/status/877162045594112002)
 
 > RT @TuurDemeester: Great point by @ArthurB: "Post ICO pivoting is extremely hard due to nature of the tech". 
 > 
-> <video controls><source src="../../media/877729137942601728-hWDLlFwUyuVyJdep.mp4">Your browser does not support the video tag.</video>
+> <video controls><source src="{{ site.url }}{{ site.baseurl }}/assets/images/media/877729137942601728-hWDLlFwUyuVyJdep.mp4">Your browser does not support the video tag.</video>
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Jun 22 03:25:08 +0000 2017](https://twitter.com/ChristopherA/status/877729137942601728)
 
@@ -1048,7 +1048,7 @@ Replying to [@1cyrilblanc1](https://twitter.com/@1cyrilblanc1/status/87777090293
 
 > A commons is not a public good nor public property. Read principle 1a &amp; 2b. No public goods mentioned. 
 > 
-> ![](../../media/877771814469984256-DC54z30VwAA3DqB.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/877771814469984256-DC54z30VwAA3DqB.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Jun 22 06:14:43 +0000 2017](https://twitter.com/ChristopherA/status/877771814469984256)
 
@@ -1387,7 +1387,7 @@ Replying to [@triptananda, @exiledsurfer, @janoc200, @JoeAndrieu, @windley, @ken
 
 > RT @AWeaverWrites: Lindy Hemming gave them a metal breast plate on the left side. WARRIORS. 
 > 
-> ![](../../media/879085242681761792-DDK9ROoW0AAoMTr.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/879085242681761792-DDK9ROoW0AAoMTr.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sun Jun 25 21:13:49 +0000 2017](https://twitter.com/ChristopherA/status/879085242681761792)
 
@@ -1463,11 +1463,11 @@ Replying to [@NSmolenski, @culanth and @npseaver](https://twitter.com/Christophe
 
 > I was producer, and we won origins award for Best RPG Supplement of the Yearj. Here are some Elder Thing language samples: 
 > 
-> ![](../../media/879837656443531265-DDXPrkbUQAArzki.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/879837656443531265-DDXPrkbUQAArzki.jpg)
 > 
-> ![](../../media/879837656443531265-DDXPrkcUwAI6JFS.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/879837656443531265-DDXPrkcUwAI6JFS.jpg)
 > 
-> ![](../../media/879837656443531265-DDXPrkaUAAEfB2w.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/879837656443531265-DDXPrkaUAAEfB2w.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Jun 27 23:03:38 +0000 2017](https://twitter.com/ChristopherA/status/879837656443531265)
 
@@ -1475,7 +1475,7 @@ Replying to [@NSmolenski, @culanth and @npseaver](https://twitter.com/Christophe
 
 > RT @redmerhuizinga: Here's @NickSzabo4 's easy to read tweetchain. 
 > 
-> ![](../../media/879838091363598337-DDRjhDPXoAAwP5C.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/879838091363598337-DDRjhDPXoAAwP5C.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Jun 27 23:05:22 +0000 2017](https://twitter.com/ChristopherA/status/879838091363598337)
 
@@ -1655,9 +1655,9 @@ Replying to [@kevinakwok](https://twitter.com/kevinakwok/status/8808863168623902
 
 > Still seeking publisher for series of books analyzing the art &amp; design of cooperation, written w/@Appelcline. First book on games complete! 
 > 
-> ![](../../media/880891113900449792-DDmNzB6U0AAmxGN.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/880891113900449792-DDmNzB6U0AAmxGN.jpg)
 > 
-> ![](../../media/880891113900449792-DDmNzB7VwAAot64.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/880891113900449792-DDmNzB7VwAAot64.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri Jun 30 20:49:42 +0000 2017](https://twitter.com/ChristopherA/status/880891113900449792)
 
