--- a/_tweets-md/2017/2017-07-01-tweets.md
+++ b/_tweets-md/2017/2017-07-01-tweets.md
@@ -98,9 +98,9 @@ Replying to [@csuwildcat, @zooko and @dckc](https://twitter.com/csuwildcat/statu
 
 > As we celebrate this July 4th, the first under Trump, I ponder "Privacy for the weak, transparency for the powerful” [http://limn.it/survival-of-the-cryptic/](http://limn.it/survival-of-the-cryptic/) 
 > 
-> ![](../../media/882319312517701632-DD6gvB-UMAE-PoK.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/882319312517701632-DD6gvB-UMAE-PoK.jpg)
 > 
-> ![](../../media/882319312517701632-DD6gvCAVoAADTVq.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/882319312517701632-DD6gvCAVoAADTVq.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Jul 04 19:24:51 +0000 2017](https://twitter.com/ChristopherA/status/882319312517701632)
 
@@ -166,7 +166,7 @@ Replying to [@awrigh01](https://twitter.com/awrigh01/status/882626221867249664)
 
 > RT @ChristopherA: I'm disappointed in the corruption of the term "Smart Contracts"… 
 > 
-> ![](../../media/883816688432455680-CezkVHZWAAE-zTz.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/883816688432455680-CezkVHZWAAE-zTz.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sat Jul 08 22:34:53 +0000 2017](https://twitter.com/ChristopherA/status/883816688432455680)
 
@@ -273,7 +273,7 @@ Replying to [@DanielSolis and @ShannaGermain](https://twitter.com/DanielSolis/st
 
 > I started on Twitter on 1/5/2007, first 10 follows: @jeffpulver @t  @burtonator @kevinmarks @amyjokim @zephoria @ev @joi @kwerb @dweinberger 
 > 
-> ![](../../media/883872730604380161-DEQlj4mVYAApdp_.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/883872730604380161-DEQlj4mVYAApdp_.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sun Jul 09 02:17:35 +0000 2017](https://twitter.com/ChristopherA/status/883872730604380161)
 
@@ -337,7 +337,7 @@ Replying to [@ummjackson, @etscrivner and @TuurDemeester](https://twitter.com/Ch
 
 > Here is my shorter poster talk image from Euro Security &amp; Privacy conference last May. Since then 2 more predicate smart signature proposals 
 > 
-> ![](../../media/883889511603642368-DEQ0ZiyUQAMeO_V.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/883889511603642368-DEQ0ZiyUQAMeO_V.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sun Jul 09 03:24:16 +0000 2017](https://twitter.com/ChristopherA/status/883889511603642368)
 
@@ -571,7 +571,7 @@ Replying to [@dstadulis, @tdryja and @petertoddbtc](https://twitter.com/dstaduli
 > RT @fahmyeu: Lol! Just found this Gem in a FB post:  
 > #Bitcoin #Mining 
 > 
-> ![](../../media/884855861952118784-DEd7v-YXcAQPQPh.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/884855861952118784-DEd7v-YXcAQPQPh.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Jul 11 19:24:11 +0000 2017](https://twitter.com/ChristopherA/status/884855861952118784)
 
@@ -617,11 +617,11 @@ Replying to [@dstadulis, @tdryja and @petertoddbtc](https://twitter.com/dstaduli
 
 > RT @lopp: Good job, anonymous sign guy. May many BTC rain down upon you. 
 > 
-> ![](../../media/885598386413486080-DEjopE7XgAMU-RN.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/885598386413486080-DEjopE7XgAMU-RN.jpg)
 > 
-> ![](../../media/885598386413486080-DEjopyGXUAAmrLC.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/885598386413486080-DEjopyGXUAAmrLC.jpg)
 > 
-> ![](../../media/885598386413486080-DEjoqnkWsAILmcj.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/885598386413486080-DEjoqnkWsAILmcj.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Jul 13 20:34:43 +0000 2017](https://twitter.com/ChristopherA/status/885598386413486080)
 
@@ -758,9 +758,9 @@ Replying to [@FomoCoinProject and @cryptospacesuit](https://twitter.com/FomoCoin
 
 > Some thoughts on ethical principles of persuasion &amp; influence from my course Using the Social Web for Social Change: [https://www.slideshare.net/ChristopherA/tactics-of-persuasion-influence-bgiedu](https://www.slideshare.net/ChristopherA/tactics-of-persuasion-influence-bgiedu) 
 > 
-> ![](../../media/885639203685408771-DEpsDnqVwAAJGJP.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/885639203685408771-DEpsDnqVwAAJGJP.jpg)
 > 
-> ![](../../media/885639203685408771-DEpsDkhUIAEYF7w.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/885639203685408771-DEpsDkhUIAEYF7w.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Jul 13 23:16:55 +0000 2017](https://twitter.com/ChristopherA/status/885639203685408771)
 
@@ -784,7 +784,7 @@ Replying to [@taoeffect](https://twitter.com/taoeffect/status/885639487228858368
 
 > RT @NickSzabo4: What happens when the managers and investors ignore the engineers and scientists #Bitcoin 
 > 
-> ![](../../media/885640587659034624-CMzjdI8UEAEAuo-.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/885640587659034624-CMzjdI8UEAEAuo-.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Jul 13 23:22:25 +0000 2017](https://twitter.com/ChristopherA/status/885640587659034624)
 
@@ -792,7 +792,7 @@ Replying to [@taoeffect](https://twitter.com/taoeffect/status/885639487228858368
 
 > RT @jakevdp: "Documentation? No, just read the code... it's all pretty straightforward." 
 > 
-> <video controls><source src="../../media/885640783319019522-C8Qz7gLUIAERVRn.mp4">Your browser does not support the video tag.</video>
+> <video controls><source src="{{ site.url }}{{ site.baseurl }}/assets/images/media/885640783319019522-C8Qz7gLUIAERVRn.mp4">Your browser does not support the video tag.</video>
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Jul 13 23:23:11 +0000 2017](https://twitter.com/ChristopherA/status/885640783319019522)
 
@@ -998,7 +998,7 @@ Replying to [@JTremback](https://twitter.com/JTremback/status/887360844782120960
 
 > "Market manipulation can occur during the lag…encoding in a block…this facilitates sniping…it enables frontrunning." The solution: CT/CA. 
 > 
-> ![](../../media/887401904183025664-DFCvU4eVwAA-GgJ.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/887401904183025664-DFCvU4eVwAA-GgJ.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Jul 18 20:01:15 +0000 2017](https://twitter.com/ChristopherA/status/887401904183025664)
 
@@ -1084,7 +1084,7 @@ Replying to [@JoeAndrieu, @NSmolenski, @zephoria and @KadijaFerryman](https://tw
 
 > Even if only half right, major disruption on its way: “Carmageddon is Coming” by @angushervey [https://medium.com/future-crunch/carmageddon-is-coming-899c0f05a2a?source=twitterShare-63ba9be92e8f-1500530431](https://medium.com/future-crunch/carmageddon-is-coming-899c0f05a2a?source=twitterShare-63ba9be92e8f-1500530431) 
 > 
-> ![](../../media/887915313106264064-DFKCRVKVwAAMl_r.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/887915313106264064-DFKCRVKVwAAMl_r.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Jul 20 06:01:21 +0000 2017](https://twitter.com/ChristopherA/status/887915313106264064)
 
@@ -1274,7 +1274,7 @@ Replying to [@aniltj, @lightcoin, @katrynadow and @trbouma](https://twitter.com/
 
 > Instead I'm hoping for people to get involved in #SmartSignatures [https://github.com/WebOfTrustInfo/ID2020DesignWorkshop/blob/master/final-documents/smarter-signatures.pdf](https://github.com/WebOfTrustInfo/ID2020DesignWorkshop/blob/master/final-documents/smarter-signatures.pdf) [https://medium.freecodecamp.org/a-hacker-stole-31m-of-ether-how-it-happened-and-what-it-means-for-ethereum-9e5dc29e33ce?source=twitterShare-63ba9be92e8f-1500791111](https://medium.freecodecamp.org/a-hacker-stole-31m-of-ether-how-it-happened-and-what-it-means-for-ethereum-9e5dc29e33ce?source=twitterShare-63ba9be92e8f-1500791111) 
 > 
-> ![](../../media/889009710870913024-DFZlnq9VoAAo2Um.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/889009710870913024-DFZlnq9VoAAo2Um.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sun Jul 23 06:30:06 +0000 2017](https://twitter.com/ChristopherA/status/889009710870913024)
 
@@ -1314,7 +1314,7 @@ Replying to [@stevecheckoway and @random_walker](https://twitter.com/stevechecko
 
 > RT @sehnaoui: Dexterity skills: +9000. 
 > 
-> <video controls><source src="../../media/889147613445890048-rOFFHXzTHLVE5YBK.mp4">Your browser does not support the video tag.</video>
+> <video controls><source src="{{ site.url }}{{ site.baseurl }}/assets/images/media/889147613445890048-rOFFHXzTHLVE5YBK.mp4">Your browser does not support the video tag.</video>
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sun Jul 23 15:38:05 +0000 2017](https://twitter.com/ChristopherA/status/889147613445890048)
 
@@ -1384,7 +1384,7 @@ Replying to [@stevecheckoway and @random_walker](https://twitter.com/stevechecko
 
 > With self-sovereign identity you at least limit the scope of how large a data loss can be. #Privacy #GDPR [https://amp.thehackernews.com/thn/2017/07/sweden-data-breach.html](https://amp.thehackernews.com/thn/2017/07/sweden-data-breach.html) 
 > 
-> ![](../../media/889993788327739392-DFnkoPXUAAAY2bw.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/889993788327739392-DFnkoPXUAAAY2bw.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Jul 25 23:40:29 +0000 2017](https://twitter.com/ChristopherA/status/889993788327739392)
 
@@ -1500,7 +1500,7 @@ Replying to [@virgilgr](https://twitter.com/ThePnnyPro/status/890479461124132864
 
 > Thank you to the diverse group who contributed to the #TokenEthics Salon in SF last night! Working on posting our results early next week. 
 > 
-> ![](../../media/890677591937437696-DFxSRa5UQAE8lKN.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/890677591937437696-DFxSRa5UQAE8lKN.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Jul 27 20:57:40 +0000 2017](https://twitter.com/ChristopherA/status/890677591937437696)
 
@@ -1660,7 +1660,7 @@ Replying to [@balajis, @VitalikButerin, @muneeb and @taoeffect](https://twitter.
 
 > 👍👍 “Global Citizenship: Leveling Up” by @aprilrinne [https://medium.com/@aprilrinne/global-citizenship-leveling-up-d9a74180e927?source=twitterShare-63ba9be92e8f-1501384318](https://medium.com/@aprilrinne/global-citizenship-leveling-up-d9a74180e927?source=twitterShare-63ba9be92e8f-1501384318) 
 > 
-> ![](../../media/891496716418940928-DF87idzV0AEVlPS.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/891496716418940928-DF87idzV0AEVlPS.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sun Jul 30 03:12:35 +0000 2017](https://twitter.com/ChristopherA/status/891496716418940928)
 
