--- a/_tweets-md/2017/2017-08-01-tweets.md
+++ b/_tweets-md/2017/2017-08-01-tweets.md
@@ -62,7 +62,7 @@ time:  23:59:59 +0000
 
 > RT @doctorow: Iranians connected to phishing attempt on tortured Syrian activist #1yrago [https://boingboing.net/2016/08/02/iranians-connected-to-phishing.html](https://boingboing.net/2016/08/02/iranians-connected-to-phishing.html) 
 > 
-> ![](../../media/892787280632467456-DGLsdLPUwAEV97E.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/media/892787280632467456-DGLsdLPUwAEV97E.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Aug 02 16:40:49 +0000 2017](https://twitter.com/ChristopherA/status/892787280632467456)
 
@@ -88,7 +88,7 @@ time:  23:59:59 +0000
 
 > "The fight for universal principles has to begin…with individual people…our human rights are equal and inalienable" [https://www.theguardian.com/commentisfree/2017/jul/31/democracy-dying-people-worried-putin-erdogan-trump-world](https://www.theguardian.com/commentisfree/2017/jul/31/democracy-dying-people-worried-putin-erdogan-trump-world) 
 > 
-> ![](../../media/892817208585342976-DGPshA9UwAAhOIS.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/media/892817208585342976-DGPshA9UwAAhOIS.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Aug 02 18:39:44 +0000 2017](https://twitter.com/ChristopherA/status/892817208585342976)
 
@@ -160,7 +160,7 @@ Replying to [@mir_btc and @giacomozucco](https://twitter.com/mir_btc/status/8927
 
 > Current proposed of a revised Mission Statement for the W3C Credentials CG, for public discussion on Tue 8/8 at 12ET [https://lists.w3.org/Archives/Public/public-credentials/2017Aug/0013.html](https://lists.w3.org/Archives/Public/public-credentials/2017Aug/0013.html) 
 > 
-> ![](../../media/893639008915308544-DGbX7z_UAAEWq0J.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/media/893639008915308544-DGbX7z_UAAEWq0J.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sat Aug 05 01:05:17 +0000 2017](https://twitter.com/ChristopherA/status/893639008915308544)
 
@@ -168,7 +168,7 @@ Replying to [@mir_btc and @giacomozucco](https://twitter.com/mir_btc/status/8927
 
 > Montgomery Street of San Francisco, looking toward Telegraph Hill, circa 1850. 
 > 
-> ![](../../media/894472255119400961-DGnNxdrUwAACjjD.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/media/894472255119400961-DGnNxdrUwAACjjD.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon Aug 07 08:16:18 +0000 2017](https://twitter.com/ChristopherA/status/894472255119400961)
 
@@ -223,7 +223,7 @@ Replying to [@VladZamfir](https://twitter.com/VladZamfir/status/8952595797051187
 
 > RT @NicolasDorier: Finally, the @pwuille have something interesting to code now! 
 > 
-> ![](../../media/895465054979489793-DGwBNYlUMAADpIw.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/media/895465054979489793-DGwBNYlUMAADpIw.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Aug 10 02:01:20 +0000 2017](https://twitter.com/ChristopherA/status/895465054979489793)
 
@@ -422,9 +422,9 @@ Replying to [@kwerb, @StevenLevy and @zeynep](https://twitter.com/ChristopherA/s
 
 > Two slides on ethics from my "Digital Influence" course, part of MBA in Sustainable System at BGI (now [http://Presidio.edu).](http://Presidio.edu)) 
 > 
-> ![](../../media/895765368228134914-DG5l2kjVYAAKuCn.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/media/895765368228134914-DG5l2kjVYAAKuCn.jpg)
 > 
-> ![](../../media/895765368228134914-DG5l2kiUAAAA47x.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/media/895765368228134914-DG5l2kiUAAAA47x.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Aug 10 21:54:40 +0000 2017](https://twitter.com/ChristopherA/status/895765368228134914)
 
@@ -454,7 +454,7 @@ Replying to [@5kyn0d3 and @CodeWisdom](https://twitter.com/sicklebeam/status/895
 
 > An even older variant of this "eat your own dog food" principle is from Hammurabi's Code. Build it &amp; it kills, then it's murder. #incentives 
 > 
-> ![](../../media/895779749947035648-DG5y7oQUAAA1Fd5.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/media/895779749947035648-DG5y7oQUAAA1Fd5.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Aug 10 22:51:49 +0000 2017](https://twitter.com/ChristopherA/status/895779749947035648)
 
@@ -475,7 +475,7 @@ Replying to [@5kyn0d3 and @CodeWisdom](https://twitter.com/sicklebeam/status/895
 
 > #qotd "Locke argued that 'sovereign &amp; independent' was man's natural state…combines with others to create society" [http://www.windley.com/archives/2016/09/self-sovereign_identity_and_the_legitimacy_of_permissioned_ledgers.shtml](http://www.windley.com/archives/2016/09/self-sovereign_identity_and_the_legitimacy_of_permissioned_ledgers.shtml) 
 > 
-> ![](../../media/895818312608698368-DG6WAQZUAAAmxQR.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/media/895818312608698368-DG6WAQZUAAAmxQR.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri Aug 11 01:25:03 +0000 2017](https://twitter.com/ChristopherA/status/895818312608698368)
 
@@ -515,7 +515,7 @@ Replying to [@muneeb](https://twitter.com/muneeb/status/894941876608016385)
 
 > Details on our 1st facilitated #TokenEthics Salon in SF, including insights, quotes, consensus &amp; best practices at [http://www.tokenethics.com/](http://www.tokenethics.com/) 
 > 
-> ![](../../media/896167044973867008-DG_TIpqVYAAz9oV.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/media/896167044973867008-DG_TIpqVYAAz9oV.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sat Aug 12 00:30:48 +0000 2017](https://twitter.com/ChristopherA/status/896167044973867008)
 
@@ -523,7 +523,7 @@ Replying to [@muneeb](https://twitter.com/muneeb/status/894941876608016385)
 
 > Next #TokenEthics Salon will be held online using Zoom Wed 8/30 at 12 ET, 9 PT, 16:00 GMT. Sign up at bottom of [http://www.TokenEthics.com](http://www.TokenEthics.com) 
 > 
-> ![](../../media/896168967655407616-DG_U6b7VoAAQUTM.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/media/896168967655407616-DG_U6b7VoAAQUTM.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sat Aug 12 00:38:26 +0000 2017](https://twitter.com/ChristopherA/status/896168967655407616)
 
@@ -539,7 +539,7 @@ Replying to [@muneeb](https://twitter.com/muneeb/status/894941876608016385)
 
 > Thank you all that contributed to our very successful first #TokenEthics Salon — I look forward to collaborating with you again! 
 > 
-> ![](../../media/896172707946954752-DG_YUkjUQAA9_4N.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/media/896172707946954752-DG_YUkjUQAA9_4N.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sat Aug 12 00:53:18 +0000 2017](https://twitter.com/ChristopherA/status/896172707946954752)
 
@@ -547,7 +547,7 @@ Replying to [@muneeb](https://twitter.com/muneeb/status/894941876608016385)
 
 > Some conclusions &amp; rough consensus from #TokenEthics Salon. Some open questions &amp; start at some best practices at [http://www.TokenEthics.com](http://www.TokenEthics.com) 
 > 
-> ![](../../media/896174118537576448-DG_ZmzKVYAEGsXm.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/media/896174118537576448-DG_ZmzKVYAEGsXm.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sat Aug 12 00:58:54 +0000 2017](https://twitter.com/ChristopherA/status/896174118537576448)
 
@@ -561,9 +561,9 @@ Replying to [@muneeb](https://twitter.com/muneeb/status/894941876608016385)
 
 > RT @TuurDemeester: @ChristopherA The paragraphs on #tokenethics meeting: 
 > 
-> ![](../../media/896230480634200064-DG_5Fk_UwAAN8vU.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/media/896230480634200064-DG_5Fk_UwAAN8vU.jpg)
 > 
-> ![](../../media/896230480634200064-DG_5HGbUwAAd4Bj.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/media/896230480634200064-DG_5HGbUwAAd4Bj.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sat Aug 12 04:42:52 +0000 2017](https://twitter.com/ChristopherA/status/896230480634200064)
 
@@ -685,7 +685,7 @@ Replying to [@Leon_Vandenberg, @katrynadow, @anguschampion, @BKBrianKelly, @mcca
 
 > #RebootingWebOfTrust is posting a series of Primers before our next event on 10/3-5. First up "Functional Identity": [https://github.com/WebOfTrustInfo/rebooting-the-web-of-trust-fall2017/blob/master/topics-and-advance-readings/functional-identity-primer.md](https://github.com/WebOfTrustInfo/rebooting-the-web-of-trust-fall2017/blob/master/topics-and-advance-readings/functional-identity-primer.md) 
 > 
-> ![](../../media/896776220293054464-DHH9N8FUAAAGAmb.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/media/896776220293054464-DHH9N8FUAAAGAmb.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sun Aug 13 16:51:26 +0000 2017](https://twitter.com/ChristopherA/status/896776220293054464)
 
@@ -713,7 +713,7 @@ Replying to [@nivertech](https://twitter.com/nivertech/status/895301233682116608
 
 > RT @AlexSteffen: Retweet if you have family members who served in WW II to end the evil of Nazism. 
 > 
-> ![](../../media/896785384830418944-DHDzelqUAAEq9rl.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/media/896785384830418944-DHDzelqUAAEq9rl.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sun Aug 13 17:27:51 +0000 2017](https://twitter.com/ChristopherA/status/896785384830418944)
 
@@ -727,7 +727,7 @@ Replying to [@nivertech](https://twitter.com/nivertech/status/895301233682116608
 
 > RT @archillect: 
 > 
-> ![](../../media/896790349837774849-DHHzv65XcAErUc0.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/media/896790349837774849-DHHzv65XcAErUc0.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sun Aug 13 17:47:35 +0000 2017](https://twitter.com/ChristopherA/status/896790349837774849)
 
@@ -992,7 +992,7 @@ Replying to [@EtheriumToken](https://twitter.com/EtheriumToken/status/9014357418
 > RT @MarcHochstein: Back to the future?  
 > H/t @timpastoor 
 > 
-> ![](../../media/902338010120822784-DIVpTGLV4AESbCR.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/media/902338010120822784-DIVpTGLV4AESbCR.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Aug 29 01:12:00 +0000 2017](https://twitter.com/ChristopherA/status/902338010120822784)
 
@@ -1054,7 +1054,7 @@ Replying to [@MazzarothLeo and @VitalikButerin](https://twitter.com/ChristopherA
 
 > RT @socrates1024: Blockchain Lab is off to a fantastic start 
 > 
-> ![](../../media/902677266374680576-DIbazmbW0AEZe1v.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/media/902677266374680576-DIbazmbW0AEZe1v.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Aug 29 23:40:05 +0000 2017](https://twitter.com/ChristopherA/status/902677266374680576)
 
@@ -1166,7 +1166,7 @@ Replying to [@finnern](https://twitter.com/finnern/status/902728927856156672)
 
 > Satoshi "stood on the shoulders of giants". I also talked a little about this in a panel at Consensus [https://youtu.be/gXUGJXN-_MU](https://youtu.be/gXUGJXN-_MU) 
 > 
-> ![](../../media/902966677326905344-DIf7ZW2V4AArr9a.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/media/902966677326905344-DIf7ZW2V4AArr9a.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Aug 30 18:50:06 +0000 2017](https://twitter.com/ChristopherA/status/902966677326905344)
 
@@ -1236,7 +1236,7 @@ Replying to [@stmdc](https://twitter.com/stmdc/status/903132798919290880)
 
 > The information asymmetry &amp; power balance issues of current ICOs can drive out the good… [https://medium.com/@avtarsehra/icos-and-economics-of-lemon-markets-96638e86b3b2?source=twitterShare-63ba9be92e8f-1504202451](https://medium.com/@avtarsehra/icos-and-economics-of-lemon-markets-96638e86b3b2?source=twitterShare-63ba9be92e8f-1504202451) 
 > 
-> ![](../../media/903317290396958720-DIk6SWjUwAA4XiN.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/media/903317290396958720-DIk6SWjUwAA4XiN.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Aug 31 18:03:19 +0000 2017](https://twitter.com/ChristopherA/status/903317290396958720)
 
@@ -1244,7 +1244,7 @@ Replying to [@stmdc](https://twitter.com/stmdc/status/903132798919290880)
 
 > Conditions that can lead to Lemon Markets. All are potentially applicable to ICO market today. [https://medium.com/@avtarsehra/icos-and-economics-of-lemon-markets-96638e86b3b2](https://medium.com/@avtarsehra/icos-and-economics-of-lemon-markets-96638e86b3b2) #TokenEthics 
 > 
-> ![](../../media/903320474569936896-DIk9K4FXUAEr5td.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/media/903320474569936896-DIk9K4FXUAEr5td.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Aug 31 18:15:58 +0000 2017](https://twitter.com/ChristopherA/status/903320474569936896)
 
@@ -1330,9 +1330,9 @@ Replying to [@timpastoor](https://twitter.com/timpastoor/status/9034531085499351
 
 > Here is a quote from a late 80s SciFi book, along with the chapters on agorical computing, that helped me get my first investors in 88/89: 
 > 
-> ![](../../media/903492079359148032-DInZPfhUQAEVCRo.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/media/903492079359148032-DInZPfhUQAEVCRo.jpg)
 > 
-> ![](../../media/903492079359148032-DInZPfhVYAEIXDn.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/media/903492079359148032-DInZPfhVYAEIXDn.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri Sep 01 05:37:52 +0000 2017](https://twitter.com/ChristopherA/status/903492079359148032)
 
