--- a/_tweets-md/2017/2017-09-01-tweets.md
+++ b/_tweets-md/2017/2017-09-01-tweets.md
@@ -222,7 +222,7 @@ Replying to [@MTurlakov, @yanntn, @dgwbirch and @Cardkillah](https://twitter.com
 
 > RT @weex: Dish assembled,  LNB mounted, elevation and LNB skew set. #Bitcoin 
 > 
-> ![](../../media/904081255376945152-DIvkg1oUMAAxabB.jpg)
+> ![]({{ site.url }}{{ site.baseurl }}/assets/images/media/904081255376945152-DIvkg1oUMAAxabB.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sat Sep 02 20:39:02 +0000 2017](https://twitter.com/ChristopherA/status/904081255376945152)
 
@@ -472,7 +472,7 @@ Replying to [@kimdhamilton and @salesforce](https://twitter.com/kimdhamilton/sta
 
 > I'm conflicted about iPhone X facial recognition. I like the technology but not the consent. I now use a random finger, preventing coercion. 
 > 
-> ![](../../media/908374776745410560-DJsyCdtVAAAQtZq.jpg)
+> ![]({{ site.url }}{{ site.baseurl }}/assets/images/media/908374776745410560-DJsyCdtVAAAQtZq.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Sep 14 16:59:58 +0000 2017](https://twitter.com/ChristopherA/status/908374776745410560)
 
@@ -1108,7 +1108,7 @@ Replying to [@Provoost and @austinhill](https://twitter.com/provoost/status/9126
 
 > I'll close out this discussion of SSS vs. threshold ECDSA (@sgoldfed et al) with this quote from Greg Maxwell (aka nullc) w/ his permission: 
 > 
-> ![](../../media/912776531264512000-DKrVaPoVoAA5aRz.jpg)
+> ![]({{ site.url }}{{ site.baseurl }}/assets/images/media/912776531264512000-DKrVaPoVoAA5aRz.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Sep 26 20:30:58 +0000 2017](https://twitter.com/ChristopherA/status/912776531264512000)
 
@@ -1248,7 +1248,7 @@ Replying to [@iang_fc](https://twitter.com/iang_fc/status/912869923650543616)
 
 > Quote from game designer extraordinaire @RaphKoster (Ultima Online, Star Wars Online) but applicable to blockchains [https://www.raphkoster.com/2017/09/22/31098/](https://www.raphkoster.com/2017/09/22/31098/) 
 > 
-> ![](../../media/913457150327873536-DK1AbuhVoAAo7iB.jpg)
+> ![]({{ site.url }}{{ site.baseurl }}/assets/images/media/913457150327873536-DK1AbuhVoAAo7iB.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Sep 28 17:35:30 +0000 2017](https://twitter.com/ChristopherA/status/913457150327873536)
 
@@ -1292,7 +1292,7 @@ Replying to [@RainDogDance, @timoncc, @SatoshiLite, @ErikVoorhees and @thomastos
 
 > Academic study of the theoretical limits of bi-directional anonymity "strong, low bandwidth, low latency—choose 2!" [https://eprint.iacr.org/2017/954](https://eprint.iacr.org/2017/954) 
 > 
-> ![](../../media/913555000642592768-DK2ZbhEV4AAUbI6.jpg)
+> ![]({{ site.url }}{{ site.baseurl }}/assets/images/media/913555000642592768-DK2ZbhEV4AAUbI6.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri Sep 29 00:04:19 +0000 2017](https://twitter.com/ChristopherA/status/913555000642592768)
 
