--- a/_tweets-md/2017/2017-10-01-tweets.md
+++ b/_tweets-md/2017/2017-10-01-tweets.md
@@ -116,9 +116,9 @@ Replying to [@jamesAmunsch and @SatoshiLite](https://twitter.com/jamesAmunsch/st
 
 > Results so far from Day One of #RebootingWebOfTrust: weak signals &amp; decentralized identity whitepapers in progress: [https://github.com/WebOfTrustInfo/rebooting-the-web-of-trust-fall2017/blob/master/event-documents/plenaries/0-day1-overview.md](https://github.com/WebOfTrustInfo/rebooting-the-web-of-trust-fall2017/blob/master/event-documents/plenaries/0-day1-overview.md) 
 > 
-> ![](../../media/915407920086618112-DLQumoEXcAAAVl3.jpg)
+> ![915407920086618112-DLQumoEXcAAAVl3]({{ site.url }}{{ site.baseurl }}/assets/images/media/915407920086618112-DLQumoEXcAAAVl3.jpg)
 > 
-> ![](../../media/915407920086618112-DLQumoGW4AA7AR1.jpg)
+> ![image-twitter]({{ site.url }}{{ site.baseurl }}/assets/images/media/915407920086618112-DLQumoGW4AA7AR1.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Oct 04 02:47:10 +0000 2017](https://twitter.com/ChristopherA/status/915407920086618112)
 
@@ -126,7 +126,7 @@ Replying to [@jamesAmunsch and @SatoshiLite](https://twitter.com/jamesAmunsch/st
 
 > RT @kyletorpey: “Making MAST Meaningful; Bitcoin Atomic Swaps Become Private” — Brian Deery [https://medium.com/@BrianDeery/making-mast-meaningful-bitcoin-atomic-swaps-become-private-ff003f7c2b7a#---0-400](https://medium.com/@BrianDeery/making-mast-meaningful-bitcoin-atomic-swaps-become-private-ff003f7c2b7a#---0-400) 
 > 
-> ![](../../media/915432624021262336-DLPrqpWWAAA9OLz.jpg)
+> ![image-twitter]({{ site.url }}{{ site.baseurl }}/assets/images/media/915432624021262336-DLPrqpWWAAA9OLz.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Oct 04 04:25:20 +0000 2017](https://twitter.com/ChristopherA/status/915432624021262336)
 
@@ -179,9 +179,9 @@ Replying to [@jamesAmunsch and @SatoshiLite](https://twitter.com/jamesAmunsch/st
 
 > Day 2 of #RebootingWebOfTrust progress on white papers &amp; demos of apps supporting DIDs on many different blockchains [https://github.com/WebOfTrustInfo/rebooting-the-web-of-trust-fall2017/blob/master/event-documents/plenaries/0-day2-overview.md](https://github.com/WebOfTrustInfo/rebooting-the-web-of-trust-fall2017/blob/master/event-documents/plenaries/0-day2-overview.md) 
 > 
-> ![](../../media/915767090543579143-DLV1TzPWsAAvXmH.jpg)
+> ![image-twitter]({{ site.url }}{{ site.baseurl }}/assets/images/media/915767090543579143-DLV1TzPWsAAvXmH.jpg)
 > 
-> ![](../../media/915767090543579143-DLV1TzVXcAALVOn.jpg)
+> ![image-twitter]({{ site.url }}{{ site.baseurl }}/assets/images/media/915767090543579143-DLV1TzVXcAALVOn.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Oct 05 02:34:23 +0000 2017](https://twitter.com/ChristopherA/status/915767090543579143)
 
@@ -213,7 +213,7 @@ Replying to [@jamesAmunsch and @SatoshiLite](https://twitter.com/jamesAmunsch/st
 
 > RT @tonilanec: #BitcoinFamily #weboftrust @ChristopherA 
 > 
-> ![](../../media/915905976259235840-DLUSWzPXkAAv69M.jpg)
+> ![image-twitter]({{ site.url }}{{ site.baseurl }}/assets/images/media/915905976259235840-DLUSWzPXkAAv69M.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Oct 05 11:46:16 +0000 2017](https://twitter.com/ChristopherA/status/915905976259235840)
 
@@ -227,9 +227,9 @@ Replying to [@jamesAmunsch and @SatoshiLite](https://twitter.com/jamesAmunsch/st
 
 > Last day of #RebootingWebOfTrust: Design Workshop exceeded expectations with 16 collaborative papers on identity: [https://github.com/WebOfTrustInfo/rebooting-the-web-of-trust-fall2017/blob/master/event-documents/plenaries/0-day3-overview.md](https://github.com/WebOfTrustInfo/rebooting-the-web-of-trust-fall2017/blob/master/event-documents/plenaries/0-day3-overview.md) 
 > 
-> ![](../../media/916190817940918274-DLb2rwJW4AA8zZQ.jpg)
+> ![image-twitter]({{ site.url }}{{ site.baseurl }}/assets/images/media/916190817940918274-DLb2rwJW4AA8zZQ.jpg)
 > 
-> ![](../../media/916190817940918274-DLb2rwIX4AAof6g.jpg)
+> ![image-twitter]({{ site.url }}{{ site.baseurl }}/assets/images/media/916190817940918274-DLb2rwIX4AAof6g.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri Oct 06 06:38:07 +0000 2017](https://twitter.com/ChristopherA/status/916190817940918274)
 
@@ -328,7 +328,7 @@ Replying to [@kate_sills and @naval](https://twitter.com/ChristopherA/status/916
 
 > An earlier paper by same author: Virtual Worlds: A First-Hand Account of Market and Society on the Cyberian Frontier [https://papers.ssrn.com/sol3/papers.cfm?abstract_id=294828](https://papers.ssrn.com/sol3/papers.cfm?abstract_id=294828) 
 > 
-> ![](../../media/916782317070376960-DLkQp2FXkAA4aZU.jpg)
+> ![image-twitter]({{ site.url }}{{ site.baseurl }}/assets/images/media/916782317070376960-DLkQp2FXkAA4aZU.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sat Oct 07 21:48:32 +0000 2017](https://twitter.com/ChristopherA/status/916782317070376960)
 
@@ -443,7 +443,7 @@ Replying to [@kate_sills and @naval](https://twitter.com/kate_sills/status/91677
 
 > Another dimension is that most current crypto-economists focus only on speculative &amp; transactional wealth, and not systemic "deep" wealth. 
 > 
-> ![](../../media/917146712312909824-DLpcElcVYAAZncF.jpg)
+> ![image-twitter]({{ site.url }}{{ site.baseurl }}/assets/images/media/917146712312909824-DLpcElcVYAAZncF.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sun Oct 08 21:56:30 +0000 2017](https://twitter.com/ChristopherA/status/917146712312909824)
 
@@ -558,7 +558,7 @@ Replying to [@smashthepast and @rclemmons](https://twitter.com/@smashthepast/sta
 
 > In our communities, online &amp; offline, big &amp; small, we should be saying more "We don't do that here". Useful tool! [http://www.thagomizer.com/blog/2017/09/29/we-don-t-do-that-here.html](http://www.thagomizer.com/blog/2017/09/29/we-don-t-do-that-here.html) 
 > 
-> ![](../../media/918001144311439361-DL1lK9XUQAAB81L.jpg)
+> ![image-twitter]({{ site.url }}{{ site.baseurl }}/assets/images/media/918001144311439361-DL1lK9XUQAAB81L.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Oct 11 06:31:43 +0000 2017](https://twitter.com/ChristopherA/status/918001144311439361)
 
@@ -734,7 +734,7 @@ Replying to [@Fennie_Wang and @ixo_foundation](https://twitter.com/Fennie_Wang/s
 
 > This is why every time I see someone attempting "algorithmic agility" or the latest list of TLS ciphersuite I cringe [https://blog.cryptographyengineering.com/2017/10/16/falling-through-the-kracks/amp/](https://blog.cryptographyengineering.com/2017/10/16/falling-through-the-kracks/amp/) 
 > 
-> ![](../../media/919953832385359877-DMRVIR6W0AEKOM-.jpg)
+> ![image-twitter]({{ site.url }}{{ site.baseurl }}/assets/images/media/919953832385359877-DMRVIR6W0AEKOM-.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon Oct 16 15:51:00 +0000 2017](https://twitter.com/ChristopherA/status/919953832385359877)
 
@@ -748,7 +748,7 @@ Replying to [@Fennie_Wang and @ixo_foundation](https://twitter.com/Fennie_Wang/s
 
 > RT @mgd: Marketing Data and GDPR Compliance cartoon | Marketoonist | Tom Fishburne [https://buff.ly/2ytR66P](https://buff.ly/2ytR66P) 
 > 
-> ![](../../media/919956311047012353-DMRKo-2XUAEaZ0r.jpg)
+> ![image-twitter]({{ site.url }}{{ site.baseurl }}/assets/images/media/919956311047012353-DMRKo-2XUAEaZ0r.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon Oct 16 16:00:51 +0000 2017](https://twitter.com/ChristopherA/status/919956311047012353)
 
@@ -867,9 +867,9 @@ Replying to [@msgilligan and @MichaelRAlessio](https://twitter.com/msgilligan/st
 
 > Greg Maxwell &amp; Chris Cook demo a portable @Blockstream Satellite Bitcoin data feed from roof of our Berlin hotel. No internet required! 
 > 
-> ![](../../media/921040486089084928-DMgxZ4zWAAAmq20.jpg)
+> ![image-twitter]({{ site.url }}{{ site.baseurl }}/assets/images/media/921040486089084928-DMgxZ4zWAAAmq20.jpg)
 > 
-> ![](../../media/921040486089084928-DMgxZ40X4AICg8A.jpg)
+> ![image-twitter]({{ site.url }}{{ site.baseurl }}/assets/images/media/921040486089084928-DMgxZ40X4AICg8A.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Oct 19 15:48:58 +0000 2017](https://twitter.com/ChristopherA/status/921040486089084928)
 
@@ -1039,7 +1039,7 @@ Replying to [@PeterHebly, @VCfSEE_TimWayre, @NicolasDorier and @Blockstream](htt
 
 > Paper proposes improvements to how we measure GDP in order to improve #DeepWealth. We can’t manage what we don’t measure! 
 > 
-> ![](../../media/923547107851567107-DNEZMpwV4AEZbxl.jpg)
+> ![image-twitter]({{ site.url }}{{ site.baseurl }}/assets/images/media/923547107851567107-DNEZMpwV4AEZbxl.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Oct 26 13:49:23 +0000 2017](https://twitter.com/ChristopherA/status/923547107851567107)
 
@@ -1063,7 +1063,7 @@ Replying to [@DianeCoyle1859 and @profjasonpotts](https://twitter.com/Christophe
 
 > #DeepWealth: Measuring more than the financial transactions of a system, but its resilience, sustainability, commons, and natural capital. 
 > 
-> ![](../../media/923550661949534212-DNEcbeoVwAEc3IG.jpg)
+> ![image-twitter]({{ site.url }}{{ site.baseurl }}/assets/images/media/923550661949534212-DNEcbeoVwAEc3IG.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Oct 26 14:03:31 +0000 2017](https://twitter.com/ChristopherA/status/923550661949534212)
 
@@ -1152,7 +1152,7 @@ Replying to [@zacharylarson, @DianeCoyle1859 and @profjasonpotts](https://twitte
 
 > A manifesto by @Joi on ecosystem resilience vs singularity: “Developing a sensibility and a culture of flourishing…” [https://pubpub.ito.com/pub/resisting-reduction](https://pubpub.ito.com/pub/resisting-reduction) 
 > 
-> ![](../../media/924302232580907009-DNPH-lGUIAAJE_j.jpg)
+> ![image-twitter]({{ site.url }}{{ site.baseurl }}/assets/images/media/924302232580907009-DNPH-lGUIAAJE_j.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sat Oct 28 15:49:59 +0000 2017](https://twitter.com/ChristopherA/status/924302232580907009)
 
@@ -1246,7 +1246,7 @@ Replying to [@smdiehl, @sj_mackenzie, @jjmerelo and @brian_steffens](https://twi
 
 > Here is my poster talk on #SmartSignature languages presented at Euro S&amp;P earlier this year: 
 > 
-> ![](../../media/925024326398615552-DNZYt5VVQAAWWuw.jpg)
+> ![image-twitter]({{ site.url }}{{ site.baseurl }}/assets/images/media/925024326398615552-DNZYt5VVQAAWWuw.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon Oct 30 15:39:20 +0000 2017](https://twitter.com/ChristopherA/status/925024326398615552)
 
@@ -1264,7 +1264,7 @@ Replying to [@smdiehl, @sj_mackenzie, @jjmerelo and @brian_steffens](https://twi
 
 > Another addition to possible #SmartSignature languages (came out after my paper) is @Chepurnoy’s Σ-State Authentication Language, from FC27: 
 > 
-> ![](../../media/925027705715699712-DNZbyqMVwAEfp8a.jpg)
+> ![image-twitter]({{ site.url }}{{ site.baseurl }}/assets/images/media/925027705715699712-DNZbyqMVwAEfp8a.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon Oct 30 15:52:45 +0000 2017](https://twitter.com/ChristopherA/status/925027705715699712)
 
@@ -1289,7 +1289,7 @@ Replying to [@smdiehl, @sj_mackenzie, @jjmerelo and @brian_steffens](https://twi
 
 > RT @lopp: Simplicity: A New Language for Blockchains [https://blockstream.com/simplicity.pdf](https://blockstream.com/simplicity.pdf) H/T @alexbosworth 
 > 
-> ![](../../media/925103649293869057-DNZbvmxVoAEO_x3.jpg)
+> ![image-twitter]({{ site.url }}{{ site.baseurl }}/assets/images/media/925103649293869057-DNZbvmxVoAEO_x3.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon Oct 30 20:54:32 +0000 2017](https://twitter.com/ChristopherA/status/925103649293869057)
 
@@ -1297,13 +1297,13 @@ Replying to [@smdiehl, @sj_mackenzie, @jjmerelo and @brian_steffens](https://twi
 
 > Dr. O'Connor's t-shirt at #PLAS2017 w/ Simplicity's complete denotational &amp; operational semantics for provable code: [https://blockstream.com/2017/10/30/simplicity.html](https://blockstream.com/2017/10/30/simplicity.html) 
 > 
-> ![](../../media/925402657224716288-DNevZT2UIAAZH1l.jpg)
+> ![image-twitter]({{ site.url }}{{ site.baseurl }}/assets/images/media/925402657224716288-DNevZT2UIAAZH1l.jpg)
 > 
-> ![](../../media/925402657224716288-DNeva4zUEAA4uo1.jpg)
+> ![image-twitter]({{ site.url }}{{ site.baseurl }}/assets/images/media/925402657224716288-DNeva4zUEAA4uo1.jpg)
 > 
-> ![](../../media/925402657224716288-DNevcK4VoAE3DiV.png)
+> ![image-twitter]({{ site.url }}{{ site.baseurl }}/assets/images/media/925402657224716288-DNevcK4VoAE3DiV.png)
 > 
-> ![](../../media/925402657224716288-DNevdfNVwAAS8Ha.png)
+> ![image-twitter]({{ site.url }}{{ site.baseurl }}/assets/images/media/925402657224716288-DNevdfNVwAAS8Ha.png)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Oct 31 16:42:41 +0000 2017](https://twitter.com/ChristopherA/status/925402657224716288)
 
