--- a/_tweets-md/2017/2017-11-01-tweets.md
+++ b/_tweets-md/2017/2017-11-01-tweets.md
@@ -128,7 +128,7 @@ Replying to [@Melt_Dem](https://twitter.com/Melt_Dem/status/926943072692441096)
 
 > RT @lightcoin: @lopp @kanzure @roasbeef @ScalingBitcoin Kanzure: "Challenge accepted!" 
 > 
-> <video controls><source src="../../media/926946208186187777-DN0oNqRUIAAb6Oa.mp4">Your browser does not support the video tag.</video>
+> <video controls><source src="{{ site.url }}{{ site.baseurl }}/assets/images/media/926946208186187777-DN0oNqRUIAAb6Oa.mp4">Your browser does not support the video tag.</video>
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sat Nov 04 22:56:12 +0000 2017](https://twitter.com/ChristopherA/status/926946208186187777)
 
@@ -156,7 +156,7 @@ Replying to [@Melt_Dem](https://twitter.com/Melt_Dem/status/926943072692441096)
 
 > “Why does the price of Bitcoin keep going up?” — @bobbyclee 
 > 
-> ![](../../media/926976314296320000-DN1IBmHVwAAenYB.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/926976314296320000-DN1IBmHVwAAenYB.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sun Nov 05 00:55:50 +0000 2017](https://twitter.com/ChristopherA/status/926976314296320000)
 
@@ -238,7 +238,7 @@ Replying to [@lightcoin](https://twitter.com/lightcoin/status/927626380770271232
 
 > We need to understand how these informal reputation networks form &amp; how to support them, else we risk the humaneness of them: “Digital data doesn’t count for much because most of what is valuable is offline biashara.” [https://kioneki.com/2017/11/08/how-kenyas-digital-financial-inclusion-industry-is-failing-women-entrepreneurs/](https://kioneki.com/2017/11/08/how-kenyas-digital-financial-inclusion-industry-is-failing-women-entrepreneurs/) 
 > 
-> ![](../../media/928521690606268416-DOLFjUxUMAADxR_.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/928521690606268416-DOLFjUxUMAADxR_.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Nov 09 07:16:36 +0000 2017](https://twitter.com/ChristopherA/status/928521690606268416)
 
@@ -459,7 +459,7 @@ Replying to [@paulmadsen and @taoeffect](https://twitter.com/paulmadsen/status/9
 
 > It looks like @BlockStack is beginning to move toward DIDs (Decentralized Identifiers)! Come join us in the W3C Credentials CG to define the future &amp; interoperability of this standard &amp; Verifiable Credentials! @larrysalibra [https://www.larrysalibra.com/blog/blockstack-token-sale-voucher-registration-walkthrough/](https://www.larrysalibra.com/blog/blockstack-token-sale-voucher-registration-walkthrough/) 
 > 
-> ![](../../media/929033958515400705-DOSXdNlV4AAKagx.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/929033958515400705-DOSXdNlV4AAKagx.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri Nov 10 17:12:10 +0000 2017](https://twitter.com/ChristopherA/status/929033958515400705)
 
@@ -519,7 +519,7 @@ Replying to [@darrello, @blockstack and @larrysalibra](https://twitter.com/darre
 
 > RT @jptrophardy: Bitwala to US persons 
 > 
-> ![](../../media/929201525691260937-DORvHruWsAIYC4i.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/929201525691260937-DORvHruWsAIYC4i.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sat Nov 11 04:18:02 +0000 2017](https://twitter.com/ChristopherA/status/929201525691260937)
 
@@ -735,7 +735,7 @@ Replying to [@dustyweb, @cwebber and @puckipedia](https://twitter.com/dustyweb/s
 >   
 > [https://medium.com/incerto/the-merchandising-of-virtue-b548762658f0](https://medium.com/incerto/the-merchandising-of-virtue-b548762658f0) 
 > 
-> ![](../../media/933131364123029504-DI5Lyc7UMAAK6eb.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/933131364123029504-DI5Lyc7UMAAK6eb.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Nov 22 00:33:48 +0000 2017](https://twitter.com/ChristopherA/status/933131364123029504)
 
@@ -799,7 +799,7 @@ Replying to [@dustyweb, @cwebber and @puckipedia](https://twitter.com/dustyweb/s
 
 > RT @coindesk: Blockstream, Digital Garage Team Up to Foster Blockchain in Japan [http://bit.ly/2iBcP3Y](http://bit.ly/2iBcP3Y) 
 > 
-> ![](../../media/933423001810243585-DPKJa2eXcAIOpQB.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/933423001810243585-DPKJa2eXcAIOpQB.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Nov 22 19:52:40 +0000 2017](https://twitter.com/ChristopherA/status/933423001810243585)
 
@@ -823,7 +823,7 @@ Replying to [@BrentToderian](https://twitter.com/BrentToderian/status/9328094386
 
 > Some of this is just useful for anyone reading. There also have been some readability improvements using colored text that are interesting. I’d love to see some more empirical testing of different techniques. [http://www.beelinereader.com/individual](http://www.beelinereader.com/individual) @BeeLineReader 
 > 
-> ![](../../media/933430231297171457-DPQ12CzUQAAPbPx.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/933430231297171457-DPQ12CzUQAAPbPx.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Nov 22 20:21:24 +0000 2017](https://twitter.com/ChristopherA/status/933430231297171457)
 
@@ -839,7 +839,7 @@ Replying to [@_MicheleSeven](https://twitter.com/_MicheleSeven/status/9334225015
 
 > Alacrity, noun. From the Latin alacritas meaning promptitude. Quickness in action or movement. Alacrity stresses promptness in response to a suggestion or command, cheerful and eager willingness, appropriate quickness, and in general the beginning of fast movement. 
 > 
-> ![](../../media/933432110429356032-DPQ3jf5UQAAFW5H.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/933432110429356032-DPQ3jf5UQAAFW5H.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Nov 22 20:28:52 +0000 2017](https://twitter.com/ChristopherA/status/933432110429356032)
 
@@ -1091,7 +1091,7 @@ Replying to [@b41125446, @KarelBassez and @kylesamani](https://twitter.com/b4112
 
 > RT @rusty_twit: OK #bitcoin I'm now ready for *anything*. 
 > 
-> ![](../../media/936129841346240513-DP2Zi1zU8AIUtE7.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/936129841346240513-DP2Zi1zU8AIUtE7.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Nov 30 07:08:41 +0000 2017](https://twitter.com/ChristopherA/status/936129841346240513)
 
@@ -1180,7 +1180,7 @@ Replying to [@naresh_sunkara, @joshephraim and @adambsterling](https://twitter.c
 
 > Beautiful post-sunset view of San Francisco from the Berkeley hills tonight… 
 > 
-> ![](../../media/936408735852896256-DP7KyAkV4AEnUbz.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/936408735852896256-DP7KyAkV4AEnUbz.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri Dec 01 01:36:54 +0000 2017](https://twitter.com/ChristopherA/status/936408735852896256)
 
