--- a/_tweets-md/2017/2017-12-01-tweets.md
+++ b/_tweets-md/2017/2017-12-01-tweets.md
@@ -32,7 +32,7 @@ Replying to [@wmclaxton, @dsearls and @linuxjournal](https://twitter.com/wmclaxt
 
 > "The growth of documents generally reflects the lack of trust in a society. No paper trail can make someone accountable. Only self-assumption can. Too many societies had used paper as a substitute for accountability" from "Adiamante" by L.E. Modisett Jr. [http://a.co/08SKP0T](http://a.co/08SKP0T) 
 > 
-> ![](../../media/937095416671113216-DQE7UJnVoAEzqJd.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/937095416671113216-DQE7UJnVoAEzqJd.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sat Dec 02 23:05:32 +0000 2017](https://twitter.com/ChristopherA/status/937095416671113216)
 
@@ -96,7 +96,7 @@ Replying to [@Beautyon_](https://twitter.com/Beautyon_/status/937323247313485825
 
 > A fully functional Mac Plus with working display and mouse. Photo is to scale and no Photoshop. [https://youtu.be/V-PiNVPp5h0](https://youtu.be/V-PiNVPp5h0) #hackaday 
 > 
-> ![](../../media/937855046879920128-DQPuMUmUIAA6RVj.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/937855046879920128-DQPuMUmUIAA6RVj.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Dec 05 01:24:02 +0000 2017](https://twitter.com/ChristopherA/status/937855046879920128)
 
@@ -180,7 +180,7 @@ Replying to [@J0hnnyXm4s and @Kyle_DH](https://twitter.com/J0hnnyXm4s/status/938
 
 > RT @Snyke: Good news everyone :-p 
 > 
-> ![](../../media/938482000591069184-DQYNsXfXcAEZ45V.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/938482000591069184-DQYNsXfXcAEZ45V.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Dec 06 18:55:19 +0000 2017](https://twitter.com/ChristopherA/status/938482000591069184)
 
@@ -230,7 +230,7 @@ Replying to [@nic__carter](https://twitter.com/nic__carter/status/93877137079158
 
 > RT @trbouma: Two questions for #SelfSovereignIdentity @darrello 
 > 
-> ![](../../media/938945816923742208-DQd_jJtV4AE2Aom.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/938945816923742208-DQd_jJtV4AE2Aom.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri Dec 08 01:38:22 +0000 2017](https://twitter.com/ChristopherA/status/938945816923742208)
 
@@ -950,9 +950,9 @@ Replying to [@KamesCG and @petertoddbtc](https://twitter.com/KamesCG/status/9411
 
 > RT @kallewoof: Stand-alone Bitcoin Script Debugger. 
 > 
-> ![](../../media/941121406531538945-DQ6fEaiWkAI-WqT.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/941121406531538945-DQ6fEaiWkAI-WqT.jpg)
 > 
-> ![](../../media/941121406531538945-DQ6fTQUWAAAYDaU.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/941121406531538945-DQ6fTQUWAAAYDaU.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Dec 14 01:43:23 +0000 2017](https://twitter.com/ChristopherA/status/941121406531538945)
 
@@ -1134,11 +1134,11 @@ Replying to [@windley](https://twitter.com/windley/status/943158814676631552)
 
 > This was my first microcomputer, an IMSAI 8080 in 77. We could not afford a ROM so loaded machine-language bootloader via front switches, which loaded paper tape reader driver, which loaded Altair BASIC by Gates &amp; Allen—it was a big deal when we could save BASIC to cassette tape. 
 > 
-> ![](../../media/943238903619756032-DRcOx4dVoAAQH4B.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/943238903619756032-DRcOx4dVoAAQH4B.jpg)
 > 
-> ![](../../media/943238903619756032-DRcOx4cVwAE_h-A.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/943238903619756032-DRcOx4cVwAE_h-A.jpg)
 > 
-> ![](../../media/943238903619756032-DRcOx4bUEAAKo1B.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/943238903619756032-DRcOx4bUEAAKo1B.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Dec 19 21:57:33 +0000 2017](https://twitter.com/ChristopherA/status/943238903619756032)
 
@@ -1205,7 +1205,7 @@ Replying to [@timpastoor](https://twitter.com/timpastoor/status/9448074241118412
 >   
 > Inner Me: Do it anyway 
 > 
-> ![](../../media/945720292541849600-DR2oj1fXcAUDQD_.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/945720292541849600-DR2oj1fXcAUDQD_.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Dec 26 18:17:43 +0000 2017](https://twitter.com/ChristopherA/status/945720292541849600)
 
@@ -1311,11 +1311,11 @@ Replying to [@amyjokim](https://twitter.com/amyjokim/status/945780786367795200)
 
 > I prefer @Michele_Pax’s “Six Enduring Desires”, as these are things that people will sacrifice Maslow’s comforts to have: meaning, purpose, value, connection, resilience and transcendence. 
 > 
-> ![](../../media/945806747997843456-DSAuOCGUMAEKxBS.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/945806747997843456-DSAuOCGUMAEKxBS.jpg)
 > 
-> ![](../../media/945806747997843456-DSAuOCGVwAAATJI.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/945806747997843456-DSAuOCGVwAAATJI.jpg)
 > 
-> ![](../../media/945806747997843456-DSAuOCEUMAAjJRv.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/945806747997843456-DSAuOCEUMAAjJRv.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Dec 27 00:01:15 +0000 2017](https://twitter.com/ChristopherA/status/945806747997843456)
 
