--- a/_tweets-md/2018/2018-01-01-tweets.md
+++ b/_tweets-md/2018/2018-01-01-tweets.md
@@ -207,7 +207,7 @@ Replying to [@cryptoqst and @peterktodd](https://twitter.com/@cryptoqst/status/9
 > RT @Aristot73: My favourite:   
 > Conclusions and Future Work from the #spectre paper [https://spectreattack.com/spectre.pdf](https://spectreattack.com/spectre.pdf) 1/x 
 > 
-> ![](../../media/948718074147958784-DSqATb4XUAUYJC7.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/948718074147958784-DSqATb4XUAUYJC7.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Jan 04 00:49:49 +0000 2018](https://twitter.com/ChristopherA/status/948718074147958784)
 
@@ -215,7 +215,7 @@ Replying to [@cryptoqst and @peterktodd](https://twitter.com/@cryptoqst/status/9
 
 > RT @Aristot73: Conclusions and Future Work from the #spectre paper 2/x 
 > 
-> ![](../../media/948718090212249601-DSqAs24XUAEtXc4.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/948718090212249601-DSqAs24XUAEtXc4.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Jan 04 00:49:53 +0000 2018](https://twitter.com/ChristopherA/status/948718090212249601)
 
@@ -389,7 +389,7 @@ Replying to [@taoeffect, @danieltbar, @VladZamfir, @socrates1024, @ChrisLundkvis
 
 > RT @ChloeCondon: Me trying to be an extrovert at tech conferences. 😐 
 > 
-> ![](../../media/951541589939077120-DTKcTujU8AA8oOP.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/951541589939077120-DTKcTujU8AA8oOP.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Jan 11 19:49:28 +0000 2018](https://twitter.com/ChristopherA/status/951541589939077120)
 
@@ -494,7 +494,7 @@ Replying to [@lopp](https://twitter.com/lopp/status/951529453582155776)
 
 > RT @coindesk: The Sidechains Breakthrough Almost Everyone in Bitcoin Missed [http://bit.ly/2ENQZmm](http://bit.ly/2ENQZmm) 
 > 
-> ![](../../media/953494438046662659-DTt9bVtVwAACjsb.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/953494438046662659-DTt9bVtVwAACjsb.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Jan 17 05:09:23 +0000 2018](https://twitter.com/ChristopherA/status/953494438046662659)
 
@@ -784,7 +784,7 @@ Replying to [@Meaningness, @perrymetzger and @St_Rev](https://twitter.com/Meanin
 
 > RT @HardcoreValue: What Jeff Bezos thinks when an Analyst congratulates him on a "good quarter". 
 > 
-> <video controls><source src="../../media/955202083094802432-p8NHUwduDu6l6baI.mp4">Your browser does not support the video tag.</video>
+> <video controls><source srcTweets-image="{{ site.url }}{{ site.baseurl }}/assets/images/media/955202083094802432-p8NHUwduDu6l6baI.mp4">Your browser does not support the video tag.</video>
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sun Jan 21 22:14:58 +0000 2018](https://twitter.com/ChristopherA/status/955202083094802432)
 
@@ -857,9 +857,9 @@ Replying to [@zacharylarson](https://twitter.com/zacharylarson/status/9563248510
 
 > RT @AntonPolishko: Gems at #bpase18 #blockchain #stanford 
 > 
-> ![](../../media/956326638924398592-DUV24IuVwAAZ39k.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/956326638924398592-DUV24IuVwAAZ39k.jpg)
 > 
-> ![](../../media/956326638924398592-DUV24IjVoAEMHQx.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/956326638924398592-DUV24IjVoAEMHQx.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Jan 25 00:43:33 +0000 2018](https://twitter.com/ChristopherA/status/956326638924398592)
 
@@ -909,7 +909,7 @@ Replying to [@lpolovets](https://twitter.com/lpolovets/status/956354363101818880
 
 > The formal semantics of @Blockstream’s Russel O’Connors’s Simplicity blockchain #SmartSignature language fits on a t-shirt: #bpase18 [https://blockstream.com/2017/10/30/simplicity.html](https://blockstream.com/2017/10/30/simplicity.html) 
 > 
-> ![](../../media/956594311046443009-DUaBc9RVwAEhS38.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/956594311046443009-DUaBc9RVwAEhS38.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Jan 25 18:27:11 +0000 2018](https://twitter.com/ChristopherA/status/956594311046443009)
 
@@ -919,7 +919,7 @@ Replying to [@lpolovets](https://twitter.com/lpolovets/status/956354363101818880
 >   
 > #BPASE18 $BTC 
 > 
-> ![](../../media/956604769224683520-DUZ-CnmUMAEQCGv.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/956604769224683520-DUZ-CnmUMAEQCGv.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Jan 25 19:08:44 +0000 2018](https://twitter.com/ChristopherA/status/956604769224683520)
 
@@ -935,7 +935,7 @@ Replying to [@lpolovets](https://twitter.com/lpolovets/status/956354363101818880
 >   
 > -- Vincent Ostrom, in The Meaning of American Federalism 
 > 
-> ![](../../media/956620931157250048-DUaRfW_UQAAK77H.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/956620931157250048-DUaRfW_UQAAK77H.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Jan 25 20:12:57 +0000 2018](https://twitter.com/ChristopherA/status/956620931157250048)
 
@@ -1035,7 +1035,7 @@ Replying to [@Steve_Lockstep and @dgwbirch](https://twitter.com/ChristopherA/sta
 
 > Science Fiction writer &amp; social thinker Ursula LeGuin died this week. A profound influence on my early thinking, a balance of yin to Heinlein’s yang. I still see resonance of both writer’s influence on blockchain and other high social tech today. 
 > 
-> ![](../../media/956989698584428546-DUfpC-aVAAAAgEG.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/956989698584428546-DUfpC-aVAAAAgEG.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri Jan 26 20:38:18 +0000 2018](https://twitter.com/ChristopherA/status/956989698584428546)
 
@@ -1065,7 +1065,7 @@ Replying to [@dgwbirch, @Steve_Lockstep, @chrisinajar and @JoeAndrieu](https://t
 
 > 👍Firefox 59 now prominently promotes its support of decentralization protocols on its updates announcements page! Let’s keep the momentum going! 
 > 
-> ![](../../media/957153628761960448-DUh-Jn0V4AArSPG.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/957153628761960448-DUh-Jn0V4AArSPG.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sat Jan 27 07:29:42 +0000 2018](https://twitter.com/ChristopherA/status/957153628761960448)
 
@@ -1293,7 +1293,7 @@ Replying to [@lykle](https://twitter.com/lykle/status/958785752267214854)
 
 > RT @archillect: 
 > 
-> ![](../../media/958836740122267649-DU5k2_KWAAE603G.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/958836740122267649-DU5k2_KWAAE603G.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Jan 31 22:57:47 +0000 2018](https://twitter.com/ChristopherA/status/958836740122267649)
 
