--- a/_tweets-md/2018/2018-02-01-tweets.md
+++ b/_tweets-md/2018/2018-02-01-tweets.md
@@ -222,7 +222,7 @@ Replying to [@trbouma](https://twitter.com/trbouma/status/960375936939159552)
 
 > The SEC in today's Senate "Virtual Currencies" hearing: 
 > 
-> <video controls><source src="../../media/960975245501874176-DVYRwpaVQAA0_6a.mp4">Your browser does not support the video tag.</video>
+> <video controls><source src="{{ site.url }}{{ site.baseurl }}/assets/images/media/960975245501874176-DVYRwpaVQAA0_6a.mp4">Your browser does not support the video tag.</video>
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Feb 06 20:35:27 +0000 2018](https://twitter.com/ChristopherA/status/960975245501874176)
 
@@ -244,7 +244,7 @@ Replying to [@trbouma](https://twitter.com/trbouma/status/960375936939159552)
 
 > Our biggest fans this week: @TuurDemeester, @Blockstream, @Marsmensch. Thank you! via [https://sumall.com/thankyou?utm_source=twitter&utm_medium=publishing&utm_campaign=thank_you_tweet&utm_content=text_and_media&utm_term=d0ab6b00ad990b36d99f7a0b](https://sumall.com/thankyou?utm_source=twitter&utm_medium=publishing&utm_campaign=thank_you_tweet&utm_content=text_and_media&utm_term=d0ab6b00ad990b36d99f7a0b) 
 > 
-> ![](../../media/961283713823895552-DVcqcS5WsAIewJj.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/961283713823895552-DVcqcS5WsAIewJj.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Feb 07 17:01:11 +0000 2018](https://twitter.com/ChristopherA/status/961283713823895552)
 
@@ -258,7 +258,7 @@ Replying to [@trbouma](https://twitter.com/trbouma/status/960375936939159552)
 
 > I want a hardware key that can also sign &amp; print a signature. Thinking a small camera that can do QR, a small Ledger-like ID, rings to set a PIN, and micro-pins to imprint. 
 > 
-> ![](../../media/961434004774821888-DVezIQUVAAEkiyF.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/961434004774821888-DVezIQUVAAEkiyF.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Feb 08 02:58:23 +0000 2018](https://twitter.com/ChristopherA/status/961434004774821888)
 
@@ -272,7 +272,7 @@ Replying to [@trbouma](https://twitter.com/trbouma/status/960375936939159552)
 
 > My week on Twitter 🎉: 253 Mentions, 14.7K Mention Reach, 310 Likes, 134 Retweets, 653K Retweet Reach. See yours with [https://sumall.com/performancetweet?utm_source=twitter&utm_medium=publishing&utm_campaign=performance_tweet&utm_content=text_and_media&utm_term=d0ab6b00ad990b36d99f7a0b](https://sumall.com/performancetweet?utm_source=twitter&utm_medium=publishing&utm_campaign=performance_tweet&utm_content=text_and_media&utm_term=d0ab6b00ad990b36d99f7a0b) 
 > 
-> ![](../../media/961449595590017024-DVfBT4-VAAAQZse.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/961449595590017024-DVfBT4-VAAAQZse.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Feb 08 04:00:21 +0000 2018](https://twitter.com/ChristopherA/status/961449595590017024)
 
@@ -454,7 +454,7 @@ Replying to [@MadelineAshby, @NASA and @imaginationASU](https://twitter.com/Made
 
 > Our biggest fans this week: @peterktodd, @PrivacyPro_Plow, @nozomimagine. Thank you! via [https://sumall.com/thankyou?utm_source=twitter&utm_medium=publishing&utm_campaign=thank_you_tweet&utm_content=text_and_media&utm_term=d0ab6b00ad990b36d99f7a0b](https://sumall.com/thankyou?utm_source=twitter&utm_medium=publishing&utm_campaign=thank_you_tweet&utm_content=text_and_media&utm_term=d0ab6b00ad990b36d99f7a0b) 
 > 
-> ![](../../media/963820772484665353-DWAt4huXkAEP1jr.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/963820772484665353-DWAt4huXkAEP1jr.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Feb 14 17:02:33 +0000 2018](https://twitter.com/ChristopherA/status/963820772484665353)
 
@@ -499,7 +499,7 @@ Replying to [@MadelineAshby, @NASA and @imaginationASU](https://twitter.com/Made
 
 > My week on Twitter 🎉: 82 Mentions, 4.65K Mention Reach, 212 Likes, 28 Retweets, 137K Retweet Reach. See yours with [https://sumall.com/performancetweet?utm_source=twitter&utm_medium=publishing&utm_campaign=performance_tweet&utm_content=text_and_media&utm_term=d0ab6b00ad990b36d99f7a0b](https://sumall.com/performancetweet?utm_source=twitter&utm_medium=publishing&utm_campaign=performance_tweet&utm_content=text_and_media&utm_term=d0ab6b00ad990b36d99f7a0b) 
 > 
-> ![](../../media/963986652845694976-DWDEwDUXUAAcrY7.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/963986652845694976-DWDEwDUXUAAcrY7.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Feb 15 04:01:42 +0000 2018](https://twitter.com/ChristopherA/status/963986652845694976)
 
@@ -967,7 +967,7 @@ Replying to [@CryptoCymro](https://twitter.com/bitgeiniog/status/966095779336245
 
 > Our biggest fans this week: @TuurDemeester, @BrendanEich, @theonevortex. Thank you! via [https://sumall.com/thankyou?utm_source=twitter&utm_medium=publishing&utm_campaign=thank_you_tweet&utm_content=text_and_media&utm_term=d0ab6b00ad990b36d99f7a0b](https://sumall.com/thankyou?utm_source=twitter&utm_medium=publishing&utm_campaign=thank_you_tweet&utm_content=text_and_media&utm_term=d0ab6b00ad990b36d99f7a0b) 
 > 
-> ![](../../media/966357176301359107-DWkwuqNVQAEDE_C.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/966357176301359107-DWkwuqNVQAEDE_C.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Feb 21 17:01:19 +0000 2018](https://twitter.com/ChristopherA/status/966357176301359107)
 
@@ -1015,7 +1015,7 @@ Replying to [@C1aranMurray](https://twitter.com/C1aranMurray/status/966486365956
 
 > My week on Twitter 🎉: 86 Mentions, 16.5K Mention Reach, 508 Likes, 165 Retweets, 793K Retweet Reach. See yours with [https://sumall.com/performancetweet?utm_source=twitter&utm_medium=publishing&utm_campaign=performance_tweet&utm_content=text_and_media&utm_term=d0ab6b00ad990b36d99f7a0b](https://sumall.com/performancetweet?utm_source=twitter&utm_medium=publishing&utm_campaign=performance_tweet&utm_content=text_and_media&utm_term=d0ab6b00ad990b36d99f7a0b) 
 > 
-> ![](../../media/966523067915800576-DWnHm4XX4AEKpoP.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/966523067915800576-DWnHm4XX4AEKpoP.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Feb 22 04:00:31 +0000 2018](https://twitter.com/ChristopherA/status/966523067915800576)
 
@@ -1217,7 +1217,7 @@ Replying to [@DougInAMug and @kevinakwok](https://twitter.com/ChristopherA/statu
 
 > RT @TuurDemeester: @ChristopherA @joncallas  
 > 
-> ![](../../media/967523119731589120-DW0gZRzVMAA3asN.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/967523119731589120-DW0gZRzVMAA3asN.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sat Feb 24 22:14:22 +0000 2018](https://twitter.com/ChristopherA/status/967523119731589120)
 
@@ -1245,7 +1245,7 @@ Replying to [@harryhalpin](https://twitter.com/harryhalpin/status/96735572074324
 
 > Digital Bazaar, long-time supporters of #RebootingWebOfTrust &amp; the W3C Credentials CG, have announced the test release of their fit-for-purpose identity blockchain [https://Veres.One](https://Veres.One) that is also ICO token-free. Article at Coinbase [https://www.coindesk.com/w3c-vets-forego-ico-government-friendly-blockchain-launch/](https://www.coindesk.com/w3c-vets-forego-ico-government-friendly-blockchain-launch/) 
 > 
-> ![](../../media/968153401610657792-DW-SYgYVQAA8Dra.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/968153401610657792-DW-SYgYVQAA8Dra.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon Feb 26 15:58:53 +0000 2018](https://twitter.com/ChristopherA/status/968153401610657792)
 
@@ -1291,7 +1291,7 @@ Replying to [@ChiefScientist](https://twitter.com/ChiefScientist/status/96824303
 
 > Our biggest fans this week: @TuurDemeester, @BrendanEich, @sbmeunier. Thank you! via [https://sumall.com/thankyou?utm_source=twitter&utm_medium=publishing&utm_campaign=thank_you_tweet&utm_content=text_and_media&utm_term=d0ab6b00ad990b36d99f7a0b](https://sumall.com/thankyou?utm_source=twitter&utm_medium=publishing&utm_campaign=thank_you_tweet&utm_content=text_and_media&utm_term=d0ab6b00ad990b36d99f7a0b) 
 > 
-> ![](../../media/968893866094088193-DXIz1fMXUAA7k6f.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/968893866094088193-DXIz1fMXUAA7k6f.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Feb 28 17:01:13 +0000 2018](https://twitter.com/ChristopherA/status/968893866094088193)
 
@@ -1323,7 +1323,7 @@ Replying to [@Beautyon_](https://twitter.com/Beautyon_/status/968437693452570624
 
 > My week on Twitter 🎉: 71 Mentions, 87.1K Mention Reach, 396 Likes, 169 Retweets, 805K Retweet Reach. See yours with [https://sumall.com/performancetweet?utm_source=twitter&utm_medium=publishing&utm_campaign=performance_tweet&utm_content=text_and_media&utm_term=d0ab6b00ad990b36d99f7a0b](https://sumall.com/performancetweet?utm_source=twitter&utm_medium=publishing&utm_campaign=performance_tweet&utm_content=text_and_media&utm_term=d0ab6b00ad990b36d99f7a0b) 
 > 
-> ![](../../media/969059759780454400-DXLKtwCUMAAngRB.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/969059759780454400-DXLKtwCUMAAngRB.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Mar 01 04:00:25 +0000 2018](https://twitter.com/ChristopherA/status/969059759780454400)
 
