--- a/_tweets-md/2018/2018-03-01-tweets.md
+++ b/_tweets-md/2018/2018-03-01-tweets.md
@@ -242,7 +242,7 @@ Replying to [@delicopsch56](https://twitter.com/@delicopsch56/status/96973650060
 
 > 👍The State of Maryland is on the verge of requiring presidential candidates to release 5 years of returns. “In exchange for power, influence, command and a place in history, a president gives up the bulk of his privacy”—Roger Mudd. Anything else is corrupting! 
 > 
-> ![](../../media/969748697956409344-DXU9Sv6U8AIvyqi.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/969748697956409344-DXU9Sv6U8AIvyqi.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sat Mar 03 01:38:01 +0000 2018](https://twitter.com/ChristopherA/status/969748697956409344)
 
@@ -268,7 +268,7 @@ Replying to [@delicopsch56](https://twitter.com/@delicopsch56/status/96973650060
 
 > RT @pwuille: At Financial Cryptography 2018 even the food needs to be quantum resistant. 
 > 
-> ![](../../media/970124386853425154-DXXriQEX4AAeoj2.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/970124386853425154-DXXriQEX4AAeoj2.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sun Mar 04 02:30:52 +0000 2018](https://twitter.com/ChristopherA/status/970124386853425154)
 
@@ -358,9 +358,9 @@ Replying to [@SarahJamieLewis](https://twitter.com/SarahJamieLewis/status/970537
 
 > On train to #RebootingWebOfTrust in Santa Barbara. 
 > 
-> ![](../../media/970764553381228544-DXjZIoVU0AAzbCb.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/970764553381228544-DXjZIoVU0AAzbCb.jpg)
 > 
-> ![](../../media/970764553381228544-DXjZIoUUQAAWw2x.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/970764553381228544-DXjZIoUUQAAWw2x.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon Mar 05 20:54:40 +0000 2018](https://twitter.com/ChristopherA/status/970764553381228544)
 
@@ -398,7 +398,7 @@ Replying to [@AlpenSheth](https://twitter.com/AlpenSheth/status/9046046096745431
 
 > 13 whitepaper &amp; specifications on decentralized identity in process at the 6th #RebootingWebOfTrust Design Workshop in Santa Barbara. [https://github.com/WebOfTrustInfo/rebooting-the-web-of-trust-spring2018/blob/master/event-documents/plenaries/06-paper-reports.md](https://github.com/WebOfTrustInfo/rebooting-the-web-of-trust-spring2018/blob/master/event-documents/plenaries/06-paper-reports.md) 
 > 
-> ![](../../media/971256217900380160-DXqYYLOW0AAmSSK.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/971256217900380160-DXqYYLOW0AAmSSK.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Mar 07 05:28:22 +0000 2018](https://twitter.com/ChristopherA/status/971256217900380160)
 
@@ -412,7 +412,7 @@ Replying to [@AlpenSheth](https://twitter.com/AlpenSheth/status/9046046096745431
 
 > Our biggest fans this week: @BrendanEich, @zooko, @pascalbouvier. Thank you! via [https://sumall.com/thankyou?utm_source=twitter&utm_medium=publishing&utm_campaign=thank_you_tweet&utm_content=text_and_media&utm_term=d0ab6b00ad990b36d99f7a0b](https://sumall.com/thankyou?utm_source=twitter&utm_medium=publishing&utm_campaign=thank_you_tweet&utm_content=text_and_media&utm_term=d0ab6b00ad990b36d99f7a0b) 
 > 
-> ![](../../media/971430597238411265-DXs2-pMWsAA26s0.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/971430597238411265-DXs2-pMWsAA26s0.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Mar 07 17:01:17 +0000 2018](https://twitter.com/ChristopherA/status/971430597238411265)
 
@@ -420,7 +420,7 @@ Replying to [@AlpenSheth](https://twitter.com/AlpenSheth/status/9046046096745431
 
 > My week on Twitter 🎉: 78 Mentions, 21K Mention Reach, 231 Likes, 64 Retweets, 373K Retweet Reach. See yours with [https://sumall.com/performancetweet?utm_source=twitter&utm_medium=publishing&utm_campaign=performance_tweet&utm_content=text_and_media&utm_term=d0ab6b00ad990b36d99f7a0b](https://sumall.com/performancetweet?utm_source=twitter&utm_medium=publishing&utm_campaign=performance_tweet&utm_content=text_and_media&utm_term=d0ab6b00ad990b36d99f7a0b) 
 > 
-> ![](../../media/971596440844881920-DXvN0AbXUAAvcsr.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/971596440844881920-DXvN0AbXUAAvcsr.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Mar 08 04:00:17 +0000 2018](https://twitter.com/ChristopherA/status/971596440844881920)
 
@@ -628,7 +628,7 @@ Replying to [@tradewithdave and @muneeb](https://twitter.com/tradewithdave/statu
 
 > Our biggest fans this week: @ChrisLundkvist, @heathervescent, @Leon_Vandenberg. Thank you! via [https://sumall.com/thankyou?utm_source=twitter&utm_medium=publishing&utm_campaign=thank_you_tweet&utm_content=text_and_media&utm_term=d0ab6b00ad990b36d99f7a0b](https://sumall.com/thankyou?utm_source=twitter&utm_medium=publishing&utm_campaign=thank_you_tweet&utm_content=text_and_media&utm_term=d0ab6b00ad990b36d99f7a0b) 
 > 
-> ![](../../media/973952137020493824-DYQsTmdW0AAq0sp.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/973952137020493824-DYQsTmdW0AAq0sp.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Mar 14 16:00:59 +0000 2018](https://twitter.com/ChristopherA/status/973952137020493824)
 
@@ -636,7 +636,7 @@ Replying to [@tradewithdave and @muneeb](https://twitter.com/tradewithdave/statu
 
 > My week on Twitter 🎉: 16 Mentions, 1.5K Mention Reach, 227 Likes, 51 Retweets, 223K Retweet Reach. See yours with [https://sumall.com/performancetweet?utm_source=twitter&utm_medium=publishing&utm_campaign=performance_tweet&utm_content=text_and_media&utm_term=d0ab6b00ad990b36d99f7a0b](https://sumall.com/performancetweet?utm_source=twitter&utm_medium=publishing&utm_campaign=performance_tweet&utm_content=text_and_media&utm_term=d0ab6b00ad990b36d99f7a0b) 
 > 
-> ![](../../media/974118085388009472-DYTDPA2U8AAM3h3.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/974118085388009472-DYTDPA2U8AAM3h3.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Mar 15 03:00:24 +0000 2018](https://twitter.com/ChristopherA/status/974118085388009472)
 
@@ -744,7 +744,7 @@ Replying to [@grittygrease and @PatrickLonga](https://twitter.com/grittygrease/s
 
 > Our biggest fans this week: @NickSzabo4, @danheld, @tonilanec. Thank you! via [https://sumall.com/thankyou?utm_source=twitter&utm_medium=publishing&utm_campaign=thank_you_tweet&utm_content=text_and_media&utm_term=d0ab6b00ad990b36d99f7a0b](https://sumall.com/thankyou?utm_source=twitter&utm_medium=publishing&utm_campaign=thank_you_tweet&utm_content=text_and_media&utm_term=d0ab6b00ad990b36d99f7a0b) 
 > 
-> ![](../../media/976488825517150209-DY0vaS9UQAAmCvP.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/976488825517150209-DY0vaS9UQAAmCvP.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Mar 21 16:00:52 +0000 2018](https://twitter.com/ChristopherA/status/976488825517150209)
 
@@ -752,7 +752,7 @@ Replying to [@grittygrease and @PatrickLonga](https://twitter.com/grittygrease/s
 
 > My week on Twitter 🎉: 38 Mentions, 3.71K Mention Reach, 77 Likes, 53 Retweets, 240K Retweet Reach. See yours with [https://sumall.com/performancetweet?utm_source=twitter&utm_medium=publishing&utm_campaign=performance_tweet&utm_content=text_and_media&utm_term=d0ab6b00ad990b36d99f7a0b](https://sumall.com/performancetweet?utm_source=twitter&utm_medium=publishing&utm_campaign=performance_tweet&utm_content=text_and_media&utm_term=d0ab6b00ad990b36d99f7a0b) 
 > 
-> ![](../../media/976654820307292160-DY3GYgTXkAY320o.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/976654820307292160-DY3GYgTXkAY320o.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Mar 22 03:00:29 +0000 2018](https://twitter.com/ChristopherA/status/976654820307292160)
 
@@ -1017,7 +1017,7 @@ Replying to [@HW and @alexbosworth](https://twitter.com/HW/status/97872582031002
 
 > Our biggest fans this week: @MadBitcoins, @flix1, @Truthcoin. Thank you! via [https://sumall.com/thankyou?utm_source=twitter&utm_medium=publishing&utm_campaign=thank_you_tweet&utm_content=text_and_media&utm_term=d0ab6b00ad990b36d99f7a0b](https://sumall.com/thankyou?utm_source=twitter&utm_medium=publishing&utm_campaign=thank_you_tweet&utm_content=text_and_media&utm_term=d0ab6b00ad990b36d99f7a0b) 
 > 
-> ![](../../media/979025530816253953-DZYyh8cVwAAsLvH.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/979025530816253953-DZYyh8cVwAAsLvH.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Mar 28 16:00:50 +0000 2018](https://twitter.com/ChristopherA/status/979025530816253953)
 
@@ -1296,7 +1296,7 @@ Replying to [@WayneVaughan](https://twitter.com/WayneVaughan/status/979755998603
 
 > #qotd: “Life is too short not to do something that matters”—@gapingvoid 
 > 
-> ![](../../media/980182271100465152-DZpOlDdUQAAINIo.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/980182271100465152-DZpOlDdUQAAINIo.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sat Mar 31 20:37:18 +0000 2018](https://twitter.com/ChristopherA/status/980182271100465152)
 
