--- a/_tweets-md/2018/2018-04-01-tweets.md
+++ b/_tweets-md/2018/2018-04-01-tweets.md
@@ -48,7 +48,7 @@ time:  23:59:59 +0000
 
 > Squirrel Mohawk? 
 > 
-> ![](../../media/980617138304987136-DZvaFZqV4AEl6cE.jpg)
+> ![980617138304987136-DZvaFZqV4AEl6cE]({{ site.url }}{{ site.baseurl }}/assets/images/media/980617138304987136-DZvaFZqV4AEl6cE.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon Apr 02 01:25:19 +0000 2018](https://twitter.com/ChristopherA/status/980617138304987136)
 
@@ -446,7 +446,7 @@ Replying to [@amigus and @tristanhoy](https://twitter.com/amigus/status/98140037
 
 > Our biggest fans this week: @peterktodd, @eric_lombrozo, @PatriceinMilano. Thank you! via [https://sumall.com/thankyou?utm_source=twitter&utm_medium=publishing&utm_campaign=thank_you_tweet&utm_content=text_and_media&utm_term=d0ab6b00ad990b36d99f7a0b](https://sumall.com/thankyou?utm_source=twitter&utm_medium=publishing&utm_campaign=thank_you_tweet&utm_content=text_and_media&utm_term=d0ab6b00ad990b36d99f7a0b) 
 > 
-> ![](../../media/981562265244786689-DZ81rTjX4AAysjV.jpg)
+> ![981562265244786689-DZ81rTjX4AAysjV]({{ site.url }}{{ site.baseurl }}/assets/images/media/981562265244786689-DZ81rTjX4AAysjV.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Apr 04 16:00:55 +0000 2018](https://twitter.com/ChristopherA/status/981562265244786689)
 
@@ -896,7 +896,7 @@ Replying to [@jpm3492](https://twitter.com/jpm3492/status/983555144435429376)
 
 > RT @alexbosworth: Lighting Mainnet [https://lnd3.vanilla.co.za/multinodegraphs/index.html](https://lnd3.vanilla.co.za/multinodegraphs/index.html) it's full of stars 
 > 
-> <video controls><source src="../../media/983827486923304960-K60PfVUO17GfXbxE.mp4">Your browser does not support the video tag.</video>
+> <video controls><source src="{{ site.url }}{{ site.baseurl }}/assets/images/media/983827486923304960-K60PfVUO17GfXbxE.mp4">Your browser does not support the video tag.</video>
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Apr 10 22:02:06 +0000 2018](https://twitter.com/ChristopherA/status/983827486923304960)
 
@@ -942,7 +942,7 @@ Replying to [@taktoa1](https://twitter.com/taktoa1/status/983728461989732352)
 
 > Our biggest fans this week: @coindesk, @TuurDemeester, @theonevortex. Thank you! via [https://sumall.com/thankyou?utm_source=twitter&utm_medium=publishing&utm_campaign=thank_you_tweet&utm_content=text_and_media&utm_term=d0ab6b00ad990b36d99f7a0b](https://sumall.com/thankyou?utm_source=twitter&utm_medium=publishing&utm_campaign=thank_you_tweet&utm_content=text_and_media&utm_term=d0ab6b00ad990b36d99f7a0b) 
 > 
-> ![](../../media/984098951484903430-Dag4x6-W4AAj3LX.jpg)
+> ![984098951484903430-Dag4x6-W4AAj3LX]({{ site.url }}{{ site.baseurl }}/assets/images/media/984098951484903430-Dag4x6-W4AAj3LX.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Apr 11 16:00:48 +0000 2018](https://twitter.com/ChristopherA/status/984098951484903430)
 
@@ -1014,7 +1014,7 @@ Replying to [@dasource_](https://twitter.com/dasource_/status/984139589765001216
 
 > True! “Scarce resources in crypto right now are talent, attention, and credibility, not money or agility”—@Melt_Dem [https://www.slideshare.net/mobile/DCGCo/playing-the-game-the-nature-of-competition-among-blockchain-networks](https://www.slideshare.net/mobile/DCGCo/playing-the-game-the-nature-of-competition-among-blockchain-networks) 
 > 
-> ![](../../media/984204418257006592-DaiYspuVwAA6hep.jpg)
+> ![984204418257006592-DaiYspuVwAA6hep]({{ site.url }}{{ site.baseurl }}/assets/images/media/984204418257006592-DaiYspuVwAA6hep.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Apr 11 22:59:53 +0000 2018](https://twitter.com/ChristopherA/status/984204418257006592)
 
@@ -1084,7 +1084,7 @@ Replying to [@orionwl, @alfiedotwtf, @least_nathan, @johanssonlc, @flck and @mat
 >   
 > see: Carlo M. Cippola 
 > 
-> ![](../../media/984537403028209665-DamVKnWVwAAXhO0.jpg)
+> ![984537403028209665-DamVKnWVwAAXhO0]({{ site.url }}{{ site.baseurl }}/assets/images/media/984537403028209665-DamVKnWVwAAXhO0.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Apr 12 21:03:03 +0000 2018](https://twitter.com/ChristopherA/status/984537403028209665)
 
@@ -1164,9 +1164,9 @@ Replying to [@WayneVaughan](https://twitter.com/WayneVaughan/status/984826503354
 
 > I was a source for an article about refugees &amp; self-sovereign identity in this week’s @techreview “Blockchains, Allen told me, are critical to such identity systems because they solve previously ‘unsolvable’ problems.” [https://www.technologyreview.com/s/610806/inside-the-jordan-refugee-camp-that-runs-on-blockchain/](https://www.technologyreview.com/s/610806/inside-the-jordan-refugee-camp-that-runs-on-blockchain/) 
 > 
-> ![](../../media/984935137665142785-DasxR5fVwAAt5bR.jpg)
+> ![984935137665142785-DasxR5fVwAAt5bR]({{ site.url }}{{ site.baseurl }}/assets/images/media/984935137665142785-DasxR5fVwAAt5bR.jpg)
 > 
-> ![](../../media/984935137665142785-DasxR5hU0AAtgYR.jpg)
+> ![984935137665142785-DasxR5hU0AAtgYR]({{ site.url }}{{ site.baseurl }}/assets/images/media/984935137665142785-DasxR5hU0AAtgYR.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri Apr 13 23:23:30 +0000 2018](https://twitter.com/ChristopherA/status/984935137665142785)
 
@@ -1467,7 +1467,7 @@ Replying to [@timpastoor](https://twitter.com/ChristopherA/status/98591409337355
 > At tomorrow’s weekly call of the W3C Credentials CG at 9am PDT (12 noon EDT) cryptographer @JanCamenisch will be presenting on ZKLang, a language for proving identity claims in a privacy-preserving way (using zero-knowledge proofs) #SmartSignatures:  
 > [https://lists.w3.org/Archives/Public/public-credentials/2018Apr/0077.html](https://lists.w3.org/Archives/Public/public-credentials/2018Apr/0077.html) 
 > 
-> ![](../../media/986049687856734208-Da8m9XhVwAUpvaj.jpg)
+> ![986049687856734208-Da8m9XhVwAUpvaj]({{ site.url }}{{ site.baseurl }}/assets/images/media/986049687856734208-Da8m9XhVwAUpvaj.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Apr 17 01:12:20 +0000 2018](https://twitter.com/ChristopherA/status/986049687856734208)
 
@@ -1569,7 +1569,7 @@ Replying to [@MoeCrypto3 and @haydentiff](https://twitter.com/MoeCrypto3/status/
 
 > The updated slides from @JanCamenisch's ZKLang talk at today's W3C Credentials CG meeting. [https://github.com/w3c-ccg/meetings/blob/gh-pages/2018-04-17/zklang.ccg-presentation.2018.04.17.pdf](https://github.com/w3c-ccg/meetings/blob/gh-pages/2018-04-17/zklang.ccg-presentation.2018.04.17.pdf) 
 > 
-> ![](../../media/986279365339103233-Da_3aqfU8AI3zXL.jpg)
+> ![986279365339103233-Da_3aqfU8AI3zXL]({{ site.url }}{{ site.baseurl }}/assets/images/media/986279365339103233-Da_3aqfU8AI3zXL.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Apr 17 16:24:59 +0000 2018](https://twitter.com/ChristopherA/status/986279365339103233)
 
@@ -1599,7 +1599,7 @@ Replying to [@VitalikButerin](https://twitter.com/VitalikButerin/status/98610115
 
 > Here is an artistic CNC plywood wall for an open area in an office that is not only aesthetically pleasing, works both to moderate noise and offer interesting non-direct ambient lighting. If you live in an area with a tech shop you can design the pattern yourself. #officedesign 
 > 
-> ![](../../media/986419333877284864-DbB3I2dU0AE0a2V.jpg)
+> ![986419333877284864-DbB3I2dU0AE0a2V]({{ site.url }}{{ site.baseurl }}/assets/images/media/986419333877284864-DbB3I2dU0AE0a2V.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Apr 18 01:41:10 +0000 2018](https://twitter.com/ChristopherA/status/986419333877284864)
 
@@ -1629,7 +1629,7 @@ Replying to [@jonspock and @JanCamenisch](https://twitter.com/@jonspock/status/9
 
 > Our biggest fans this week: @aantonop, @el33th4xor, @pmedina. Thank you! via [https://sumall.com/thankyou?utm_source=twitter&utm_medium=publishing&utm_campaign=thank_you_tweet&utm_content=text_and_media&utm_term=d0ab6b00ad990b36d99f7a0b](https://sumall.com/thankyou?utm_source=twitter&utm_medium=publishing&utm_campaign=thank_you_tweet&utm_content=text_and_media&utm_term=d0ab6b00ad990b36d99f7a0b) 
 > 
-> ![](../../media/986635653730504704-DbE75caUQAAm--Z.jpg)
+> ![986635653730504704-DbE75caUQAAm--Z]({{ site.url }}{{ site.baseurl }}/assets/images/media/986635653730504704-DbE75caUQAAm--Z.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Apr 18 16:00:45 +0000 2018](https://twitter.com/ChristopherA/status/986635653730504704)
 
@@ -1671,7 +1671,7 @@ Replying to [@CarrascosaCris_](https://twitter.com/ChristopherA/status/986689267
 
 > RT @AlexisAiono: Only in San Francisco 
 > 
-> ![](../../media/986763097661517824-DbBVYF8U0AAj9Ou.jpg)
+> ![986763097661517824-DbBVYF8U0AAj9Ou]({{ site.url }}{{ site.baseurl }}/assets/images/media/986763097661517824-DbBVYF8U0AAj9Ou.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Apr 19 00:27:10 +0000 2018](https://twitter.com/ChristopherA/status/986763097661517824)
 
@@ -1767,7 +1767,7 @@ Replying to [@WeathermanIam and @saifedean](https://twitter.com/JWWeatherman_/st
 
 > RT @Data_Visual_: The sound of birds visualized: [http://designawards.core77.com/Visual-Communication/30854/Chirming](http://designawards.core77.com/Visual-Communication/30854/Chirming) 
 > 
-> ![](../../media/986838577593040896-DbAbu99X0AATKlj.jpg)
+> ![986838577593040896-DbAbu99X0AATKlj]({{ site.url }}{{ site.baseurl }}/assets/images/media/986838577593040896-DbAbu99X0AATKlj.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Apr 19 05:27:06 +0000 2018](https://twitter.com/ChristopherA/status/986838577593040896)
 
@@ -1863,7 +1863,7 @@ Replying to [@aeliasnet and @dustyweb](https://twitter.com/aeliasnet/status/9870
 
 > RT @jimmysong: 33 more devs trained. Biggest class yet! Thank you @jmcorgan and Shannon for being TAs! 
 > 
-> ![](../../media/987230362811052032-DbHF7dOUwAAO0to.jpg)
+> ![987230362811052032-DbHF7dOUwAAO0to]({{ site.url }}{{ site.baseurl }}/assets/images/media/987230362811052032-DbHF7dOUwAAO0to.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri Apr 20 07:23:55 +0000 2018](https://twitter.com/ChristopherA/status/987230362811052032)
 
@@ -1949,9 +1949,9 @@ Replying to [@michaelfolkson](https://twitter.com/michaelfolkson/status/98736780
 
 > @tarah Just off the top of your head last night you listed a few Noir stereotypes, some of which were missing from my game deck. Think you can recap them? 
 > 
-> ![](../../media/988140217952387072-DbaURNzUwAApMbP.jpg)
+> ![988140217952387072-DbaURNzUwAApMbP]({{ site.url }}{{ site.baseurl }}/assets/images/media/988140217952387072-DbaURNzUwAApMbP.jpg)
 > 
-> ![](../../media/988140217952387072-DbaURNzU0AALsrz.jpg)
+> ![988140217952387072-DbaURNzU0AALsrz]({{ site.url }}{{ site.baseurl }}/assets/images/media/988140217952387072-DbaURNzU0AALsrz.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sun Apr 22 19:39:21 +0000 2018](https://twitter.com/ChristopherA/status/988140217952387072)
 
@@ -1980,7 +1980,7 @@ Replying to [@OliviaLovenmark](https://twitter.com/OliviaLovenmark/status/988451
 
 > Understanding “pseudonym parties” is on my “to investigate” list before next #RebootingWebOfTrust. I never liked PGP signing parties — to much social pressure to sign other keys. But for “proof of unique person” could be useful. @brynosaurus [http://bford.info/log/2018/0423-ieeesb-blockchain.pdf](http://bford.info/log/2018/0423-ieeesb-blockchain.pdf) 
 > 
-> ![](../../media/988587331119562752-Dbgq7-2VQAEIC4W.jpg)
+> ![988587331119562752-Dbgq7-2VQAEIC4W]({{ site.url }}{{ site.baseurl }}/assets/images/media/988587331119562752-Dbgq7-2VQAEIC4W.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Apr 24 01:16:01 +0000 2018](https://twitter.com/ChristopherA/status/988587331119562752)
 
@@ -2520,7 +2520,7 @@ Replying to [@danielselman](https://twitter.com/danielselman/status/989150773228
 
 > Our biggest fans this week: @BrendanEich, @stacyherbert, @BKBrianKelly. Thank you! via [https://sumall.com/thankyou?utm_source=twitter&utm_medium=publishing&utm_campaign=thank_you_tweet&utm_content=text_and_media&utm_term=d0ab6b00ad990b36d99f7a0b](https://sumall.com/thankyou?utm_source=twitter&utm_medium=publishing&utm_campaign=thank_you_tweet&utm_content=text_and_media&utm_term=d0ab6b00ad990b36d99f7a0b) 
 > 
-> ![](../../media/989172409482739714-Dbo_ED3VwAAuE9b.jpg)
+> ![989172409482739714-Dbo_ED3VwAAuE9b]({{ site.url }}{{ site.baseurl }}/assets/images/media/989172409482739714-Dbo_ED3VwAAuE9b.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Apr 25 16:00:55 +0000 2018](https://twitter.com/ChristopherA/status/989172409482739714)
 
