--- a/_tweets-md/2018/2018-05-01-tweets.md
+++ b/_tweets-md/2018/2018-05-01-tweets.md
@@ -6,9 +6,9 @@ time:  23:59:59 +0000
 
 > Didn’t expect this—maybe most Republicans I know tend Liberatarian. “We saw that in general Democrats have a higher concern across an array of scenarios about the use of their data, Republicans are in general less concerned about those practices.” #privacy [https://www.nytimes.com/2018/04/30/technology/privacy-concerns-politics.html](https://www.nytimes.com/2018/04/30/technology/privacy-concerns-politics.html) 
 > 
-> ![](../../media/991331938546806784-DcHrI_xUwAAZQ_7.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/991331938546806784-DcHrI_xUwAAZQ_7.jpg)
 > 
-> ![](../../media/991331938546806784-DcHrI_xV0AAjIEf.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/991331938546806784-DcHrI_xV0AAjIEf.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue May 01 15:02:06 +0000 2018](https://twitter.com/ChristopherA/status/991331938546806784)
 
@@ -71,7 +71,7 @@ Replying to [@trentmc0, @DimitriDeJonghe and @gongfang2008](https://twitter.com/
 
 > Our biggest fans this week: @TuurDemeester, @BrendanEich, @twobitidiot. Thank you! via [https://sumall.com/thankyou?utm_source=twitter&utm_medium=publishing&utm_campaign=thank_you_tweet&utm_content=text_and_media&utm_term=d0ab6b00ad990b36d99f7a0b](https://sumall.com/thankyou?utm_source=twitter&utm_medium=publishing&utm_campaign=thank_you_tweet&utm_content=text_and_media&utm_term=d0ab6b00ad990b36d99f7a0b) 
 > 
-> ![](../../media/991710127970451456-DcNDGuJWAAAA_Pl.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/991710127970451456-DcNDGuJWAAAA_Pl.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed May 02 16:04:54 +0000 2018](https://twitter.com/ChristopherA/status/991710127970451456)
 
@@ -690,7 +690,7 @@ Replying to [@davewiner](https://twitter.com/davewiner/status/993994595146108928
 
 > Our biggest fans this week: @peterktodd, @el33th4xor, @prestonjbyrne. Thank you! via [https://sumall.com/thankyou?utm_source=twitter&utm_medium=publishing&utm_campaign=thank_you_tweet&utm_content=text_and_media&utm_term=d0ab6b00ad990b36d99f7a0b](https://sumall.com/thankyou?utm_source=twitter&utm_medium=publishing&utm_campaign=thank_you_tweet&utm_content=text_and_media&utm_term=d0ab6b00ad990b36d99f7a0b) 
 > 
-> ![](../../media/994245812174520322-DcxFS8xX0AARdCU.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/994245812174520322-DcxFS8xX0AARdCU.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed May 09 16:00:48 +0000 2018](https://twitter.com/ChristopherA/status/994245812174520322)
 
@@ -742,7 +742,7 @@ Replying to [@davewiner](https://twitter.com/davewiner/status/993994595146108928
 
 > RT @mashable: Meet the most experienced female space walker 
 > 
-> <video controls><source src="../../media/994284249044865024-v90BR4rTjsNEZllR.mp4">Your browser does not support the video tag.</video>
+> <video controls><source src="{{ site.url }}{{ site.baseurl }}/assets/images/media/994284249044865024-v90BR4rTjsNEZllR.mp4">Your browser does not support the video tag.</video>
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed May 09 18:33:32 +0000 2018](https://twitter.com/ChristopherA/status/994284249044865024)
 
@@ -1074,7 +1074,7 @@ Replying to [@anotherday____, @iang_fc, @MarkFriedenbach, @zooko, @obreahny and 
 
 > RT @timpastoor: @ChristopherA Reminds me of: 
 > 
-> ![](../../media/995835225820119040-CqowT91WIAAbn1N.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/995835225820119040-CqowT91WIAAbn1N.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon May 14 01:16:34 +0000 2018](https://twitter.com/ChristopherA/status/995835225820119040)
 
@@ -1170,7 +1170,7 @@ Replying to [@kevinakwok and @calcsam](https://twitter.com/ChristopherA/status/9
 
 > Our biggest fans this week: @davewiner, @dangillmor, @zooko. Thank you! via [https://sumall.com/thankyou?utm_source=twitter&utm_medium=publishing&utm_campaign=thank_you_tweet&utm_content=text_and_media&utm_term=d0ab6b00ad990b36d99f7a0b](https://sumall.com/thankyou?utm_source=twitter&utm_medium=publishing&utm_campaign=thank_you_tweet&utm_content=text_and_media&utm_term=d0ab6b00ad990b36d99f7a0b) 
 > 
-> ![](../../media/996782556719865856-DdVIc6RXkAAECQ-.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/996782556719865856-DdVIc6RXkAAECQ-.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed May 16 16:00:55 +0000 2018](https://twitter.com/ChristopherA/status/996782556719865856)
 
@@ -1266,7 +1266,7 @@ Replying to [@MarkFriedenbach, @muneeb and @zapnap](https://twitter.com/fodagut/
 
 > RT @theyblinked: “People should not have to choose self-sovereignty. It must be the default.” -@NSmolenski #3CLMT 
 > 
-> ![](../../media/997592657189732352-DddkVKdXkAEWIZZ.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/997592657189732352-DddkVKdXkAEWIZZ.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri May 18 21:39:58 +0000 2018](https://twitter.com/ChristopherA/status/997592657189732352)
 
@@ -1280,7 +1280,7 @@ Replying to [@MarkFriedenbach, @muneeb and @zapnap](https://twitter.com/fodagut/
 
 > RT @jimmysong: Programming Blockchain New York is done! 37 new devs! 
 > 
-> ![](../../media/997593668939792384-Ddgnap_VQAA7XZX.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/997593668939792384-Ddgnap_VQAA7XZX.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri May 18 21:43:59 +0000 2018](https://twitter.com/ChristopherA/status/997593668939792384)
 
@@ -1363,7 +1363,7 @@ Replying to [@DanielSolis](https://twitter.com/DanielSolis/status/99818882176534
 > RT @danheld: Beginner: I know nothing  
 > Expert: I know nothing 
 > 
-> ![](../../media/998409609118343169-DdkxdPOU0AE-_HP.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/998409609118343169-DdkxdPOU0AE-_HP.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon May 21 03:46:15 +0000 2018](https://twitter.com/ChristopherA/status/998409609118343169)
 
@@ -1471,7 +1471,7 @@ Replying to [@SDLerner and @MarkFriedenbach](https://twitter.com/SDLerner/status
 
 > RT @chriseng: (paraphrase) "Things like BGP, DNS, and SSL have become personal safety issues." @dotMudge #l0pht20 
 > 
-> ![](../../media/999162994092228608-Dd05ysIUwAAc5sV.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/999162994092228608-Dd05ysIUwAAc5sV.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed May 23 05:39:55 +0000 2018](https://twitter.com/ChristopherA/status/999162994092228608)
 
@@ -1486,7 +1486,7 @@ Replying to [@SDLerner and @MarkFriedenbach](https://twitter.com/SDLerner/status
 
 > Our biggest fans this week: @MadBitcoins, @theonevortex, @Xentagz. Thank you! via [https://sumall.com/thankyou?utm_source=twitter&utm_medium=publishing&utm_campaign=thank_you_tweet&utm_content=text_and_media&utm_term=d0ab6b00ad990b36d99f7a0b](https://sumall.com/thankyou?utm_source=twitter&utm_medium=publishing&utm_campaign=thank_you_tweet&utm_content=text_and_media&utm_term=d0ab6b00ad990b36d99f7a0b) 
 > 
-> ![](../../media/999319205412528128-Dd5LhSRU8AApeyI.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/999319205412528128-Dd5LhSRU8AApeyI.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed May 23 16:00:39 +0000 2018](https://twitter.com/ChristopherA/status/999319205412528128)
 
@@ -1681,7 +1681,7 @@ Replying to [@VladZamfir](https://twitter.com/VladZamfir/status/1001439767299592
 
 > Our biggest fans this week: @TuurDemeester, @CaitlinLong_, @Lambo. Thank you! via [https://sumall.com/thankyou?utm_source=twitter&utm_medium=publishing&utm_campaign=thank_you_tweet&utm_content=text_and_media&utm_term=d0ab6b00ad990b36d99f7a0b](https://sumall.com/thankyou?utm_source=twitter&utm_medium=publishing&utm_campaign=thank_you_tweet&utm_content=text_and_media&utm_term=d0ab6b00ad990b36d99f7a0b) 
 > 
-> ![](../../media/1001856095495839744-DedOzxcUwAAQvLn.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/1001856095495839744-DedOzxcUwAAQvLn.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed May 30 16:01:21 +0000 2018](https://twitter.com/ChristopherA/status/1001856095495839744)
 
