--- a/_tweets-md/2018/2018-06-01-tweets.md
+++ b/_tweets-md/2018/2018-06-01-tweets.md
@@ -60,13 +60,13 @@ Replying to [@katherineykwu](https://twitter.com/katherineykwu/status/1002660312
 
 > I taught about knowledge management &amp; information overload in tech leadership program in MBA. A) choose a context, allocate specific time in advance (no more!) B) 15% SCAN in context, maybe bookmark, but don’t read. C) 50% FOCUS read best of scan. D) 35% ACT take notes, share. 
 > 
-> ![](../../media/1002994188651098112-DetZ5ABU8AAQ09c.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/1002994188651098112-DetZ5ABU8AAQ09c.jpg)
 > 
-> ![](../../media/1002994188651098112-DetZ5AAU0AAPNkz.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/1002994188651098112-DetZ5AAU0AAPNkz.jpg)
 > 
-> ![](../../media/1002994188651098112-DetZ5AAU0AEXLfQ.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/1002994188651098112-DetZ5AAU0AEXLfQ.jpg)
 > 
-> ![](../../media/1002994188651098112-DetZ5AAVAAAQVcw.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/1002994188651098112-DetZ5AAVAAAQVcw.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sat Jun 02 19:23:43 +0000 2018](https://twitter.com/ChristopherA/status/1002994188651098112)
 
@@ -288,7 +288,7 @@ Replying to [@TaxMasterTax and @stephendpalley](https://twitter.com/TaxMasterTax
 
 > Our biggest fans this week: @pierre_rochard, @socialboostclub, @MrHodl. Thank you! via [https://sumall.com/thankyou?utm_source=twitter&utm_medium=publishing&utm_campaign=thank_you_tweet&utm_content=text_and_media&utm_term=d0ab6b00ad990b36d99f7a0b](https://sumall.com/thankyou?utm_source=twitter&utm_medium=publishing&utm_campaign=thank_you_tweet&utm_content=text_and_media&utm_term=d0ab6b00ad990b36d99f7a0b) 
 > 
-> ![](../../media/1004392728531267584-DfBR3OyWAAIYAyn.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/1004392728531267584-DfBR3OyWAAIYAyn.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Jun 06 16:01:01 +0000 2018](https://twitter.com/ChristopherA/status/1004392728531267584)
 
@@ -473,7 +473,7 @@ Replying to [@dan_mi_sun, @whimful and @pietgeursen](https://twitter.com/dan_mi_
 
 > RT @sehnaoui: Theory in progress: The world is a cat, playing with Australia. 
 > 
-> ![](../../media/1005876239981133824-DfQTd6vX4AEjmI7.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/1005876239981133824-DfQTd6vX4AEjmI7.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sun Jun 10 18:15:58 +0000 2018](https://twitter.com/ChristopherA/status/1005876239981133824)
 
@@ -612,7 +612,7 @@ Replying to [@hjarche and @JenniferSertl](https://twitter.com/hjarche/status/100
 
 > I also like Michelle DeMarco’s model for “Six Enduring Desires” which are Meaning, Purpose, Value, Connection, Resilience &amp; Transcendence — drawn from her research on what people in multiple cultures will sacrifice Maslow’s Needs in order to have: 
 > 
-> ![](../../media/1006704222346231809-DfiIJvsU8AIYs1-.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/1006704222346231809-DfiIJvsU8AIYs1-.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Jun 13 01:06:04 +0000 2018](https://twitter.com/ChristopherA/status/1006704222346231809)
 
@@ -644,7 +644,7 @@ Replying to [@hjarche and @JenniferSertl](https://twitter.com/hjarche/status/100
 
 > Our biggest fans this week: @twobitidiot, @mclynd, @theonevortex. Thank you! via [https://sumall.com/thankyou?utm_source=twitter&utm_medium=publishing&utm_campaign=thank_you_tweet&utm_content=text_and_media&utm_term=d0ab6b00ad990b36d99f7a0b](https://sumall.com/thankyou?utm_source=twitter&utm_medium=publishing&utm_campaign=thank_you_tweet&utm_content=text_and_media&utm_term=d0ab6b00ad990b36d99f7a0b) 
 > 
-> ![](../../media/1006929402175852544-DflU9EzW0AA9LUW.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/1006929402175852544-DflU9EzW0AA9LUW.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Jun 13 16:00:51 +0000 2018](https://twitter.com/ChristopherA/status/1006929402175852544)
 
@@ -936,7 +936,7 @@ Replying to [@BryceWeiner](https://twitter.com/BryceWeiner/status/10093367030545
 
 > Our biggest fans this week: @doctorow, @TuurDemeester, @MadBitcoins. Thank you! via [https://sumall.com/thankyou?utm_source=twitter&utm_medium=publishing&utm_campaign=thank_you_tweet&utm_content=text_and_media&utm_term=d0ab6b00ad990b36d99f7a0b](https://sumall.com/thankyou?utm_source=twitter&utm_medium=publishing&utm_campaign=thank_you_tweet&utm_content=text_and_media&utm_term=d0ab6b00ad990b36d99f7a0b) 
 > 
-> ![](../../media/1009466206984769537-DgJYKkLU8AEEA6G.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/1009466206984769537-DgJYKkLU8AEEA6G.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Jun 20 16:01:13 +0000 2018](https://twitter.com/ChristopherA/status/1009466206984769537)
 
@@ -1060,9 +1060,9 @@ Replying to [@Truthcoin, @droplister, @miketwenty1, @brucefenton and @WayneVaugh
 
 > I studied groupware argumentation systems like IBIS &amp; gIBIS back in the pre-Internet 80’s, used for things like Y/N on rocket launches. I have been surprised that there have not been more modern versions. This one looks interesting: @KialoHQ [https://www.kialo.com/tour/](https://www.kialo.com/tour/) 
 > 
-> ![](../../media/1009891317495705600-DgPazLAUEAA8Cow.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/1009891317495705600-DgPazLAUEAA8Cow.jpg)
 > 
-> ![](../../media/1009891317495705600-DgPazK-UwAEOXAr.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/1009891317495705600-DgPazK-UwAEOXAr.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Jun 21 20:10:27 +0000 2018](https://twitter.com/ChristopherA/status/1009891317495705600)
 
@@ -1367,7 +1367,7 @@ Replying to [@BryceWeiner](https://twitter.com/BryceWeiner/status/10110681629371
 
 > RT @EFF: How secure is your email service provider? Try the STARTTLS checker at [https://starttls-everywhere.org](https://starttls-everywhere.org) 
 > 
-> <video controls><source src="../../media/1011383152416206848-DgkPj8sUcAAlw03.mp4">Your browser does not support the video tag.</video>
+> <video controls><source src="{{ site.url }}{{ site.baseurl }}/assets/images/media/1011383152416206848-DgkPj8sUcAAlw03.mp4">Your browser does not support the video tag.</video>
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon Jun 25 22:58:28 +0000 2018](https://twitter.com/ChristopherA/status/1011383152416206848)
 
@@ -1391,7 +1391,7 @@ Replying to [@boscolochris](https://twitter.com/boscolochris/status/101166374058
 >   
 > #Artikel13 
 > 
-> ![](../../media/1011764471998529536-DgIIIBNX0AEf6qc.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/1011764471998529536-DgIIIBNX0AEf6qc.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Jun 27 00:13:42 +0000 2018](https://twitter.com/ChristopherA/status/1011764471998529536)
 
@@ -1485,7 +1485,7 @@ Replying to [@bramcohen and @Twitter](https://twitter.com/bramcohen/status/10116
 
 > Our biggest fans this week: @NickSzabo4, @BrendanEich, @theonevortex. Thank you! via [https://sumall.com/thankyou?utm_source=twitter&utm_medium=publishing&utm_campaign=thank_you_tweet&utm_content=text_and_media&utm_term=d0ab6b00ad990b36d99f7a0b](https://sumall.com/thankyou?utm_source=twitter&utm_medium=publishing&utm_campaign=thank_you_tweet&utm_content=text_and_media&utm_term=d0ab6b00ad990b36d99f7a0b) 
 > 
-> ![](../../media/1012002828473262080-DgtbNXsX4AA2I1e.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/1012002828473262080-DgtbNXsX4AA2I1e.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Jun 27 16:00:51 +0000 2018](https://twitter.com/ChristopherA/status/1012002828473262080)
 
@@ -1658,7 +1658,7 @@ Replying to [@IdentityWoman, @aalexis1234, @annie_parker, @AmberBaldet, @angela_
 
 > BIP174 “Partially Signed Bitcoin Transaction Format” here is an example of the 2 of 3 multisig workflow. Once implemented, any wallet supporting BIP174 can be a party to a multisig transaction — you don’t need to all be using the same software. [https://github.com/bitcoin/bips/blob/master/bip-0174.mediawiki](https://github.com/bitcoin/bips/blob/master/bip-0174.mediawiki) 
 > 
-> ![](../../media/1012488864299008000-Dg0VQBqUwAAk4bk.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/1012488864299008000-Dg0VQBqUwAAk4bk.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri Jun 29 00:12:11 +0000 2018](https://twitter.com/ChristopherA/status/1012488864299008000)
 
@@ -1706,7 +1706,7 @@ Replying to [@_jillruth](https://twitter.com/jillrgunter/status/1012580888306241
 
 > Celebrating #HarlanEllison’s life, here is Harlan’s Hawk (actually a dark subspecies of Red-Tailed Hawk) screaming at the world until he is recognized for being right. [http://www.featheredphotography.com/blog/2013/01/20/harlans-hawk/](http://www.featheredphotography.com/blog/2013/01/20/harlans-hawk/)  (video taken in my backyard today) 
 > 
-> <video controls><source src="../../media/1012895689276194816-TacdBHXenQVQT-z9.mp4">Your browser does not support the video tag.</video>
+> <video controls><source src="{{ site.url }}{{ site.baseurl }}/assets/images/media/1012895689276194816-TacdBHXenQVQT-z9.mp4">Your browser does not support the video tag.</video>
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sat Jun 30 03:08:45 +0000 2018](https://twitter.com/ChristopherA/status/1012895689276194816)
 
