--- a/_tweets-md/2018/2018-07-01-tweets.md
+++ b/_tweets-md/2018/2018-07-01-tweets.md
@@ -52,7 +52,7 @@ Replying to [@aalexis1234 and @BobSummerwill](https://twitter.com/AlisonbobEth/s
 
 > Our biggest fans this week: @pierre_rochard, @giacomozucco, @bitstein. Thank you! via [https://sumall.com/thankyou?utm_source=twitter&utm_medium=publishing&utm_campaign=thank_you_tweet&utm_content=text_and_media&utm_term=d0ab6b00ad990b36d99f7a0b](https://sumall.com/thankyou?utm_source=twitter&utm_medium=publishing&utm_campaign=thank_you_tweet&utm_content=text_and_media&utm_term=d0ab6b00ad990b36d99f7a0b) 
 > 
-> ![](../../media/1014539591494316032-DhReYY-X4AAJx6p.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/1014539591494316032-DhReYY-X4AAJx6p.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Jul 04 16:01:02 +0000 2018](https://twitter.com/ChristopherA/status/1014539591494316032)
 
@@ -319,7 +319,7 @@ Replying to [@DanielSolis](https://twitter.com/DanielSolis/status/10164161255449
 
 > “To act jointly, we journey from disparate places to a coherent, collective sense of what is real, what we desire &amp; what we will do to accomplish it. Group alignment emerges through conversations that generate shared stories, understandings &amp; decisions.” [http://groupworksdeck.org/patterns/Moving_toward_Alignment](http://groupworksdeck.org/patterns/Moving_toward_Alignment) 
 > 
-> ![](../../media/1016456053452464128-DhstZDzUcAAKFNx.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/1016456053452464128-DhstZDzUcAAKFNx.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon Jul 09 22:56:22 +0000 2018](https://twitter.com/ChristopherA/status/1016456053452464128)
 
@@ -345,7 +345,7 @@ Replying to [@DanielSolis](https://twitter.com/DanielSolis/status/10164161255449
 
 > My long-time co-author @Appelcline &amp; I have turned in our manuscript for “Meeples Together” on design &amp; theory of collaborative tabletop games, to be published by @GamePlayWright. Hopefully first in series. Here is a photo from our early re-design of Arkham Horror 15+ years ago! 
 > 
-> ![](../../media/1016497453774745600-DhtTCpaUYAA6Ljr.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/1016497453774745600-DhtTCpaUYAA6Ljr.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Jul 10 01:40:53 +0000 2018](https://twitter.com/ChristopherA/status/1016497453774745600)
 
@@ -429,7 +429,7 @@ Replying to [@windley and @Subhashish30](https://twitter.com/windley/status/1016
 
 > “Consciously decide to give more attention to where we agree than where we don't. By tuning in to what we share, we find the way to make progress together.” #GroupWorks [https://groupworksdeck.org/patterns/Common_Ground](https://groupworksdeck.org/patterns/Common_Ground) 
 > 
-> ![](../../media/1016738307886047232-DhwuGYfVQAA46KW.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/1016738307886047232-DhwuGYfVQAA46KW.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Jul 10 17:37:57 +0000 2018](https://twitter.com/ChristopherA/status/1016738307886047232)
 
@@ -491,7 +491,7 @@ Replying to [@hrdwrknvrstps](https://twitter.com/hrdwrknvrstps/status/1016871786
 
 > Our biggest fans this week: @theonevortex, @pierre_rochard, @giacomozucco. Thank you! via [https://sumall.com/thankyou?utm_source=twitter&utm_medium=publishing&utm_campaign=thank_you_tweet&utm_content=text_and_media&utm_term=d0ab6b00ad990b36d99f7a0b](https://sumall.com/thankyou?utm_source=twitter&utm_medium=publishing&utm_campaign=thank_you_tweet&utm_content=text_and_media&utm_term=d0ab6b00ad990b36d99f7a0b) 
 > 
-> ![](../../media/1017076329353826304-Dh1hh4hXUAYVOdm.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/1017076329353826304-Dh1hh4hXUAYVOdm.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Jul 11 16:01:07 +0000 2018](https://twitter.com/ChristopherA/status/1017076329353826304)
 
@@ -527,7 +527,7 @@ Replying to [@jdegoes and @prezcannady](https://twitter.com/jdegoes/status/10174
 
 > “Shepherding a group discussion includes discerning when the group needs a wider view vs. when to sink down into the details. Zoom out to see vision, patterns, and overall trends; zoom in for examples, specific data, and other particulars.” [https://groupworksdeck.org/patterns/Seeing_the_Forest_Seeing_the_Trees](https://groupworksdeck.org/patterns/Seeing_the_Forest_Seeing_the_Trees) #GroupWorks 
 > 
-> ![](../../media/1017482482948509696-Dh7S7BgU8AAgMUB.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/1017482482948509696-Dh7S7BgU8AAgMUB.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Jul 12 18:55:02 +0000 2018](https://twitter.com/ChristopherA/status/1017482482948509696)
 
@@ -610,7 +610,7 @@ Replying to [@fp_robo](https://twitter.com/t_robo17/status/1011603401099169792)
 >   
 > [https://www.newamerica.org/international-security/future-property-rights/blog/fpr-principles-identity/](https://www.newamerica.org/international-security/future-property-rights/blog/fpr-principles-identity/) 
 > 
-> ![](../../media/1017882925239418881-DgnvwZvX0AAeBoK.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/1017882925239418881-DgnvwZvX0AAeBoK.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri Jul 13 21:26:15 +0000 2018](https://twitter.com/ChristopherA/status/1017882925239418881)
 
@@ -702,7 +702,7 @@ Replying to [@AnnaLysyanskaya, @gregoryneven, @n1ckler and @FBaldimtsi](https://
 
 > On the side I’m a collaborative tabletop &amp; story game designer, and I really appreciate elegant simple games. Just ran across this very topical party game “Elon Musk’s iPod Submarine” that I quite admire: [https://twitter.com/tinstargames/status/1017660844048506880](https://twitter.com/tinstargames/status/1017660844048506880) 
 > 
-> ![](../../media/1017983162289307649-DiCaSYIVQAAjNva.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/1017983162289307649-DiCaSYIVQAAjNva.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sat Jul 14 04:04:33 +0000 2018](https://twitter.com/ChristopherA/status/1017983162289307649)
 
@@ -726,13 +726,13 @@ Replying to [@AnnaLysyanskaya, @gregoryneven, @n1ckler and @FBaldimtsi](https://
 
 > Some of my favorite photos of "Monster Smash" games circa 2001. 
 > 
-> ![](../../media/1018000382964858880-DiCo2KMVQAEmmmx.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/1018000382964858880-DiCo2KMVQAEmmmx.jpg)
 > 
-> ![](../../media/1018000382964858880-DiCpCzjUcAAWnub.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/1018000382964858880-DiCpCzjUcAAWnub.jpg)
 > 
-> ![](../../media/1018000382964858880-DiCpJVMUcAA-Sal.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/1018000382964858880-DiCpJVMUcAA-Sal.jpg)
 > 
-> ![](../../media/1018000382964858880-DiCp0JqVAAAJe-h.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/1018000382964858880-DiCp0JqVAAAJe-h.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sat Jul 14 05:12:59 +0000 2018](https://twitter.com/ChristopherA/status/1018000382964858880)
 
@@ -776,7 +776,7 @@ Replying to [@clifton_r and @hasufl](https://twitter.com/clifton_r/status/101840
 
 > I thought that was called Lamarkian Poker. [https://boardgamegeek.com/boardgame/3270/lamarckian-poker](https://boardgamegeek.com/boardgame/3270/lamarckian-poker) 
 > 
-> ![](../../media/1018554256939339776-DiKhsiIUEAApKDJ.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/1018554256939339776-DiKhsiIUEAApKDJ.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sun Jul 15 17:53:53 +0000 2018](https://twitter.com/ChristopherA/status/1018554256939339776)
 
@@ -878,7 +878,7 @@ Replying to [@BitcoinMises, @Truthcoin, @droplister, @miketwenty1, @brucefenton,
 
 > Our biggest fans this week: @skinnylatte, @Steven_McKie, @BobSummerwill. Thank you! via [https://sumall.com/thankyou?utm_source=twitter&utm_medium=publishing&utm_campaign=thank_you_tweet&utm_content=text_and_media&utm_term=d0ab6b00ad990b36d99f7a0b](https://sumall.com/thankyou?utm_source=twitter&utm_medium=publishing&utm_campaign=thank_you_tweet&utm_content=text_and_media&utm_term=d0ab6b00ad990b36d99f7a0b) 
 > 
-> ![](../../media/1019613192564199424-DiZky1sXUAE6fyR.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/1019613192564199424-DiZky1sXUAE6fyR.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Jul 18 16:01:43 +0000 2018](https://twitter.com/ChristopherA/status/1019613192564199424)
 
@@ -1342,7 +1342,7 @@ Replying to [@MadBitcoins and @BitcoinAlley](https://twitter.com/MadBitcoins/sta
 
 > RT @rusty_twit: My new workspace is ready! Thanks @phneep ! 
 > 
-> ![](../../media/1022713189861998593-DjEof0fU0AARpEe.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/1022713189861998593-DjEof0fU0AARpEe.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri Jul 27 05:20:00 +0000 2018](https://twitter.com/ChristopherA/status/1022713189861998593)
 
