--- a/_tweets-md/2018/2018-08-01-tweets.md
+++ b/_tweets-md/2018/2018-08-01-tweets.md
@@ -338,7 +338,7 @@ Replying to [@AoverK](https://twitter.com/AoverK/status/1026596583230586885)
 
 > #PriFi looks interesting—it leverages public servers to help with privacy on W(LAN)s. Offers anonymity between users of a net, eavesdropping protection against parking-lot, malicious/coerced employees &amp; malware attacks, jamming &amp; equivocation attacks. [https://prifi.net/](https://prifi.net/) 
 > 
-> ![](../../media/1026993820418727937-DkCdb1XU8AAd_gH.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/1026993820418727937-DkCdb1XU8AAd_gH.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Aug 08 00:49:42 +0000 2018](https://twitter.com/ChristopherA/status/1026993820418727937)
 
@@ -1250,7 +1250,7 @@ Replying to [@mHaGqnOACyFm0h5, @Daniel_Plante, @notgrubles, @kimdhamilton and @N
 
 > AI drawing of “The quick brown jumped over the lazy dog” [http://t2i.cvalenzuelab.com/](http://t2i.cvalenzuelab.com/) 
 > 
-> ![](../../media/1030956681251844098-Dk6xorHU4AAeH_A.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/1030956681251844098-Dk6xorHU4AAeH_A.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sat Aug 18 23:16:41 +0000 2018](https://twitter.com/ChristopherA/status/1030956681251844098)
 
@@ -1300,7 +1300,7 @@ Replying to [@bascule](https://twitter.com/bascule/status/1030900085880573953)
 
 > SF Author Larry Niven at #Worldcon panel on #collaboration: “You should count on as a collaborator that you will do 80% of the work, and thus together 160%. Hopefully the result will be 160% better or you earn 160% more money.” 
 > 
-> ![](../../media/1031012990676492288-Dk7k2RnU4AAJhlQ.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/1031012990676492288-Dk7k2RnU4AAJhlQ.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sun Aug 19 03:00:26 +0000 2018](https://twitter.com/ChristopherA/status/1031012990676492288)
 
@@ -1701,7 +1701,7 @@ Replying to [@jemenger, @VladZamfir, @CalBlockchain and @mechanism_labs](https:/
 
 > We have our own diagraming language for our upcoming cooperative game book — here is one from our case study of the Pandemic boardgame. Closest I’ve seen elsewhere are some diagraming approaches for analysis of games. @raphkoster ?? 
 > 
-> ![](../../media/1035332202505023488-Dl49JTyUcAA9Cmf.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/1035332202505023488-Dl49JTyUcAA9Cmf.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri Aug 31 01:03:27 +0000 2018](https://twitter.com/ChristopherA/status/1035332202505023488)
 
