--- a/_tweets-md/2018/2018-09-01-tweets.md
+++ b/_tweets-md/2018/2018-09-01-tweets.md
@@ -352,7 +352,7 @@ Replying to [@JudeCNelson](https://twitter.com/JudeCNelson/status/10378676434270
 
 > RT @philchen913: This is our exodus t shirt 
 > 
-> ![](../../media/1038320447723458560-Dme4usGUUAAyX9O.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/1038320447723458560-Dme4usGUUAAyX9O.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sat Sep 08 06:57:40 +0000 2018](https://twitter.com/ChristopherA/status/1038320447723458560)
 
@@ -360,11 +360,11 @@ Replying to [@JudeCNelson](https://twitter.com/JudeCNelson/status/10378676434270
 
 Replying to [@webdevMason](https://twitter.com/webdevMason/status/1037788332137140224)
 
-> ![](../../media/1038595023242125312-DmnUoKiVAAAvmAm.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/1038595023242125312-DmnUoKiVAAAvmAm.jpg)
 > 
-> ![](../../media/1038595023242125312-DmnUoKfU0AY1YeH.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/1038595023242125312-DmnUoKfU0AY1YeH.jpg)
 > 
-> ![](../../media/1038595023242125312-DmnUoKfU4AE5N9r.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/1038595023242125312-DmnUoKfU4AE5N9r.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sun Sep 09 01:08:44 +0000 2018](https://twitter.com/ChristopherA/status/1038595023242125312)
 
@@ -412,9 +412,9 @@ Replying to [@2Canadians](https://twitter.com/2Canadians/status/1039577770223796
 
 > Introduced by @philchen913 of @htcexodus, we met with Jason Hsu @augama Taiwanese at-large legislator, or as his biz card offers “a.k.a Crypto Congressman”. We had some great discussion on self-sovereign identity and possibilities offered by Taiwan’s unique position in the world. 
 > 
-> ![](../../media/1040023247398395904-Dm7noEgVAAA8Sez.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/1040023247398395904-Dm7noEgVAAA8Sez.jpg)
 > 
-> ![](../../media/1040023247398395904-Dm7noEeU8AEtT0N.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/1040023247398395904-Dm7noEeU8AEtT0N.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Sep 12 23:43:59 +0000 2018](https://twitter.com/ChristopherA/status/1040023247398395904)
 
@@ -496,7 +496,7 @@ Replying to [@n1ckler and @RCasatta](https://twitter.com/ChristopherA/status/104
 
 > RT @augama: Great meeting @ChristopherA who is a pioneer in digital identities and initiating #WebofTrust 
 > 
-> ![](../../media/1040402317948858369-Dm8ul3zUwAAFKHB.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/1040402317948858369-Dm8ul3zUwAAFKHB.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri Sep 14 00:50:16 +0000 2018](https://twitter.com/ChristopherA/status/1040402317948858369)
 
@@ -1064,7 +1064,7 @@ Replying to [@intjr, @kanzure, @CaitlinLong_, @anguschampion and @ckayakr](https
 
 > But I want a Technical Igor! 
 > 
-> <video controls><source src="../../media/1043664213971881985-DnvXD7YUwAAexEK.mp4">Your browser does not support the video tag.</video>
+> <video controls><source src="{{ site.url }}{{ site.baseurl }}/assets/images/media/1043664213971881985-DnvXD7YUwAAexEK.mp4">Your browser does not support the video tag.</video>
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sun Sep 23 00:51:53 +0000 2018](https://twitter.com/ChristopherA/status/1043664213971881985)
 
@@ -1216,7 +1216,7 @@ Replying to [@msantoriESQ](https://twitter.com/ChristopherA/status/1044341758841
 > "Everyone deserves access to a hardware wallet"  
 > @ShiftCryptoHQ 
 > 
-> ![](../../media/1044384951565598720-Dnx0I0rXoAIZiU2.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/1044384951565598720-Dnx0I0rXoAIZiU2.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Sep 25 00:35:50 +0000 2018](https://twitter.com/ChristopherA/status/1044384951565598720)
 
@@ -1224,7 +1224,7 @@ Replying to [@msantoriESQ](https://twitter.com/ChristopherA/status/1044341758841
 
 > RT @larrysalibra: “You can never have enough checklists” @kanzure #bh2018 
 > 
-> ![](../../media/1044385023892189184-DnxydSSXgAAUCJJ.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/1044385023892189184-DnxydSSXgAAUCJJ.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Sep 25 00:36:08 +0000 2018](https://twitter.com/ChristopherA/status/1044385023892189184)
 
@@ -1273,7 +1273,7 @@ Replying to [@VladZamfir](https://twitter.com/VladZamfir/status/1044626649352982
 
 > RT @darrello: Looking forward to exploring #digitalWallet tech and ideas at #RebootingWebOfTrust 
 > 
-> ![](../../media/1044952167541559300-DoBZXRoV4AMryKq.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/1044952167541559300-DoBZXRoV4AMryKq.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Sep 26 14:09:45 +0000 2018](https://twitter.com/ChristopherA/status/1044952167541559300)
 
@@ -1311,7 +1311,7 @@ Replying to [@BenDiFrancesco and @_jillruth](https://twitter.com/BenDiFrancesco/
 
 > Collaborations emerging at our 7th #RebootingWebOfTrust! 
 > 
-> ![](../../media/1045008815375159298-DoCd-P8W0AEFOY-.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/1045008815375159298-DoCd-P8W0AEFOY-.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Sep 26 17:54:51 +0000 2018](https://twitter.com/ChristopherA/status/1045008815375159298)
 
@@ -1325,7 +1325,7 @@ Replying to [@BenDiFrancesco and @_jillruth](https://twitter.com/BenDiFrancesco/
 
 > RT @darrello: .@heathervescent up with 3-Horizons model for considering the future of #RebootingWebOfTrust 
 > 
-> ![](../../media/1045045238648197120-DoB4sARUUAYuWGq.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/1045045238648197120-DoB4sARUUAYuWGq.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Sep 26 20:19:35 +0000 2018](https://twitter.com/ChristopherA/status/1045045238648197120)
 
@@ -1498,7 +1498,7 @@ Replying to [@DennisPortoMD](https://twitter.com/pourteaux/status/10465430394125
 
 > RT @EFF: BREAKING: #NetNeutrality is now law in California. 
 > 
-> ![](../../media/1046569691718737920-DoYfxmvVAAEUfcy.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/1046569691718737920-DoYfxmvVAAEUfcy.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon Oct 01 01:17:13 +0000 2018](https://twitter.com/ChristopherA/status/1046569691718737920)
 
