--- a/_tweets-md/2018/2018-11-01-tweets.md
+++ b/_tweets-md/2018/2018-11-01-tweets.md
@@ -48,7 +48,7 @@ Replying to [@lucas_lclc, @Snyke, @bitcoin_ch, @CV_Labs, @Trust_Square and @CV_S
 
 > RT @hackylawyER: Happy Halloween #Identity folks 🎃 👻 #identitynerds #halloween 
 > 
-> ![](../../media/1057977494119178240-Dq3XlwxU4AAqVVU.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/1057977494119178240-Dq3XlwxU4AAqVVU.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Nov 01 12:47:45 +0000 2018](https://twitter.com/ChristopherA/status/1057977494119178240)
 
@@ -68,7 +68,7 @@ Replying to [@lucas_lclc, @Snyke, @bitcoin_ch, @CV_Labs, @Trust_Square and @CV_S
 
 > RT @kimdhamilton: Great dinner but horrible SPOF placing all these DID experts in one location #w3ctpac 
 > 
-> ![](../../media/1058129483700584448-Dq84lf6U0AAbFw6.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/1058129483700584448-Dq84lf6U0AAbFw6.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Nov 01 22:51:42 +0000 2018](https://twitter.com/ChristopherA/status/1058129483700584448)
 
@@ -210,7 +210,7 @@ Replying to [@jimlikesgames, @gameplaywright and @Appelcline](https://twitter.co
 
 > The slides for my talk in Zurich tonight on "Decentralized Identity: Ideology &amp; Architecture" for the Bitcoin Association of Switzerland @bitcoin_ch are now available at: [https://docs.google.com/presentation/d/15M0tdSS1dRMVdJdVgBlFap8JwiuFdvocZ0AAu7c1eBk](https://docs.google.com/presentation/d/15M0tdSS1dRMVdJdVgBlFap8JwiuFdvocZ0AAu7c1eBk) Thanks @lucas_lclc &amp; @DarioTepoTec for inviting me! 
 > 
-> ![](../../media/1059585521821892608-DrRnGZCWoAAPxv1.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/1059585521821892608-DrRnGZCWoAAPxv1.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon Nov 05 23:17:29 +0000 2018](https://twitter.com/ChristopherA/status/1059585521821892608)
 
@@ -508,7 +508,7 @@ Replying to [@maaretp and @ilarihenrik](https://twitter.com/@maaretp/status/1062
 
 > “Consider. Enact. Debrief. Experiment further. Effective processes that move groups forward often involve cycles of reflection, followed by action, leading to additional reflection, and so on. Alternating in this manner fosters engagement &amp; integration…” [https://groupworksdeck.org/patterns/Reflection_Action_Cycle](https://groupworksdeck.org/patterns/Reflection_Action_Cycle) 
 > 
-> ![](../../media/1062044529971355654-Dr0j3poU8AAkN3a.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/1062044529971355654-Dr0j3poU8AAkN3a.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon Nov 12 18:08:42 +0000 2018](https://twitter.com/ChristopherA/status/1062044529971355654)
 
