--- a/_tweets-md/2018/2018-12-01-tweets.md
+++ b/_tweets-md/2018/2018-12-01-tweets.md
@@ -970,7 +970,7 @@ Replying to [@Leon_Vandenberg and @SarahJamieLewis](https://twitter.com/Leon_Van
 
 > Both identity &amp; personal data should be #RightsNotProperty. [https://docs.google.com/presentation/d/15M0tdSS1dRMVdJdVgBlFap8JwiuFdvocZ0AAu7c1eBk](https://docs.google.com/presentation/d/15M0tdSS1dRMVdJdVgBlFap8JwiuFdvocZ0AAu7c1eBk) 
 > 
-> ![](../../media/1075473945694879745-DuzZ2jXU8AApHT4.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/1075473945694879745-DuzZ2jXU8AApHT4.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Dec 19 19:32:24 +0000 2018](https://twitter.com/ChristopherA/status/1075473945694879745)
 
@@ -978,7 +978,7 @@ Replying to [@Leon_Vandenberg and @SarahJamieLewis](https://twitter.com/Leon_Van
 
 > RT @ChristopherA: Both identity &amp; personal data should be #RightsNotProperty. [https://docs.google.com/presentation/d/15M0tdSS1dRMVdJdVgBlFap8JwiuFdvocZ0AAu7c1eBk](https://docs.google.com/presentation/d/15M0tdSS1dRMVdJdVgBlFap8JwiuFdvocZ0AAu7c1eBk) 
 > 
-> ![](../../media/1075473966242836480-DuzZ2jXU8AApHT4.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/1075473966242836480-DuzZ2jXU8AApHT4.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Dec 19 19:32:29 +0000 2018](https://twitter.com/ChristopherA/status/1075473966242836480)
 
@@ -1027,7 +1027,7 @@ Replying to [@Leon_Vandenberg and @SarahJamieLewis](https://twitter.com/Leon_Van
 
 > Finding this hard today: “Right Size Bite: Break tasks, processes, and content to be absorbed into chunks that are an appropriate match for the time and people you have. Tackle complex topics and larger goals piece by piece.” #GroupWorks #PatternLanguage [http://groupworksdeck.org/patterns/Right_Size_Bite](http://groupworksdeck.org/patterns/Right_Size_Bite) 
 > 
-> ![](../../media/1075523144864034816-Du0GmRzV4AAcXEU.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/1075523144864034816-Du0GmRzV4AAcXEU.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Dec 19 22:47:54 +0000 2018](https://twitter.com/ChristopherA/status/1075523144864034816)
 
@@ -1151,7 +1151,7 @@ Replying to [@johnabbe and @judell](https://twitter.com/johnabbe/status/10760390
 
 > RT @TuurDemeester: 50/ I’ll close with a few words from Gregory Maxwell from 2016,: [https://bitcointalk.org/index.php?topic=1427885.msg14601127#msg14601127](https://bitcointalk.org/index.php?topic=1427885.msg14601127#msg14601127) 
 > 
-> ![](../../media/1078721724319903744-DvhEExAV4AMdQlL.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/1078721724319903744-DvhEExAV4AMdQlL.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri Dec 28 18:37:55 +0000 2018](https://twitter.com/ChristopherA/status/1078721724319903744)
 
@@ -1195,7 +1195,7 @@ Replying to [@Lambo and @ToniHDS](https://twitter.com/Lambo/status/1078799651774
 
 > RT @xopn: "The" Social Credit System in China by @ToniHDS at #35C3 
 > 
-> ![](../../media/1079203121685921793-DvbLKCaXgAAk0Gn.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/1079203121685921793-DvbLKCaXgAAk0Gn.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sun Dec 30 02:30:49 +0000 2018](https://twitter.com/ChristopherA/status/1079203121685921793)
 
@@ -1211,7 +1211,7 @@ Replying to [@Lambo and @ToniHDS](https://twitter.com/Lambo/status/1078799651774
 >   
 > [https://youtu.be/vY6EplKdCc8](https://youtu.be/vY6EplKdCc8) 
 > 
-> ![](../../media/1079208944805924864-DvoauW1VYAA4ytn.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/1079208944805924864-DvoauW1VYAA4ytn.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sun Dec 30 02:53:57 +0000 2018](https://twitter.com/ChristopherA/status/1079208944805924864)
 
