--- a/_tweets-md/2020/2020-02-01-tweets.md
+++ b/_tweets-md/2020/2020-02-01-tweets.md
@@ -112,7 +112,7 @@ Replying to [@APompliano](https://twitter.com/APompliano/status/1223813157631725
 
 > RT @trbouma: "What is a Digital Credential? Document versus Envelope" 
 > 
-> ![](../../media/1224595239626846208-EP55SK-XUAAJY23.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/1224595239626846208-EP55SK-XUAAJY23.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Feb 04 07:27:11 +0000 2020](https://twitter.com/ChristopherA/status/1224595239626846208)
 
@@ -210,13 +210,13 @@ Replying to [@APompliano](https://twitter.com/APompliano/status/1223813157631725
 
 > Join the Dutch Self-Sovereign Identity community in a #Foremembrance for those who died by attempting to bomb the civil archives captured by the Nazis &amp; those defending the vulnerable today. Sunset next March 27th at what is now the Zoo Cafe in Amsterdam. [https://goo.gl/maps/T2hD9BwfaCt18bFM8](https://goo.gl/maps/T2hD9BwfaCt18bFM8) 
 > 
-> ![](../../media/1225123316916260864-EQCDKAdUwAER-Lo.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/1225123316916260864-EQCDKAdUwAER-Lo.jpg)
 > 
-> ![](../../media/1225123316916260864-EQCDKAeU0AAz3F_.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/1225123316916260864-EQCDKAeU0AAz3F_.jpg)
 > 
-> ![](../../media/1225123316916260864-EQCDKAAWoAMdfiA.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/1225123316916260864-EQCDKAAWoAMdfiA.jpg)
 > 
-> ![](../../media/1225123316916260864-EQCDKAAXsAE0Iiz.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/1225123316916260864-EQCDKAAXsAE0Iiz.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Feb 05 18:25:35 +0000 2020](https://twitter.com/ChristopherA/status/1225123316916260864)
 
@@ -511,7 +511,7 @@ Replying to [@francispouliot_ and @jimmysong](https://twitter.com/francispouliot
 
 > The new FullyNoded2 (in late alpha) allows you to use your own full node over Tor (easily installed with bitcoin standup app or Linux script) and 2:3 multisig. Only iOS currently. Successor app to @FullyNoded v1. 
 > 
-> ![](../../media/1228948124086849536-EQ4ZzJ_UYAANZX5.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/1228948124086849536-EQ4ZzJ_UYAANZX5.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sun Feb 16 07:44:00 +0000 2020](https://twitter.com/ChristopherA/status/1228948124086849536)
 
@@ -525,9 +525,9 @@ Replying to [@francispouliot_ and @jimmysong](https://twitter.com/francispouliot
 
 > I hope this might be useful for someone. This is how I organize my iPhone’s iOS 13 control center (the always available pull down from right top)—leveraging Fitts’ Law I put my most common functions in the 4 corners, next most on edges with a simple visual heirachy of relatedness 
 > 
-> ![](../../media/1229001071638405120-EQ5J9QEU0AEXqoV.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/1229001071638405120-EQ5J9QEU0AEXqoV.jpg)
 > 
-> ![](../../media/1229001071638405120-EQ5J9QEUYAAok2J.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/1229001071638405120-EQ5J9QEUYAAok2J.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sun Feb 16 11:14:23 +0000 2020](https://twitter.com/ChristopherA/status/1229001071638405120)
 
