--- a/_tweets-md/2020/2020-05-01-tweets.md
+++ b/_tweets-md/2020/2020-05-01-tweets.md
@@ -6,7 +6,7 @@ time: 23:59:59 +0000
 
 > The poll results are in (547 votes, thanks!) and 46% of you would prefer to pay up-front one-time for a “best-in-class” Bitcoin wallet. What one feature would put you over the top to be willing to pay at least $50 for a mobile wallet? 
 > 
-> ![](../../media/1256330046131732480-EW9hhBxU0AE6ziE.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/1256330046131732480-EW9hhBxU0AE6ziE.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri May 01 21:09:59 +0000 2020](https://twitter.com/ChristopherA/status/1256330046131732480)
 
@@ -571,7 +571,7 @@ Replying to [@gablerjonathan, @jeffemmett and @decentralion](https://twitter.com
 
 > RT @dakami: h/t Ronald, no idea original source, but LOOOOOOOOOOOOOL 
 > 
-> ![](../../media/1261406352515227650-EYE0STLU0AYDrnK.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/1261406352515227650-EYE0STLU0AYDrnK.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri May 15 21:21:24 +0000 2020](https://twitter.com/ChristopherA/status/1261406352515227650)
 
@@ -579,7 +579,7 @@ Replying to [@gablerjonathan, @jeffemmett and @decentralion](https://twitter.com
 
 > In the 4 years since I chose the term Self Sovereign Identity aka #SSI for our movement, some people have expressed concern about using the word Sovereign. However when I see these statements in the @washingtonpost I feel it was right choice. People must also have an equal voice: 
 > 
-> ![](../../media/1261454210094313473-EYGV5dcWAAAPOST.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/1261454210094313473-EYGV5dcWAAAPOST.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sat May 16 00:31:35 +0000 2020](https://twitter.com/ChristopherA/status/1261454210094313473)
 
@@ -704,7 +704,7 @@ Replying to [@dakami, @FreedomIsntSafe, @JWWeatherman_, @COLDCARDwallet, @Trezor
 
 > RT @warikoo: Am just going to leave this here, so that it stays forever as a gentle reminder! 
 > 
-> <video controls><source src="../../media/1262603814084829185-etbXbhNG7aZEbdA7.mp4">Your browser does not support the video tag.</video>
+> <video controls><source srcTweets-image="{{ site.url }}{{ site.baseurl }}/assets/images/media/1262603814084829185-etbXbhNG7aZEbdA7.mp4">Your browser does not support the video tag.</video>
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue May 19 04:39:41 +0000 2020](https://twitter.com/ChristopherA/status/1262603814084829185)
 
@@ -1162,7 +1162,7 @@ Replying to [@BitcoinLixin, @WolfMcnally, @FullyNoded, @CoboVault and @mflaxman]
 
 > Re: social distancing I miss doing things together. “Larping is fundamentally a social endeavour, done together with others. Doing things together is hardwired in humans. It is fundamentally different to do things together than to do things side-by-side.” [https://nordiclarp.org/2020/05/28/beauty-in-larp/](https://nordiclarp.org/2020/05/28/beauty-in-larp/) 
 > 
-> ![](../../media/1266187081019244545-EZJmby2XYAEEvhq.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/1266187081019244545-EZJmby2XYAEEvhq.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri May 29 01:58:19 +0000 2020](https://twitter.com/ChristopherA/status/1266187081019244545)
 
