--- a/_tweets-md/2020/2020-06-01-tweets.md
+++ b/_tweets-md/2020/2020-06-01-tweets.md
@@ -6,7 +6,7 @@ time: 23:59:59 +0000
 
 > #SmartCustody is an ongoing project of @BlockchainComns, a blockchain infrastructure support organization. In it we share the best practices for the use of advanced cryptographic tools in improving the care, maintenance, control, and protection of your digital assets. (1/14) 
 > 
-> ![](../../media/1267560481855639553-EZdHibDUcAETjvV.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/1267560481855639553-EZdHibDUcAETjvV.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon Jun 01 20:55:43 +0000 2020](https://twitter.com/ChristopherA/status/1267560481855639553)
 
@@ -124,7 +124,7 @@ time: 23:59:59 +0000
 
 > The adversaries in my #SmartCustody book are broadly divided into seven categories, the first of which is LOSS BY ACTS OF GOD. These are threats to your cryptocurrency and other digital assets that originate in bad luck. (1/6) 
 > 
-> ![](../../media/1267859439408697344-EZhXb9fU4AES5Oh.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/1267859439408697344-EZhXb9fU4AES5Oh.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Jun 02 16:43:40 +0000 2020](https://twitter.com/ChristopherA/status/1267859439408697344)
 
@@ -188,7 +188,7 @@ time: 23:59:59 +0000
 >   
 > What is DEATH's motivation? I imagine it as: "I am your last firing neurons, and I seek to drag everything you ever knew down with you, into the darkness." (1/7) 
 > 
-> ![](../../media/1268401649728368640-EZpEk5JVcAAJAFt.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/1268401649728368640-EZpEk5JVcAAJAFt.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Jun 04 04:38:13 +0000 2020](https://twitter.com/ChristopherA/status/1268401649728368640)
 
@@ -267,7 +267,7 @@ time: 23:59:59 +0000
 >   
 > DENIAL OF ACCESS is a very pragmatic adversary that can affect your cryptocurrency. What if you physically couldn't get to the location where you stored the private keys that protect those assets? (1/9) 
 > 
-> ![](../../media/1268531178916569088-EZq6YZRWkAQabvb.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/1268531178916569088-EZq6YZRWkAQabvb.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Jun 04 13:12:55 +0000 2020](https://twitter.com/ChristopherA/status/1268531178916569088)
 
@@ -401,7 +401,7 @@ time: 23:59:59 +0000
 >   
 > DISASTER! Its motivation? "I want to destroy. I want to crumble and burn. I want to ruin with water, to blow things into the air. I am bombs, bullets, and explosions. I am sudden and unexpected but disastrous destruction." (1/9) 
 > 
-> ![](../../media/1268838617012568065-EZvR_0PU4AA5nlX.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/1268838617012568065-EZvR_0PU4AA5nlX.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri Jun 05 09:34:34 +0000 2020](https://twitter.com/ChristopherA/status/1268838617012568065)
 
@@ -427,7 +427,7 @@ time: 23:59:59 +0000
 
 > Last year I polled my Twitter followers about their own recovery key practices. 30% of them did not have redundant copies of their recovery keys &amp; 51% still had their recovery keys only on paper! I live in California, but everywhere you may be vulnerable to some DISASTER. (4/9) 
 > 
-> ![](../../media/1268838626500083712-EZvSAYSVcAAZWvM.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/1268838626500083712-EZvSAYSVcAAZWvM.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri Jun 05 09:34:37 +0000 2020](https://twitter.com/ChristopherA/status/1268838626500083712)
 
@@ -437,7 +437,7 @@ time: 23:59:59 +0000
 
 > I suggest physically reinforcing your key storage as the best way to defend against disaster. If you use paper, it should be waterproof with permanent ink, but it's even better to stamp or etch your keys into steel or titanium plates. And it's quite easy to do! (5/9) 
 > 
-> ![](../../media/1268838636037894144-EZvSAsmUYAEZbPm.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/1268838636037894144-EZvSAsmUYAEZbPm.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri Jun 05 09:34:39 +0000 2020](https://twitter.com/ChristopherA/status/1268838636037894144)
 
@@ -623,7 +623,7 @@ Replying to [@La__Cuen](https://twitter.com/La__Cuen/status/1269018523331899392)
 >   
 > Cryptocurrency is innately digital: it's stored on computers. That's why LOSS BY COMPUTER ERROR may terrify us the most among adversaries that could steal away those assets. It's the second category of adversaries in my book .(1/7) 
 > 
-> ![](../../media/1269425280008876032-EZ3nj3mUEAEs4Bg.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/1269425280008876032-EZ3nj3mUEAEs4Bg.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sun Jun 07 00:25:46 +0000 2020](https://twitter.com/ChristopherA/status/1269425280008876032)
 
@@ -758,7 +758,7 @@ Replying to [@mikeinspace and @FullyNoded](https://twitter.com/mikeinspace/statu
 >   
 > Our first category “Loss by Computer Error" adversary is BITROT. It encompasses the many ways that you could lose digital assets &amp; cryptocurrency through failure of your electronic storage. (1/10) 
 > 
-> ![](../../media/1270034533270745095-EaARq4dUEAAIgnY.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/1270034533270745095-EaARq4dUEAAIgnY.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon Jun 08 16:46:43 +0000 2020](https://twitter.com/ChristopherA/status/1270034533270745095)
 
@@ -904,7 +904,7 @@ Replying to [@mikeinspace and @FullyNoded](https://twitter.com/mikeinspace/statu
 >   
 > Here's an adversary for your cryptocurrency (or other digital assets) that you might not have thought about: SYSTEMIC KEY COMPROMISE. What if the software that generated your keys did so in an insecure way? (1/11) 
 > 
-> ![](../../media/1270438677940846592-EaGBPkmVcAEKLe5.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/1270438677940846592-EaGBPkmVcAEKLe5.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Jun 09 19:32:39 +0000 2020](https://twitter.com/ChristopherA/status/1270438677940846592)
 
@@ -1022,7 +1022,7 @@ Replying to [@mikeinspace and @FullyNoded](https://twitter.com/mikeinspace/statu
 >   
 > Cryptocurrency holders seem to be the most afraid of their digital assets being stolen. That's my third category of #SmartCustody adversaries: LOSS BY CRIME, THEFT. And, it's quite varied: I've got a whole week's worth of them! (1/8) 
 > 
-> ![](../../media/1270774037782777856-EaKyQEdVcAE2CeR.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/1270774037782777856-EaKyQEdVcAE2CeR.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Jun 10 17:45:15 +0000 2020](https://twitter.com/ChristopherA/status/1270774037782777856)
 
@@ -1104,7 +1104,7 @@ Replying to [@mikeinspace and @FullyNoded](https://twitter.com/mikeinspace/statu
 >   
 > What's INSTITUTIONAL THEFT? Here's the motive: "I pretend to be a good employee, but I’m always waiting for my chance for a great score. I want to sift through the goods entrusted to my company and to take the best for myself." (1/8) 
 > 
-> ![](../../media/1271172504787116032-EaQcp9gUEAENgyJ.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/1271172504787116032-EaQcp9gUEAENgyJ.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Jun 11 20:08:37 +0000 2020](https://twitter.com/ChristopherA/status/1271172504787116032)
 
@@ -1170,7 +1170,7 @@ Replying to [@TuurDemeester, @ericsavics1 and @kanzure](https://twitter.com/Tuur
 >   
 > We might not like to think about INTERNAL THEFT in our #SmartCustody scenarios, but what if someone you entrust with the keys to your digital kingdom decides to steal those assets? (1/7) 
 > 
-> ![](../../media/1271474884497965056-EaUvqehU8AIW4FB.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/1271474884497965056-EaUvqehU8AIW4FB.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri Jun 12 16:10:09 +0000 2020](https://twitter.com/ChristopherA/status/1271474884497965056)
 
@@ -1384,7 +1384,7 @@ Replying to [@phil_geiger and @skwp](https://twitter.com/phil_geiger/status/1272
 
 > PERSONAL NETWORK ATTACK is a #SmartCustody adversary that comes in two parts. First, it's an internet-based attack on digital assets, and second it's directed at your personally. (1/7) 
 > 
-> ![](../../media/1272624127719829504-EalE5iGUMAA2D4-.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/1272624127719829504-EalE5iGUMAA2D4-.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon Jun 15 20:16:50 +0000 2020](https://twitter.com/ChristopherA/status/1272624127719829504)
 
@@ -1494,7 +1494,7 @@ Replying to [@phil_geiger and @skwp](https://twitter.com/phil_geiger/status/1272
 >   
 > Yesterday I talked about Personal Network Attack as a adversary that could threaten your digital assets. But what if attackers instead make a SYSTEMIC NETWORK ATTACK, going after your service providers? (1/8) 
 > 
-> ![](../../media/1272955016710549504-Eapx1zfVAAIpA_J.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/1272955016710549504-Eapx1zfVAAIpA_J.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Jun 16 18:11:41 +0000 2020](https://twitter.com/ChristopherA/status/1272955016710549504)
 
@@ -1576,7 +1576,7 @@ Replying to [@phil_geiger and @skwp](https://twitter.com/phil_geiger/status/1272
 >   
 > Imagine: a robber enters your home and steals the safe containing your Ledger. It wasn't their goal, and they might have no idea what to do with it. But you don't have access to your Ledger any more either. (1/8) 
 > 
-> ![](../../media/1273363574295937024-EavlbAHUYAA4FtH.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/1273363574295937024-EavlbAHUYAA4FtH.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Jun 17 21:15:08 +0000 2020](https://twitter.com/ChristopherA/status/1273363574295937024)
 
@@ -1740,7 +1740,7 @@ Replying to [@alistairmilne](https://twitter.com/alistairmilne/status/1273145603
 
 > Yesterday I wrote about the #SmartCustody adversary Casual Physical Theft, where a robber accidentally (or at least non-purposefully) takes your cryptocurrency. SOPHISTICATED PHYSICAL THEFT, where they know what they're after, is much more dangerous. (1/8) 
 > 
-> ![](../../media/1273671203832492033-Eaz9NZAUYAYZm1Q.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/1273671203832492033-Eaz9NZAUYAYZm1Q.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Jun 18 17:37:33 +0000 2020](https://twitter.com/ChristopherA/status/1273671203832492033)
 
@@ -1814,7 +1814,7 @@ Replying to [@BitcoinQ_A](https://twitter.com/BitcoinQ_A/status/1273290668551680
 
 > You should also look at Bitcoin Standup MacOS [https://github.com/BlockchainCommons/Bitcoin-Standup-MacOS](https://github.com/BlockchainCommons/Bitcoin-Standup-MacOS), a one-click installer that also installs Tor v3 services &amp; QuickConnect QR to connect to a remote wallet (some of your other nodes do as well, should add a column!). We have linux scripts also available. 
 > 
-> ![](../../media/1273694192133263361-Ea0SHhVU8AAGpMu.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/1273694192133263361-Ea0SHhVU8AAGpMu.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Jun 18 19:08:54 +0000 2020](https://twitter.com/ChristopherA/status/1273694192133263361)
 
@@ -1888,7 +1888,7 @@ Replying to [@hackylawyER, @rothfuss, @JaredSOlsen, @Emily_Fry_, @GiuliettaMaran
 >   
 > The Con Man may be the most dangerous thief in the online world. He's an adversary who depends on SOCIAL ENGINEERING to trick you into giving up your credentials, and then use them to steal the assets that they were protecting. (1/12) 
 > 
-> ![](../../media/1274067538637291520-Ea5lq_3UcAAxlD9.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/1274067538637291520-Ea5lq_3UcAAxlD9.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri Jun 19 19:52:26 +0000 2020](https://twitter.com/ChristopherA/status/1274067538637291520)
 
@@ -2046,7 +2046,7 @@ Replying to [@KLoaec and @rootzoll](https://twitter.com/KLoaec/status/1274133356
 >   
 > SUPPLY-CHAIN ATTACK may be one of the least obvious adversaries that we cover in #SmartCustody. But that makes it particularly important, because you may not be aware of its possibilities. (1/11) 
 > 
-> ![](../../media/1275143980389265408-EbI4sQBU0AAzYWz.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/1275143980389265408-EbI4sQBU0AAzYWz.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon Jun 22 19:09:50 +0000 2020](https://twitter.com/ChristopherA/status/1275143980389265408)
 
@@ -2152,7 +2152,7 @@ Replying to [@KLoaec and @rootzoll](https://twitter.com/KLoaec/status/1274133356
 >   
 > I've spent a lot of time on the category of THEFT, but it's not the only sort of crime that can impact your cryptocurrency holdings. There's a whole other category, which I wittily called LOSS BY CRIME, OTHER. (1/10) 
 > 
-> ![](../../media/1275535534866104322-EbOczcsVcAAw6UK.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/1275535534866104322-EbOczcsVcAAw6UK.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Jun 23 21:05:44 +0000 2020](https://twitter.com/ChristopherA/status/1275535534866104322)
 
@@ -2262,7 +2262,7 @@ Replying to [@KLoaec and @rootzoll](https://twitter.com/KLoaec/status/1274133356
 >   
 > BLACKMAIL sounds like a somewhat unlikely crime for the average person, but in actuality it's a very real adversary, which is why we talk about in #SmartCustody. (1/10) 
 > 
-> ![](../../media/1275901766081507329-EbTp5AJVcAA3T2d.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/1275901766081507329-EbTp5AJVcAA3T2d.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Jun 24 21:21:00 +0000 2020](https://twitter.com/ChristopherA/status/1275901766081507329)
 
@@ -2312,7 +2312,7 @@ Replying to [@KLoaec and @rootzoll](https://twitter.com/KLoaec/status/1274133356
 
 > A challenge that the BLACKMAIL doesn't even have to be true. Going back to the day's of Cardinal Richelieu's “six lines” and today's #FalseNews and  #MeToo facts are unfortunately optional. (7/10) 
 > 
-> ![](../../media/1275901973926010880-EbTqFVXUMAAMq6B.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/1275901973926010880-EbTqFVXUMAAMq6B.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Jun 24 21:21:50 +0000 2020](https://twitter.com/ChristopherA/status/1275901973926010880)
 
@@ -2392,7 +2392,7 @@ Replying to [@infinite_mao](https://twitter.com/@infinite_mao/status/12759790667
 >   
 > COERCION? Ugh. It's a terrible adversary that can threaten the #SmartCustody of your digital assets. Someone is demanding those assets based on a threat to you, your family, or your friends. (1/8) 
 > 
-> ![](../../media/1276218207909511169-EbYJsh9VcAEFhVr.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/1276218207909511169-EbYJsh9VcAEFhVr.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Jun 25 18:18:26 +0000 2020](https://twitter.com/ChristopherA/status/1276218207909511169)
 
@@ -2458,7 +2458,7 @@ Replying to [@infinite_mao](https://twitter.com/@infinite_mao/status/12759790667
 >   
 > The most far-flung crime in my list of adversaries is likely the NON-FINANCIALLY MOTIVATED ATTACKERS: people who are  denying you access to your cryptocurrency even though they don't care about the money. (1/9) 
 > 
-> ![](../../media/1276569133165903872-EbdI3EeVcAA4Tfl.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/1276569133165903872-EbdI3EeVcAA4Tfl.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri Jun 26 17:32:53 +0000 2020](https://twitter.com/ChristopherA/status/1276569133165903872)
 
@@ -2573,7 +2573,7 @@ Replying to [@bobhilt](https://twitter.com/bobhilt/status/1276250040290299904)
 >   
 > Here's one final criminal adversary from #SmartCustody that might affect your digital holdings: TERRORISM or the MOB. (1/9) 
 > 
-> ![](../../media/1277710396778885120-EbtW1WsUEAM9DTp.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/1277710396778885120-EbtW1WsUEAM9DTp.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Mon Jun 29 21:07:51 +0000 2020](https://twitter.com/ChristopherA/status/1277710396778885120)
 
@@ -2683,7 +2683,7 @@ Replying to [@lumpysnake](https://twitter.com/lumpysnake/status/1277819729944576
 
 > LOSS BY GOVERNMENT is one of the most interesting categories of adversaries in #SmartCustody because I think it's something that a lot of cryptocurrency holders are afraid of, but I also think it contains adversaries that aren't necessarily going to impact most people. (1/8) 
 > 
-> ![](../../media/1278058733868773376-EbyTo-7UwAA3yA2.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/1278058733868773376-EbyTo-7UwAA3yA2.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Jun 30 20:12:01 +0000 2020](https://twitter.com/ChristopherA/status/1278058733868773376)
 
