--- a/_tweets-md/2020/2020-12-01-tweets.md
+++ b/_tweets-md/2020/2020-12-01-tweets.md
@@ -32,7 +32,7 @@ Replying to [@lukechilds, @CypherSafe, @adam3us and @pwuille](https://twitter.co
 
 > We recommend casino dice as manufacturers have strong incentive for true randomness. But even then, you have to roll them correctly — I like DIY dice towers. Here a blog post on how bad ordinary game dice is: 144k rolls for 29% 1s. Should have been 16.6%. [https://www.dakkadakka.com/wiki/en/That's_How_I_Roll_-_A_Scientific_Analysis_of_Dice](https://www.dakkadakka.com/wiki/en/That's_How_I_Roll_-_A_Scientific_Analysis_of_Dice) 
 > 
-> ![](../../media/1335044653683417089-EocICYnUUAAgOFl.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/1335044653683417089-EocICYnUUAAgOFl.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sat Dec 05 02:13:44 +0000 2020](https://twitter.com/ChristopherA/status/1335044653683417089)
 
@@ -119,7 +119,7 @@ Replying to [@NZN](https://twitter.com/NZN/status/1336083110124019713)
 
 > The most exciting application so far has been the creation of animated QR codes, allowing for the reliable transmission of PSBTs to airgapped devices for the first time. [3/6] 
 > 
-> <video controls><source src="../../media/1336393320403066880-EovPsvcVQAArQ2B.mp4">Your browser does not support the video tag.</video>
+> <video controls><source srcTweets-image="{{ site.url }}{{ site.baseurl }}/assets/images/media/1336393320403066880-EovPsvcVQAArQ2B.mp4">Your browser does not support the video tag.</video>
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Dec 08 19:32:51 +0000 2020](https://twitter.com/ChristopherA/status/1336393320403066880)
 
@@ -149,7 +149,7 @@ Replying to [@dantrevino and @BlockchainComns](https://twitter.com/dantrevino/st
 
 > The purpose of @BlockchainComns is to address the security challenges of open infrastructure. As co-author of TLS I don’t want to see events like HeartBleed again. [https://www.explainxkcd.com/wiki/index.php/2347:_Dependency](https://www.explainxkcd.com/wiki/index.php/2347:_Dependency) 
 > 
-> ![](../../media/1336582770391277569-Eox-8h6U8AEmNW2.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/1336582770391277569-Eox-8h6U8AEmNW2.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Dec 09 08:05:39 +0000 2020](https://twitter.com/ChristopherA/status/1336582770391277569)
 
@@ -197,7 +197,7 @@ Replying to [@dustyweb](https://twitter.com/dustyweb/status/1336772911189921793)
 
 > Bitcoin products &amp; devs currently supporting Quick Connect 1.0 include @GordianWallet @BlockchainComns  @FullyNoded @Fonta1n3  @BtcpayServer @NicolasDorier @nodl_it @raspiblitz @mynodebtc 
 > 
-> ![](../../media/1337147301354074113-Eo6ADkIUwAA4Dxz.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/1337147301354074113-Eo6ADkIUwAA4Dxz.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Dec 10 21:28:54 +0000 2020](https://twitter.com/ChristopherA/status/1337147301354074113)
 
@@ -227,7 +227,7 @@ Replying to [@evankaloudis](https://twitter.com/evankaloudis/status/133714776006
 
 > What's a #Torgap? It's a Tor-protocol link between apps and services that need to be connected to the internet. For example, here are the 2 Torgaps and 3 Airgaps of the @GordianWallet [2/4] 
 > 
-> ![](../../media/1337487029123252224-Eo-z4ZPUcAAld22.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/1337487029123252224-Eo-z4ZPUcAAld22.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri Dec 11 19:58:51 +0000 2020](https://twitter.com/ChristopherA/status/1337487029123252224)
 
