--- a/_tweets-md/2011/2011-11-01-tweets.md
+++ b/_tweets-md/2011/2011-11-01-tweets.md
@@ -18,7 +18,7 @@ time: 23:59:59 +0000
 
 > Beautiful autumn colors in Seattle from the plane window this morning: 
 > 
-> ![]({{ site.url }}{{ site.baseurl }}/assets/images/media/131799095508598784-AdQ-lD3CAAAfsdk.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/131799095508598784-AdQ-lD3CAAAfsdk.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Nov 02 18:25:29 +0000 2011](https://twitter.com/ChristopherA/status/131799095508598784)
 
