--- a/_tweets-md/2016/2016-11-01-tweets.md
+++ b/_tweets-md/2016/2016-11-01-tweets.md
@@ -12,7 +12,7 @@ time:  23:59:59 +0000
 
 > RT @b0rk: slowly learning a few things about distributed systems 
 > 
-> ![](../../media/793497068668989440-CwJTqQTWcAA173h.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/793497068668989440-CwJTqQTWcAA173h.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Nov 01 16:56:58 +0000 2016](https://twitter.com/ChristopherA/status/793497068668989440)
 
@@ -298,7 +298,7 @@ Replying to [@bascule and @manusporny](https://twitter.com/bascule/status/794033
 
 > RT @1timstreet: #BackToTheFuture One year late. 
 > 
-> ![](../../media/794040842562379776-CwT-M7UUoAAZ8Wy.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/794040842562379776-CwT-M7UUoAAZ8Wy.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Nov 03 04:57:44 +0000 2016](https://twitter.com/ChristopherA/status/794040842562379776)
 
@@ -506,7 +506,7 @@ Replying to [@timpastoor](https://twitter.com/timpastoor/status/7947206797866639
 
 > I'd like to see systems that have incentives to improve the ecosystem as a whole for the long term: [http://ParticipatoryEcosystem.com](http://ParticipatoryEcosystem.com) 
 > 
-> ![](../../media/794721891927740416-CwdrV3qVIAEdLb8.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/794721891927740416-CwdrV3qVIAEdLb8.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sat Nov 05 02:03:58 +0000 2016](https://twitter.com/ChristopherA/status/794721891927740416)
 
@@ -514,7 +514,7 @@ Replying to [@timpastoor](https://twitter.com/timpastoor/status/7947206797866639
 
 > RT @TurkeyUntold: List of the VPN providers that have been banned in Turkey. 
 > 
-> ![](../../media/794724135939117056-CwcnomeXcAEwd47.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/794724135939117056-CwcnomeXcAEwd47.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sat Nov 05 02:12:53 +0000 2016](https://twitter.com/ChristopherA/status/794724135939117056)
 
@@ -608,7 +608,7 @@ Replying to [@timpastoor](https://twitter.com/timpastoor/status/7947275216694845
 
 > RT @pickover: Images that make us dream: Actual View of Sunset on Mars. 
 > 
-> ![](../../media/794774812941918209-Bic0zGnCUAAdz8l.png)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/794774812941918209-Bic0zGnCUAAdz8l.png)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sat Nov 05 05:34:16 +0000 2016](https://twitter.com/ChristopherA/status/794774812941918209)
 
@@ -622,7 +622,7 @@ Replying to [@timpastoor](https://twitter.com/timpastoor/status/7947275216694845
 
 > For @laparisa, head of Chome security, it is also personal: [https://www.wired.com/2016/11/googles-chrome-hackers-flip-webs-security-model/](https://www.wired.com/2016/11/googles-chrome-hackers-flip-webs-security-model/) see also @Firuzehmahmoudi who is doing good mobile work. 
 > 
-> ![](../../media/794785947028058112-CwelmnAUUAAwM8f.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/794785947028058112-CwelmnAUUAAwM8f.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sat Nov 05 06:18:30 +0000 2016](https://twitter.com/ChristopherA/status/794785947028058112)
 
@@ -827,7 +827,7 @@ Replying to [@PennDesign](https://twitter.com/WeitzmanSchool/status/797183629273
 >   
 > Identity is an edge protocol 
 > 
-> ![](../../media/797586576410865666-CxF4SntUQAADhFk.png)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/797586576410865666-CxF4SntUQAADhFk.png)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sat Nov 12 23:47:12 +0000 2016](https://twitter.com/ChristopherA/status/797586576410865666)
 
@@ -897,7 +897,7 @@ Replying to [@PennDesign](https://twitter.com/WeitzmanSchool/status/797183629273
 
 > Autumn passage through Regent's Canal in London… 
 > 
-> ![](../../media/800346855053938688-CxtnMzBUAAAjVmZ.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/800346855053938688-CxtnMzBUAAAjVmZ.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sun Nov 20 14:35:34 +0000 2016](https://twitter.com/ChristopherA/status/800346855053938688)
 
@@ -925,7 +925,7 @@ Replying to [@locodelbitcoin](https://twitter.com/locodelbitcoin/status/80035885
 
 > RT @joergresch: #identity on the #blockchain with @ChristopherA now at #ConsumerID16 
 > 
-> ![](../../media/801351423673962496-Cx7rgHqWQAITA1S.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/801351423673962496-Cx7rgHqWQAITA1S.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Nov 23 09:07:22 +0000 2016](https://twitter.com/ChristopherA/status/801351423673962496)
 
@@ -933,7 +933,7 @@ Replying to [@locodelbitcoin](https://twitter.com/locodelbitcoin/status/80035885
 
 > RT @kuppingercole: #ConsumerID16 @ChristopherA about Sovereign #Identities in the Age of #Blockchain 
 > 
-> ![](../../media/801351476018876416-Cx7ttrRWIAAW5y8.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/801351476018876416-Cx7ttrRWIAAW5y8.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Nov 23 09:07:34 +0000 2016](https://twitter.com/ChristopherA/status/801351476018876416)
 
@@ -970,7 +970,7 @@ Replying to [@Steve_Lockstep](https://twitter.com/ChristopherA/status/8013844069
 > RT @katrynadow: #identity is not an administrative mechanism for others to control  
 > @ChristopherA #SelfSovereign 
 > 
-> ![](../../media/801942051931770881-CyDFBFbXgAAACM9.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/801942051931770881-CyDFBFbXgAAACM9.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri Nov 25 00:14:19 +0000 2016](https://twitter.com/ChristopherA/status/801942051931770881)
 
@@ -978,7 +978,7 @@ Replying to [@Steve_Lockstep](https://twitter.com/ChristopherA/status/8013844069
 
 > RT @evoluchain: @ChristopherA has its PGP hash in his prez ;-) 
 > 
-> ![](../../media/801942140750331904-CyDC2krXUAAqONd.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/801942140750331904-CyDC2krXUAAqONd.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri Nov 25 00:14:40 +0000 2016](https://twitter.com/ChristopherA/status/801942140750331904)
 
@@ -986,7 +986,7 @@ Replying to [@Steve_Lockstep](https://twitter.com/ChristopherA/status/8013844069
 
 > RT @katrynadow: #Identity on #blockchain is two-edged sword @ChristopherA 
 > 
-> ![](../../media/801942169019961344-CyDCyN9XEAA7_ax.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/801942169019961344-CyDCyN9XEAA7_ax.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri Nov 25 00:14:47 +0000 2016](https://twitter.com/ChristopherA/status/801942169019961344)
 
