--- a/_tweets-md/2018/2018-10-01-tweets.md
+++ b/_tweets-md/2018/2018-10-01-tweets.md
@@ -635,7 +635,7 @@ Replying to [@kimdhamilton and @danpape](https://twitter.com/kimdhamilton/status
 
 > The Kickstarter for our book “Meeples Together” on cooperative games will be beginning soon. We have a cover design we like, and you can sign up for the announcement at [http://gameplaywright.net/kickstart-meeples/](http://gameplaywright.net/kickstart-meeples/) 
 > 
-> ![](../../media/1049815853393358848-DpGx89dUwAAAb5S.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/1049815853393358848-DpGx89dUwAAAb5S.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Oct 10 00:16:18 +0000 2018](https://twitter.com/ChristopherA/status/1049815853393358848)
 
@@ -675,7 +675,7 @@ Replying to [@kimdhamilton and @danpape](https://twitter.com/kimdhamilton/status
 
 > Fond memories (8 years ago today) of opening circles in the sustainable systems MBA program at [http://BGI.edu](http://BGI.edu) /Pinchot University. I appreciate how every time a class, spin-off group or corp would meet they would just assume that the chairs should start in a circle. 
 > 
-> ![](../../media/1050243839183675392-DpM3M8iUcAAtSyF.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/1050243839183675392-DpM3M8iUcAAtSyF.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Thu Oct 11 04:36:58 +0000 2018](https://twitter.com/ChristopherA/status/1050243839183675392)
 
@@ -801,7 +801,7 @@ Replying to [@bigbadcon](https://twitter.com/bigbadcon/status/105084260414369792
 
 > I have a book on cooperative games coming to Kickstarter soon, but I am also fascinated by the patterns of cooperative play (improv, jazz, role-playing), which will likely become a sequel. This playtest RPG is also a test of some of these patterns. 
 > 
-> ![](../../media/1050912494468849664-DpWXV1hU0AE9KPk.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/1050912494468849664-DpWXV1hU0AE9KPk.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Sat Oct 13 00:53:58 +0000 2018](https://twitter.com/ChristopherA/status/1050912494468849664)
 
@@ -1044,7 +1044,7 @@ Replying to [@boscolochris](https://twitter.com/ChristopherA/status/105261908307
 
 > Our new book on the design of collaborative games is not just for game designers. Are you an educator or parent? Do you want your students &amp; children to better learn how to collaborate? You will likely find ideas in our book that will inspire &amp; help. [https://www.kickstarter.com/projects/jefftidball/meeples-together-how-and-why-cooperative-board-gam?ref=aldqny](https://www.kickstarter.com/projects/jefftidball/meeples-together-how-and-why-cooperative-board-gam?ref=aldqny) 
 > 
-> ![](../../media/1052621670953799680-Dpup1FqUYAAj_tV.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/1052621670953799680-Dpup1FqUYAAj_tV.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Oct 17 18:05:37 +0000 2018](https://twitter.com/ChristopherA/status/1052621670953799680)
 
@@ -1154,7 +1154,7 @@ Replying to [@TT_Gamification](https://twitter.com/TT_Gamification/status/105293
 
 > RT @trbouma: An excellent chart of evolution of #digitalidentity by @ChristopherA 
 > 
-> ![](../../media/1053285837054472192-Dp3s7vuU4AME3a2.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/1053285837054472192-Dp3s7vuU4AME3a2.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Fri Oct 19 14:04:47 +0000 2018](https://twitter.com/ChristopherA/status/1053285837054472192)
 
@@ -1379,7 +1379,7 @@ Replying to [@JosephVines and @WIRED](https://twitter.com/JosephVines/status/105
 
 > Where the real work at W3C TPAC gets done: 
 > 
-> ![](../../media/1054742167124496384-DqMyWmCU8AA94Yx.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/1054742167124496384-DqMyWmCU8AA94Yx.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Tue Oct 23 14:31:43 +0000 2018](https://twitter.com/ChristopherA/status/1054742167124496384)
 
@@ -1538,7 +1538,7 @@ Replying to [@PratsArthur, @ericholscher, @richlitt, @frabrunelle, @qlesceller a
 
 > 👍👍 #Bitcoin announcement’s 10th anniversary. I consider this a teaser—the real anniversaries are next January 3rd with the creation of Bitcoin’s first “genesis” block, and January 9th with the release of the open source code. 
 > 
-> ![](../../media/1057727805109293056-Dq3N0mIWwAEHdsA.jpg)
+> ![Tweets-image]({{ site.url }}{{ site.baseurl }}/assets/images/media/1057727805109293056-Dq3N0mIWwAEHdsA.jpg)
 
 <img src="{{ site.url }}{{ site.baseurl }}/assets/images/media/tweet.ico" width="30" /> [Wed Oct 31 20:15:35 +0000 2018](https://twitter.com/ChristopherA/status/1057727805109293056)
 
